--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/10.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/10.md
@@ -1,276 +1,446 @@
----
-title: १० रामावतारः
-unicode_script: devanagari
----
++++
+title = "१० रामावतारः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga10-01-15.mp3"></div>
 
 पृथिवीं शासतस्तस्य पाकशासनतेजसः ।  
-किंचिदूनमनूनर्द्धेः शरदामयुतं ययौ॥ १॥
+किंचिदूनमनूनर्द्धेः शरदामयुतं ययौ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न चोपलेभे पूर्वेषामृणनिर्मोक्षसाधनम् ।  
-सुताभिधानं स ज्योतिः सद्यः शोकतमोपहम्॥ २॥
+सुताभिधानं स ज्योतिः सद्यः शोकतमोपहम्॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अतिष्ठत्प्रत्ययापेक्षसंततिः स चिरं नृपः ।  
-प्राङ्मन्थादनभिव्यक्तरत्नोत्पत्तिरिवार्णवः॥ ३॥
+प्राङ्मन्थादनभिव्यक्तरत्नोत्पत्तिरिवार्णवः॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऋष्यशृङ्गादयस्तस्य सन्तः सन्तानकाङ्क्षिणः ।  
-आरेभिरे जितात्मानः पुत्रीयामिष्टिमृत्विजः॥ ४॥
+आरेभिरे जितात्मानः पुत्रीयामिष्टिमृत्विजः॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्नवसरे देवाः पौलस्त्योपप्लुता हरिम् ।  
-अभिजग्मुर्निदाघार्ताश्छायावृक्षमिवाध्वगाः॥ ५॥
+अभिजग्मुर्निदाघार्ताश्छायावृक्षमिवाध्वगाः॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते च प्रापुरुदन्वन्तं बुबुधे चादिपूरुषः ।  
-अव्याक्षेपो भविष्यन्त्याः कार्यसिद्धेर्हि लक्षणम्॥ ६॥
+अव्याक्षेपो भविष्यन्त्याः कार्यसिद्धेर्हि लक्षणम्॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भोगिभोगासनासीनं ददृशुस्तं दिवौकसः ।  
-तत्फणामण्डलोदर्चिर्मणिद्योतितविग्रहम्॥ ७॥
+तत्फणामण्डलोदर्चिर्मणिद्योतितविग्रहम्॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रियः पद्मनिषण्णायाः क्षौमान्तरितमेखले ।  
-अङ्के निक्षिप्तचरणमास्तीर्णकरपल्लवे॥ ८॥
+अङ्के निक्षिप्तचरणमास्तीर्णकरपल्लवे॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रबुद्धपुण्डरीकाक्षं बालातपनिभांशुकम् ।  
-दिवसं शारदमिव प्रारम्भसुखदर्शनम्॥ ९॥
+दिवसं शारदमिव प्रारम्भसुखदर्शनम्॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रभानुलिप्तश्रीवत्सं लक्ष्मीविभ्रमदर्पणम् ।  
-कौस्तुभाख्यमपां सारं बिभ्राणं बृहतोरसा॥ १०॥
+कौस्तुभाख्यमपां सारं बिभ्राणं बृहतोरसा॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बहुभिर्विटपाकारैर्दिव्याभरणभूषितैः ।  
-आविर्भूतमपां मध्ये पारिजातमिवापरम्॥ ११॥
+आविर्भूतमपां मध्ये पारिजातमिवापरम्॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दैत्यस्त्रीगण्डलेखानां मदरागविलोपिभिः ।  
-हेतिभिश्चेतनावद्भिरुदीरितजयस्वनम्॥ १२॥
+हेतिभिश्चेतनावद्भिरुदीरितजयस्वनम्॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मुक्तशेषविरोधेन कुलिशव्रणलक्ष्मणा ।  
-उपस्थितं प्राञ्जलिना विनीतेन गरुत्मता॥ १३॥
+उपस्थितं प्राञ्जलिना विनीतेन गरुत्मता॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 योगनिद्रान्तविशदैः पावनैरवलोकनैः ।  
-भृग्वादीननुगृह्णन्तं सौखशायनिकानृषीन्॥ १४॥
+भृग्वादीननुगृह्णन्तं सौखशायनिकानृषीन्॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रणिपत्य सुरास्तस्मै शमयित्रे सुरद्विषां ।  
-अथैनं तुष्टुवुः स्तुत्यमवाङ्मनसगोचरम्॥ १५॥
+अथैनं तुष्टुवुः स्तुत्यमवाङ्मनसगोचरम्॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga10-16-27.mp3"></div>
 
 नमो विश्वसृजे पूर्वं विश्वं तदनु बिभ्रते ।  
-अथ विश्वस्य संहर्त्रे तुभ्यं त्रेधास्थितात्मने॥ १६॥
+अथ विश्वस्य संहर्त्रे तुभ्यं त्रेधास्थितात्मने॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रसान्तराण्येकरसं यथा दिव्यं पयोऽश्नुते ।  
-देशे देशे गुणेष्वेवमवस्थास्तवमविक्रियः॥ १७॥
+देशे देशे गुणेष्वेवमवस्थास्तवमविक्रियः॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमेयो मितलोकस्त्वमनर्थी प्रार्थनावहः ।  
-अजितो जिष्णुरत्यन्तमव्यक्तो व्यक्तकारणम्॥ १८॥
+अजितो जिष्णुरत्यन्तमव्यक्तो व्यक्तकारणम्॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हृदयस्थमनासन्नमकामं त्वां तपस्विनम् ।  
-दयालुमनघस्पृष्टं पुराणमजरं विदुः॥ १९॥
+दयालुमनघस्पृष्टं पुराणमजरं विदुः॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सर्वज्ञस्त्वमविज्ञातः सर्वयोनिस्त्वमात्मभूः ।  
-सर्वप्रभुरनीशस्त्वमेकस्त्वं सर्वरूपभाक्॥ २०॥
+सर्वप्रभुरनीशस्त्वमेकस्त्वं सर्वरूपभाक्॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सप्तसामोपगीतं त्वां सप्तार्णवजलेशयम् ।  
-सप्तार्चिमुखमाचख्युः सप्तलोकैकसंश्रयम्॥ २१॥
+सप्तार्चिमुखमाचख्युः सप्तलोकैकसंश्रयम्॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चतुर्वर्गफलं ज्ञानं कालावस्थाश्चतुर्युगाः ।  
-चतुर्वर्णमयो लोकस्त्वत्तः सर्वं चतुर्मुखात्॥ २२॥
+चतुर्वर्णमयो लोकस्त्वत्तः सर्वं चतुर्मुखात्॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अभ्यासनिगृहीतेन मनसा हृदयाश्रयम् ।  
-ज्योतिर्मयं विचिन्वन्ति योगिनस्त्वां विमुक्तये॥ २३॥
+ज्योतिर्मयं विचिन्वन्ति योगिनस्त्वां विमुक्तये॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अजस्य गृह्णतो जन्म निरीहस्य हतद्विषः ।  
-स्वपतो जागरूकस्य याथार्थ्यं वेद कस्तव॥ २४॥
+स्वपतो जागरूकस्य याथार्थ्यं वेद कस्तव॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शब्दादीन्विषयान्भोक्तुं चरितुं दुश्चरं तपः ।  
-पर्याप्तोऽसि प्रजाः पातुमौदासीन्येन वर्तितुम्॥ २५॥
+पर्याप्तोऽसि प्रजाः पातुमौदासीन्येन वर्तितुम्॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बहुधाप्यागमैर्भिन्नाः पन्थानः सिद्धिहेतवः ।  
-त्वय्येव निपतन्त्योघा जाह्नवीया इवार्णवे॥ २६॥
+त्वय्येव निपतन्त्योघा जाह्नवीया इवार्णवे॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्वय्यावेशितचित्तानां त्वत्समर्पितकर्मणाम् ।  
-गतिस्त्वं वीतरागाणामभूयःसंनिवृत्तये॥ २७॥
+गतिस्त्वं वीतरागाणामभूयःसंनिवृत्तये॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga10-28-50.mp3"></div>
 
 प्रत्यक्षोऽप्यपरिच्छेद्यो मह्यादिर्महिमा तव ।  
-आप्तवागनुमानाभ्यां साध्यं त्वां प्रति का कथा॥ २८॥
+आप्तवागनुमानाभ्यां साध्यं त्वां प्रति का कथा॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 केवलं स्मरणेनैव पुनांसि पुरुषं यतः ।  
-अनेन वृत्तयः शेषा निवेदितफलास्त्वयि॥ २९॥
+अनेन वृत्तयः शेषा निवेदितफलास्त्वयि॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उदधेरिव रत्नानि तेजांसीव विवस्वतः ।  
-स्तुतिभ्यो व्यतिरिच्यन्ते दूराणि चरितानि ते॥ ३०॥
+स्तुतिभ्यो व्यतिरिच्यन्ते दूराणि चरितानि ते॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनवाप्तमवाप्तव्यं न ते किञ्चन विद्यते ।  
-लोकानुग्रह एवैको हेतुस्ते जन्मकर्मणोः॥ ३१॥
+लोकानुग्रह एवैको हेतुस्ते जन्मकर्मणोः॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 महिमानं यदुत्कीर्त्य तव संह्रियते वचः ।  
-श्रमेण तदशक्त्या वा न गुणानामियत्तया॥ ३२॥
+श्रमेण तदशक्त्या वा न गुणानामियत्तया॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति प्रसादयामासुस्ते सुरास्तमधोक्षजम् ।  
-भूतार्थव्याहृतिः सा हि न स्तुतिः परमेष्ठिनः ॥ ३३॥
+भूतार्थव्याहृतिः सा हि न स्तुतिः परमेष्ठिनः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मै कुशलसंप्रश्नव्यञ्जितप्रीतये सुराः ।  
-भयमप्रलयोद्वेलादाचख्युर्नैरृतोदधेः॥ ३४॥
+भयमप्रलयोद्वेलादाचख्युर्नैरृतोदधेः॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ वेलासमासन्नशैलरन्ध्रानुवादिना ।  
-स्वरेणोवाच भगवान् परिभूतार्णवध्वनिः॥ ३५॥
+स्वरेणोवाच भगवान् परिभूतार्णवध्वनिः॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुराणस्य कवेस्तस्य वर्णस्थानसमीरिता ।  
-बभूव कृतसंस्कारा चरितार्थैव भारती॥ ३६॥
+बभूव कृतसंस्कारा चरितार्थैव भारती॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बभौ सदशनज्योत्स्ना सा विभोर्वदनोद्गता ।  
-निर्यातशेषा चरणाद्गङ्गेवोर्ध्वप्रवर्तिनी॥ ३७॥
+निर्यातशेषा चरणाद्गङ्गेवोर्ध्वप्रवर्तिनी॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जाने वो रक्षसाक्रान्तावनुभावपराक्रमौ ।  
-अङ्गिनां तमसेवोभौ गुणौ प्रथममध्यमौ॥ ३८॥
+अङ्गिनां तमसेवोभौ गुणौ प्रथममध्यमौ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विदितं तप्यमानं च तेन मे भुवनत्रयम् ।  
-अकामोपनतेनेव साधोर्हृदयमेनसा॥ ३९॥
+अकामोपनतेनेव साधोर्हृदयमेनसा॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कार्येषु चैककार्यत्वादभ्यर्थ्योऽस्मि न वज्रिणा ।  
-स्वयमेव हि वातोऽग्नेः सारथ्यं प्रतिपद्यते॥ ४०॥
+स्वयमेव हि वातोऽग्नेः सारथ्यं प्रतिपद्यते॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वासिधारापरिहृतः कामं चक्रस्य तेन मे ।  
-स्थापितो दशमो मूर्धा लभ्यांश इव रक्षसा॥ ४१॥
+स्थापितो दशमो मूर्धा लभ्यांश इव रक्षसा॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्रष्टुर्वरातिसर्गात्तु मया तस्य दुरात्मनः ।  
-अत्यारूढं रिपोः सोढं चन्दनेनेव भोगिनः॥ ४२॥
+अत्यारूढं रिपोः सोढं चन्दनेनेव भोगिनः॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धातारं तपसा प्रीतं ययाचे स हि राक्षसः ।  
-दैवात्सर्गादवध्यत्वं मर्त्येष्वास्थापराङ्मुखः॥ ४३॥
+दैवात्सर्गादवध्यत्वं मर्त्येष्वास्थापराङ्मुखः॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽहं दाशरथिर्भूत्वा रणभूमेर्बलिक्षमम् ।  
-करिष्यामि शरैस्तीक्ष्णैस्तच्छिरःकमलोच्चयम्॥ ४४॥
+करिष्यामि शरैस्तीक्ष्णैस्तच्छिरःकमलोच्चयम्॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अचिराद्यज्वभिर्भागं कल्पितं विधिवत्पुनः ।  
-मायाविभिरनालीढमादास्यध्वे निशाचरैः॥ ४५॥
+मायाविभिरनालीढमादास्यध्वे निशाचरैः॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वैमानिकाः पुण्यकृतस्त्यजन्तु मरुतां पथि ।  
-पुष्पकालोकसंक्षोभं मेघावरणतत्पराः॥ ४६॥
+पुष्पकालोकसंक्षोभं मेघावरणतत्पराः॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मोक्ष्यध्वे स्वर्गबन्दीनां वेणीबन्धनदूषितान् ।  
-शापयन्त्रितपौलस्त्यबलात्कारकचग्रहैः॥ ४७॥
+शापयन्त्रितपौलस्त्यबलात्कारकचग्रहैः॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रावणावग्रहक्लान्तमिति वागमृतेन सः ।  
-अभिवृष्य मरुत्सस्यं कृष्णमेघस्तिरोदधे॥ ४८॥
+अभिवृष्य मरुत्सस्यं कृष्णमेघस्तिरोदधे॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरहूतप्रभृतयः सुरकार्योद्यतं सुराः ।  
-अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः॥ ४९॥
+अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ तस्य विशांपत्युरन्ते कामस्य कर्मणः ।  
-पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम्॥ ५०॥
+पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम्॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga10-51-65.mp3"></div>
 
 हेमपात्रगतं दोर्भ्यामादधानः पयश्चरुम् ।  
-अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम्॥ ५१॥
+अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम्॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्राजापत्योपनीतं तदन्नं प्रत्यग्रहीन्नृपः ।  
-वृषेव पयसां सारमाविष्कृतमुदन्वता॥ ५२॥
+वृषेव पयसां सारमाविष्कृतमुदन्वता॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन कथिता राज्ञो गुणास्तस्यान्यदुर्लभाः ।  
-प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत्॥ ५३॥
+प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत्॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तेजो वैष्णवं पत्न्योर्विभेजे चरुसंज्ञितम् ।  
-द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम्॥ ५४॥
+द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम्॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अर्चिता तस्य कौसल्या प्रिया केकयवंशजा ।  
-अतः संभावितां ताभ्यां सुमित्रामैच्छदीश्वरः॥ ५५॥
+अतः संभावितां ताभ्यां सुमित्रामैच्छदीश्वरः॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते बहुज्ञस्य चित्तज्ञे पत्नौ पत्युर्महीक्षितः ।  
-चरोरर्धार्धभागाभ्यां तामयोजयतामुभे॥ ५६॥
+चरोरर्धार्धभागाभ्यां तामयोजयतामुभे॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा हि प्रणयवत्यासीत्सपत्न्योरुभयोरपि ।  
-भ्रमरी वारणस्येव मदनिस्यन्दरेखयोः॥ ५७॥
+भ्रमरी वारणस्येव मदनिस्यन्दरेखयोः॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताभिर्गर्भः प्रजाभूत्यै दध्रे देवांशसंभवः ।  
-सौरीभिरिव नाडीभिरमृताख्याभिरम्मयः॥ ५८॥
+सौरीभिरिव नाडीभिरमृताख्याभिरम्मयः॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सममापन्नसत्त्वास्ता रेजुरापाण्डुरत्विषः ।  
-अन्तर्गतफलारम्भाः सस्यानामिव संपदः॥ ५९॥
+अन्तर्गतफलारम्भाः सस्यानामिव संपदः॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुप्तं ददृशुरात्मानं सर्वाः स्वप्नेषु वामनैः ।  
-जलजासिकदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः॥ ६०॥
+जलजासिकदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हेमपक्षप्रभाजालं गगने च वितन्वता ।  
-उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयोमुचा॥ ६१॥
+उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयोमुचा॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बिभ्रत्या कौस्तुभन्यासं स्तनान्तरविलम्बितम् ।  
-पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया॥ ६२॥
+पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृताभिषेकैर्दिव्यायां त्रिस्रोतसि च सप्तभिः ।  
-ब्रह्मर्षिभिः परं ब्रह्म गृणद्भिरुपतस्थिरे॥ ६३॥
+ब्रह्मर्षिभिः परं ब्रह्म गृणद्भिरुपतस्थिरे॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताभ्यस्तथाविधान्स्वप्नाञ्छ्रुत्वा प्रीतो हि पार्थिवः ।  
-मेने परार्ध्यमात्मानं गुरुत्वेन जगद्गुरोः॥ ६४॥
+मेने परार्ध्यमात्मानं गुरुत्वेन जगद्गुरोः॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विभक्तात्मा विभुस्तासामेकः कुक्षिष्वनेकधा ।  
-उवास प्रतिमाचन्द्रः प्रसन्नानामपामिव॥ ६५॥
+उवास प्रतिमाचन्द्रः प्रसन्नानामपामिव॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga10-66-86.mp3"></div>
 
 अथाग्र्यमहिषी राज्ञः प्रसूतिसमये सती ।  
-पुत्रं तमोपहं लेभे नक्तं ज्योतिरिवौषधिः॥ ६६॥
+पुत्रं तमोपहं लेभे नक्तं ज्योतिरिवौषधिः॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राम इत्यभिरामेण वपुषा तस्य चोदितः ।  
-नामधेयं गुरुश्चक्रे जगत्प्रथममङ्गलम्॥ ६७॥
+नामधेयं गुरुश्चक्रे जगत्प्रथममङ्गलम्॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुवंशप्रदीपेन तेनाप्रतिमतेजसा ।  
-रक्षागृहगता दीपाः प्रत्यादिष्टा इवाभवन्॥ ६८॥
+रक्षागृहगता दीपाः प्रत्यादिष्टा इवाभवन्॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शय्यागतेन रामेण माता शातोदरी बभौ ।  
-सैकताम्भोजबलिना जाह्नवीव शरत्कृशा॥ ६९॥
+सैकताम्भोजबलिना जाह्नवीव शरत्कृशा॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कैकेय्यास्तनयो जज्ञे भरतो नाम शीलवान् ।  
-जनयित्रीमलंचक्रे यः प्रश्रय इव श्रियम्॥ ७०॥
+जनयित्रीमलंचक्रे यः प्रश्रय इव श्रियम्॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रा सुषुवे यमौ ।  
-सम्यगाराधिता विद्या प्रबोधविनयाविव॥ ७१॥
+सम्यगाराधिता विद्या प्रबोधविनयाविव॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्दोषमभवत्सर्वमाविष्कृतगुणं जगत् ।  
-अन्वगादिव हि स्वर्गो गां गतं पुरुषोत्तमम्॥ ७२॥
+अन्वगादिव हि स्वर्गो गां गतं पुरुषोत्तमम्॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्योदये चतुर्मूर्तेः पौलस्त्यचकितेश्वराः ।  
-विरजस्कैर्नभस्वद्भिर्दिश उच्छ्वसिता इव॥ ७३॥
+विरजस्कैर्नभस्वद्भिर्दिश उच्छ्वसिता इव॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृशानुरपधूमत्वात्प्रसन्नत्वात्प्रभाकरः ।  
-रक्षोविप्रकृतावास्तामपविद्धशुचाविव॥ ७४॥
+रक्षोविप्रकृतावास्तामपविद्धशुचाविव॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दशाननकिरीटेभ्यस्तत्क्षणं राक्षसश्रियः ।  
-मणिव्याजेन पर्यस्ताः पृथिव्यामश्रुबिन्दवः॥ ७५॥
+मणिव्याजेन पर्यस्ताः पृथिव्यामश्रुबिन्दवः॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुत्रजन्मप्रवेश्यानां तूर्याणां तस्य पुत्रिणः ।  
-आरम्भं प्रथमं चक्रुर्देवदुन्दुभयो दिवि॥ ७६॥
+आरम्भं प्रथमं चक्रुर्देवदुन्दुभयो दिवि॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संतानकमयी वृष्टिर्भवने चास्य पेतुषी ।  
-सन्मङ्गलोपचाराणां सैवादिरचनाऽभवत्॥ ७७॥
+सन्मङ्गलोपचाराणां सैवादिरचनाऽभवत्॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुमाराः कृतसंस्कारास्ते धात्रीस्तन्यपायिनः ।  
-आनन्देनाग्रजेनेव समं ववृधिरे पितुः॥ ७८॥
+आनन्देनाग्रजेनेव समं ववृधिरे पितुः॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वाभाविकं विनीतत्वं तेषां विनयकर्मणा ।  
-मुमूर्च्छ सहजं तेजो हविषेव हविर्भुजाम्॥ ७९॥
+मुमूर्च्छ सहजं तेजो हविषेव हविर्भुजाम्॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्परविरुद्धास्ते तद्रगोरनघं कुलम् ।  
 अलमुद्योतयामासुर्देवारण्यमिवर्तवः
 समानेऽपि हि सौभ्रात्रे यथेभौ रामलक्ष्मणौ ।  
-तथा भरतशत्रुघ्नौ प्रीत्या द्वन्द्वं बभूवतुः॥ ८१॥
+तथा भरतशत्रुघ्नौ प्रीत्या द्वन्द्वं बभूवतुः॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेषां द्वयोर्द्वयोरैक्यं बिभिदे न कदाचन ।  
-यथा वायुर्विभावस्वोर्यथा चन्द्रसमुद्रयोः॥ ८२॥
+यथा वायुर्विभावस्वोर्यथा चन्द्रसमुद्रयोः॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते प्रजानां प्रजानाथास्तेजसा प्रश्रयेण च ।  
-मनो जह्रुर्निदाघान्ते श्यामाभ्रा दिवसा इव॥ ८३॥
+मनो जह्रुर्निदाघान्ते श्यामाभ्रा दिवसा इव॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स चतुर्धा बभौ व्यस्तः प्रसवः पृथिवीपतेः ।  
-धर्मार्थकाममोक्षाणामवतार इवाङ्गवान्॥ ८४॥
+धर्मार्थकाममोक्षाणामवतार इवाङ्गवान्॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुणैराराधयामासुस्ते गुरुं गुरुवत्सलाः ।  
-तमेव चतुरन्तेशं रत्नैरिव महार्णवाः॥ ८५॥
+तमेव चतुरन्तेशं रत्नैरिव महार्णवाः॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुरगज इव दन्तैर्भग्नदैत्यासिधारै-
 र्नय इव पणबन्धव्यक्तयोगैरुपायैः ।  
 हरिरिव युगदीर्घैर्दोर्भिरंशैस्तदीयैः
-पतिरवनिपतीनां तैश्चकाशे चतुर्भिः॥ ८६॥
+पतिरवनिपतीनां तैश्चकाशे चतुर्भिः॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 रामावतारू नाम दशमः सर्गः ॥
