--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/12.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/12.md
@@ -1,339 +1,547 @@
----
-title: १२ रावणवधः   
-unicode_script: devanagari
----
++++
+title = "१२ रावणवधः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-01-10.mp3"></div>
 
 निर्दिष्टविषयस्नेहः स दशान्तमुपेयिवान् ।  
-आसीदासन्ननिर्वाणः प्रदीपार्चिरिवोषसि॥ १॥
+आसीदासन्ननिर्वाणः प्रदीपार्चिरिवोषसि॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं कर्णमूलमागत्य रामे श्रीर्न्यस्यतामिति ।  
-कैकेयीशङ्कयीवाह पलितच्छद्मना जरा॥ २॥
+कैकेयीशङ्कयीवाह पलितच्छद्मना जरा॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा पौरान्पौरकान्तस्य रामस्याभ्युदयश्रुतिः ।  
-प्रत्येकं ह्रादयांचक्रे कुल्येनोद्यानपादपान्॥ ३॥
+प्रत्येकं ह्रादयांचक्रे कुल्येनोद्यानपादपान्॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याभिषेकसंभारे कल्पितं क्रूरनिश्चया ।  
-दूषयामास कैकेयी शोकोष्णैः पार्थिवाश्रुभिः॥ ४॥
+दूषयामास कैकेयी शोकोष्णैः पार्थिवाश्रुभिः॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा किलाश्वासिता चण्डी भर्त्रा तत्संश्रुतौ वरौ ।  
-उद्ववामेन्द्रसिक्ता भूर्बिलमग्नाविवोरगौ॥ ५॥
+उद्ववामेन्द्रसिक्ता भूर्बिलमग्नाविवोरगौ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तयोश्चतुर्दशैकेन रामं प्राव्राजयत्समाः ।  
-द्वितीयेन सुतस्यैच्छद्वैधव्यैकफलां श्रियम्॥ ६॥
+द्वितीयेन सुतस्यैच्छद्वैधव्यैकफलां श्रियम्॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पित्रा दत्तं रुदन्रामः प्राङ्महीं प्रत्यपद्यत ।  
-पश्चाद्वनाय गच्छेति तदाज्ञां मुदितोऽग्रहीत्॥ ७॥
+पश्चाद्वनाय गच्छेति तदाज्ञां मुदितोऽग्रहीत्॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दधतो मङ्गलक्षौमे वसानस्य च वल्कले ।  
-ददृशुर्विस्मितास्तस्य मुखरागं समं जनाः॥ ८॥
+ददृशुर्विस्मितास्तस्य मुखरागं समं जनाः॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स सीतालक्ष्मणसखः सत्याद्गुरुमलोपयन् ।  
-विवेश दण्डकारण्यं प्रत्येकं च सतां मनः॥ ९॥
+विवेश दण्डकारण्यं प्रत्येकं च सतां मनः॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राजापि तद्वियोगार्तः स्मृत्वा शापं स्वकर्मजम् ।  
-शरीरत्यागमात्रेण शुद्धिलाभमन्यत॥ १०॥
+शरीरत्यागमात्रेण शुद्धिलाभमन्यत॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-11-20.mp3"></div>
 
 विप्रोषितकुमारं तद्राज्यमस्तमितेश्वरम् ।  
-रन्ध्रान्वेषणदक्षाणां द्विषामामिषततां ययौ॥ ११॥
+रन्ध्रान्वेषणदक्षाणां द्विषामामिषततां ययौ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथानाथाः प्रकृतयो मातृबन्धुनिवासिनम् ।  
-मौलैरानाययामासुर्भरतं स्तम्भिताश्रुभिः॥ १२॥
+मौलैरानाययामासुर्भरतं स्तम्भिताश्रुभिः॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुत्वा तथाविधं मृत्युं कैकेयीतनयः पितुः ।  
-मातुर्न केवलं स्वस्याः श्रियोऽप्यासीत्पराङ्मुखः॥ १३॥
+मातुर्न केवलं स्वस्याः श्रियोऽप्यासीत्पराङ्मुखः॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ससैन्यश्चान्वगाद्रामं दर्शितानाश्रमालयैः ।  
-तस्य पश्यन्ससौमित्रेरुदश्रुर्वसतिद्रुमान्॥ १४॥
+तस्य पश्यन्ससौमित्रेरुदश्रुर्वसतिद्रुमान्॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चित्रकूटवनस्थं च कथितस्वर्गतिर्गुरोः ।  
-लक्ष्म्या निमन्त्रयांचक्रे तमनुच्छिष्टसंपदा॥ १५॥
+लक्ष्म्या निमन्त्रयांचक्रे तमनुच्छिष्टसंपदा॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स हि प्रथमजे तस्मिन्नकृतश्रीपरिग्रहे ।  
-परिवेत्तारमात्मानं मेने स्वीकरणाद्भुवः॥ १६॥
+परिवेत्तारमात्मानं मेने स्वीकरणाद्भुवः॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमशक्यमपाक्रष्टुं निदेशात्स्वर्गिणः पितुः ।  
-ययाचे पादुके पश्चात्कर्तुं राज्याधिदेवते॥ १७॥
+ययाचे पादुके पश्चात्कर्तुं राज्याधिदेवते॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स विसृष्टस्तथेत्युक्त्वा भ्रात्रा नैवाविशत्पुरीम् ।  
-नन्दिग्रामगतस्तस्य राज्यं न्यासमिवाभुनक्॥ १८॥
+नन्दिग्रामगतस्तस्य राज्यं न्यासमिवाभुनक्॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दृढभक्तिरिति ज्येष्ठे राज्यतृष्णापराङ्मुखः ।  
-मातुः पापस्य भरतः प्रायश्चित्तमिवाकरोत्॥ १९॥
+मातुः पापस्य भरतः प्रायश्चित्तमिवाकरोत्॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामोऽपि सह वैदेह्या वने वन्येन वर्तयन् ।  
-चचार सानुजः शान्तो वृद्धेक्ष्वाकुव्रतं युवा॥ २०॥
+चचार सानुजः शान्तो वृद्धेक्ष्वाकुव्रतं युवा॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-21-30.mp3"></div>
 
 प्रभावस्तम्भितच्छायमाश्रितः स वनस्पतिम् ।  
-कदाचिदङ्के सीतायाः शिश्ये किंचिदिव श्रमात्॥ २१॥
+कदाचिदङ्के सीतायाः शिश्ये किंचिदिव श्रमात्॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऐन्द्रः किल नखैस्तस्या विददार स्तनौ द्विजः ।  
-प्रियोपभोगचिह्नेषु पौरोभाग्यमिवाचरन्॥ २२॥
+प्रियोपभोगचिह्नेषु पौरोभाग्यमिवाचरन्॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्नस्थदिषीकास्त्रं रामो रामावबोधितः ।  
-आत्मानं मुमुचे तस्मादेकनेत्रव्ययेन सः॥ २३॥
+आत्मानं मुमुचे तस्मादेकनेत्रव्ययेन सः॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामस्त्वासन्नदेशत्वाद्भरतागमनं पुनः ।  
-आशङ्क्योत्सुकसारङ्गां चित्रकूटस्थलीं जहौ॥ २४॥
+आशङ्क्योत्सुकसारङ्गां चित्रकूटस्थलीं जहौ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रययावातिथेयेषु वसन्नृषिकुलेषु सः ।  
-दक्षिणां दिशमृक्षेषु वार्षिकेष्विव भास्करः॥ २५॥
+दक्षिणां दिशमृक्षेषु वार्षिकेष्विव भास्करः॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बभौ तमनुगच्छन्ती विदेहाधिपतेः सुता ।  
-प्रतिषिद्धापि कैकेय्या लक्ष्मीरिव गुणोन्मुखी॥ २६॥
+प्रतिषिद्धापि कैकेय्या लक्ष्मीरिव गुणोन्मुखी॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनसूयातिसृष्टेन पुण्यगन्धेन काननम् ।  
-सा चकाराङ्गरागेण पुष्पोच्चलितषट्पदम्॥ २७॥
+सा चकाराङ्गरागेण पुष्पोच्चलितषट्पदम्॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संध्याभ्रकपिशस्तस्य विराधो नाम राक्षसः ।  
-अतिष्ठन्मार्गमावृत्य रामस्येन्दोरिव ग्रहः॥ २८॥
+अतिष्ठन्मार्गमावृत्य रामस्येन्दोरिव ग्रहः॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स जहार तयोर्मध्ये मैथिलीं लोकशोषणः ।  
-नभोनभस्ययोर्वृष्टिमवग्रह इवान्तरे॥ २९॥
+नभोनभस्ययोर्वृष्टिमवग्रह इवान्तरे॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं विनिष्पिष्य काकुत्स्थौ पुरा दूषयति स्थलीम् ।  
-गन्धेनाशुचिना चेति वसुधायां निचख्नतुः॥ ३०॥
+गन्धेनाशुचिना चेति वसुधायां निचख्नतुः॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-31-50.mp3"></div>
 
 पञ्चवट्यां ततो रामः शासनात्कुम्भजन्मनः ।  
-अनपोढस्थितिस्तस्थौ विन्ध्याद्रिः प्रकृताविव॥ ३१॥
+अनपोढस्थितिस्तस्थौ विन्ध्याद्रिः प्रकृताविव॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रावणावरजा तत्र राघवं मदनातुरा ।  
-अभिपेदे निदाघार्ता व्यालीव मलयद्रुमम्॥ ३२॥
+अभिपेदे निदाघार्ता व्यालीव मलयद्रुमम्॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा सीतासंनिधावेव तं वव्रे कथितान्वया ।  
-अत्यारूढो हि नारीणामकालज्ञो मनोभवः॥ ३३॥
+अत्यारूढो हि नारीणामकालज्ञो मनोभवः॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कलत्रवानहं बाले कनीयांसं भजस्व मे।  
-इति रामो वृषस्यन्तीं वृषस्कन्धः शशास ताम्॥ ३४॥
+इति रामो वृषस्यन्तीं वृषस्कन्धः शशास ताम्॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ज्येष्ठाभिगमनात्पूर्वं तेनाप्यनभिनन्दिताम् ।  
-साऽभूद्रामाश्रया भूयो नदीवोभयकूलभाक्॥ ३५॥
+साऽभूद्रामाश्रया भूयो नदीवोभयकूलभाक्॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संरम्भं मैथिलीहासः क्षणसौम्यां निनाय ताम् ।  
-निवातस्तिमितां वेलां चन्द्रोदय इवोदधेः॥ ३६॥
+निवातस्तिमितां वेलां चन्द्रोदय इवोदधेः॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 फलमस्योपहासस्य सद्यः प्राप्स्यसि पश्य माम् ।  
-मृग्याः परिभवो व्याघ्र्यामित्यवेहि त्वया कृतम्॥ ३७॥
+मृग्याः परिभवो व्याघ्र्यामित्यवेहि त्वया कृतम्॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्युक्त्वा मैथिलीं भर्तुरङ्के निविशतीं भयात् ।  
-रूपं शूर्पणखा नाम्नः सदृशं प्रत्यपद्यत॥ ३८॥
+रूपं शूर्पणखा नाम्नः सदृशं प्रत्यपद्यत॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लक्ष्मणः प्रथमं श्रुत्वा कोकिलामञ्जुवादिनीम् ।  
-शिवाघोरस्वनां पश्चाद्बुबुधे विकृतेति ताम्॥ ३९॥
+शिवाघोरस्वनां पश्चाद्बुबुधे विकृतेति ताम्॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पर्णशालामथ क्षिप्रं विकृष्टासिः प्रविश्य सः ।  
-वैरूप्यपौनरुक्त्येन भीषणां तामयोजयत्॥ ४०॥
+वैरूप्यपौनरुक्त्येन भीषणां तामयोजयत्॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा वक्रनखधारिण्या वेणुकर्कशपर्वया ।  
-अङ्कुशाकारयाङ्गुल्या तावतर्जयदम्बरे॥ ४१॥
+अङ्कुशाकारयाङ्गुल्या तावतर्जयदम्बरे॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्राप्य चाशु जनस्थानं खरादिभ्यस्तथाविधम् ।  
-रामोपक्रममाचख्यौ रक्षःपरिभवं नवम्॥ ४२॥
+रामोपक्रममाचख्यौ रक्षःपरिभवं नवम्॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मुखावयवलूनां तां नैरृता यत्पुरो दधुः ।  
-रामाभियायिनां तेषां तदेवाभूदमङ्गलम्॥ ४३॥
+रामाभियायिनां तेषां तदेवाभूदमङ्गलम्॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उदायुधानात्पततस्तान्दृप्तान्प्रेक्ष्य राघवः ।  
-निदधे विजयाशंसां चापे सीतां च लक्ष्मणे॥ ४४॥
+निदधे विजयाशंसां चापे सीतां च लक्ष्मणे॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एको दाशरथिः कामं यातुधानाः सहस्रशः ।  
-ते तु यावन्त एवाजौ तावांश्च ददृशे स तैः॥ ४५॥
+ते तु यावन्त एवाजौ तावांश्च ददृशे स तैः॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असज्जनेन काकुत्स्थः प्रयुक्तमथ दूषणम् ।  
-न चक्षमे शुभाचारः स दूषणमिवात्मनः॥ ४६॥
+न चक्षमे शुभाचारः स दूषणमिवात्मनः॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं शरैः प्रतिजग्राह खरत्रिशिरसौ च सः ।  
-क्रमशस्ते पुनस्तस्य चापात्सममिवोद्ययुः॥ ४७॥
+क्रमशस्ते पुनस्तस्य चापात्सममिवोद्ययुः॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तैस्त्रयाणां शितैर्बाणैर्यथापूर्वविशुद्धिभिः ।  
-आयुर्देहातिगैः पीतं रुधिरं तु पतत्रिभिः॥ ४८॥
+आयुर्देहातिगैः पीतं रुधिरं तु पतत्रिभिः॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्रामशरोत्कृत्ते बले महति रक्षसाम् ।  
-उत्थितं ददृशेऽन्न्यच्च कबन्धेभ्यो न किंचन॥ ४९॥
+उत्थितं ददृशेऽन्न्यच्च कबन्धेभ्यो न किंचन॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा बाणवर्षिणं रामं योधयित्वा सुरद्विषाम् ।  
-अप्रबोधाय सुष्वाप गृध्रच्छाये वरूथिनी॥ ५०॥
+अप्रबोधाय सुष्वाप गृध्रच्छाये वरूथिनी॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-51-70.mp3"></div>
 
 राघवास्त्रविदीर्णानां रावणं प्रति रक्षसाम् ।  
-तेषां शूर्पणखैवैका दुष्प्रवृत्तिहराऽभवत्॥ ५१॥
+तेषां शूर्पणखैवैका दुष्प्रवृत्तिहराऽभवत्॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निग्रहात्स्वसुराप्तानां वधाच्च धनदानुजः ।  
-रामेण निहितं मेने पदं दशसु मूर्धसु॥ ५२॥
+रामेण निहितं मेने पदं दशसु मूर्धसु॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रक्षसा मृगरूपेण वञ्चयित्वा स राघवौ ।  
-जहार सीतां पक्षीन्द्रप्रयासक्षणविघ्नितः॥ ५३॥
+जहार सीतां पक्षीन्द्रप्रयासक्षणविघ्नितः॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ सीतावेषिणौ गृध्रं लूनपक्षमपश्यताम् ।  
-प्राणैर्दशरथप्रीतेरनृणं कण्ठवर्तिभिः॥ ५४॥
+प्राणैर्दशरथप्रीतेरनृणं कण्ठवर्तिभिः॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स रावणहृतां ताभ्यां वचसाचष्ट मैथिलीम् ।  
-आत्मनः सुमहत्कर्म व्रणैरावेद्य संस्थितः॥ ५५॥
+आत्मनः सुमहत्कर्म व्रणैरावेद्य संस्थितः॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तयोस्तस्मिन्नवीभूतपितृव्यापतिशोकयोः ।  
-पितरीवाग्निसंस्कारात्परा ववृतिरे क्रियाः॥ ५६॥
+पितरीवाग्निसंस्कारात्परा ववृतिरे क्रियाः॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वधनिर्धूतशापस्य कबन्धस्योपदेशतः ।  
-मुमूर्च्छ सख्यं रामस्य समानव्यसने हरौ॥ ५७॥
+मुमूर्च्छ सख्यं रामस्य समानव्यसने हरौ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स हत्वा वालिनं वीरस्तत्पदे चिरकाङ्क्षिते ।  
-धातोः स्थान इवादेशं सुग्रीवं संन्यवेशयत्॥ ५८॥
+धातोः स्थान इवादेशं सुग्रीवं संन्यवेशयत्॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इतस्ततश्च वैदेहीमन्वेष्टुं भर्तृचोदिताः ।  
-कपयश्चेरुरार्तस्य रामस्येव मनोरथाः॥ ५९॥
+कपयश्चेरुरार्तस्य रामस्येव मनोरथाः॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रवृत्तावुपलब्धायां तस्याः संपातिदर्शनात् ।  
-मारुतिः सागरं तीर्णः संसारमिव निर्ममः॥ ६०॥
+मारुतिः सागरं तीर्णः संसारमिव निर्ममः॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दृष्टा विचिन्वता तेन लङ्कायां राक्षसीवृता ।  
-जानकी विषवल्लीभिः परितेव महौषधिः॥ ६१॥
+जानकी विषवल्लीभिः परितेव महौषधिः॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यै भर्तुरभिज्ञानमङ्गुलीयं ददौ कपिः ।  
-प्रत्युद्गतमिवानुष्णैस्तदानन्दाश्रुबिन्दुभिः॥ ६२॥
+प्रत्युद्गतमिवानुष्णैस्तदानन्दाश्रुबिन्दुभिः॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्वाप्य प्रियसंदेशैः सीतामक्षवधोद्धतः ।  
-स ददाह पुरीं लङ्कां क्षणसोढारिनिग्रहः॥ ६३॥
+स ददाह पुरीं लङ्कां क्षणसोढारिनिग्रहः॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रत्यभिज्ञानरत्नं च रामायादर्शयत्कृती ।  
-हृदयं स्वयमायातं वैदेह्या इव मूर्तिमत्॥ ६४॥
+हृदयं स्वयमायातं वैदेह्या इव मूर्तिमत्॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स प्राप हृदयन्यस्तमणिस्पर्शनिमीलितः ।  
-अपयोधरसंसर्गां प्रियालिङ्गननिर्वृतिम्॥ ६५॥
+अपयोधरसंसर्गां प्रियालिङ्गननिर्वृतिम्॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुत्वा रामः प्रियोदन्तं मेने तत्सङ्गमोत्सुकः ।  
-महार्णवपरिक्षेपं लङ्कायाः परिखालघुम्॥ ६६॥
+महार्णवपरिक्षेपं लङ्कायाः परिखालघुम्॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स प्रतस्थेऽरिनाशाय हरिसैन्यैरनुद्रुतः ।  
-न केवलं भुवः पृष्ठे व्योम्नि संबाधवर्तिभिः॥ ६७॥
+न केवलं भुवः पृष्ठे व्योम्नि संबाधवर्तिभिः॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निविष्टमुदधेः कूले तं प्रपाद बिभीषणः ।  
-स्नेहाद्राक्षसलक्ष्म्येव बुद्धिमाविश्य चोदितः॥ ६८॥
+स्नेहाद्राक्षसलक्ष्म्येव बुद्धिमाविश्य चोदितः॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मै निशाचरैश्वर्यं प्रतिशुश्राव राघवः ।  
-काले खलु समालब्धाः फलं बध्नन्ति नीतयः॥ ६९॥
+काले खलु समालब्धाः फलं बध्नन्ति नीतयः॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स सेतुं बन्धयामास प्लवगैर्लवणाम्भसि ।  
-रसातलादिवोन्मग्नं शेषं स्वप्नाय शार्ङ्गिणः॥ ७०॥
+रसातलादिवोन्मग्नं शेषं स्वप्नाय शार्ङ्गिणः॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-71-90.mp3"></div>
 
 तेनोत्तीर्य पथा लङ्कां रोधयामास पिङ्गलैः ।  
-द्वितीयं हेमप्राकारं कुर्वद्भिरिव वानरैः॥ ७१॥
+द्वितीयं हेमप्राकारं कुर्वद्भिरिव वानरैः॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रणः प्रववृते तत्र भीमः प्लवगरक्षसाम् ।  
-दिग्विजृम्भितकाकुत्स्थपौलस्त्यजयघोषणः॥ ७२॥
+दिग्विजृम्भितकाकुत्स्थपौलस्त्यजयघोषणः॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पादपाविद्धपरिघः शिलानिष्पिष्टमुद्गरः ।  
-अतिशस्त्रनखन्यासः शैलरुग्णमतंगजः॥ ७३॥
+अतिशस्त्रनखन्यासः शैलरुग्णमतंगजः॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ रामशिरश्छेददर्शनोद्भ्रान्तचेतनाम् ।  
-सीतां मायेति शंसन्ती त्रिजटा समजीवयत्॥ ७४॥
+सीतां मायेति शंसन्ती त्रिजटा समजीवयत्॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामं जीवति मे नाथ इति सा विजहौ शुचम् ।  
-प्राङ्मत्वा सत्यमस्यान्तं जीवितास्मीति लज्जिता॥ ७५॥
+प्राङ्मत्वा सत्यमस्यान्तं जीवितास्मीति लज्जिता॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गरुडापातविश्लिष्टमेघनादास्त्रबन्धनः ।  
-दाशरथ्योः क्षणक्लेशः स्वप्नवृत्त इवाभवत्॥ ७६॥
+दाशरथ्योः क्षणक्लेशः स्वप्नवृत्त इवाभवत्॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो बिभेद पौलस्त्यः शक्त्या वक्षसि लक्ष्मणम् ।  
-रामस्त्वनाहतोऽप्यासीद्विदीर्णहॄदयः शुचा॥ ७७॥
+रामस्त्वनाहतोऽप्यासीद्विदीर्णहॄदयः शुचा॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स मारुतिसमानीतमहौषधिहतव्यथः ।  
-लङ्कास्त्रीणां पुनश्चक्रे विलापाचार्यकं शरैः॥ ७८॥
+लङ्कास्त्रीणां पुनश्चक्रे विलापाचार्यकं शरैः॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स नादं मेघनादस्य धनुश्चेन्द्रायुधप्रभम् ।  
-मेघस्येव शरत्कालो न किञ्चित्पर्यशेषयत्॥ ७९॥
+मेघस्येव शरत्कालो न किञ्चित्पर्यशेषयत्॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुम्भकर्णः कपीन्द्रेण तुल्यावस्थः स्वसुः कृतः ।  
-रुरोध रामं शृङ्गीव टङ्कच्छिन्नमनःशिलः॥ ८०॥
+रुरोध रामं शृङ्गीव टङ्कच्छिन्नमनःशिलः॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अकाले बोधितो भ्राता प्रियस्वप्नो वृथा भवान् ।  
-रामेषुभिरितीवासौ दीर्घनिद्रां प्रवेशितः॥ ८१॥
+रामेषुभिरितीवासौ दीर्घनिद्रां प्रवेशितः॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इतराण्यपि रक्षांसि पेतुर्वानरकोटिषु ।  
-रजांसि समरोत्थानि तच्छोणितनदीष्विव॥ ८२॥
+रजांसि समरोत्थानि तच्छोणितनदीष्विव॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्ययावथ पौलस्त्यः पुनर्युद्धाय मन्दिरात् ।  
-अरावणमरामं वा जगदद्येति निश्चितः॥ ८३॥
+अरावणमरामं वा जगदद्येति निश्चितः॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामं पदातिमालोक्य लङ्केशं च वरूथिनम् ।  
-हरियुग्यं रथं तस्मै प्रजिघाय पुरंदरः॥ ८४॥
+हरियुग्यं रथं तस्मै प्रजिघाय पुरंदरः॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमाधूतध्वजपटं व्योमगङ्गोर्मिवायुभिः ।  
-देवसूतभुजालम्बी जैत्रमध्यास्त राघवः॥ ८५॥
+देवसूतभुजालम्बी जैत्रमध्यास्त राघवः॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मातलिस्तस्य माहेन्द्रमामुमोच तनुच्छदम् ।  
-यत्रोत्पलदलक्लैब्यमस्त्राण्यापुः सुरद्विषाम्॥ ८६॥
+यत्रोत्पलदलक्लैब्यमस्त्राण्यापुः सुरद्विषाम्॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अन्योन्यदर्शनप्राप्तविक्रमावसरं चिरात् ।  
-रामरावणयोर्युद्धं चरितार्थमिवाभवत्॥ ८७॥
+रामरावणयोर्युद्धं चरितार्थमिवाभवत्॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भुजमूर्धोरुबाहुल्यादेकोऽपि धनदानुजः ।  
-ददृशे ह्ययथापूर्वो मातृवंश इव स्थितः॥ ८८॥
+ददृशे ह्ययथापूर्वो मातृवंश इव स्थितः॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जेतारं लोकपालानां स्वमुखैरर्चितेश्वरम् ।  
-रामस्तुलितकैलासमारातिं बह्वमन्यत॥ ८९॥
+रामस्तुलितकैलासमारातिं बह्वमन्यत॥ ८९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/89.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य स्फुरति पौलस्त्यः सीतासंगमशंसिनि ।  
-निचखानाधिकक्रोधः शरं सव्येतरे भुजे॥ ९०॥
+निचखानाधिकक्रोधः शरं सव्येतरे भुजे॥ ९०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/90.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga12-91-104.mp3"></div>
 
 रावणस्यापि रामास्तो भित्त्वा हृदयमाशुगः ।  
-विवेश भुवमाख्यातुमुरगेभ्य इव प्रियम्॥ ९१॥
+विवेश भुवमाख्यातुमुरगेभ्य इव प्रियम्॥ ९१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/91.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वचसैव तयोर्वाक्यमस्त्रमस्त्रेण निघ्नतोः ।  
-अन्योन्यजयसंरम्भो ववृधे वादिनोरिव॥ ९२॥
+अन्योन्यजयसंरम्भो ववृधे वादिनोरिव॥ ९२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/92.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विक्रमव्यतिहारेण सामान्याऽभूद्द्वयोरपि ।  
-जयश्रीरन्तरा वेदिर्मत्तवारणयोरिव॥ ९३॥
+जयश्रीरन्तरा वेदिर्मत्तवारणयोरिव॥ ९३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/93.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृतप्रतिकृतप्रीतैस्तयोर्मुक्तां सुरासुरैः ।  
-परस्परशरव्राताः पुष्पवृष्टिं न सेहिरे॥ ९४॥
+परस्परशरव्राताः पुष्पवृष्टिं न सेहिरे॥ ९४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/94.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अयःशङ्कुचितां रक्षः शतघ्नीमथ शत्रवे ।  
-हृतां वैवस्वतस्येव कूटशाल्मलिमक्षिपत्॥ ९५॥
+हृतां वैवस्वतस्येव कूटशाल्मलिमक्षिपत्॥ ९५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/95.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राघवो रथमप्राप्तां तामाशां च सुरद्विषाम् ।  
-अर्धचन्द्रमुखैर्बाणैश्चिच्छेद कदलीसुखम्॥ ९६॥
+अर्धचन्द्रमुखैर्बाणैश्चिच्छेद कदलीसुखम्॥ ९६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/96.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमोघं संदधे चास्मै धनुष्येकधनुर्धरः ।  
-ब्राह्ममस्त्रं प्रियाशोकशल्यनिष्कर्षणौषधम्॥ ९७॥
+ब्राह्ममस्त्रं प्रियाशोकशल्यनिष्कर्षणौषधम्॥ ९७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/97.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तद्व्योम्नि शतधा भिन्नं ददृशे दीप्तिमन्मुखम् ।  
-वपुर्महोरगस्येव करालफलमण्डलम्॥ ९८॥
+वपुर्महोरगस्येव करालफलमण्डलम्॥ ९८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/98.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेन मन्त्रप्रयुक्तेन निमेषार्धादपातयत् ।  
-स रावणशिरःपङ्क्तिमज्ञातव्रणवेदनाम्॥ ९९॥
+स रावणशिरःपङ्क्तिमज्ञातव्रणवेदनाम्॥ ९९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/99.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बालार्कप्रतिमेवाप्सु वीचिभिन्ना पतिष्यतः ।  
-रराज रक्षःकायस्य कण्ठच्छेदपरम्परा॥ १००॥
+रराज रक्षःकायस्य कण्ठच्छेदपरम्परा॥ १००॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/100.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मरुतां पश्यतां तस्य शिरांसि पतितान्यपि ।  
-मनो नातिविशस्वास पुनःसंधानशङ्किनाम्॥ १०१॥
+मनो नातिविशस्वास पुनःसंधानशङ्किनाम्॥ १०१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/101.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ मदगुरुपक्षैलोकपालद्विपाना-
 मनुगतमलिवृन्दैर्गण्डभित्तीर्विहाय ।  
 उपनतमणिबन्धे मूर्ध्नि पौलस्त्यशत्रोः
-सुरभि सुरविमुक्तं पुष्पवर्षं पपात॥ १०२॥
+सुरभि सुरविमुक्तं पुष्पवर्षं पपात॥ १०२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/102.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यन्ता हरेः सपदि संहृतकार्मुकज्य-
 मापृच्छ्य राघवमनुष्ठितदेवकार्यम् ।  
 नामाङ्करावणशराङ्कितकेतुयष्टि-
-मूर्ध्वं रथं हरिसहस्रयुजं निनाय॥ १०३॥
+मूर्ध्वं रथं हरिसहस्रयुजं निनाय॥ १०३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/103.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुपतिरपि जातवेदोविशुद्धां प्रगृह्य प्रियां
 प्रियसुहृदि बिभीषणे संगमय्य श्रियं वैरिणः ।  
 रविसुतसहितेन तेनानुयातः ससौमित्रिणा
-भुजविजितविमानरत्नाधिरूढः प्रतस्थे पुरीम्॥ १०४॥
+भुजविजितविमानरत्नाधिरूढः प्रतस्थे पुरीम्॥ १०४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/104.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 रावणवधो नाम द्वादशः सर्गः ॥
