--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/13.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/13.md
@@ -1,276 +1,434 @@
----
-title: १३ दण्डकाप्रत्यागमनम् 
-unicode_script: devanagari
----
++++
+title = "१३ दण्डकाप्रत्यागमनम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga13-01-25.mp3"></div>
 
 अथात्मनः शब्दगुणं गुणज्ञः पदं विमानेन विगाहमानः ।  
-रत्नाकरं वीक्ष्य मिथः स जायां रामाभिधानो हरिरित्युवाच ॥ १॥
+रत्नाकरं वीक्ष्य मिथः स जायां रामाभिधानो हरिरित्युवाच ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वैदेहि पश्यऽऽमलयाद्विभक्तं मत्सेतुना फेनिलमम्बुराशिम्
-छायापथेनेव शरत्प्रसन्नमाकाशमाविष्कृतचारुतारम् ॥ २॥
+छायापथेनेव शरत्प्रसन्नमाकाशमाविष्कृतचारुतारम् ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुरोर्यियक्षोः कपिलेन मेध्ये रसातलं संक्रमिते तुरंगे ।  
-तदर्थमुर्वीमवधारयद्भिः पूर्वैः किलायं परिवर्धितो नः ॥ ३॥
+तदर्थमुर्वीमवधारयद्भिः पूर्वैः किलायं परिवर्धितो नः ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गर्भं दधत्यर्कमरीचयोऽस्माद्विवृद्धिमत्राश्नुवते वसूनि ।  
-अबिन्धनं वह्निमसौ बिभर्ति प्रह्लादनं ज्योतिरजन्यनेन ॥ ४॥
+अबिन्धनं वह्निमसौ बिभर्ति प्रह्लादनं ज्योतिरजन्यनेन ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तां तामवस्थां प्रतिपद्यमानं स्थितं दश व्याप दिशो महिम्ना ।  
-विष्णोरिवास्यानवधारणीयमीदृक्तया रूपमियत्ताया वा ॥ ५॥
+विष्णोरिवास्यानवधारणीयमीदृक्तया रूपमियत्ताया वा ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नाभिप्ररूढाम्बुरुहासनेन संस्तूयमानः प्रथमेन धात्रा ।  
-अमुं युगान्तोचितयोगनिद्रः संहृत्य लोकान्पुरुषोऽधिशेते ॥ ६॥
+अमुं युगान्तोचितयोगनिद्रः संहृत्य लोकान्पुरुषोऽधिशेते ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पक्षच्छिदा गोत्रभिदात्तगन्धाः शरण्यमेनं शतशो महीध्राः ।  
-नृपा इवोपप्लविनः परेभ्यो धर्मोत्तरं मध्यममाश्रयन्ते ॥ ७॥
+नृपा इवोपप्लविनः परेभ्यो धर्मोत्तरं मध्यममाश्रयन्ते ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रसातलादादिभवेन पुंसा भुवः प्रयुक्तोद्वहनक्रियायाः ।  
-अस्याच्छमम्भः प्रलयप्रवृद्धं मुहूर्तवक्त्राभरणं बभूव ॥ ८॥
+अस्याच्छमम्भः प्रलयप्रवृद्धं मुहूर्तवक्त्राभरणं बभूव ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मुखार्पणेषु प्रकृतिप्रगल्भाः स्वयं तरंगाधरदानदक्षः ।  
-अनन्यसामान्यकलत्रवृत्तिः पिबत्यसौ पाययते च सिन्धुः ॥ ९॥
+अनन्यसामान्यकलत्रवृत्तिः पिबत्यसौ पाययते च सिन्धुः ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ससत्वमादाय नदीमुखाम्भः संमीलयन्तो विवृताननत्वात् ।  
-अमी तिरोभिस्तिमयः सरन्ध्रैरूध्वं वितन्वन्ति जलप्रवाहान् ॥ १०॥
+अमी तिरोभिस्तिमयः सरन्ध्रैरूध्वं वितन्वन्ति जलप्रवाहान् ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मातंगनक्रैः सहसोत्पतद्भिर्भिन्नान्द्विधा पश्य समुद्रफेनान् ।  
-कपोलसंसर्पितया य एषां व्रजन्ति कर्णक्षणचामरत्वम् ॥ ११॥
+कपोलसंसर्पितया य एषां व्रजन्ति कर्णक्षणचामरत्वम् ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वेलानिलाय प्रसृता भुजंगा वहोर्मिविस्फूर्जथुनिर्विशेषाः ।  
-सूर्यांशुसंपर्कविवृद्धरागैर्व्यज्यन्त एते मणिभिः फणस्थैः ॥ १२॥
+सूर्यांशुसंपर्कविवृद्धरागैर्व्यज्यन्त एते मणिभिः फणस्थैः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तवाधरस्पर्धिषु विद्रुमेषु पर्यस्तमेतत्सहसोर्मिवेगात् ।  
-ऊर्ध्वाङ्कुरप्रोतमुखं कथंचित्क्लेशादपक्रामति शङ्खयूथम् ॥ १३॥
+ऊर्ध्वाङ्कुरप्रोतमुखं कथंचित्क्लेशादपक्रामति शङ्खयूथम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रवृत्तमात्रेण पयांसि पातुमावर्तवेगाद्भ्रमता घनेन ।  
-आभाति भूयिष्ठमयं समुद्रः प्रमथ्यमानो गिरिणेव भूयः ॥ १४॥
+आभाति भूयिष्ठमयं समुद्रः प्रमथ्यमानो गिरिणेव भूयः ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दूरादयश्चक्रनिभस्य तन्वी तमालतालीवनराजिनीला ।  
-आभाति वेला लवणाम्बुराशेर्धारानिबद्धेव कलङ्करेखा ॥ १५॥
+आभाति वेला लवणाम्बुराशेर्धारानिबद्धेव कलङ्करेखा ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वेलानिलः केतकरेणुभिस्ते संभावयत्याननमायताक्षि ।  
-मामक्षमं मण्डलकालहानेर्वेत्तीव बिम्बाधरबद्धतृष्णम् ॥ १६॥
+मामक्षमं मण्डलकालहानेर्वेत्तीव बिम्बाधरबद्धतृष्णम् ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एते वयं सैकतभिन्नशुक्तिपर्यस्तमुक्तापटलं पयोधेः ।  
-प्राप्ता मुहूर्तेन विमानवेगात्कूलं फलावर्जितपूगमालम् ॥ १७॥
+प्राप्ता मुहूर्तेन विमानवेगात्कूलं फलावर्जितपूगमालम् ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुरुष्व तावत्करभोरु पश्चान्मार्गे मृगप्रेक्षिणि दृष्टिपातम् ।  
-एषा विदूरीभवतः समुद्रात्सकानना निष्पततीव भूमिः ॥ १८॥
+एषा विदूरीभवतः समुद्रात्सकानना निष्पततीव भूमिः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्वचित्पथा संचरते सुराणां क्वचिद्घनानां पततां क्वचिच्च ।  
-यथाविधो मे मनसोऽभिलाषः प्रवर्तते पश्य तथा विमानम् ॥ १९॥
+यथाविधो मे मनसोऽभिलाषः प्रवर्तते पश्य तथा विमानम् ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असौ महेन्द्रद्विपदानगन्धिस्त्रिमार्गगावीचिविमर्दशीतः ।  
-आकाशवायुर्दिनयौवनोत्थानाचामति स्वेदलवान्मुखे ते ॥ २०॥
+आकाशवायुर्दिनयौवनोत्थानाचामति स्वेदलवान्मुखे ते ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 करेण वातायनलम्बितेन स्पृष्टस्त्वया चण्डि कुतूहलिन्या ।  
-आमुञ्चतीवाभरणं द्वितीयमुद्भिन्नविद्युद्वलयो घनस्ते ॥ २१॥
+आमुञ्चतीवाभरणं द्वितीयमुद्भिन्नविद्युद्वलयो घनस्ते ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमी जनस्थानमपोढविघ्नं मत्वा समारब्धनवोटजानि ।  
-अध्यासते चीरभृतो यथास्वं चिरोज्झितान्याश्रममण्डलानि ॥ २२॥
+अध्यासते चीरभृतो यथास्वं चिरोज्झितान्याश्रममण्डलानि ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सैषा स्थली यत्र विचिन्वता त्वां भ्रष्टं मया नूपुरमेकमुर्व्याम् ।  
-अदृष्यत त्वच्चरणारविन्दविश्लेषदुःखादिव बद्धमौनम् ॥ २३॥
+अदृष्यत त्वच्चरणारविन्दविश्लेषदुःखादिव बद्धमौनम् ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्वं रक्षसा भीरु यतोऽपनीता तं मार्गमेताः कृपया लता मे ।  
-अदर्शयन्वक्तुमशक्नुवत्यः शाखाभिरावर्जितपल्लवाभिः ॥ २४॥
+अदर्शयन्वक्तुमशक्नुवत्यः शाखाभिरावर्जितपल्लवाभिः ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मृग्यश्च दर्भाङ्कुरनिर्व्यपेक्षास्तवागतिज्ञं समबोधयन्माम् ।  
-व्यापारयन्त्यो दिशि दक्षिणस्यामुत्पक्षराजीनि विलोचनानि ॥ २५॥
+व्यापारयन्त्यो दिशि दक्षिणस्यामुत्पक्षराजीनि विलोचनानि ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga13-26-50.mp3"></div>
 
 एतद्गिरेर्माल्यवतः पुरस्तादाविर्भत्यम्बरलेखि शृङ्गम् ।  
-नवं पयो यत्र घनैर्मया च त्वद्विप्रयोगाश्रु समं विसृष्टम् ॥ २६॥
+नवं पयो यत्र घनैर्मया च त्वद्विप्रयोगाश्रु समं विसृष्टम् ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गन्धश्च धाराहतपल्वलानां कादम्बमर्धोद्गतकेसरं च ।  
-स्निग्धाश्च केकाः शिखिनां बभूवुर्यस्मिन्नसह्यानि विना त्वया मे ॥ २७॥
+स्निग्धाश्च केकाः शिखिनां बभूवुर्यस्मिन्नसह्यानि विना त्वया मे ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पूर्वानुभूतं स्मरता च यत्र कम्पोत्तरं भीरु तवोपगूढम् ।  
-गुहाविसारीण्यतिवाहितानि मया कथंचिद्घनगर्जितानि ॥ २८॥
+गुहाविसारीण्यतिवाहितानि मया कथंचिद्घनगर्जितानि ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आसारसिक्तक्षितिबाष्पयोगान्मामक्षिणोद्यत्र विभिन्नकोशैः ।  
-विडम्ब्यमाना नवकन्दलैस्ते विवाहधूमारुणलोचनश्रीः ॥ २९॥
+विडम्ब्यमाना नवकन्दलैस्ते विवाहधूमारुणलोचनश्रीः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपान्तवानीरवनोपगूढान्यालक्षपारिप्लवसारसानि ।  
-दूरावतीर्णा पिबतीव खेदादमूनि पम्पासलिलानि दृष्टिः ॥ ३०॥
+दूरावतीर्णा पिबतीव खेदादमूनि पम्पासलिलानि दृष्टिः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अत्रावियुक्तानि रथङ्गनाम्नामन्योन्यदत्तोत्पलकेसराणि ।  
-द्वन्द्वानि दूरान्तरवर्तिना ते मया प्रिये सस्मितमीक्षितानि ॥ ३१॥
+द्वन्द्वानि दूरान्तरवर्तिना ते मया प्रिये सस्मितमीक्षितानि ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इमां तटाशोकलतां च तन्वीं स्तनाभिरामस्तबकाभिनम्राम् ।  
-त्वत्प्राप्तिबुद्ध्या परिरब्धुकामः सौमित्रिणा साश्रुरहं निषिद्धः ॥ ३२॥
+त्वत्प्राप्तिबुद्ध्या परिरब्धुकामः सौमित्रिणा साश्रुरहं निषिद्धः ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमूर्विमानान्तरलम्बिनीनां श्रुत्वा स्वनं काञ्चनकिङ्किणीनाम् ।  
-प्रत्युद्व्रजन्तीव खमुत्पतन्त्यो गोदावरीसारसपङ्क्तयस्त्वाम् ॥ ३३॥
+प्रत्युद्व्रजन्तीव खमुत्पतन्त्यो गोदावरीसारसपङ्क्तयस्त्वाम् ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एषा त्वया पेशलमध्ययापि घटाम्बुसंवर्धितबालचूता ।  
-आनन्दयत्युन्मुखकृष्णसारा दृष्टा चिरात्पञ्चवटी मनो मे ॥ ३४॥
+आनन्दयत्युन्मुखकृष्णसारा दृष्टा चिरात्पञ्चवटी मनो मे ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अत्रानुगोदं मृगयानिवृत्तस्तरंगवातेन विनीतखेदः ।  
-रहस्त्वदुत्सङ्गनिषण्णमूर्धा स्मरामि वानीरगृहेषु सुप्तः ॥ ३५॥
+रहस्त्वदुत्सङ्गनिषण्णमूर्धा स्मरामि वानीरगृहेषु सुप्तः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भ्रूभेदमात्रेण पदान्मघोनः प्रभ्रंशयां यो नहुषं चकार ।  
-तस्याविलाम्भःपरिशुद्धिहेतोर्भौमो मुनेः स्थानपरिग्रहोऽयम् ॥ ३६॥
+तस्याविलाम्भःपरिशुद्धिहेतोर्भौमो मुनेः स्थानपरिग्रहोऽयम् ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्रेताग्निधूमाग्रमनिन्द्यकीर्तेस्तस्येदमाक्रान्तविमानमार्गम् ।  
-घ्रात्वा हविर्गन्धि रजोविमुक्तः समश्नुते मे लघिमानमात्मा ॥ ३७॥
+घ्रात्वा हविर्गन्धि रजोविमुक्तः समश्नुते मे लघिमानमात्मा ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एतन्मुमुनेर्मानिनि शातकर्णेः पञ्चाप्सरो नाम विहारवारि ।  
-आभाति पर्यन्तवनं विदूरान्मेघान्तरालक्ष्यमिवेन्दुबिम्बम् ॥ ३८॥
+आभाति पर्यन्तवनं विदूरान्मेघान्तरालक्ष्यमिवेन्दुबिम्बम् ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरा स दर्भाङ्कुरमात्रवृत्तिश्चरन्मृगैः सार्धमृषिर्मघोना ।  
-समाधिभीतेन किलोपनीतः पञ्चाप्सरोयौवनकूटबन्धम् ॥ ३९॥
+समाधिभीतेन किलोपनीतः पञ्चाप्सरोयौवनकूटबन्धम् ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यायमन्तर्हितसौधभाजः प्रसक्तसंगीतमृदङ्गघोषः ।  
-वियद्गतः पुष्पकचन्द्रशालाः क्षणं प्रतिश्रुन्मुखराः करोति ॥ ४०॥
+वियद्गतः पुष्पकचन्द्रशालाः क्षणं प्रतिश्रुन्मुखराः करोति ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हविर्भुजामेधवतां चतुर्णां मध्ये ललाटंतपसप्तसप्तिः ।  
-असौ तपस्यत्यपरस्तपस्वी नाम्ना सुतीक्ष्णश्चरितेन दान्तः ॥ ४१॥
+असौ तपस्यत्यपरस्तपस्वी नाम्ना सुतीक्ष्णश्चरितेन दान्तः ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमुं सहासप्रहितेक्षणानि व्याजार्धसंदर्शितमेखलानि ।  
-नालं विकर्तुं जनितेन्द्रशङ्कं सुराङ्गनाविभ्रमचेष्टितानि ॥ ४२॥
+नालं विकर्तुं जनितेन्द्रशङ्कं सुराङ्गनाविभ्रमचेष्टितानि ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एषोऽक्षमालावलयं मृगाणां कण्डूयितारं कुशसूचिलावम् ।  
-सभाजने मे भुजमूर्ध्वबाहुः सव्येतरं प्राध्वमितः प्रयुङ्क्ते ॥ ४३॥
+सभाजने मे भुजमूर्ध्वबाहुः सव्येतरं प्राध्वमितः प्रयुङ्क्ते ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वाचंयमत्वात्प्रणतिं ममैष कम्पेन किञ्चित्प्रतिगृह्य मूर्ध्नः ।  
-दृष्टिं विमानव्यवधानमुक्तां पुनः सहस्रार्चिषि संनिधत्ते ॥ ४४॥
+दृष्टिं विमानव्यवधानमुक्तां पुनः सहस्रार्चिषि संनिधत्ते ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अदः शरण्यं शरभङ्गनाम्नस्तपोवनं पावनमाहिताग्नेः ।  
-चिराय संतर्प्य समिद्भिरग्निं यो मन्त्रपूतां तनुमप्यहौषीत् ॥ ४५॥
+चिराय संतर्प्य समिद्भिरग्निं यो मन्त्रपूतां तनुमप्यहौषीत् ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 छायाविनीताध्वपरिश्रमेषु भूयिष्ठसंभाव्यफलेष्वमीषु ।  
-तस्यातिथीनामधुनासपर्या स्थिता सुपुत्रेष्विव पादपेषु ॥ ४६॥
+तस्यातिथीनामधुनासपर्या स्थिता सुपुत्रेष्विव पादपेषु ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धारास्वनोद्गारिदरीमुखोऽसौ शृङ्गाङ्गलग्नाम्बुजवप्रपङ्कः ।  
-बध्नाति मे बन्धुरगात्रि चक्षुर्दृप्तः ककुद्मानिव चित्रकूटः ॥ ४७॥
+बध्नाति मे बन्धुरगात्रि चक्षुर्दृप्तः ककुद्मानिव चित्रकूटः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एषा प्रसन्नस्तिमितप्रवाहा सरिद्विदूरान्तरभावतन्वी ।  
-मन्दाकिनी भाति नगोपकण्ठे मुक्तावली कण्ठगतेव भूमेः ॥ ४८॥
+मन्दाकिनी भाति नगोपकण्ठे मुक्तावली कण्ठगतेव भूमेः ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अयं सुजातोऽनुगिरं तमालः प्रवालमादाय सुगन्धि यस्य ।  
-यवाङ्कुरापाण्डुकपोलशोभी मयावतंसः परिकल्पितस्ते ॥ ४९॥
+यवाङ्कुरापाण्डुकपोलशोभी मयावतंसः परिकल्पितस्ते ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनिग्रहत्रासविनीतसत्त्वमपुष्पलिङ्गात्फलबन्धिवृक्षम् ।  
-वनं तपःसाधनमेतदत्रेराविष्कृतोदग्रतरप्रभावम् ॥ ५०॥
+वनं तपःसाधनमेतदत्रेराविष्कृतोदग्रतरप्रभावम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga13-51-65.mp3"></div>
 
 अत्राभिषेकाय तपोधनानां सप्तर्षिहस्तोद्धृतहेमपद्माम् ।  
-प्रवर्तयामास किलानसूया त्रिस्रोतसं त्र्यम्बकमौलिमालाम् ॥ ५१॥
+प्रवर्तयामास किलानसूया त्रिस्रोतसं त्र्यम्बकमौलिमालाम् ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वीरासनैर्ध्यानजुषामृषीणाममी समध्यासितवेदिमध्याः ।  
-निवातनिष्कम्पतया विभान्ति योगाधिरूढा इव शाखिनोऽपि ॥ ५२॥
+निवातनिष्कम्पतया विभान्ति योगाधिरूढा इव शाखिनोऽपि ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्वया पुरस्तादुपयाचितो यः सोऽयं वटः श्याम इति प्रतीतः ।  
-राशिर्मणीनामिव गारुडानां सपद्मरागः फलितो विभाति ॥ ५३॥
+राशिर्मणीनामिव गारुडानां सपद्मरागः फलितो विभाति ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्वचित्प्रभालेपिभिरिन्द्रनीलैर्मुक्तामयी यष्टिरिवानुविद्धा ।  
-अन्यत्र माला सितपङ्कजानामिन्दीवरैरुत्खचितान्तरेव ॥ ५४॥
+अन्यत्र माला सितपङ्कजानामिन्दीवरैरुत्खचितान्तरेव ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्वचित्खगानां प्रियमानसानां कादम्बसंसर्गवतीव पङ्क्तिः ।  
-अन्यत्र कालागुरुदतापत्रा भक्तिर्भुवश्चन्दनकल्पितेव ॥ ५५॥
+अन्यत्र कालागुरुदतापत्रा भक्तिर्भुवश्चन्दनकल्पितेव ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्वचित्प्रभा चान्द्रमसी तमोभिश्छायाविलीनैः शबलीकृतेव ।  
-अन्यत्र शुभ्रा शरदभ्रलेखा रन्ध्रेष्विवालक्ष्यनभःप्रदेशा ॥ ५६॥
+अन्यत्र शुभ्रा शरदभ्रलेखा रन्ध्रेष्विवालक्ष्यनभःप्रदेशा ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्वचिच्च कृष्णोरगभूषणेव भस्माङ्गरागा तनुरीश्वरस्य ।  
-पश्यानवद्याङ्गि विभाति गङ्गा भिन्नप्रवाहा यमुनातरङ्गैः ॥ ५७॥
+पश्यानवद्याङ्गि विभाति गङ्गा भिन्नप्रवाहा यमुनातरङ्गैः ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 समुद्रपत्योर्जलसंनिपाते पूतात्मनामत्र किलाभिषेकात् ।  
-तत्त्वावबोधेन विनापि भूयस्तनुत्यजां नास्ति शरीरबन्धः ॥ ५८॥
+तत्त्वावबोधेन विनापि भूयस्तनुत्यजां नास्ति शरीरबन्धः ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरं निषादाधिपतेरिदं तद्यस्मिन्मया मौलिमणिं विहाय ।  
-जटासु बद्धास्वरुदत्सुमन्त्रः कैकेयि कामाः फलितास्तवेति ॥ ५९॥
+जटासु बद्धास्वरुदत्सुमन्त्रः कैकेयि कामाः फलितास्तवेति ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पयोधरैः पुण्यजनाङ्गनानां निर्विष्टहेमाम्बुजरेणु यस्याः ।  
-ब्राह्मं सरः कारणमाप्तवाचो बुद्धेरिवाव्यक्तमुदाहरन्ति ॥ ६०॥
+ब्राह्मं सरः कारणमाप्तवाचो बुद्धेरिवाव्यक्तमुदाहरन्ति ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जलानि या तीरनिखातयूपा वहत्ययोध्यामनु राजधानीम् ।  
-तुरंगमेधावभृथावतीर्णैरिक्ष्वाकुभिः पुण्यतरीकृतानि ॥ ६१॥
+तुरंगमेधावभृथावतीर्णैरिक्ष्वाकुभिः पुण्यतरीकृतानि ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यां सैकतोत्सङ्गसुखोचितानां प्राज्यैः पयोभिः परिवर्धितानाम् ।  
-सामान्यधात्रीमिव मानसं मे संभावयत्युत्तरकोसलानाम् ॥ ६२॥
+सामान्यधात्रीमिव मानसं मे संभावयत्युत्तरकोसलानाम् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सेयं मदीया जननीव तेन मान्येन राज्ञा सरयूर्वियुक्ता ।  
-दूरे वसन्तं शिशिरानिलैर्मां तरंगहस्तैरुपगूहतीव ॥ ६३॥
+दूरे वसन्तं शिशिरानिलैर्मां तरंगहस्तैरुपगूहतीव ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विरक्तसंध्याकपिशं परस्ताद्यतो रजः पार्थिवमुज्जिहीते ।  
-शङ्के हनूमत्कथितप्रवृत्तिः प्रत्युद्गतो मां भरतः ससैन्यः ॥ ६४॥
+शङ्के हनूमत्कथितप्रवृत्तिः प्रत्युद्गतो मां भरतः ससैन्यः ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अद्धा श्रियं पालितसंगराय प्रत्यर्पयिष्यत्यनघां स साधुः ।  
-हत्वा निवृत्ताय मृधे खरादीन्संरक्षितां त्वामिव लक्ष्मणो मे ॥ ६५॥
+हत्वा निवृत्ताय मृधे खरादीन्संरक्षितां त्वामिव लक्ष्मणो मे ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga13-66-79.mp3"></div>
 
 असौ पुरस्कृत्य गुरुं पदातिः पश्चादवस्थापितवाहिनीकः ।  
-वृद्धैरमात्यैः सह चीरवासा मामर्घ्यपाणिर्भरतोऽप्युपैति ॥ ६६॥
+वृद्धैरमात्यैः सह चीरवासा मामर्घ्यपाणिर्भरतोऽप्युपैति ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पित्रा विसृष्टां मदपेक्षया यः श्रियं युवाप्यङ्कगतामभोक्ता ।  
-इयन्ति वर्षाणि तया सहोग्रमभ्यस्यतीव व्रतमासिधारम् ॥ ६७॥
+इयन्ति वर्षाणि तया सहोग्रमभ्यस्यतीव व्रतमासिधारम् ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एतावदुक्तवति दाशरथौ तदीया-
 मिच्छां विमानमधिदेवतया विदित्वा ।  
 ज्योतिष्पथादवतार सविस्मयाभि-
-रुद्वीक्षितं प्रकृतिभिर्भरतानुगाभिः ॥ ६८॥
+रुद्वीक्षितं प्रकृतिभिर्भरतानुगाभिः ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मात्पुरःसरबिभीषणदर्शनेन
 सेवाविचक्षणहरीश्वरदत्तहस्तः ।  
 यानादवातरददूरमहीतलेन
-मार्गेण भङ्गिरचितस्फटिकेन रामः ॥ ६९॥
+मार्गेण भङ्गिरचितस्फटिकेन रामः ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इक्ष्वाकुवंशगुरवे प्रयतः प्रणम्य
 स भ्रातरं भरतमर्घ्यपरिग्रहान्ते ।  
 पर्यश्रुरस्वजत मूर्धनि चोपजघ्रौ
-तद्भक्त्यपोढपितृराज्यमहाभिषेके ॥ ७०॥
+तद्भक्त्यपोढपितृराज्यमहाभिषेके ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्मश्रुप्रवृद्धिजनिताननविक्रियांश्च
 प्लक्षान्प्ररोहजटिलानिव मन्त्रिवृद्धान् ।  
 अन्वग्रहीत्प्रणवतः शुभदृष्टिपातै-
-र्वातानुयोगमधुराक्षरया च वाचा ॥ ७१॥
+र्वातानुयोगमधुराक्षरया च वाचा ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दुर्जातबन्धुरयमृक्षहरीश्वरो मे
 पौलस्त्य एष समरेषु पुरःप्रहर्ता ।  
 इत्यादृतेन कथितौ रघुनन्दनेन
-व्युत्क्रम्य लक्ष्मणमुभौ भरतो ववन्दे ॥ ७२॥
+व्युत्क्रम्य लक्ष्मणमुभौ भरतो ववन्दे ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सौमित्रिणा तदनु संससृजे स चैन-
 मुत्थाप्य नम्रशिरसं भृशमालिलिङ्ग ।  
 रूढेन्द्रजित्प्रहरणव्रणकर्कशेन
-क्लिश्यन्निवास्य भुजमध्यमुरस्थलेन ॥ ७३॥
+क्लिश्यन्निवास्य भुजमध्यमुरस्थलेन ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामाज्ञया हरिचमूपतयस्तदानीं
 कृत्वा मनुष्यवपुरारुरुहुर्गजेन्द्रान् ।  
 तेषु क्षरत्सु बहुधा मदवारिधाराः
-शैलाधिरोहणसुखान्युपलेभिरेमे ॥ ७४॥
+शैलाधिरोहणसुखान्युपलेभिरेमे ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सानुप्लवः प्रभुरपि क्षणदाचराणां
 भेजे रथान्दशरथप्रभवानुशिष्टः ।  
 मायाविकल्परचितैरपि ये तदीयै-
-र्न स्यन्दनैस्तुलितकृत्रिमभक्तिशोभाः ॥ ७५॥
+र्न स्यन्दनैस्तुलितकृत्रिमभक्तिशोभाः ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भूयस्ततो रघुपतिर्विलसत्पताक-
 मध्यास्त कामगति सावरजो विमानम् ।  
 दोषातनं बुधबृहस्पतियोगदृश्य-
-स्तारापतिस्तरलविद्युदिवाभ्रवृन्दम् ॥ ७६॥
+स्तारापतिस्तरलविद्युदिवाभ्रवृन्दम् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्रेश्वरेण जगतां प्रलयादिवोर्वीं
 वर्षात्ययेन रुचमभ्रघनादिवेन्दोः।  
 रामेण मैथिलसुतां दशकण्ठकृच्छ्रा-
-त्प्रत्युद्धृतां धृतिमतीं भरतो ववन्दे ॥ ७७॥
+त्प्रत्युद्धृतां धृतिमतीं भरतो ववन्दे ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लङ्केश्वरप्रणतिभङ्गदृढव्रतं त-
 द्वन्द्यं युगं चरणयोर्जनकात्मजायाः ।  
 जेष्ठानुवृत्तिजटिलं च शिरोऽस्य साधो-
-रन्योन्यपावनमभूदुभयं समेत्य ॥ ७८॥
+रन्योन्यपावनमभूदुभयं समेत्य ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रोशार्धं प्रकृतिपुरःसरेण गत्वा
 काकुत्स्थः स्तिमितजवेन पुष्पकेण ।  
 शत्रुघ्नप्रतिविहितोपकार्यमार्यः
-साकेतोपवनमुदारमध्युवास ॥ ७९॥
+साकेतोपवनमुदारमध्युवास ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 दण्डकाप्रत्यागमनो नाम त्रयोदशः सर्गः ॥
