--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/15.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/15.md
@@ -1,328 +1,534 @@
----
-title: १५ श्रीरामस्वर्गारोहणम्
-unicode_script: devanagari
----
++++
+title = "१५ श्रीरामस्वर्गारोहणम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga15-01-20.mp3"></div>
 
 कृतसीतापरित्यागः स रत्नाकरमेखलाम् ।  
-बुभुजे पृथिवीपालः पृथिवीमेव केवलाम्॥ १॥
+बुभुजे पृथिवीपालः पृथिवीमेव केवलाम्॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लवणेन विलुप्तेज्यास्तामिस्रेण तमभ्ययुः ।  
-मुनयो यमुनाभाजः शरण्यं शरणार्थिनः॥ २॥
+मुनयो यमुनाभाजः शरण्यं शरणार्थिनः॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवेक्ष्य रामं ते तस्मिन्न प्रजह्रुः स्वतेजसा ।  
-त्राणाभावे हि शापास्त्राः कुर्वन्ति तपसो व्ययम्॥ ३॥
+त्राणाभावे हि शापास्त्राः कुर्वन्ति तपसो व्ययम्॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रतिशुश्राव काकुत्स्थस्तेभ्यो विघ्नप्रतिक्रियाम् ।  
-धर्मसंरक्षणार्थेव प्रवृत्तिर्भुवि शार्ङ्गिणः॥ ४॥
+धर्मसंरक्षणार्थेव प्रवृत्तिर्भुवि शार्ङ्गिणः॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते रामाय वधोपायमाचख्युर्विबुधद्विषः ।  
-दुर्जयो लवणः शूली विशूलः प्रार्थ्यतामिति॥ ५॥
+दुर्जयो लवणः शूली विशूलः प्रार्थ्यतामिति॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आदिदेशाथ शत्रुघ्नं तेषां क्षेमाय राघवः ।  
-करिष्यन्निव नामास्य यथार्थमरिनिग्रहात्॥ ६॥
+करिष्यन्निव नामास्य यथार्थमरिनिग्रहात्॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यः कश्चन रघूणां हि परमेकः परंतपः ।  
-अपवाद इवोत्सर्गं व्यावर्तयितुमीश्वरः॥ ७॥
+अपवाद इवोत्सर्गं व्यावर्तयितुमीश्वरः॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अग्रजेन प्रयुक्ताशीस्ततो दाशरथी रथी ।  
-ययौ वनस्थलीः पश्यन्पुष्पिताः सुरभीरभीः॥ ८॥
+ययौ वनस्थलीः पश्यन्पुष्पिताः सुरभीरभीः॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामादेशादनुगता सेना तस्यार्थसिद्धये ।  
-पश्चादध्यनार्थस्य धातोरधिरिवाभवत्॥ ९॥
+पश्चादध्यनार्थस्य धातोरधिरिवाभवत्॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आदिष्टवर्त्मा मुनिभिः स गच्छंस्तपसां वरः ।  
-विरराज रथप्रष्ठैर्वालखिल्यैरिवांशुमान्॥ १०॥
+विरराज रथप्रष्ठैर्वालखिल्यैरिवांशुमान्॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य मार्गवशादेका बभूव वसतिर्यतः ।  
-रथस्वनोत्कण्ठमृगे वाल्मीकीये तपोवने॥ ११॥
+रथस्वनोत्कण्ठमृगे वाल्मीकीये तपोवने॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमृषिः पूजयामास कुमारं क्लान्तवाहनम् ।  
-तपःप्रभावसिद्धाभिर्विशेषप्रतिपत्तिभिः ॥ १२॥
+तपःप्रभावसिद्धाभिर्विशेषप्रतिपत्तिभिः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यामेवास्य यामिन्यामन्तर्वन्ती प्रजावती ।  
-सुतावसूत संपन्नौ कोशदण्डाविव क्षितिः॥ १३॥
+सुतावसूत संपन्नौ कोशदण्डाविव क्षितिः॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संतानश्रवणाद्भ्रातुः सौमित्रिः सौमनस्यवान् ।  
-प्राञ्जलिर्मुनिमामन्त्र्य प्रातर्युक्तरथो ययौ॥ १४॥
+प्राञ्जलिर्मुनिमामन्त्र्य प्रातर्युक्तरथो ययौ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स च प्राप मधूपघ्नं कुम्भीनस्याश्च कुक्षिजः ।  
-वनात्करमिवादाय सत्त्वराशिमुपस्थितः ॥ १५॥
+वनात्करमिवादाय सत्त्वराशिमुपस्थितः ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धूमधूम्रो वसागन्धी ज्वालाबभ्रुशिरोरुहः ।  
-क्रव्याद्गणपरीवारश्चिताग्निरिव जंगमः ॥ १६॥
+क्रव्याद्गणपरीवारश्चिताग्निरिव जंगमः ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपशूलं तमासाद्य लवणं लक्ष्मणानुजः ।  
-रुरोध संमुखीनो हि जयो रन्ध्रप्रहारिणाम्॥ १७॥
+रुरोध संमुखीनो हि जयो रन्ध्रप्रहारिणाम्॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नातिपर्याप्तमालक्ष्य मत्कुक्षेरद्य भोजनम् ।  
-दिष्ट्या त्वमसि मे धात्रा भीतेनेवोपपादितः॥ १८॥
+दिष्ट्या त्वमसि मे धात्रा भीतेनेवोपपादितः॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति संतर्ज्य शत्रुघ्नं राक्षसस्तज्जिघांसया ।  
-प्रांशुमुत्पाटयामास मुस्तास्तम्बमिव द्रुमम्॥ १९॥
+प्रांशुमुत्पाटयामास मुस्तास्तम्बमिव द्रुमम्॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सौमित्रेर्निशितैर्बाणैरन्तरा शकलीकृतः ।  
-गात्रं पुष्परजः प्राप न शाखी नैरृतेरितः॥ २०॥
+गात्रं पुष्परजः प्राप न शाखी नैरृतेरितः॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga15-21-40.mp3"></div>
 
 विनाशात्तस्य वृक्षस्य रक्षस्तस्मै महोपलम् ।  
-प्रजिघाय कृतान्तस्य मुष्टिं पृथगिव स्थितम्॥ २१॥
+प्रजिघाय कृतान्तस्य मुष्टिं पृथगिव स्थितम्॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऐन्द्रमस्त्रमुपादाय शत्रुघ्नेन स ताडितः ।  
-सिकतात्वादपि परं प्रपेदे परमाणुताम्॥ २२॥
+सिकतात्वादपि परं प्रपेदे परमाणुताम्॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमुपाद्रवदुद्यम्य दक्षिणं दोर्निशाचरः ।  
-एकताल इवोत्पातपवनप्रेरितो गिरिः॥ २३॥
+एकताल इवोत्पातपवनप्रेरितो गिरिः॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कार्ष्णेन पत्रिणा शत्रुः स भिन्नहृदयः पतन् ।  
-अनिनाय भुवः कम्पं जहाराश्रमवासिनाम्॥ २४॥
+अनिनाय भुवः कम्पं जहाराश्रमवासिनाम्॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वयसां पङ्क्तयः पेतुर्हतस्योपरि विद्विषः ।  
-तत्प्रतिद्वन्द्विनो मूर्ध्नि दिव्याः कुसुमवृष्टयः॥ २५॥
+तत्प्रतिद्वन्द्विनो मूर्ध्नि दिव्याः कुसुमवृष्टयः॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स हत्वा लवणं वीरस्तदा मेने महौजसः ।  
-भ्रातुः सोदर्यमात्मानमिन्द्रजिद्वधशोभिनः॥ २६॥
+भ्रातुः सोदर्यमात्मानमिन्द्रजिद्वधशोभिनः॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य संस्तूयमानस्य चरितार्थैस्तपस्विभिः ।  
-शुशुभे विक्रमोदग्रं व्रीडयावनतं शिरः॥ २७॥
+शुशुभे विक्रमोदग्रं व्रीडयावनतं शिरः॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपकूलं च कालिन्द्याः पुरीं पौरुषभूषणः ।  
-निर्ममे निर्ममोऽर्थेषु मथुरां मधुराकृतिः॥ २८॥
+निर्ममे निर्ममोऽर्थेषु मथुरां मधुराकृतिः॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 या सौराज्यप्रकाशाभिर्बभौ पौरविभूतिभिः ।  
-स्वर्गाभिष्यन्दवमनं कृत्वेवोपनिवेशिता॥ २९॥
+स्वर्गाभिष्यन्दवमनं कृत्वेवोपनिवेशिता॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र सौधगतः पश्यन्यमुनां चक्रवाकिनीम् ।  
-हेमभक्तिमतीं भूमेः प्रवेणीमिव पिप्रिये॥ ३०॥
+हेमभक्तिमतीं भूमेः प्रवेणीमिव पिप्रिये॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सखा दशरथस्यापि जनकस्य च मन्त्रकृत् ।  
-संचस्कारोभयप्रीत्या मैथिलेयौ यथाविधि॥ ३१॥
+संचस्कारोभयप्रीत्या मैथिलेयौ यथाविधि॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तौ कुशलवोन्मृष्टगर्भक्लेदौ तदाख्यया ।  
-कविः कुशलवावेव चकार किल नामतः॥ ३२॥
+कविः कुशलवावेव चकार किल नामतः॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 साङ्गं च वेदमध्याप्य किंचिदुत्क्रान्तशैशवौ ।  
-स्वकृतिं गापयामास कविप्रथमपद्धतिम्॥ ३३॥
+स्वकृतिं गापयामास कविप्रथमपद्धतिम्॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रामस्य मधुरं वृत्तं गायन्तो मातुरग्रतः ।  
-तद्वियोगव्यथां किंचिच्छिथिलीचक्रतुः सुतौ॥ ३४॥
+तद्वियोगव्यथां किंचिच्छिथिलीचक्रतुः सुतौ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इतरेऽपि रघोर्वंश्यास्त्रयस्त्रेताग्नितेजसः ।  
-तद्योगात्पतिवत्नीषु पत्नीष्वासन्द्विसूनवः ॥ ३५॥
+तद्योगात्पतिवत्नीषु पत्नीष्वासन्द्विसूनवः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शत्रुघातिनि शत्रुघ्नः सुबाहौ च बहुश्रुते ।  
-मथुराविदिशे सून्वोर्निदधे पूर्वजोत्सुकः॥ ३६॥
+मथुराविदिशे सून्वोर्निदधे पूर्वजोत्सुकः॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भूयस्तपोव्ययो मा भूद्वाल्मीकेरिति सोऽत्यगात् ।  
-मैथिलीतनयोद्गीतनिःस्पन्दमृगमाश्रमम्॥ ३७॥
+मैथिलीतनयोद्गीतनिःस्पन्दमृगमाश्रमम्॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वशी विवेश चायोध्यां रथ्यसंस्कारशोभिनीम् ।  
-लवणस्य वधात्पौरैरीक्षितोऽत्यन्तगौरवम्॥ ३८॥
+लवणस्य वधात्पौरैरीक्षितोऽत्यन्तगौरवम्॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स ददर्श सभामध्ये सभासद्भिरुपस्थितम् ।  
-रामं सीतापरित्यागादसामान्यपतिं भुवः॥ ३९॥
+रामं सीतापरित्यागादसामान्यपतिं भुवः॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमभ्यनन्दत्प्रणतं लवणान्तकमग्रजः ।  
-कालनेमिवधात्प्रीतस्तुराषाडिव शार्ङ्गिणम्॥ ४०॥
+कालनेमिवधात्प्रीतस्तुराषाडिव शार्ङ्गिणम्॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga15-41-60.mp3"></div>
 
 स पृष्टः सर्वतो वार्तमाख्यद्राज्ञे न संततिम् ।  
-प्रत्यर्पयिष्यतः काले कवेराद्यस्य शासनात्॥ ४१॥
+प्रत्यर्पयिष्यतः काले कवेराद्यस्य शासनात्॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ जानपदो विप्रः शिशुमप्राप्तयौवनम् ।  
-अवतार्याङ्कशय्यास्थं द्वारि चक्रन्द भूपतेः॥ ४२॥
+अवतार्याङ्कशय्यास्थं द्वारि चक्रन्द भूपतेः॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शोचनीयासि वसुधे या त्वं दशरथाच्च्युता ।  
-रामहस्तमनुप्राप्य कष्टात्कष्टतरं गता॥ ४३॥
+रामहस्तमनुप्राप्य कष्टात्कष्टतरं गता॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुत्वा तस्य शुचो हेतुं गोप्ता जिह्राय राघवः ।  
-न ह्यकालभवो मृत्युरिक्ष्वाकुपदमस्पृशत्॥ ४४॥
+न ह्यकालभवो मृत्युरिक्ष्वाकुपदमस्पृशत्॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स मुहूर्तं क्षमस्वेति द्विजमाश्वास्य दुःखितम् ।  
-यानं सस्मार कौबेरं वैवस्वतजिगीषया॥ ४५॥
+यानं सस्मार कौबेरं वैवस्वतजिगीषया॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आत्तशस्त्रस्तदध्यास्य प्रस्थितः स रघूद्वहः ।  
-उच्चचार पुरस्तस्य गूढरूपा सरस्वती॥ ४६॥
+उच्चचार पुरस्तस्य गूढरूपा सरस्वती॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राजन् प्रजासु ते कश्चिदपचारः प्रवर्तते ।  
-तमन्विष्य प्रशमयेर्भविष्यसि ततः कृती॥ ४७॥
+तमन्विष्य प्रशमयेर्भविष्यसि ततः कृती॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्याप्तवचनाद्रामो विनेष्यन्वर्णविक्रियाम् ।  
-दिशः पपात पत्रेण वेगनिष्कम्पहेतुना॥ ४८॥
+दिशः पपात पत्रेण वेगनिष्कम्पहेतुना॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ धूमाभिताम्राक्षं वृक्षशाखावलम्बिनम् ।  
-ददर्श कंचिदैक्ष्वाकस्तपस्यन्तमधोमुखम्॥ ४९॥
+ददर्श कंचिदैक्ष्वाकस्तपस्यन्तमधोमुखम्॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पृष्टनामान्वयो राज्ञा स किलाचष्ट धूमपः ।  
-आत्मानं शम्बुकं नाम शूद्रं सुरपदार्थिनम्॥ ५०॥
+आत्मानं शम्बुकं नाम शूद्रं सुरपदार्थिनम्॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तपस्यनधिकारित्वात्प्रजानां तमघावहम् ।  
-शीर्षच्छेद्यं परिच्छिद्य नियन्ता शस्त्रमाददे॥ ५१॥
+शीर्षच्छेद्यं परिच्छिद्य नियन्ता शस्त्रमाददे॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तद्वक्त्रं हिमक्लिष्टकिञ्जल्कमिव पङ्कजम् ।  
-ज्योतिष्कणाहतश्मश्रु कण्ठनालादपातयत्॥ ५२॥
+ज्योतिष्कणाहतश्मश्रु कण्ठनालादपातयत्॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृतदण्डः स्वयं राज्ञा लेभे शूद्रः सतां गतिम् ।  
-तपसा दुश्चरेणापि न स्वमार्गविलङ्घिना॥ ५३॥
+तपसा दुश्चरेणापि न स्वमार्गविलङ्घिना॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुनाथोऽप्यगस्त्येन मार्गसंदर्शितात्मना ।  
-महौजसा संयुयुजे शरत्काल इवेन्दुना॥ ५४॥
+महौजसा संयुयुजे शरत्काल इवेन्दुना॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुम्भयोनिरलंकारं तस्मै दिव्यपरिग्रहम् ।  
-ददौ दत्तं समुद्रेण पीतेनेवात्मनिष्क्रयम्॥ ५५॥
+ददौ दत्तं समुद्रेण पीतेनेवात्मनिष्क्रयम्॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स दधन्मैथिलीकण्ठनिर्व्यापारेण बाहुना ।  
-पश्चान्निववृते रामः प्राक्परासुर्द्विजात्मजः ॥ ५६॥
+पश्चान्निववृते रामः प्राक्परासुर्द्विजात्मजः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य पूर्वोदितां निन्दां द्विजः पुत्रसमागतः ।  
-स्तुत्वा निवर्तयामास त्रातुर्वैवस्वतादपि॥ ५७॥
+स्तुत्वा निवर्तयामास त्रातुर्वैवस्वतादपि॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमध्वराय मुक्ताश्वं रक्षःकपिनरेश्वराः ।  
-मेघाः सस्यमिवाम्भोभिरभ्यवर्षन्नुपायनैः॥ ५८॥
+मेघाः सस्यमिवाम्भोभिरभ्यवर्षन्नुपायनैः॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिग्भ्यो निमन्त्रिताश्चैनमभिजग्मुर्महर्षयः ।  
-न भौमान्येव धिष्ण्यानि हित्वा ज्योतिर्मयान्यपि॥ ५९॥
+न भौमान्येव धिष्ण्यानि हित्वा ज्योतिर्मयान्यपि॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपशल्यनिविष्टैस्तैश्चतुर्द्वारमुखी बभौ ।  
-अयोध्या सृष्टलोकेव सद्यः पैतामही तनुः॥ ६०॥
+अयोध्या सृष्टलोकेव सद्यः पैतामही तनुः॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga15-61-80.mp3"></div>
 
 श्लाघ्यस्त्यागोऽपि वैदेह्याः पत्युः प्राग्वंशवासिनः ।  
-अनन्यजानेः सैवासीद्यस्माज्जाया हिरण्मयी॥ ६१॥
+अनन्यजानेः सैवासीद्यस्माज्जाया हिरण्मयी॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विधेरधिकसंभारस्ततः प्रववृते मखः ।  
-आसन्यत्र क्रियाविघ्ना राक्षसा एव रक्षिणः॥ ६२॥
+आसन्यत्र क्रियाविघ्ना राक्षसा एव रक्षिणः॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ प्राचेतसोपज्ञं रामायणमितस्ततः ।  
-मैथिलेयौ कुशलवौ जगतुर्गुरुचोदितौ॥ ६३॥
+मैथिलेयौ कुशलवौ जगतुर्गुरुचोदितौ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वृत्तं रामस्य वाल्मीकेः कृतिस्तौ किंनरस्वनौ ।  
-किं तद्येन मनो हर्तुमलं स्यातां न शृण्वताम्॥ ६४॥
+किं तद्येन मनो हर्तुमलं स्यातां न शृण्वताम्॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रूपे गीते च माधुर्यंतयोस्तज्ज्ञैर्निवेदितम् ।  
-ददर्श सानुजो रामः शुश्राव च कुतूहली॥ ६५॥
+ददर्श सानुजो रामः शुश्राव च कुतूहली॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तद्गीतश्रवणैकाग्रा संसदश्रुमुखी बभौ ।  
-हिमनिष्यन्दिनी प्रातर्निर्वातेव वनस्थली॥ ६६॥
+हिमनिष्यन्दिनी प्रातर्निर्वातेव वनस्थली॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वयोवेषविसंवादि रामस्य च तयोस्तदा ।  
-जनता प्रेक्ष्य सादृश्यं नाक्षिकम्पं व्यतिष्ठत॥ ६७॥
+जनता प्रेक्ष्य सादृश्यं नाक्षिकम्पं व्यतिष्ठत॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उभयोर्न तथा लोकः प्रावीण्येन विसिष्मिये ।  
-नृपतेः प्रीतिदानेषु वीतस्पृहतया यथा॥ ६८॥
+नृपतेः प्रीतिदानेषु वीतस्पृहतया यथा॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गेये को नु विनेता वां कस्य चेयं कृतिः कवेः ।  
-इति राज्ञा स्वयं पृष्टौ तौ वाल्मीकिमशंसताम्॥ ६९॥
+इति राज्ञा स्वयं पृष्टौ तौ वाल्मीकिमशंसताम्॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ सावरजो रामः प्राचेतसमुपेयिवान् ।  
-ऊरीकृत्यात्मनो देहं राज्यमस्मै न्यवेदयत्॥ ७०॥
+ऊरीकृत्यात्मनो देहं राज्यमस्मै न्यवेदयत्॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तावाख्याय रामाय मैथिलीयौ तदात्मजौ ।  
-कविः कारुणिको वव्रे सीतायाः संपरिग्रहम्॥ ७१॥
+कविः कारुणिको वव्रे सीतायाः संपरिग्रहम्॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तात शुद्धा समक्षं नः स्नुषा ते जातवेदसि ।  
-दौरात्म्याद्रक्षसस्तां तु नात्रत्याः श्रद्दधुः प्रजाः॥ ७२॥
+दौरात्म्याद्रक्षसस्तां तु नात्रत्याः श्रद्दधुः प्रजाः॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताः स्वचारित्र्यमुद्दिश्य प्रत्याययतु मैथिली ।  
-ततः पुत्रवतीमेनां प्रतिपत्स्ये त्वदाज्ञया॥ ७३॥
+ततः पुत्रवतीमेनां प्रतिपत्स्ये त्वदाज्ञया॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति प्रतिश्रुते राज्ञा जानकीमाश्रमान्मुनिः ।  
-शिष्यैरानाययामास स्वसिद्धिं नियमैरिव॥ ७४॥
+शिष्यैरानाययामास स्वसिद्धिं नियमैरिव॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अन्येद्युरथ काकुत्स्थः संनिपात्य पुरौकसः ।  
-कविमाह्वाययामास प्रस्तुतप्रतिपत्तये॥ ७५॥
+कविमाह्वाययामास प्रस्तुतप्रतिपत्तये॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वरसंस्कारवत्यासौ पुत्राभ्यामथ सीतया ।  
-ऋचेवोदर्चिषं सूर्यं रामं मुनिरुपस्थितः॥ ७६॥
+ऋचेवोदर्चिषं सूर्यं रामं मुनिरुपस्थितः॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 काषायपरिवीतेन स्वपदार्पितचक्षुषा ।  
-अन्वमीयत शुद्धेति शान्तेन वपुषैव सा॥ ७७॥
+अन्वमीयत शुद्धेति शान्तेन वपुषैव सा॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जनास्तदालोकपथात्प्रतिसंहृतचक्षुषः ।  
-तस्थुस्तेऽवाङ्मुखाः सर्वे फलिता इव शालयः॥ ७८॥
+तस्थुस्तेऽवाङ्मुखाः सर्वे फलिता इव शालयः॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तां दृष्टिविषये भर्तुर्मुनिरास्थितविष्टरः ।  
-कुरु निःसंशयं वत्से स्ववृत्ते लोकमित्यशात्॥ ७९॥
+कुरु निःसंशयं वत्से स्ववृत्ते लोकमित्यशात्॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ वाल्मीकिशिष्येण पुण्यमावर्जितं पयः ।  
-आचम्योदीरयामास सीता सत्यां सरस्वतीम्॥ ८०॥
+आचम्योदीरयामास सीता सत्यां सरस्वतीम्॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga15-81-103.mp3"></div>
 
 वाङ्मनःकर्मभिः पत्यौ व्यभिचारो यथा न मे ।  
-तथा विश्वंभरे देवि मामन्तर्धातुमर्हसि॥ ८१॥
+तथा विश्वंभरे देवि मामन्तर्धातुमर्हसि॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवमुक्ते तया साध्व्या रन्ध्रात्सद्योभवाद्भुवः ।  
-शातह्रदमिव ज्योतिः प्रभामण्डलमुद्ययौ॥ ८२॥
+शातह्रदमिव ज्योतिः प्रभामण्डलमुद्ययौ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र नागफणोत्क्षिप्तसिंहासननिषेदुषी ।  
-समुद्ररशना साक्षात्प्रादुरासीद्वसुंधरा॥ ८३॥
+समुद्ररशना साक्षात्प्रादुरासीद्वसुंधरा॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा सीतामङ्कमारोप्य भर्तृप्रणिहितेक्षणाम् ।  
-मामेति व्याहरत्येव तस्मिन्पातालमभ्यगात्॥ ८४॥
+मामेति व्याहरत्येव तस्मिन्पातालमभ्यगात्॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धरायां तस्य संरम्भं सीताप्रत्यर्पणैषिणः ।  
-गुरुर्विधिबलापेक्षी शमयामास धन्विनः॥ ८५॥
+गुरुर्विधिबलापेक्षी शमयामास धन्विनः॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऋषीन्विसृज्य यज्ञान्ते सुहृदश्च पुरस्कृतान् ।  
-रामः सीतागतं स्नेहं निदधे तदपत्ययोः॥ ८६॥
+रामः सीतागतं स्नेहं निदधे तदपत्ययोः॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 युधाजितस्य संदेशात्स देशं सिन्धुनामकम् ।  
-ददौ दत्तप्रभावाय भरताय भृतप्रजः॥ ८७॥
+ददौ दत्तप्रभावाय भरताय भृतप्रजः॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भरतस्तत्र गन्धर्वान्युधि निर्जित्य केवलम् ।  
-आतोद्यं ग्राहयामास समत्याजयदायुधम्॥ ८८॥
+आतोद्यं ग्राहयामास समत्याजयदायुधम्॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तक्षपुष्कलौ पुत्रौ राजधान्योस्तदाख्ययोः ।  
-अभिषिच्याभिषेकार्हौ रामान्तिकमगात्पुनः॥ ८९॥
+अभिषिच्याभिषेकार्हौ रामान्तिकमगात्पुनः॥ ८९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/89.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अङ्गदं चन्द्रकेतुं च लक्ष्मणोऽप्यात्मसंभवौ ।  
-शासनाद्रघुनाथस्य चक्रे कारापथेश्वरौ॥ ९०॥
+शासनाद्रघुनाथस्य चक्रे कारापथेश्वरौ॥ ९०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/90.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्यारोपितपुत्रास्ते जननीनां जनेश्वराः ।  
-भर्तृलोकप्रपन्नानां निवापान्विदधुः क्रमात्॥ ९१॥
+भर्तृलोकप्रपन्नानां निवापान्विदधुः क्रमात्॥ ९१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/91.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपेत्य मुनिवेषोऽथ कालः प्रोवाच राघवम् ।  
-रहःसंवादिनौ पश्येदावां यस्तं त्यजेरिति॥ ९२॥
+रहःसंवादिनौ पश्येदावां यस्तं त्यजेरिति॥ ९२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/92.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेति प्रतिपन्नाय विवृतात्मा नृपाय सः ।  
-आचख्यौ दिवमध्यास्व शासनात्परमेष्ठिनः॥ ९३॥
+आचख्यौ दिवमध्यास्व शासनात्परमेष्ठिनः॥ ९३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/93.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विद्वानपि तयोर्द्वाःस्थः समयं लक्ष्मणोऽभिनत् ।  
-भीतो दुर्वाससः शापाद्रामसंदर्शनार्थिना॥ ९४॥
+भीतो दुर्वाससः शापाद्रामसंदर्शनार्थिना॥ ९४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/94.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स गत्वा सरयूतीरं देहत्यागेन योगवित् ।  
-चकारावितथां भ्रातुः प्रतिज्ञां पूर्वजन्मनः॥ ९५॥
+चकारावितथां भ्रातुः प्रतिज्ञां पूर्वजन्मनः॥ ९५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/95.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्नात्मचतुर्भागे प्राङ्नाकमधितस्थुषि ।  
-राघवः शिथिलं तस्थौ भुवि धर्मस्त्रिपादिव॥ ९६॥
+राघवः शिथिलं तस्थौ भुवि धर्मस्त्रिपादिव॥ ९६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/96.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स निवेश्य कुशावत्यां रिपुनागाङ्कुशं कुशम् ।  
-शरावत्यां सतां सूक्तैर्जनिताश्रुलवं लवम्॥ ९७॥
+शरावत्यां सतां सूक्तैर्जनिताश्रुलवं लवम्॥ ९७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/97.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उदक्प्रतस्थे स्थिरधीः सानुजोऽग्निपुरःसरः ।  
-अन्वितः पतिवात्सल्याद्गृहवर्जमयोध्यया॥ ९८॥
+अन्वितः पतिवात्सल्याद्गृहवर्जमयोध्यया॥ ९८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/98.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जगृहुस्तस्य चित्तज्ञाः पदवीं हरिराक्षसाः ।  
-कदम्बमुकुलस्थूलैरभिवृष्टां प्रजाश्रुभिः॥ ९९॥
+कदम्बमुकुलस्थूलैरभिवृष्टां प्रजाश्रुभिः॥ ९९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/99.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपस्थितविमानेन तेन भक्तानुकम्पिना ।  
-चक्रे त्रिदिवनिःश्रेणिः सरयूरनुयायिनाम्॥ १००॥
+चक्रे त्रिदिवनिःश्रेणिः सरयूरनुयायिनाम्॥ १००॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/100.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यद्गोप्रतरकल्पोऽभूत्संमर्दस्तत्र मज्जताम् ।  
-अतस्तदाख्यया तीर्थं पावनं भुवि पप्रथे॥ १०१॥
+अतस्तदाख्यया तीर्थं पावनं भुवि पप्रथे॥ १०१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/101.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स विभुर्विबुधांशेषु प्रतिपन्नात्ममूर्तिषु ।  
-त्रिदशीभूतपौराणां स्वर्गान्तरमकल्पयत्॥ १०२॥
+त्रिदशीभूतपौराणां स्वर्गान्तरमकल्पयत्॥ १०२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/102.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्वर्त्यैवं दशमुखशिरश्छेदकार्यं सुराणां
 विष्वक्सेनः स्वतनुमविशत्सर्वलोकप्रतिष्ठाम् ।  
 लङ्कानाथं पवनतनयं चोभयं स्थापयित्वा
-कीर्तिस्तम्भद्वयमिव गिरौ दक्षिणे चोत्तरे च॥ १०३॥
+कीर्तिस्तम्भद्वयमिव गिरौ दक्षिणे चोत्तरे च॥ १०३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/103.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 श्रीरामस्वर्गारोहणो नाम पञ्चदशः सर्गः ॥
