--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -1,9 +1,8 @@
----
-title: ०१ वसिष्ठाश्रमाभिगमनम्
-unicode_script: devanagari
++++
+title = "०१ वसिष्ठाश्रमाभिगमनम्"
+unicode_script = "devanagari"
 
----
-
++++
 ## परिचयः
 
 - मूलम् अत्र श्रूयताम् - [आर्कैवि](https://archive.org/details/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3) ।  
@@ -17,58 +16,80 @@ unicode_script: devanagari
 वागर्थाव् इव सम्पृक्तौ  
 वागर्थ-प्रतिपत्तये ।  
 जगतः पितरौ वन्दे  
-पार्वती-परमेश्वरौ ॥ १ ॥  
+पार्वती-परमेश्वरौ ॥ १ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्व सूर्य-प्रभवो वंशः  
 क्व चाल्पविषया मतिः ।  
 तितीर्षुर् दुस्तरम् मोहाद्  
-उडुपेनास्मि सागरम् ॥ २ ॥  
+उडुपेनास्मि सागरम् ॥ २ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मन्दः कवियशः प्रार्थी  
 गमिष्याम्य् उपहास्यताम् ।  
 प्रांशुलभ्ये फले लोभाद्  
-उद्बाहुर् इव वामनः ॥ ३ ॥  
+उद्बाहुर् इव वामनः ॥ ३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ वा कृत-वाग्-द्वारे  
 वंशेऽस्मिन् पूर्व-सूरिभिः ।  
 मणौ वज्र-समुत्कीर्णे  
-सूत्रस्येवास्ति मे गतिः ॥ ४ ॥  
+सूत्रस्येवास्ति मे गतिः ॥ ४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽहम् आजन्म-शुद्धानाम्  
 आफलोदय-कर्मणाम् ।  
 आसमुद्र-क्षितीशानाम्  
-आनाक-रथ-वर्त्मनाम् ॥ ५ ॥  
+आनाक-रथ-वर्त्मनाम् ॥ ५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यथाविधि-हुताग्नीनाय्ँ  
 यथाकामार्चितार्थिनाम् ।  
 यथापराधदण्डानाय्ँ  
-यथाकाल-प्रभोधिनाम् ॥ ६ ॥  
+यथाकाल-प्रभोधिनाम् ॥ ६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्यागाय सम्भृतार्थानां  
 सत्याय मितभाषिणाम् ।  
 यशसे विजिगीषुणाम्  
-प्रजायै गृह-मेन्धिनाम् ॥ ७ ॥  
+प्रजायै गृह-मेन्धिनाम् ॥ ७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शैशवे ऽभ्यस्त-विद्यानाय्ँ  
 यौवने विषयैषिणाम् ।  
 वार्धके मुनिवृत्तीनाय्ँ  
-योगेनान्ते तनुत्यजाम् ॥ ८ ॥  
+योगेनान्ते तनुत्यजाम् ॥ ८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघूणाम् अन्वयव्ँ वक्ष्ये  
 तनुवाग्-विभवोऽपि सन् ।  
 तद्गुणैः कर्णमागत्य  
-चापलाय प्रचोदितः ॥ ९ ॥  
+चापलाय प्रचोदितः ॥ ९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं सन्तः श्रोतुम् अर्हन्ति  
 सदसद्-व्यक्ति-हेतवः ।  
 हेम्नः संलक्ष्यते ह्य् अग्नौ  
-विशुद्धिः श्यामिकापि वा ॥ १० ॥  
+विशुद्धिः श्यामिकापि वा ॥ १० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## मनुः
 वैवसतो मनुर् नाम  
 माननीयो मनीषिणाम् ।  
 आसीन् महीक्षिताम् आद्यः  
-प्रणवश् छन्दसाम् इव ॥ ११ ॥+++(र५)+++  
+प्रणवश् छन्दसाम् इव ॥ ११ ॥+++(र५)+++    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## दिलीपः
 ### तद्गुणाः
@@ -77,113 +98,155 @@ unicode_script: devanagari
 तदन्वये शुद्धिमति  
 प्रसूतः शुद्धिमत्तरः ।  
 दिलीप इति राजेन्दुर्  
-इन्दुः क्षीरनिधाविव ॥ १२ ॥  
+इन्दुः क्षीरनिधाविव ॥ १२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्यूढोरस्को वृषस्कन्धः  
 शाल-प्रांशुर् महाभुजः ।  
 आत्म-कर्म-क्षमन् देहङ्  
-क्षात्रो धर्म इवाश्रितः ॥ १३ ॥  
+क्षात्रो धर्म इवाश्रितः ॥ १३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सर्वातिरिक्त-सारेण  
 सर्व-तेजोऽभिभाविना ।  
 स्थितः सर्वोन्नतेनोर्वीङ्  
-क्रान्त्वा मेरुर् इवात्मना ॥ १४ ॥  
+क्रान्त्वा मेरुर् इवात्मना ॥ १४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आकार-सदृश-प्रज्ञः  
 प्रज्ञया सदृशागमः ।  
 आगमैः सदृशारम्भ  
-आरम्भसदृशोदयः ॥ १५ ॥  
+आरम्भसदृशोदयः ॥ १५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भीमकान्तैर् नृपगुणैः  
 स भभूवोपजीविनाम् ।  
 अधृष्यश् चाभिगम्यश् च  
-याधो-रत्नैर् इवार्णवः ॥ १६ ॥  
+याधो-रत्नैर् इवार्णवः ॥ १६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रेखामात्रम् अपि क्षुण्णाद्  
 आ मनोर्वर्त्मनः परम् ।  
 न व्यतीयुः प्रजास् तस्य  
-नियन्तुर् नेमि-वृत्तयः ॥ १७ ॥  
+नियन्तुर् नेमि-वृत्तयः ॥ १७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-18-25.mp3"></div>
 
 प्रजानाम् एव भूत्यर्थं  
 स ताभ्यो बलिमग्रहीत् ।  
 सहस्र-गुणम् उत्स्रष्टुम्  
-आदत्ते हि रसं रविः ॥ १८ ॥  
+आदत्ते हि रसं रविः ॥ १८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सेना परिच्छदस् तस्य,  
 +++(यतः -)+++ द्वयम् एवार्थ-साधनम् ।  
 शास्त्रेष्व् अकुण्ठिता बुद्धिर्,  
-मौर्वी धनुषि चातता ॥ १९ ॥  
+मौर्वी धनुषि चातता ॥ १९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य सव्ँवृत-मन्त्रस्य  
 गूढाकारेङ्गितस्य च ।  
 फलानुमेयाः प्रारम्भाः  
-संस्काराः प्राक्तना इव ॥ २० ॥  
+संस्काराः प्राक्तना इव ॥ २० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जुगोपात्मानम् अत्रस्तो  
 भेजे धर्मम् अनातुरः ।  
 अगृध्नुर् आददे सोऽर्थम्  
-असक्तः सुखमन्वभूत् ॥ २१ ॥  
+असक्तः सुखमन्वभूत् ॥ २१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ज्ञाने मौनङ् क्षमा शक्तौ  
 त्यागे श्लाघा-विपर्ययः ।  
 गुणा गुणानुबन्धित्वात्  
-तस्य सप्रसवा इव ॥ २२ ॥  
+तस्य सप्रसवा इव ॥ २२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनाकृष्टस्य विषयैर्  
 विद्यानाम् पारदृश्वनः ।  
 तस्य धर्म-रतेर् आसीद्  
-वृद्धत्वञ् जरसा विना ॥ २३ ॥  
+वृद्धत्वञ् जरसा विना ॥ २३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रजानाव्ँ विनयाधानाद्  
 रक्षणाद् भरणाद् अपि ।  
 स पिता पितरस् तासाङ्  
-केवलञ् जन्म-हेतवः ॥ २४ ॥  
+केवलञ् जन्म-हेतवः ॥ २४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्थित्यै दण्डयतो दण्ड्यान्  
 परिणेतुः प्रसूतये ।  
 अप्य् अर्थकामौ तस्यास्तान्  
-धर्म एव मनीषिणः ॥ २५ ॥  
+धर्म एव मनीषिणः ॥ २५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-26-50.mp3"></div>
 
 दुदोह गां स यज्ञाय  
 सस्याय मघवा दिवम् ।  
 सम्पद्-विनिमयेनोभौ  
-दधतुर् भुवनद्वयम् ॥ २६ ॥  
+दधतुर् भुवनद्वयम् ॥ २६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न किलानुययुस् तस्य  
 राजानो रक्षितुर् यशः ।  
 +++(प्रजा)+++ व्यावृत्ता यत् पर-स्वेभ्यः,  
-श्रुतौ तस्करता स्थिता ॥ २७ ॥  
+श्रुतौ तस्करता स्थिता ॥ २७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 द्वेष्योऽपि सम्मतः शिष्टस्  
 तस्यार्तस्य यथौषधम् ।  
 त्याज्यो दुष्टः प्रियोऽप्य् आसीद्  
-अङ्गुलीवोरग-क्षता ॥ २८ ॥  
+अङ्गुलीवोरग-क्षता ॥ २८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तव्ँ वेधा विदधे नूनम्  
 महाभूत-समाधिना ।  
 तथा हि सर्वे तस्यासन्  
-परार्थैक-फला गुणाः ॥ २९ ॥  
+परार्थैक-फला गुणाः ॥ २९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स वेला-वप्र+++(=प्राकार)+++-वलयाम्  
 परिखी-कृत-सागराम् ।  
 अनन्याशासनाम् ऊर्वीं  
-शशासैक-पुरीम् इव ॥ ३० ॥  
+शशासैक-पुरीम् इव ॥ ३० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ### तत्पत्नी
 
 तस्य दाक्षिण्य+++(=परच्छन्दानुवर्त्तित्व)+++-रुढेन  
 नाम्ना मगध-वंश-जा ।  
 पत्नी सुदक्षिणेत्य् आसीद्  
-अध्वरस्येव दक्षिणा ॥ ३१ ॥  
+अध्वरस्येव दक्षिणा ॥ ३१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कलत्रवन्तम् आत्मानम्  
 अवरोधे महत्य् अपि ।  
 तया मेने मनस्विन्या  
-लक्ष्म्या च वसुधाधिपः ॥ ३२ ॥+++(र५)+++  
+लक्ष्म्या च वसुधाधिपः ॥ ३२ ॥+++(र५)+++    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ### पुत्रेच्छा
 +++(क५)+++
@@ -191,12 +254,16 @@ unicode_script: devanagari
 तस्याम् आत्मानुरूपायाम्  
 आत्म-जन्म-समुत्सुकः ।  
 विलम्बित-फलैः कालं  
-स निनाय मनोरथैः ॥ ३३ ॥+++(र५)+++  
+स निनाय मनोरथैः ॥ ३३ ॥+++(र५)+++    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सन्तानार्थाय विधये  
 स्वभुजाद् अवतारिता ।  
 तेन धूर् जगतो गुर्वी  
-सचिवेषु निचिक्षिपे ॥ ३४ ॥  
+सचिवेषु निचिक्षिपे ॥ ३४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गङ्गाम् भगीरथेनेव  
 पूर्वेषाम् पावनक्षमाम् ।  
@@ -206,7 +273,9 @@ unicode_script: devanagari
 अथाभ्यर्च्य विधातारम्  
 प्रयतौ पुत्रकाम्यया ।  
 तौ दम्पती वसिष्ठस्य  
-गुरोर् जग्मतुर् आश्रमम् ॥ ३५ ॥  
+गुरोर् जग्मतुर् आश्रमम् ॥ ३५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## आश्रमाय यानम्
 +++(र५)+++
@@ -214,206 +283,326 @@ unicode_script: devanagari
 स्निग्ध-गम्भीर-निर्घोषम्  
 एकं स्यन्दनम् आस्थितौ ।  
 प्रावृषेण्यं+++(=प्रावृषि भवम्)+++ पयोवाहव्ँ  
-विद्युद्-ऐरावताव् इव ॥ ३६ ॥  
+विद्युद्-ऐरावताव् इव ॥ ३६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मा भूद् आश्रम-पीडेति  
 परिमेय-पुरःसरौ ।  
 अनुभाव-विशेषात् तु  
-सेना-परिवृताव् इव ॥ ३७ ॥  
+सेना-परिवृताव् इव ॥ ३७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सेव्यमानौ सुखस्पर्शैः शालनिर्यासगन्धिभिः ।  
-पुष्परेणूत्किरैर्वातैराधूतवनराजिभिः ॥ ३८ ॥  
+पुष्परेणूत्किरैर्वातैराधूतवनराजिभिः ॥ ३८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मनोऽभिरामाः शृण्वन्तौ रथनेमिस्वनोन्मुखैः ।  
-षड्जसव्ँवादिनीः केका द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥  
+षड्जसव्ँवादिनीः केका द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्पराक्षिसादृश्यम् अदूरोज्झितवर्त्मसु ।  
-मृगद्वन्द्वेषु पश्यन्तौ स्यन्दनाबद्धदृष्टिषु ॥ ४० ॥  
+मृगद्वन्द्वेषु पश्यन्तौ स्यन्दनाबद्धदृष्टिषु ॥ ४० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रेणीबन्धाद्वितन्वद्भिरस्तम्भान् तोरणस्रजम् ।  
-सारसैः कलनिर्ह्राधैः क्वचिदुन्नमिताननौ ॥ ४१ ॥  
+सारसैः कलनिर्ह्राधैः क्वचिदुन्नमिताननौ ॥ ४१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पवनस्यानुकूलत्वात्प्रार्थनासिद्धिशंसिनः ।  
-रजोभिस्तुरगोत्कीर्णैरस्पृष्टालकवेष्टनौ ॥ ४२ ॥  
+रजोभिस्तुरगोत्कीर्णैरस्पृष्टालकवेष्टनौ ॥ ४२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सरसीष्वरविन्दानाव्ँ वीचिविक्षोभशीतलम् ।  
-आमोदम् उपजिघ्रन्तौ स्वनिःश्वासानुकारिणम् ॥ ४३ ॥  
+आमोदम् उपजिघ्रन्तौ स्वनिःश्वासानुकारिणम् ॥ ४३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ग्रामेष्वात्मविषृटेषु यूपचिह्नेषु यज्वनाम् ।  
-अमोघाः प्रतिगृह्णन्तावर्घ्यानुपदम् आशिषः ॥ ४४ ॥  
+अमोघाः प्रतिगृह्णन्तावर्घ्यानुपदम् आशिषः ॥ ४४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हैयङ्गवीनम् आदाय घोषवृद्धान् उपस्थितान् ।  
-नामधेयानि पृच्छन्तौ वन्यानाम् मार्गशाखिनाम् ॥ ४५ ॥  
+नामधेयानि पृच्छन्तौ वन्यानाम् मार्गशाखिनाम् ॥ ४५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 काप्यभिख्या तयोरासीद् व्रजतोः शुद्धवेषयोः ।  
-हिमनिर्मुक्तयोर् योगे चित्राचन्द्रमसोरिव ॥ ४६ ॥  
+हिमनिर्मुक्तयोर् योगे चित्राचन्द्रमसोरिव ॥ ४६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्तद्भूमिपतिः पत्न्यै दर्शयन्प्रियदर्शनः ।  
-अपि लङ्घितमध्वानम् बुबुधे न बुधोपमः ॥ ४७ ॥  
+अपि लङ्घितमध्वानम् बुबुधे न बुधोपमः ॥ ४७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## आश्रमवर्णनम्
 +++(र५)+++
 
 स दुष्प्रापयशाः प्रापदाश्रमं श्रान्तवाहनः ।  
-सायं सय्ँयमिनस्तस्य महर्षेर्महिषीसखः ॥ ४८ ॥  
+सायं सय्ँयमिनस्तस्य महर्षेर्महिषीसखः ॥ ४८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वनान्तरादुपावृत्तैः समित्कुशफलाहरैः ।  
-पूर्यमाणम् अदृश्याग्निप्रत्युद्यातैस् तपस्विभिः ॥ ४९ ॥  
+पूर्यमाणम् अदृश्याग्निप्रत्युद्यातैस् तपस्विभिः ॥ ४९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 +++(कामं पितरं प्रोषितवन्तं पुत्राः प्रत्याधावन्ति। एवमेतमग्नयः प्रत्याधवन्ति। )+++
 
 आकीर्णम् ऋषिपत्नीनाम् उटजद्वाररोधिभिः ।  
-अपत्यैरिव नीवार+++(=तृणधान्य)+++-भागधेयोचितैर् मृगैः ॥ ५० ॥  
+अपत्यैरिव नीवार+++(=तृणधान्य)+++-भागधेयोचितैर् मृगैः ॥ ५० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-51-95.mp3"></div>
 
 सेकान्ते मुनिकन्याभिस्तत्क्षणोज्झितवृक्षकम् ।  
-विश्वासाय विहङ्गानाम् आलवालाम्बुपायिनाम् ॥ ५१ ॥  
+विश्वासाय विहङ्गानाम् आलवालाम्बुपायिनाम् ॥ ५१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आतपाऽऽत्यय+++(=अपगम)+++सङ्क्षिप्तनीवारासु+++(=तृणधान्य)+++ निषादिभिः ।  
-मृगैर् वर्तितरोमन्थम् उटजाङ्गनभूमिषु ॥ ५२ ॥  
+मृगैर् वर्तितरोमन्थम् उटजाङ्गनभूमिषु ॥ ५२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अभ्युत्थिताग्निपिशुनैरतिथीनाश्रमोन्मुखान् ।  
-पुनानम् पवनोद्धूतैर् धूमैराहुतिगन्धिभिः ॥ ५३ ॥  
+पुनानम् पवनोद्धूतैर् धूमैराहुतिगन्धिभिः ॥ ५३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## मुनि-दर्शनम्
 +++(र५)+++
 
 अथ यन्तारमादिष्य धुर्यान् विश्रमयेति सः ।  
-तामवारोपयत्पत्नीं रथादवततार च ॥ ५४ ॥  
+तामवारोपयत्पत्नीं रथादवततार च ॥ ५४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मै सभ्याः सभार्याय गोप्त्रे गुप्ततमेन्द्रियाः ।  
-अर्हणाम् अर्हते चक्रुर्मुनयो नयचक्षुषे ॥ ५५ ॥  
+अर्हणाम् अर्हते चक्रुर्मुनयो नयचक्षुषे ॥ ५५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विधेः सायन्तनस्यान्ते स ददर्श तपोनिधिम् ।  
-अन्वासितम् अरुन्धत्या स्वाहयेव हविर्भुजम् ॥ ५६ ॥  
+अन्वासितम् अरुन्धत्या स्वाहयेव हविर्भुजम् ॥ ५६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तयोर्जगृहतुः पादान् राजा राज्ञी च मागधी ।  
-तौ गुरुर्गुरुपत्नी च प्रीत्या प्रतिननन्दतुः ॥ ५७ ॥  
+तौ गुरुर्गुरुपत्नी च प्रीत्या प्रतिननन्दतुः ॥ ५७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तम् आतिथ्यक्रियाशान्तरथक्षोभपरिश्रमम् ।  
-पप्रच्छ कुशलं राज्ये राज्याश्रममुनिम् मुनिः ॥ ५८ ॥  
+पप्रच्छ कुशलं राज्ये राज्याश्रममुनिम् मुनिः ॥ ५८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथाऽथर्वनिधेस्तस्य विजितारिपुरः पुरः ।  
-अर्थ्यामर्थपतिर्वाचमाददे वदताव्ँ वरः ॥ ५९ ॥  
+अर्थ्यामर्थपतिर्वाचमाददे वदताव्ँ वरः ॥ ५९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपपन्नन् ननु शिवं सप्तस्वङ्गेषु यस्य मे ।  
-दैवीनाम् मानुषीणाञ् च प्रतिहर्ता त्वम् आपदाम् ॥ ६० ॥  
+दैवीनाम् मानुषीणाञ् च प्रतिहर्ता त्वम् आपदाम् ॥ ६० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तव मन्त्रकृतो मन्त्रैर्दूरात्प्रशमितारिभिः ।  
-प्रत्यादिश्यन्त इव मे दृष्टलक्ष्यभिदः शराः ॥ ६१ ॥  
+प्रत्यादिश्यन्त इव मे दृष्टलक्ष्यभिदः शराः ॥ ६१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हविरावर्जितं होतस् त्वया विधिवदग्निषु ।  
-वृष्टिर्भवति सस्यानाम् अवग्रहविशोषिणाम्+++(सतः षष्ठी)+++ ॥ ६२ ॥  
+वृष्टिर्भवति सस्यानाम् अवग्रहविशोषिणाम्+++(सतः षष्ठी)+++ ॥ ६२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरुषायुषजीविन्यो निरातङ्का निरीतयः +++(=निरतिवृष्ट्यादयः)+++।  
-यन्मदीयाः प्रजास् तस्य हेतुस् त्वद्ब्रह्मवर्चसम् ॥ ६३ ॥  
+यन्मदीयाः प्रजास् तस्य हेतुस् त्वद्ब्रह्मवर्चसम् ॥ ६३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्वयैवञ् चिन्त्यमानस्य गुरुणा ब्रह्मयोनिना ।  
-सानुबन्धाः कथन् न स्युः सम्पदो मे निरापदः ॥ ६४ ॥  
+सानुबन्धाः कथन् न स्युः सम्पदो मे निरापदः ॥ ६४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ### अभ्यर्थना
 +++(र५)+++
 
 किन् तु वध्वान् तवैतस्याम् अदृष्टसदृशप्रजम् ।  
-न माम् अवति सद्वीपा रत्नसूरपि मेदिनी ॥ ६५ ॥  
+न माम् अवति सद्वीपा रत्नसूरपि मेदिनी ॥ ६५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नूनम् मत्तः परव्ँ वंश्याः पिण्डविच्छेददर्शिनः ।  
-न प्रकामभुजः श्राद्धे स्वधासङ्ग्रहतत्पराः ॥ ६६ ॥  
+न प्रकामभुजः श्राद्धे स्वधासङ्ग्रहतत्पराः ॥ ६६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मत्परन् दुर्लभम् मत्वा नूनम् आवर्जितम् मया ।  
-पयः पूर्वैः स्वनिःश्वासैः कवोष्णम् उपभुज्यते ॥ ६७ ॥  
+पयः पूर्वैः स्वनिःश्वासैः कवोष्णम् उपभुज्यते ॥ ६७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽहम् इज्याविशुद्धात्मा प्रजालोपनिमीलितः ।  
-प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ ६८ ॥  
+प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ ६८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लोकान्तरसुखम् पुण्यन् तपोदानसमुद्भवम् ।  
-सन्ततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ ६९ ॥  
+सन्ततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ ६९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तया हीनव्ँ विधातर्माङ् कथम् पश्यन्न दूयसे ।  
-सिक्तं स्वयम् इव स्नेहाद्वन्ध्यम् आश्रमवृक्षकम् ॥ ७० ॥  
+सिक्तं स्वयम् इव स्नेहाद्वन्ध्यम् आश्रमवृक्षकम् ॥ ७० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असह्यपीडम् भगवन्नृणमन्त्यमवेहि मे ।  
-अरुन्तुदमिवालानमनिर्वाणस्य दन्तिनः ॥ ७१ ॥  
+अरुन्तुदमिवालानमनिर्वाणस्य दन्तिनः ॥ ७१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मान्मुच्ये यथा तात सव्ँविधातुन् तथार्हसि ।  
-इक्ष्वाकूणान् दुरापेऽर्थे त्वदधीना हि सिद्धयः ॥ ७२ ॥  
+इक्ष्वाकूणान् दुरापेऽर्थे त्वदधीना हि सिद्धयः ॥ ७२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ### मुन्युत्तरम्
 +++(र५, क५)+++
 
 इति विज्ञापितो राज्ञा ध्यानस्तिमितलोचनः ।  
-क्षणमात्रम् ऋषिस्तस्थौ सुप्तमीन इव ह्रदः ॥ ७३ ॥  
+क्षणमात्रम् ऋषिस्तस्थौ सुप्तमीन इव ह्रदः ॥ ७३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽपश्यत्प्रणिधानेन सन्ततेः स्तम्भकारणम् ।  
-भावितात्मा भुवो भर्तुरथैनम् प्रत्यबोधयत् ॥ ७४ ॥  
+भावितात्मा भुवो भर्तुरथैनम् प्रत्यबोधयत् ॥ ७४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरा शक्रमुपस्थाय तवोर्वीम् प्रति यास्यतः ।  
-आसीत्कल्पतरुच्छायामाश्रिता सुरभिः पथि ॥ ७५ ॥  
+आसीत्कल्पतरुच्छायामाश्रिता सुरभिः पथि ॥ ७५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धर्मलोपभयाद्राज्ञीम् ऋतुस्नाताम् इमां स्मरन् ।  
-प्रदक्षिणक्रियार्हायान् तस्यान् त्वं साधु नाचरः ॥ ७६ ॥  
+प्रदक्षिणक्रियार्हायान् तस्यान् त्वं साधु नाचरः ॥ ७६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवजानासि माय्ँ यस्मादतस्ते न भविष्यति ।  
-मत्प्रसूतिमनाराध्य प्रजेति त्वां शशाप सा ॥ ७७ ॥  
+मत्प्रसूतिमनाराध्य प्रजेति त्वां शशाप सा ॥ ७७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स शापो न त्वया राजन्न च सारथिना श्रुतः ।  
-नदत्याकाशगङ्गायाः स्रोतस्युद्दामदिग्गजे ॥ ७८ ॥  
+नदत्याकाशगङ्गायाः स्रोतस्युद्दामदिग्गजे ॥ ७८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ईप्सितन् तदवज्ञानाद्विद्धि सार्गलमात्मनः ।  
-प्रतिबध्नाति हि श्रेयः पूज्यपूजाव्यतिक्रमः ॥ ७९ ॥  
+प्रतिबध्नाति हि श्रेयः पूज्यपूजाव्यतिक्रमः ॥ ७९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हविषे दीर्घसत्रस्य सा चेदानीम् प्रचेतसः ।  
-भुजङ्गपिहितद्वारम् पातालमधितिष्ठति ॥ ८० ॥  
+भुजङ्गपिहितद्वारम् पातालमधितिष्ठति ॥ ८० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुतान् तदीयां सुरभेः कृत्वा प्रतिनिधिं शुचिः ।  
-आराधय सपत्नीकः प्रीता कामदुघा हि सा ॥ ८१ ॥  
+आराधय सपत्नीकः प्रीता कामदुघा हि सा ॥ ८१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## नन्दिनी-दर्शनम्
 +++(र५)+++
 
 इति वादिन एवास्य होतुराहुतिसाधनम् ।  
-अनिन्द्या नन्दिनी नाम धेनुराववृते वनात् ॥ ८२ ॥  
+अनिन्द्या नन्दिनी नाम धेनुराववृते वनात् ॥ ८२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ललाटोदयमाभुग्नम् पल्लवस्निग्धपाटला ।  
-बिभ्रती श्वेतरोमाङ्कं सन्ध्येव शशिनन् नवम् ॥ ८३ ॥  
+बिभ्रती श्वेतरोमाङ्कं सन्ध्येव शशिनन् नवम् ॥ ८३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भुवङ् कोष्णेन कुण्डोध्नी मेध्येनावभृथादपि ।  
-प्रस्रवेणाभिवर्षन्ती वत्सालोकप्रवर्तिना ॥ ८४ ॥  
+प्रस्रवेणाभिवर्षन्ती वत्सालोकप्रवर्तिना ॥ ८४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रजःकणैः खुरोद्धूतैः स्पृशद्भिर्गात्रमन्तिकात् ।  
-तीर्थाभिषेकजां शुद्धिम् आदधाना महीक्षितः ॥ ८५ ॥  
+तीर्थाभिषेकजां शुद्धिम् आदधाना महीक्षितः ॥ ८५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताम् पुण्यदर्शनान् दृष्ट्वा निमित्तज्ञस्तपोनिधिः ।  
-याज्यमाशंसितावन्ध्यप्रार्थनम् पुनरब्रवीत् ॥ ८६ ॥  
+याज्यमाशंसितावन्ध्यप्रार्थनम् पुनरब्रवीत् ॥ ८६ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अदूरवर्तिनीं सिद्धिं राजन् विगणयात्मनः ।  
-उपस्थितेयङ् कल्याणी नाम्नि कीर्तित एव यत् ॥ ८७ ॥  
+उपस्थितेयङ् कल्याणी नाम्नि कीर्तित एव यत् ॥ ८७ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ## व्रतग्रहणम्
 
 वन्यवृत्तिरिमां शश्वद् आत्मानुगमनेन गाम् ।  
-विद्यामभ्यसनेनेव प्रसादयितुमर्हसि ॥ ८८ ॥  
+विद्यामभ्यसनेनेव प्रसादयितुमर्हसि ॥ ८८ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रस्थितायाम् प्रतिष्ठेथाः स्थितायां स्थितिमाचरेः ।  
-निषण्णायान् निषीदास्याम् पीताम्भसि पिबेरपः ॥ ८९ ॥  
+निषण्णायान् निषीदास्याम् पीताम्भसि पिबेरपः ॥ ८९ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/89.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वधूर्भक्तिमती चैनामर्चिताम् आ तपोवनात् ।  
-प्रयता प्रातरन्वेतु सायम् प्रत्युद्व्रजेदपि ॥ ९१ ॥  
+प्रयता प्रातरन्वेतु सायम् प्रत्युद्व्रजेदपि ॥ ९१ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्याप्रसादादस्यास्त्वम् परिचर्यापरो भव ।  
-अविघ्नम् अस्तु ते स्थेयाः पितेव धुरि +++(सत्-)+++पुत्रिणाम् ॥ ९० ॥  
+अविघ्नम् अस्तु ते स्थेयाः पितेव धुरि +++(सत्-)+++पुत्रिणाम् ॥ ९० ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेति प्रतिजग्राह प्रीतिमान् सपरिग्रहः ।  
-आदेशन् देशकालज्ञः शिष्यः शासितुरानतः ॥ ९२ ॥  
+आदेशन् देशकालज्ञः शिष्यः शासितुरानतः ॥ ९२ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/92.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ प्रदोषे दोषज्ञः सव्ँवेशाय विशाम् पतिम् ।  
-सूनुः सूनृतवाक्स्रष्टुर् विससर्जोर्जितश्रियम् ॥ ९३ ॥  
+सूनुः सूनृतवाक्स्रष्टुर् विससर्जोर्जितश्रियम् ॥ ९३ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/93.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सत्याम् अपि तपःसिद्धौ नियमापेक्षया मुनिः ।  
-कल्पवित् कल्पयामास वन्याम् एवास्य सव्ँविधाम् ॥ ९४ ॥  
+कल्पवित् कल्पयामास वन्याम् एवास्य सव्ँविधाम् ॥ ९४ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/94.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 +++(प्रहर्षिणी वृत्तम्)+++  
 निर्दिष्टाङ् कुलपतिना स पर्णशालाम् अध्यास्य प्रयतपरिग्रहद्वितीयः ।  
-तच्छिष्याध्ययननिवेदितावसानां सव्ँविष्टः कुशशयने निशान् निनाय ॥ ९५ ॥  
+तच्छिष्याध्ययननिवेदितावसानां सव्ँविष्टः कुशशयने निशान् निनाय ॥ ९५ ॥    
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वसिष्ठाश्रमाभिगमनो नाम प्रथमः सर्गः ।। १ ।।  
