--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
@@ -1,234 +1,374 @@
----
-title: ०३ रघु-राज्याभिषेकः           
-unicode_script: devanagari
----
++++
+title = "०३ रघु-राज्याभिषेकः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-01-08.mp3"></div>
 
 अथेप्सितं भर्तुरुपस्थितोदयं सखीजनोद्वीक्षणकौमुदीमुखम् ।  
-निदानमिक्ष्वाकुकुलस्य संततेः सुदक्षिणा दौहृदलक्षणं दधौ ॥ १॥
+निदानमिक्ष्वाकुकुलस्य संततेः सुदक्षिणा दौहृदलक्षणं दधौ ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शरीरसादादसमग्रभूषणा मुखेन सालक्ष्यत लोध्रपाण्डुना ।  
-तनुप्रकाशेन विचेयतारका प्रभातकल्पा शशिनेव शर्वरी ॥ २॥
+तनुप्रकाशेन विचेयतारका प्रभातकल्पा शशिनेव शर्वरी ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदाननं मृत्सुरभि क्षितीश्वरो रहस्युपाघ्राय न तृप्तिमाययौ ।  
-करीव सिक्तं पृषतैः पयोमुचां शुचिव्यपाये वनराजिपल्वलम् ॥ ३॥
+करीव सिक्तं पृषतैः पयोमुचां शुचिव्यपाये वनराजिपल्वलम् ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिवं मरुत्वानिव भोक्ष्यते भुवं दिगन्तविश्रान्तरथो हि तत्सुतः ।  
-अतोऽभिलाषे प्रथमं तथाविधे मनो बबन्धान्यरसान्विलङ्घ्य सा ॥ ४॥
+अतोऽभिलाषे प्रथमं तथाविधे मनो बबन्धान्यरसान्विलङ्घ्य सा ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न मे ह्रिया शंसति किंचिदीप्सितं स्पृहावती वस्तुषु केषु मागधी ।  
-इति स्म पृच्छत्यनुवेलमादृतः प्रियासखीरुत्तरकोसलेश्वरः ॥ ५॥
+इति स्म पृच्छत्यनुवेलमादृतः प्रियासखीरुत्तरकोसलेश्वरः ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपेत्य सा दोहददुःखशीलतां यदेव वव्रे तदपश्यदाहृतम् ।  
-न हीष्टमस्य त्रिदिवेऽपि भूपतेरभूदनासाद्यमधिज्यधन्वनः ॥ ६॥
+न हीष्टमस्य त्रिदिवेऽपि भूपतेरभूदनासाद्यमधिज्यधन्वनः ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रमेण निस्तीर्य च दोहदव्यथां प्रचीयमानावयवा रराज सा ।  
-पुराणपत्रापगमादनन्तरं लतेव संनद्धमनोज्ञपल्लवा ॥ ७॥
+पुराणपत्रापगमादनन्तरं लतेव संनद्धमनोज्ञपल्लवा ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिनेषु गच्छत्सु नितान्तपीवरं तदीयमानीलमुखं स्तनद्वयम् ।  
-तिरश्चकार भ्रमराभिनीलयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ ८॥
+तिरश्चकार भ्रमराभिनीलयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-09-16.mp3"></div>
 
 
 निधानगर्भामिव सागराम्बरां शमीमिवाभ्यन्तरलीनपावकाम् ।  
-नदीमिवान्तःसलिलां सरस्वतीं नृपः ससत्त्वां महिषीममन्यत ॥ ९॥
+नदीमिवान्तःसलिलां सरस्वतीं नृपः ससत्त्वां महिषीममन्यत ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रियानुरागस्य मनः समुन्नतेर्भुजार्जितानां च दिगन्तसंपदाम् ।  
-यथाक्रमं पुंसवनादिकाः क्रिया धृतेश्च धीरः सदृशीर्व्यधत्त सः ॥ १०॥
+यथाक्रमं पुंसवनादिकाः क्रिया धृतेश्च धीरः सदृशीर्व्यधत्त सः ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुरेन्द्रमात्राश्रितगर्भगौरवात्प्रयत्नमुक्तासनया गृहागतः ।  
-तयोपचाराञ्जलिखिन्नहस्तया ननन्द पारिप्लवनेत्रया नृपः ॥ ११॥
+तयोपचाराञ्जलिखिन्नहस्तया ननन्द पारिप्लवनेत्रया नृपः ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुमारभृत्याकुशलैरनुष्ठिते भिषग्भिराप्तैरथ गर्भभर्मणि ।  
-पतिः प्रतीतः प्रसवोन्मुखीं प्रियां ददर्श काले दिवमभ्रितामिव ॥ १२॥
+पतिः प्रतीतः प्रसवोन्मुखीं प्रियां ददर्श काले दिवमभ्रितामिव ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ग्रहैस्ततः पञ्चभिरुच्चसंस्थितैरसूर्यगैः सूचितभाग्यसंपदम् ।  
-असूत पुत्रं समये शचीसमा त्रिसाधना शक्तिरिवार्थमक्षयम् ॥ १३॥
+असूत पुत्रं समये शचीसमा त्रिसाधना शक्तिरिवार्थमक्षयम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिशः प्रसेदुर्मरुतो ववुः सुखाः प्रदक्षिणार्चिर्हविरग्निराददे ।  
-बभूव सर्वं शुभशंसि तत्क्षणं भवो हि लोकाभ्युदयाय तादृशाम् ॥ १४॥
+बभूव सर्वं शुभशंसि तत्क्षणं भवो हि लोकाभ्युदयाय तादृशाम् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अरिष्टशय्यां परितो विसारिणा सुजन्मनस्तस्य निजेन तेजसा ।  
-निशीथदीपाः सहसा हतत्विषो बभूवुरालेख्यसमर्पिता इव ॥ १५॥
+निशीथदीपाः सहसा हतत्विषो बभूवुरालेख्यसमर्पिता इव ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जनाय शुद्धान्तचराय शंसते कुमारजन्मामृतसंमिताक्षरम् ।  
-आदेयमासीत्त्रयमेव भूपतेः शशिप्रभं छत्रमुभे च चामरे ॥ १६॥
+आदेयमासीत्त्रयमेव भूपतेः शशिप्रभं छत्रमुभे च चामरे ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-17-30.mp3"></div>
 
 निवातपद्मस्तिमितेन चक्षुषा नृपस्य कान्तं पिबतः सुताननम् ।  
-महोदधेः पूर इवेन्दुदर्शनाद्गुरुः प्रहर्षः प्रबभूव नात्मनि ॥ १७॥
+महोदधेः पूर इवेन्दुदर्शनाद्गुरुः प्रहर्षः प्रबभूव नात्मनि ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स जातकर्मण्यखिले तपस्विना तपोवनादेत्य पुरोधसा कृते ।  
-दिलीपसूनुर्मणिराकरोद्भवः प्रयुक्तसंस्कार इवाधिकं बभौ ॥ १८॥
+दिलीपसूनुर्मणिराकरोद्भवः प्रयुक्तसंस्कार इवाधिकं बभौ ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुखश्रवा मङ्गलतूर्यनिस्वनाः प्रमोदनृत्यैः सह वारयोषिताम्।  
-न केवलं सद्मनि मागधीपतेः पथि व्यजृम्भन्त दिवौकसामपि ॥१९॥
+न केवलं सद्मनि मागधीपतेः पथि व्यजृम्भन्त दिवौकसामपि ॥१९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न संयतस्तस्य बभूव रक्षितुर्विसर्जयेद्यं सुतजन्महर्षितः ।  
-ऋणाभिधानात्स्वयमेव केवलं तदा पितॄणां मुमुचे स बन्धनात् ॥ २०॥
+ऋणाभिधानात्स्वयमेव केवलं तदा पितॄणां मुमुचे स बन्धनात् ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुतस्य यायादयमन्तमर्भकः तथा परेषां युधि चेति पार्थिवः ।  
-अवेक्ष्य धातोर्गमनार्थमर्थविच्चकार नाम्ना रघुमात्मसम्भवम् ॥ २१॥
+अवेक्ष्य धातोर्गमनार्थमर्थविच्चकार नाम्ना रघुमात्मसम्भवम् ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पितुः प्रयत्नात्स समग्रसंपदः शुभैः शरीरावयवैर्दिने दिने ।  
-पुपोष वृद्धिं हरिदश्वदीधितेरनुप्रवेशादिव बालचन्द्रमाः ॥ २२॥
+पुपोष वृद्धिं हरिदश्वदीधितेरनुप्रवेशादिव बालचन्द्रमाः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उमावृषाङ्कौ शरजन्मना यथा यथा जयन्तेन शचीपुरन्दरौ ।  
-तथा नृपः सा च सुतेन मागधी ननन्दतुस्तत्सदृशेन तत्समौ ॥ २३॥
+तथा नृपः सा च सुतेन मागधी ननन्दतुस्तत्सदृशेन तत्समौ ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रथाङ्कनाम्नोरिव भावबन्धनं बभूव यत्प्रेम परस्पराश्रयम् ।  
-विभक्तमप्येकसुतेन तत्तयोः परस्परस्योपरि पर्यचीयत ॥ २४॥
+विभक्तमप्येकसुतेन तत्तयोः परस्परस्योपरि पर्यचीयत ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उवाच धात्र्या प्रथमोदितं वचो ययौ तदीयामवलम्ब्य चाङ्गुलिम् ।  
-अभूच्च नम्रः प्रणिपातशिक्षया पितुर्मुदं तेन ततान सोऽर्भकः ॥ २५॥
+अभूच्च नम्रः प्रणिपातशिक्षया पितुर्मुदं तेन ततान सोऽर्भकः ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमङ्कमारोप्य शरीरयोगजैः सुखैर्निषिञ्चन्तमिवामृतं त्वचि ।  
-उपान्तसंमीलितलोचनो नृपश्चिरात्सुतस्पर्शरसज्ञतां ययौ ॥ २६॥
+उपान्तसंमीलितलोचनो नृपश्चिरात्सुतस्पर्शरसज्ञतां ययौ ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमंस्त चानेन परार्ध्यजन्मना स्थितेरभेत्ता स्थितिमन्तमन्वयम् ।  
-स्वमूर्तिभेदेन गुणाग्र्यवर्तिना पतिः प्रजानामिव सर्गमात्मनः ॥ २७॥
+स्वमूर्तिभेदेन गुणाग्र्यवर्तिना पतिः प्रजानामिव सर्गमात्मनः ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स वृत्तचूलश्चलकाकपक्षकैरमात्यपुत्रैः सवयोभिरन्वितः ।  
-लिपेर्यथावद्ग्रहणेन वाङ्मयं नदीमुखेनेव समुद्रमाविशत् ॥ २८॥
+लिपेर्यथावद्ग्रहणेन वाङ्मयं नदीमुखेनेव समुद्रमाविशत् ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोपनीतं विधिवद्विपश्चितो विनिन्युरेनं गुरवो गुरुप्रियम् ।  
-अवन्ध्ययत्नाश्च बभूवुरत्र ते क्रिया हि वस्तूपहिता प्रसीदति ॥ २९॥
+अवन्ध्ययत्नाश्च बभूवुरत्र ते क्रिया हि वस्तूपहिता प्रसीदति ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धियः समग्रैः स गुणैरुदारधीः क्रमाच्चतस्रश्चतुरर्णवोपमाः ।  
-ततार विद्याः पवनातिपातिभिर्दिशो हरिद्भिर्हरितामिवेश्वरः ॥ ३०॥
+ततार विद्याः पवनातिपातिभिर्दिशो हरिद्भिर्हरितामिवेश्वरः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-31-40.mp3"></div>
 
 
 त्वचं च मेध्यां परिधाय रौरवीमशिक्षतास्त्रं पितुरेव मन्त्रवत् ।  
-न केवलं तद्गुरुरेकपार्थिवः क्षितावभूदेकधनुर्धरोऽपि सः ॥ ३१॥
+न केवलं तद्गुरुरेकपार्थिवः क्षितावभूदेकधनुर्धरोऽपि सः ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 महोक्षतां वत्सतरः स्पृशन्निव द्विपेन्द्रभावं कलभः श्रयन्निव ।  
-रघुः क्रमाद्यौवनभिन्नशैशवः पुपोष गाम्भीर्यमनोहरं वपुः ॥ ३२॥
+रघुः क्रमाद्यौवनभिन्नशैशवः पुपोष गाम्भीर्यमनोहरं वपुः ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथास्य गोदानविधेरनन्तरं विवाहदीक्षां निरवर्तयद्गुरुः ।  
-नरेन्द्रकन्यास्तमवाप्य सत्पतिं तमोनुदं दक्षसुता इवाबभुः ॥ ३३॥
+नरेन्द्रकन्यास्तमवाप्य सत्पतिं तमोनुदं दक्षसुता इवाबभुः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 युवा युगव्यायतबाहुरंसलः कवाटवक्षाः परिणद्धकंधरः ।  
-वपुःप्रकर्षादजयद्गुरुं रघुस्तथापि नीचैर्विनयाददृश्यत ॥ ३४॥
+वपुःप्रकर्षादजयद्गुरुं रघुस्तथापि नीचैर्विनयाददृश्यत ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः प्रजानां चिरमात्मना धृतां नितान्तगुर्वीं लघयिष्यता धुरम् ।  
-निसर्गसंस्कारविनीत इत्यसौ नृपेण चक्रे युवराजशब्दभाक् ॥ ३५॥
+निसर्गसंस्कारविनीत इत्यसौ नृपेण चक्रे युवराजशब्दभाक् ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नरेन्द्रमूलायतनादनन्तरं तदास्पदं श्रीर्युवराजसंज्ञितम् ।  
-अगच्छदंशेन गुणाभिलाषिणी नवावतारं कमलादिवोत्पलम् ॥ ३६॥
+अगच्छदंशेन गुणाभिलाषिणी नवावतारं कमलादिवोत्पलम् ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विभावसुः सारथिनेव वायुना घनव्यपायेन गभस्थिमानिव ।  
-बभूव तेनातितरां सुदुःसहः कटप्रभेदेन करीव पार्थिवः ॥ ३७॥
+बभूव तेनातितरां सुदुःसहः कटप्रभेदेन करीव पार्थिवः ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नियुज्य तं होमतुरंगरक्षणे धनुर्धरं राजसुतैरनुद्रुतम् ।  
-अपूर्णमेकेन शतक्रतूपमः शतं क्रतूनामपविघ्नमाप सः ॥ ३८॥
+अपूर्णमेकेन शतक्रतूपमः शतं क्रतूनामपविघ्नमाप सः ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः परं तेन मखाय यज्वना तुरंगमुत्सृष्टमनर्गलं पुनः ।  
-धनुर्भृतामग्रत एव रक्षिणां जहार शक्रः किल गूढविग्रहः ॥ ३९॥
+धनुर्भृतामग्रत एव रक्षिणां जहार शक्रः किल गूढविग्रहः ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विषादलुप्तप्रतिपत्ति विस्मितं कुमारसैन्यं सपदि स्थितं च तत् ।  
-वसिष्ठधेनुश्च यदॄच्छयागता श्रुतप्रभावा ददृशेऽथ नन्दिनी ॥ ४०॥
+वसिष्ठधेनुश्च यदॄच्छयागता श्रुतप्रभावा ददृशेऽथ नन्दिनी ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-41-50.mp3"></div>
 
 
 तदङ्कनिस्यन्दनजलेन लोचने प्रमृज्य पुण्येन पुरस्कृतः सताम् ।  
-अतीन्द्रियेष्वप्युपपन्नदर्शनो बभूव भावेषु दिलीपनन्दनः ॥ ४१॥
+अतीन्द्रियेष्वप्युपपन्नदर्शनो बभूव भावेषु दिलीपनन्दनः ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स पूर्वतः पर्वतपक्षशातनं ददर्श देवं नरदेवसंभवः ।  
-पुनः पुनः सूतनिषिद्धचापलं हरन्तमश्वं रथरश्मिसंयुतम् ॥ ४२॥
+पुनः पुनः सूतनिषिद्धचापलं हरन्तमश्वं रथरश्मिसंयुतम् ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शतैस्तमक्ष्णामनिमेषवृत्तिभिर्हरिं विदित्वा हरिभिश्च वाजिभिः ।  
-अवोचदेनं गगनस्पृशा रघुः स्वरेण धीरेण निवर्तयन्निव ॥ ४३॥
+अवोचदेनं गगनस्पृशा रघुः स्वरेण धीरेण निवर्तयन्निव ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मखांशभाजां प्रथमो मनीषिभिस्त्वमेव देवेन्द्र सदा निगद्यसे ।  
-अजस्रदीक्षाप्रयतस्य मद्गुरोः क्रियाविघाताय कथं प्रवर्तसे ॥ ४४॥
+अजस्रदीक्षाप्रयतस्य मद्गुरोः क्रियाविघाताय कथं प्रवर्तसे ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्रिलोकनाथेन सदा मखद्विषस्त्वया नियम्या ननु दिव्यचक्षुषा ।  
-स चेत्स्वयं कर्मसु धर्मचारिणां त्वमन्तरायो भवसि च्युतो विधिः ॥ ४५॥
+स चेत्स्वयं कर्मसु धर्मचारिणां त्वमन्तरायो भवसि च्युतो विधिः ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदङ्कमग्र्यं मघवन्महाक्रतोरमुं तुरंगं प्रतिमोक्तुमर्हसि ।  
-पथः श्रुतेर्दर्शयितार ईश्वरा मलीमसामददते न पद्धतिम् ॥ ४६॥
+पथः श्रुतेर्दर्शयितार ईश्वरा मलीमसामददते न पद्धतिम् ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति प्रगल्भं रघुणा समीरितं वचो निशम्याधिपतिर्दिवौकसाम् ।  
-निवर्तयामास रथं सविस्मयः प्रचक्रमे च प्रतिवक्तुमुत्तरम् ॥ ४७॥
+निवर्तयामास रथं सविस्मयः प्रचक्रमे च प्रतिवक्तुमुत्तरम् ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यदात्थ राजन्यकुमार तत्तथा यशस्तु रक्ष्यं परतो यशोधनैः ।  
-जगत्प्रकाशं तदशेषमिज्यया भवद्गुरुर्लङ्घयितुं ममोद्यतः ॥ ४८॥
+जगत्प्रकाशं तदशेषमिज्यया भवद्गुरुर्लङ्घयितुं ममोद्यतः ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हरिर्यथैकः पुरुषोत्तमः स्मृतो महेश्वरस्त्र्यम्बक एव नापरः ।  
-तथा विदुर्मां मुनयः शतक्रतुं द्वितीयगामी न हि शब्द एष नः ॥ ४९॥
+तथा विदुर्मां मुनयः शतक्रतुं द्वितीयगामी न हि शब्द एष नः ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अतोऽयमश्वः कपिलानुकारिणा पितुस्त्वदीयस्य मयापहारितः ।  
-अलं प्रयत्नेन तवात्र मा निधाः पदं पदव्यां सगरस्य संततेः ॥ ५०॥
+अलं प्रयत्नेन तवात्र मा निधाः पदं पदव्यां सगरस्य संततेः ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-51-70.mp3"></div>
 
 
 ततः प्रहास्यापभयः पुरन्दरं पुनर्बभाषे तुरगस्य रक्षिता ।  
-गृहाण शस्त्रं यदि सर्ग एष ते न खल्वनिर्जित्य रघुं कृती भवान् ॥ ५१॥
+गृहाण शस्त्रं यदि सर्ग एष ते न खल्वनिर्जित्य रघुं कृती भवान् ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स एवमुक्त्वा मघवन्तमुन्मुखः करिष्यमाणः सशरं शरासनम् ।  
-अतिष्ठदालीढविशेषशोभिना वपुःप्रकर्षेण विडम्बितेश्वरः ॥ ५२॥
+अतिष्ठदालीढविशेषशोभिना वपुःप्रकर्षेण विडम्बितेश्वरः ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघोरवष्टम्भमयेन पत्रिणा हृदि क्षतो गोत्रभिदप्यमर्षणः ।  
-नवाम्बुदानीकमुहूर्तलाञ्छने धनुष्यमोघं समधत्त सायकम् ॥ ५३॥
+नवाम्बुदानीकमुहूर्तलाञ्छने धनुष्यमोघं समधत्त सायकम् ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिलीपसूनोः स बृहद्भुजान्तरं प्रविश्य भीमासुरशोणितोचितः ।  
-पपावनास्वादितपूर्वमाशुगः कुतूहलेनेव मनुष्यशोणितम् ॥ ५४॥
+पपावनास्वादितपूर्वमाशुगः कुतूहलेनेव मनुष्यशोणितम् ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हरेः कुमारोऽपि कुमारविक्रमः सुरद्विपास्फालनकर्कशाङ्गुलौ ।  
-भुजे शचीपत्रविशेषकाङ्किते स्वनामचिह्नं निचखान सायकम् ॥ ५५॥
+भुजे शचीपत्रविशेषकाङ्किते स्वनामचिह्नं निचखान सायकम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जहार चान्येन मयूरपत्रिणा शरेण शक्रस्य महाशनिध्वजम् ।  
-चुकोप तस्मै स भृशं सुरश्रियः प्रसह्य केशव्यपरोपणादिव ॥ ५६॥
+चुकोप तस्मै स भृशं सुरश्रियः प्रसह्य केशव्यपरोपणादिव ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तयोरुपान्तस्थितसिद्धसैनिकं गरुत्मदाशीविषभीमदर्शनैः ।  
-बभूव युद्धं तुमुलं जयैषिणोरधोमुखैरूर्ध्वमुखैश्च पत्रिभिः ॥ ५७॥
+बभूव युद्धं तुमुलं जयैषिणोरधोमुखैरूर्ध्वमुखैश्च पत्रिभिः ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अतिप्रबन्धप्रहितास्त्रवृष्टिभिस्तमाश्रयं दुष्प्रसहस्य तेजसः ।  
-शशाक निर्वापयितुं न वासवः स्वतश्च्युतं वह्निमिवाद्भिरम्बुदः ॥ ५८॥
+शशाक निर्वापयितुं न वासवः स्वतश्च्युतं वह्निमिवाद्भिरम्बुदः ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः प्रकोष्ठे हरिचन्दनाङ्किते प्रमथ्यमानार्णवधीरनादिनीम् ।  
-रघुः शशाङ्कार्धमुखेन पत्रिणा शरासनज्यामलुनाद्बिडौजसः ॥ ५९॥
+रघुः शशाङ्कार्धमुखेन पत्रिणा शरासनज्यामलुनाद्बिडौजसः ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स चापमुत्सृज्य विवृद्धमत्सरः प्रणाशनाय प्रबलस्य विद्विषः ।  
-महीध्रपक्षव्यपरोपणोचितं स्फुरत्प्रभामण्डलमस्त्रमाददे ॥ ६०॥
+महीध्रपक्षव्यपरोपणोचितं स्फुरत्प्रभामण्डलमस्त्रमाददे ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुर्भृशं वक्षसि तेन ताडितः पपात भूमौ सह सैनिकाश्रुभिः ।  
-निमेषमात्रादवधूय च व्यथां सहोत्थितः सैनिकहर्षनिस्वनैः ॥ ६१॥
+निमेषमात्रादवधूय च व्यथां सहोत्थितः सैनिकहर्षनिस्वनैः ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथापि शस्त्रव्यवहारनिष्ठुरे विपक्षभावे चिरमस्य तस्थुषः ।  
-तुतोष वीर्यातिशयेन वृत्रहा पदं हि सर्वत्र गुणैर्निधीयते ॥ ६२॥
+तुतोष वीर्यातिशयेन वृत्रहा पदं हि सर्वत्र गुणैर्निधीयते ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असङ्गमद्रिष्वपि सारवत्तया न मे त्वदन्येन विसोढमायुधम् ।  
-अवेहि मां प्रीतमृते तुरङ्गमात्किमिच्छसीति स्फुटमाह वासवः ॥ ६३॥
+अवेहि मां प्रीतमृते तुरङ्गमात्किमिच्छसीति स्फुटमाह वासवः ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो निषङ्गादसमग्रमुधृतं सुवर्णपुङ्खद्युतिरञ्जिताङ्गुलिम् ।  
-नरेन्द्रसूनुः प्रतिसंहरन्निषुं प्रियंवदः प्रत्यवदत्सुरेश्वरम् ॥ ६४॥
+नरेन्द्रसूनुः प्रतिसंहरन्निषुं प्रियंवदः प्रत्यवदत्सुरेश्वरम् ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमोच्यमश्वं यदि मन्यसे प्रभो ततः समाप्ते विधिनैव कर्मणि ।  
-अजस्रदीक्षाप्रयतः स मद्गुरुः क्रतोरशेषेण फलेन युज्यताम् ॥ ६५॥
+अजस्रदीक्षाप्रयतः स मद्गुरुः क्रतोरशेषेण फलेन युज्यताम् ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यथा स वृत्तान्तमिमं सदोगतस्त्रिलोचनैकांशतया दुरासदः ।  
-तवैव संदेशहराद्विशांपतिः शृणोति लोकेश तथा विधीयताम् ॥ ६६॥
+तवैव संदेशहराद्विशांपतिः शृणोति लोकेश तथा विधीयताम् ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेति कामं प्रतिशुश्रुवान्रघोर्यथागतं मातलिसारथिर्ययौ ।  
-नृपस्य नातिप्रमनाः सदोगृहं सुदक्षिणासूनुरपि न्यवर्तत ॥ ६७॥
+नृपस्य नातिप्रमनाः सदोगृहं सुदक्षिणासूनुरपि न्यवर्तत ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमभ्यनन्दत्प्रथमं प्रबोधितः प्रजेश्वरः शासनहारिणा हरेः ।  
-परामृशन्हर्षजडेन पाणिना तदीयमङ्गं कुलिशव्रणाङ्कितम् ॥ ६८॥
+परामृशन्हर्षजडेन पाणिना तदीयमङ्गं कुलिशव्रणाङ्कितम् ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति क्षितीशो नवतिं नवाधिकां महाक्रतूनां महनीयशासनः ।  
-समारुरुक्षुर्दिवमायुषः क्षये ततान सोपानपरम्परामिव ॥ ६९॥
+समारुरुक्षुर्दिवमायुषः क्षये ततान सोपानपरम्परामिव ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ स विषयव्यावृत्तात्मा यथाविधि सूनवे
 नृपतिककुदं दत्त्वा यूने सितातपवारणम् ।  
 मुनिवनतरुच्छायां देव्या तया सह शिश्रिये
-गलितवयसामिक्ष्वाकूणामिदं हि कुलव्रतम् ॥ ७०॥
+गलितवयसामिक्ष्वाकूणामिदं हि कुलव्रतम् ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ॥ इति श्रीकालिदासकृते रघुवंशे महाकाव्ये रघुराज्याभिषेको नाम तृतीयः सर्गः ॥
