--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/04.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/04.md
@@ -1,289 +1,465 @@
----
-title: ०४ रघु-दिग्विजयः         
-unicode_script: devanagari
----
++++
+title = "०४ रघु-दिग्विजयः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-01-10.mp3"></div>
 
 स राज्यं गुरुणा दत्तं प्रतिपद्याधिकं बभौ ।  
-दिनान्ते निहितं तेजः सवित्रेव हुताशनः ॥ १॥
+दिनान्ते निहितं तेजः सवित्रेव हुताशनः ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिलीपानन्तरं राज्ये तं निशम्य प्रतिष्ठितम् ।  
-पूर्वं प्रधूमितो राज्ञां हृदयेऽग्निरिवोत्थितः ॥ २॥
+पूर्वं प्रधूमितो राज्ञां हृदयेऽग्निरिवोत्थितः ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरुहूतध्वजस्येव तस्यून्नयनपङ्क्तयः ।  
-नवाभ्युत्थानदर्शिन्यो ननन्दुः सप्रजाः प्रजाः ॥ ३॥
+नवाभ्युत्थानदर्शिन्यो ननन्दुः सप्रजाः प्रजाः ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सममेव समाक्रान्तं द्वयं द्विरदगामिना ।  
-तेन सिंहासनं पित्र्यमखिलं चारिमण्डलम् ॥ ४॥
+तेन सिंहासनं पित्र्यमखिलं चारिमण्डलम् ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 छायामण्डललक्ष्येण तमदृश्या किल स्वयम् ।  
-पद्मा पद्मातपत्रेण भेजे साम्राज्यदीक्षितम् ॥ ५॥
+पद्मा पद्मातपत्रेण भेजे साम्राज्यदीक्षितम् ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परिकल्पितसांनिध्या काले काले च बन्दिषु ।  
-स्तुत्यं स्तुतिभिरर्थ्याभिरुपतस्थे सरस्वती ॥ ६॥
+स्तुत्यं स्तुतिभिरर्थ्याभिरुपतस्थे सरस्वती ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मनुप्रभुतिर्मान्यैर्भुक्ता यद्यपि राजभिः ।  
-तथाप्यनन्यपूर्वेव तस्मिन्नासीद्वसुंधरा ॥ ७॥
+तथाप्यनन्यपूर्वेव तस्मिन्नासीद्वसुंधरा ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स हि सर्वस्य लोकस्य युक्तदण्डतया मनः ।  
-आददे नातिशीतोष्णो नभस्वानिव दक्षिणः ॥ ८॥
+आददे नातिशीतोष्णो नभस्वानिव दक्षिणः ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मन्दोत्कण्ठाः कृतास्तेन गुणाधिकतया गुरौ ।  
-फलेन सहकारस्य पुष्पोद्गम इव प्रजाः ॥ ९॥
+फलेन सहकारस्य पुष्पोद्गम इव प्रजाः ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नयविद्भिर्नवे राज्ञि सदसच्चोपदर्शितम् ।  
-पूर्व एवाभवत्पक्षस्तस्मिन्नाभवदुत्तरः ॥ १०॥
+पूर्व एवाभवत्पक्षस्तस्मिन्नाभवदुत्तरः ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-11-16.mp3"></div>
 
 पञ्चानामपि भूतानामुत्कर्षं पुपुषुर्गुणाः ।  
-नवे तस्मिन्महीपाले सर्वं नवमिवाभवत् ॥ ११॥
+नवे तस्मिन्महीपाले सर्वं नवमिवाभवत् ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यथा प्रह्लादनाच्चन्द्रः प्रतापात्तपनो यथा ।  
-तथैव सोऽभूदन्वर्थो राजा प्रकृतिरञ्जनात् ॥ १२॥
+तथैव सोऽभूदन्वर्थो राजा प्रकृतिरञ्जनात् ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामं कर्णान्तविश्रान्ते विशाले तस्य लोचने ।  
-चक्षुष्मत्ता तु शास्त्रेण सूक्ष्मकार्यार्थदर्शिना ॥ १३॥
+चक्षुष्मत्ता तु शास्त्रेण सूक्ष्मकार्यार्थदर्शिना ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लब्धप्रशमनस्वस्थमथैनं समुपस्थिता ।  
-पार्थिवश्रीर्द्वितीयेव शरत्पङ्कजलक्षणा ॥ १४॥
+पार्थिवश्रीर्द्वितीयेव शरत्पङ्कजलक्षणा ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्वृष्टलघुभिर्मेघैर्मुक्तवर्त्मा सुदुःसहः ।  
-प्रतापस्तस्य भानोश्च युगपद्व्यानशे दिशः ॥ १५॥
+प्रतापस्तस्य भानोश्च युगपद्व्यानशे दिशः ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वार्षिकं संजहारेन्द्रो धनुर्जैत्रं रघुर्दधौ ।  
-प्रजार्थसाधने तौ हि पर्यायोद्यतकार्मुकौ ॥ १६॥
+प्रजार्थसाधने तौ हि पर्यायोद्यतकार्मुकौ ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-17-31.mp3"></div>
 
 पुण्डरीकातपत्रस्तं विकसत्काशचामरः ।  
-ऋतुर्विडम्बयामास न पुनः प्राप तच्छ्रियम् ॥ १७॥
+ऋतुर्विडम्बयामास न पुनः प्राप तच्छ्रियम् ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रसादसुमुखे तस्मिंश्चन्द्रे च विशदप्रभे ।  
-तदा चक्षुष्मतां प्रीतिरासीत्समरसा द्वयोः ॥ १८॥
+तदा चक्षुष्मतां प्रीतिरासीत्समरसा द्वयोः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हंसश्रेणीषु तारासु कुमुद्वत्सु च वारिषु ।  
-विभूतयस्तदीयानां पर्यस्ता यशसामिव ॥ १९॥
+विभूतयस्तदीयानां पर्यस्ता यशसामिव ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इक्षुच्छायनिषादिन्यस्तस्य गोप्तुर्गुणोदयम् ।  
-आकुमारकथोद्धातं शालिगोप्यो जगुर्यशः ॥ २०॥
+आकुमारकथोद्धातं शालिगोप्यो जगुर्यशः ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रससादोदयादम्भः कुम्भयोनेर्महौजसः ।  
-रघोरभिभवाशङ्कि चुक्षुभे द्विषतां मनः॥ २१॥
+रघोरभिभवाशङ्कि चुक्षुभे द्विषतां मनः॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मदोदग्राः ककुद्मन्तः सरितां कूलमुद्रुजाः ।  
-लीलाखेलमनुप्रापुर्महोक्षास्तस्य विक्रमम्॥ २२॥
+लीलाखेलमनुप्रापुर्महोक्षास्तस्य विक्रमम्॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रसवैः सप्तपर्णानां मदगन्धिभिराहताः ।  
-असूययेव तन्नागाः सप्तधैव प्रसुस्रुवुः॥ २३॥
+असूययेव तन्नागाः सप्तधैव प्रसुस्रुवुः॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सरितः कुर्वती गाधाः पथश्चाश्यानकर्दमान् ।  
-यात्रायै चोदयामास तं शक्तेः प्रथमं शरत्॥ २४॥
+यात्रायै चोदयामास तं शक्तेः प्रथमं शरत्॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मै सम्यग्घुतो वह्निर्वाजिनीराजनाविधौ ।  
-प्रदक्षिणार्चिर्व्याजेन हस्तेनेव जयं ददौ॥ २५॥
+प्रदक्षिणार्चिर्व्याजेन हस्तेनेव जयं ददौ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स गुप्तमूलप्रत्यन्तः शुद्धपार्ष्णिरयान्वितः ।  
-षड्विधं बलमादाय प्रतस्थे दिग्जिगीषया॥ २६॥
+षड्विधं बलमादाय प्रतस्थे दिग्जिगीषया॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवाकिरन्वयोवृद्धास्तं लाजैः पौरयोषितः ।  
-पृषतैर्मन्दरोद्धूतैः क्षीरोर्मय इवाच्युतम्॥ २७॥
+पृषतैर्मन्दरोद्धूतैः क्षीरोर्मय इवाच्युतम्॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स ययौ प्रथमं प्राचीं तुल्यः प्राचीनबर्हिषा ।  
-अहिताननिलोद्धूतैस्तर्जयन्निव केतुभिः॥ २८॥
+अहिताननिलोद्धूतैस्तर्जयन्निव केतुभिः॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रजोभिः स्यन्दनोद्धूतैर्गजैश्च घनसंनिभैः ।  
-भुवस्तलमिव व्योम कुर्वन्व्योमेव भूतलम्॥ २९॥
+भुवस्तलमिव व्योम कुर्वन्व्योमेव भूतलम्॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रतापोऽग्रे ततः शब्दः परागस्तदनन्तरम् ।  
-ययौ पश्चाद्रथादीति चतुःस्कन्धेव सा चमूः॥ ३०॥
+ययौ पश्चाद्रथादीति चतुःस्कन्धेव सा चमूः॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मरुपृष्ठान्युदम्भांसि नाव्याः सुप्रतरा नदीः ।  
-विपिनानि प्रकाशानि शक्तिमत्त्वाच्चकार सः॥ ३१॥
+विपिनानि प्रकाशानि शक्तिमत्त्वाच्चकार सः॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-32-47.mp3"></div>
 
 स सेनां महतीं कर्षन्पूर्वसागरगामिनीम् ।  
-बभौ हरजटाभ्रष्टां गङ्गामिव भगीरथः॥ ३२॥
+बभौ हरजटाभ्रष्टां गङ्गामिव भगीरथः॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्याजितैः फलमुत्खातैर्भग्नैश्च बहुधा नृपैः ।  
-तस्यासीदुल्बणो मार्गः पादपैरिव दन्तिनः॥ ३३॥
+तस्यासीदुल्बणो मार्गः पादपैरिव दन्तिनः॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पौरस्त्यानेवमाक्रामंस्तांस्ताञ्जनपदाञ्जयी ।  
-प्राप तालीवनश्याममुपकण्ठं महोदधेः॥ ३४॥
+प्राप तालीवनश्याममुपकण्ठं महोदधेः॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनम्राणां समुद्धर्तुस्तस्मात्सिन्धुरयादिव ।  
-आत्मा संरक्षितः सुह्मैर्वृत्तिमाश्रित्य वैतसीम्॥ ३५॥
+आत्मा संरक्षितः सुह्मैर्वृत्तिमाश्रित्य वैतसीम्॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वङ्गानुत्खाय तरसा नेता नौसाधनोद्यतान् ।  
-निचखान जयस्तम्भान्गङ्गास्रोतोन्तरेषु सः॥ ३६॥
+निचखान जयस्तम्भान्गङ्गास्रोतोन्तरेषु सः॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आपादपद्मप्रणताः कलमा इव ते रघुम् ।  
-फलैः संवर्धयामासुरुत्खातप्रतिरोपिताः॥ ३७॥
+फलैः संवर्धयामासुरुत्खातप्रतिरोपिताः॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तीर्त्वा कपिशां सैन्यैर्बद्धद्विरदसेतुभिः ।  
-उत्कलादर्शितपथः कलिङ्गाभिमुखो ययौ॥ ३८॥
+उत्कलादर्शितपथः कलिङ्गाभिमुखो ययौ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स प्रतापं महेन्द्रस्य मूर्ध्नि तीक्ष्णं न्यवेशयत् ।  
-अङ्कुशं द्विरदस्येव यन्ता गम्भीरवेदिनः॥ ३९॥
+अङ्कुशं द्विरदस्येव यन्ता गम्भीरवेदिनः॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रतिजग्राह कालिङ्गस्तमस्त्रैर्गजसाधनः ।  
-पक्षच्छेदोद्यतं शक्रं शिलावर्षीव पर्वतः॥ ४०॥
+पक्षच्छेदोद्यतं शक्रं शिलावर्षीव पर्वतः॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 द्विषां विषह्य काकुत्स्थस्तत्र नाराचदुर्दिनम् ।  
-सन्मङ्गलस्नात इव प्रतिपेदे जयश्रियम् ॥ ४१॥
+सन्मङ्गलस्नात इव प्रतिपेदे जयश्रियम् ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताम्बूलीनां दलैस्तत्र रचितापानभूमयः ।  
-नारिकेलासवं योधाः शात्रवं च पपुर्यशः ॥ ४२॥
+नारिकेलासवं योधाः शात्रवं च पपुर्यशः ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गृहीतप्रतिमुक्तस्य स धर्मविजयी नृपः ।  
-श्रियं महेन्द्रनाथस्य जहार न तु मेदिनीम् ॥ ४३॥
+श्रियं महेन्द्रनाथस्य जहार न तु मेदिनीम् ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो वेलातटेनैव फलवत्पूगमालिना ।  
-अगस्त्याचरितामाशामनाशास्यजयो ययौ ॥ ४४॥
+अगस्त्याचरितामाशामनाशास्यजयो ययौ ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स सैन्यपरिभोगेण गजदानसुगन्धिना ।  
-कावेरीं सरितां पत्युः शङ्कनीयामिवाकरोत् ॥ ४५॥
+कावेरीं सरितां पत्युः शङ्कनीयामिवाकरोत् ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बलैरध्युषितास्तस्य विजिगीषोर्गतध्वनः ।  
-मारीचोद्भ्रान्तहारीता मलयाद्रेरुपत्यकाः ॥ ४६॥
+मारीचोद्भ्रान्तहारीता मलयाद्रेरुपत्यकाः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ससञ्जुरश्वक्षुण्णानमेलानामुत्पतिष्णवः ।  
-तुल्यगन्धिषु मत्तेभकटेषु फलरेणवः ॥ ४७॥
+तुल्यगन्धिषु मत्तेभकटेषु फलरेणवः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-48-61.mp3"></div>
 
 भोगिवेष्टनमार्गेषु चन्दनानां समर्पितम् ।  
-नास्रसत्करिणां ग्रैवं त्रिपदीच्छेदिनामपि ॥ ४८॥
+नास्रसत्करिणां ग्रैवं त्रिपदीच्छेदिनामपि ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिशि मन्दायते तेजो दक्षिणस्यां रवेरपि ।  
-तस्यामेव रघोः पाण्ड्याः प्रतापं न विषेहिरे ॥ ४९॥
+तस्यामेव रघोः पाण्ड्याः प्रतापं न विषेहिरे ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताम्रपर्णीसमेतस्य मुक्तासारं महोदधेः ।  
-ते निपत्य ददुस्तस्मै यशः स्वमिव संचितम् ॥ ५०॥
+ते निपत्य ददुस्तस्मै यशः स्वमिव संचितम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स निर्विश्य यथाकामं तटेष्वालीनचन्दनौ ।  
-स्तनाविव दिशस्तस्याः शैलौ मलयदर्दुरौ ॥ ५१॥
+स्तनाविव दिशस्तस्याः शैलौ मलयदर्दुरौ ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असह्यविक्रमः सह्यं दूरान्मुक्तमुदन्वता ।  
-नितम्बमिव मेदिन्याः स्रस्तांशुकमलङ्घयत् ॥ ५२॥
+नितम्बमिव मेदिन्याः स्रस्तांशुकमलङ्घयत् ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यानीकैर्विसर्पद्भिरपरान्तजयोद्यतैः ।  
-रामास्त्रोत्सारितोऽप्यासीत्सह्यलग्न इवार्णवः ॥ ५३॥
+रामास्त्रोत्सारितोऽप्यासीत्सह्यलग्न इवार्णवः ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भयोत्सृष्टविभूषाणां तेन केरलयोषिताम् ।  
-अलकेषु चमूरेणुश्चूर्णप्रतिनिधीकृतः ॥ ५४॥
+अलकेषु चमूरेणुश्चूर्णप्रतिनिधीकृतः ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मुरलामारुतोद्धूतमगमत्कैतकं रजः ।  
-तद्योधवारबाणानामयत्नपटवासताम् ॥ ५५॥
+तद्योधवारबाणानामयत्नपटवासताम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अभ्यभूयत वाहानां चरतां गात्रशिञ्जितैः ।  
-वर्मभिः पवनोद्धूतराजतालीवनध्वनिः ॥ ५६॥
+वर्मभिः पवनोद्धूतराजतालीवनध्वनिः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 खर्जूरीस्कन्धनद्धानां मदोद्गारसुगन्धिषु ।  
-कटेषु करिणां पेतुः पुंनागेभ्यः शिलीमुखाः ॥ ५७॥
+कटेषु करिणां पेतुः पुंनागेभ्यः शिलीमुखाः ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवकाशं किलोदन्वान् रामायाभ्यर्थितो ददौ ।  
-अपरान्तमहीपालव्याजेन रघवे करम् ॥ ५८॥
+अपरान्तमहीपालव्याजेन रघवे करम् ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मत्तेभरदनोत्कीर्णव्यक्तविक्रमलक्षणम् ।  
-त्रिकूटमेव तत्रोच्चैर्जयस्तम्भं चकार सः ॥ ५९॥
+त्रिकूटमेव तत्रोच्चैर्जयस्तम्भं चकार सः ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पारसीकांस्ततो जेतुं प्रतस्थे स्थलवर्त्मना ।  
-इन्द्रियाख्यानिव रिपूंस्तत्त्वज्ञानेन संयमी ॥ ६०॥
+इन्द्रियाख्यानिव रिपूंस्तत्त्वज्ञानेन संयमी ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यवनीमुखपद्मानां सेहे मधुमदं न सः ।  
-बालातपमिवाब्जानामकालजलदोदयः  ॥ ६१॥
+बालातपमिवाब्जानामकालजलदोदयः  ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-62-75.mp3"></div>
 
 सङ्ग्रामस्तुमुलस्तस्य पाश्चात्यैरश्वसाधनैः ।  
-शार्ङ्गकूजितविज्ञेयप्रतियोधे रजस्यभूत् ॥ ६२॥
+शार्ङ्गकूजितविज्ञेयप्रतियोधे रजस्यभूत् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भल्लापवर्जितैस्तेषां शिरोभिः श्मश्रुलैर्महीम् ।  
-तस्तार सरघाव्याप्तैः स क्षौद्रपटलैरिव ॥ ६३॥
+तस्तार सरघाव्याप्तैः स क्षौद्रपटलैरिव ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपनीतशिरस्त्राणाः शेषास्तं शरणं ययुः ।  
-प्रणिपातप्रतीकारः संरम्भो हि महात्मनाम् ॥ ६४॥
+प्रणिपातप्रतीकारः संरम्भो हि महात्मनाम् ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विनयन्ते स्म तद्योधा मधुभिर्विजयश्रमम् ।  
-आस्तीर्णाजिनरत्नासु द्राक्षावलयभूमिषु ॥ ६५॥
+आस्तीर्णाजिनरत्नासु द्राक्षावलयभूमिषु ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः प्रतस्थे कौबेरीं भास्वानिव रघुर्दिशम् ।  
-शरैरुस्रैरिवोदीच्यानुद्धरिष्यन् रसानिव ॥ ६६॥
+शरैरुस्रैरिवोदीच्यानुद्धरिष्यन् रसानिव ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विनीताध्वश्रमास्तस्य सिन्धुतीरविचेष्टनैः ।  
-दुधुवुर्वाजिनः स्कन्धाꣳल्लग्नकुङ्कुमकेसरान् ॥ ६७॥
+दुधुवुर्वाजिनः स्कन्धाꣳल्लग्नकुङ्कुमकेसरान् ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र हूणावरोधानां भर्तृषु व्यक्तविक्रमम् ।  
-कपोलपाटलादेशि बभूव रघुचेष्टितम् ॥ ६८॥
+कपोलपाटलादेशि बभूव रघुचेष्टितम् ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 काम्बोजाः समरे सोढुं तस्य वीर्यमनीश्वराः ।  
-गजालानपरिक्लिष्टैरक्षोटैः सार्धमानताः ॥ ६९॥
+गजालानपरिक्लिष्टैरक्षोटैः सार्धमानताः ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेषां सदश्वभूयिष्ठास्तुङ्गा द्रविणराशयः ।  
-उपदा विविशुः शश्वन्नोत्सेकाः कोसलेश्वरम् ॥ ७०॥
+उपदा विविशुः शश्वन्नोत्सेकाः कोसलेश्वरम् ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो गौरीगुरुं शैलमारुरोहाश्वसाधनः ।  
-वर्धयन्निव तत्कूटानुद्धूतैर्धातुरेणुभिः ॥ ७१॥
+वर्धयन्निव तत्कूटानुद्धूतैर्धातुरेणुभिः ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शशंस तुल्यसत्त्वानां सैन्यघोषेऽप्यसंभ्रमम् ।  
-गुहाशयानां सिंहानां परिवृत्यावलोकितम् ॥ ७२॥
+गुहाशयानां सिंहानां परिवृत्यावलोकितम् ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भूर्जेषु मर्मरीभूताः कीचकध्वनिहेतवः ।  
-गङ्गाशीकरिणो मार्गे मरुतस्तं सिषेविरे ॥ ७३॥
+गङ्गाशीकरिणो मार्गे मरुतस्तं सिषेविरे ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विशश्रमुर्नमेरूणां छायास्वध्यास्य सैनिकाः ।  
-दृषदो वासितोत्सङ्गा निषण्णमृगनाभिभिः ॥ ७४॥
+दृषदो वासितोत्सङ्गा निषण्णमृगनाभिभिः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सरलासक्तमातङ्गग्रैवेयस्फुरितत्विषः ।  
-आसन्नोषधयो नेतुर्नक्तमस्नेहदीपिकाः ॥ ७५॥
+आसन्नोषधयो नेतुर्नक्तमस्नेहदीपिकाः ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga04-76-88.mp3"></div>
 
 तस्योत्सृष्टनिवासेषु कण्ठरज्जुक्षतत्वचः ।  
-गजवर्ष्म किरातेभ्यः शशंसुर्देवदारवः ॥ ७६॥
+गजवर्ष्म किरातेभ्यः शशंसुर्देवदारवः ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र जन्यं रघोर्घोरं पर्वतीयैर्गणैरभूत् ।  
-नाराचक्षेपणीयाश्मनिष्पेषोत्पतितानलम् ॥ ७७॥
+नाराचक्षेपणीयाश्मनिष्पेषोत्पतितानलम् ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शरैरुत्सवसंकेतान्स कृत्वा विरतोत्सवान् ।  
-जयोदाहरणं बाह्वोर्गापयामास किंनरान् ॥ ७८॥
+जयोदाहरणं बाह्वोर्गापयामास किंनरान् ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्परेण विज्ञातस्तेषूपायनपाणिषु ।  
-राज्ञा हिमवतः सारो राज्ञः सारो हिमाद्रिणा ॥ ७९॥
+राज्ञा हिमवतः सारो राज्ञः सारो हिमाद्रिणा ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्राक्षोभ्यं यशोराशिं निवेश्यावरुरोह सः ।  
-पौलस्त्यतुलितस्याद्रेरादधान इव ह्रियम् ॥ ८०॥
+पौलस्त्यतुलितस्याद्रेरादधान इव ह्रियम् ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चकम्पे तीर्णलौहित्ये तस्मिन्प्राग्ज्योतिषेश्वरः ।  
-तद्गजालानतां प्राप्तैः सह कालागुरुद्रुमैः ॥ ८१॥
+तद्गजालानतां प्राप्तैः सह कालागुरुद्रुमैः ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न प्रसेहे स रुद्धार्कमधारावर्षदुर्दिनम् ।  
-रथवर्त्मरजोऽप्यस्य कुत एव पताकिनीम् ॥ ८२॥
+रथवर्त्मरजोऽप्यस्य कुत एव पताकिनीम् ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमीशः कामरूपाणामत्याखण्डलविक्रमम् ।  
-भेजे भिन्नकटैर्नागैरन्यानुपरुरोध यैः ॥ ८३॥
+भेजे भिन्नकटैर्नागैरन्यानुपरुरोध यैः ॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामरूपेश्वरस्तस्य हेमपीठाधिदेवताम् ।  
-रत्नपुष्पोपहारेण छायमानर्च पादयोः ॥ ८४॥
+रत्नपुष्पोपहारेण छायमानर्च पादयोः ॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति जित्वा दिशो जिष्णुर्न्यवर्तत रथोद्धतम् ।  
-रजो विश्रामयन्राज्ञां छत्रशून्येषु मौलिषु ॥ ८५॥
+रजो विश्रामयन्राज्ञां छत्रशून्येषु मौलिषु ॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स विश्वजितमाजह्रे यज्ञं सर्वस्वदक्षिणम् ।  
-आदानं हि विसर्गाय सतां वारिमुचामिव ॥ ८६॥
+आदानं हि विसर्गाय सतां वारिमुचामिव ॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सत्रान्ते सचिवसखः पुरस्क्रियाभि-
 र्गुर्वीभिः शमितपराजयव्यलीकान् ।  
 काकुत्स्थश्चिरविरहोत्सुकावरोधान्
-राजन्यान्स्वपुरनिवृत्तयेऽनुमेने ॥ ८७॥
+राजन्यान्स्वपुरनिवृत्तयेऽनुमेने ॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते रेखाकुलिशातपत्रचिह्नं
 सम्राजश्चरणयुगं प्रसादलभ्यम् ।  
 प्रस्थानप्रणतिभिरङ्गुलीषु चक्रु-
-र्मौलिस्रक्च्युतमकरन्दरेणुगौरम् ॥ ८८॥
+र्मौलिस्रक्च्युतमकरन्दरेणुगौरम् ॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/04/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 रघुदिग्विजयो नाम चतुर्थः सर्गः ॥
