--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/05.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/05.md
@@ -1,276 +1,428 @@
----
-title: ०५ अज-स्वयंवराभिगमनम्        
-unicode_script: devanagari
----
++++
+title = "०५ अज-स्वयंवराभिगमनम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-01-10.mp3"></div>
 
 तमध्वरे विश्वजिति क्षितीशं निःशेषविश्राणितकोशजातम् ।  
-उत्पातविद्यो गुरुदक्षिणार्थी कौत्सः प्रपेदे वरतन्तुशिष्यः ॥ १॥
+उत्पातविद्यो गुरुदक्षिणार्थी कौत्सः प्रपेदे वरतन्तुशिष्यः ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स मृण्मये वीतहिरण्मयत्वात्पात्रे निधायार्घ्यमनर्घशीलः ।  
-श्रुतप्रकाशं यशसा प्रकाशः प्रत्युज्जगामातिथिमातिथेयः ॥ २॥
+श्रुतप्रकाशं यशसा प्रकाशः प्रत्युज्जगामातिथिमातिथेयः ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमर्चयित्वा विधिवद्विधिज्ञस्तपोधनं मानधनाग्रयायी ।  
-विशांपतिर्विष्टरभाजमारात्कृताञ्जलिः कृत्यविदित्युवाच ॥ ३॥
+विशांपतिर्विष्टरभाजमारात्कृताञ्जलिः कृत्यविदित्युवाच ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अप्यग्रणीर्मन्त्रकृतामृषीणां कुशाग्रबुद्धे कुशली गुरुस्ते ।  
-यतस्त्वया ज्ञानमशेषमाप्तं लोकेन चैतन्यमिवोष्णरश्मेः ॥ ४॥
+यतस्त्वया ज्ञानमशेषमाप्तं लोकेन चैतन्यमिवोष्णरश्मेः ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कायेन वाचा मनसाओइ शश्वद्यत्संभृतं वासवधैर्यलोपि ।  
-आपाद्यते न व्ययमन्तरायैः कच्चिन्महर्षेस्त्रिविधं तपस्तत् ॥ ५॥
+आपाद्यते न व्ययमन्तरायैः कच्चिन्महर्षेस्त्रिविधं तपस्तत् ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आधारबन्धप्रमुखैः प्रयत्नैः संवर्धितानां सुतनिर्विशेषम् ।  
-कच्चिन्न वाय्वादिरुपप्लवो वः श्रमच्छिदामाश्रमपादपानाम् ॥ ६॥
+कच्चिन्न वाय्वादिरुपप्लवो वः श्रमच्छिदामाश्रमपादपानाम् ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रियानिमित्तेश्वपि वत्सलत्वादभग्नकामा मुनिभिः कुशेषु ।  
-तदङ्कशय्याच्युतनाभिनाला कच्चिन्मृगीणामनघा प्रसूतिः ॥ ७॥
+तदङ्कशय्याच्युतनाभिनाला कच्चिन्मृगीणामनघा प्रसूतिः ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्वत्यते यैर्नियमाभिषेको येभ्यो निवापाञ्जलयः पितॄणाम् ।  
-तान्युञ्छषष्ठाङ्कितसैकतानि शिवानि वस्तीर्थजलानि कच्चित् ॥ ८॥
+तान्युञ्छषष्ठाङ्कितसैकतानि शिवानि वस्तीर्थजलानि कच्चित् ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नीवारपाकादि कडंगरीयैरामृश्यते जानपदैर्न कच्चित् ।  
-कालोपपन्नातिथिकल्प्यभागं वन्यं शरीरस्थितिसाधनं वः ॥ ९॥
+कालोपपन्नातिथिकल्प्यभागं वन्यं शरीरस्थितिसाधनं वः ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपि प्रसन्नेन महर्षिणा त्वं सम्यग्विनीयानुमतो गृहाय ।  
-कालो ह्ययं संक्रमितुं द्वितीयं सर्वोपकारक्षममाश्रमं ते ॥ १०॥
+कालो ह्ययं संक्रमितुं द्वितीयं सर्वोपकारक्षममाश्रमं ते ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-11-20.mp3"></div>
 
 तवार्हतो नाभिगमेन तृप्तं मनो नियोगक्रिययोत्सुकं मे ।  
-अप्याज्ञया शासितुरात्मना वा प्राप्तोऽसि संभावयितुं वनान्माम् ॥ ११॥
+अप्याज्ञया शासितुरात्मना वा प्राप्तोऽसि संभावयितुं वनान्माम् ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्यर्घ्यपात्रानुमितव्ययस्य रघोरुदारामपि गां निशम्य ।  
-स्वार्थोपपत्तिं प्रति दुर्बलाशस्तमित्यवोचद्वरतन्तुशिष्यः ॥ १२॥
+स्वार्थोपपत्तिं प्रति दुर्बलाशस्तमित्यवोचद्वरतन्तुशिष्यः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सर्वत्र नो वार्तमवेहि राजन्नाथे कुतस्त्वय्यशुभं प्रजानाम् ।  
-सूर्ये तपत्यावरणाय दृष्टेः कल्पेत लोकस्य कथं तमिस्रा ॥ १३॥
+सूर्ये तपत्यावरणाय दृष्टेः कल्पेत लोकस्य कथं तमिस्रा ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भक्तिः प्रतीक्ष्येषु कुलोचिता ते पूर्वान्महाभाग तयातिशेषे ।  
-व्यतीतकालस्त्वहमभ्युपेतस्त्वामर्थिभावादिति मे विषादः ॥ १४॥
+व्यतीतकालस्त्वहमभ्युपेतस्त्वामर्थिभावादिति मे विषादः ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शरीरमात्रेण नरेन्द्र तिष्ठन्नाभासि तीर्थप्रतिपादितर्द्धिः ।  
-आरण्यकोपात्तफलप्रसूतिः स्तम्बेन नीवार इवावशिष्टः ॥ १५॥
+आरण्यकोपात्तफलप्रसूतिः स्तम्बेन नीवार इवावशिष्टः ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्थाने भवानेकनराधिपः सन्नकिंचनत्वं मखजं व्यनक्ति ।  
-पर्यायपीतस्य सुरैर्हिमांशोः कलाक्षयः श्लाघ्यतरो हि वृद्धेः ॥ १६॥
+पर्यायपीतस्य सुरैर्हिमांशोः कलाक्षयः श्लाघ्यतरो हि वृद्धेः ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदन्यतस्तावदनन्यकार्यो गुर्वर्थमाहर्तुमहं यतिष्ये ।  
-स्वस्त्यस्तु ते निर्गलिताम्बुगर्भं शरद्घनं नार्दति चातकोऽपि ॥ १७॥
+स्वस्त्यस्तु ते निर्गलिताम्बुगर्भं शरद्घनं नार्दति चातकोऽपि ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एतावदुक्त्वा प्रतियातुकामं शिष्यं महर्षेर्नृपतिर्निषिध्य ।  
-किं वस्तु विद्वन्गुरवे प्रदेयं त्वया कियद्वेति तमन्वयुङ्क्त ॥ १८॥
+किं वस्तु विद्वन्गुरवे प्रदेयं त्वया कियद्वेति तमन्वयुङ्क्त ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो यथावद्विहिताध्वराय तस्मै स्मयावेशविवर्जिताय ।  
-वर्णाश्रमाणां गुरवे स वर्णी विचक्षणः प्रस्तुतमाचचक्षे ॥ १९॥
+वर्णाश्रमाणां गुरवे स वर्णी विचक्षणः प्रस्तुतमाचचक्षे ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 समाप्तविद्येन मया महर्षिर्विज्ञापितोऽभूद्गुरुदक्षिणायै ।  
-स मे चिरायास्खलितोपचारां तां भक्तिमेवागणयत्पुरस्तात् ॥ २०॥
+स मे चिरायास्खलितोपचारां तां भक्तिमेवागणयत्पुरस्तात् ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-21-30.mp3"></div>
 
 निर्बन्धसंजातरुषार्थकार्श्यमचिन्तयित्वा गुरुणाहमुक्तः ।  
-वित्तस्य विद्यापरिसंख्यया मे कोटीश्चतस्रो दश चाहरेति ॥ २१॥
+वित्तस्य विद्यापरिसंख्यया मे कोटीश्चतस्रो दश चाहरेति ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽहं सपर्याविधिभाजनेन मत्वा भवन्तं प्रभुशब्दशेषम् ।  
-अभ्युत्सहे संप्रति नोपरोद्धुमल्पेतरत्वाच्छ्रुतनिष्क्रयस्य ॥ २२॥
+अभ्युत्सहे संप्रति नोपरोद्धुमल्पेतरत्वाच्छ्रुतनिष्क्रयस्य ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्थं द्विजेन द्विजराजकान्तिरावेदितो वेदविदां वरेण ।  
-एनोनिवृत्तेन्द्रियवृत्तिरेनं जगाद भूयो जगदेकनाथः ॥ २३॥
+एनोनिवृत्तेन्द्रियवृत्तिरेनं जगाद भूयो जगदेकनाथः ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुर्वर्थमर्थी श्रुतपारदृश्वा रघोः सकाशादनवाप्य कामम् ।  
-गतो वदान्यान्तरमित्ययं मे मा भूत्परीवादनवावतारः ॥ २४॥
+गतो वदान्यान्तरमित्ययं मे मा भूत्परीवादनवावतारः ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स त्वं प्रशस्ते महिते मदीये वसंश्चतुर्थोऽग्निरिवाग्निगारे ।  
-द्वित्राण्यहान्यर्हसि सोढुमर्हन् यावद्यते साधयितुं त्वदर्थम् ॥ २५॥
+द्वित्राण्यहान्यर्हसि सोढुमर्हन् यावद्यते साधयितुं त्वदर्थम् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेति तस्यावितथं प्रतीतः प्रत्यग्रहीत्संगरमग्रजन्मा ।  
-गामात्तसारां रघुरप्यवेक्ष्य निष्क्रष्टुमर्थं चकमे कुबेरात् ॥ २६॥
+गामात्तसारां रघुरप्यवेक्ष्य निष्क्रष्टुमर्थं चकमे कुबेरात् ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वसिष्ठमन्त्रोक्षणजात्प्रभावादुदन्वदाकाशमहीधरेषु ।  
-मरुत्सखस्येव बलाहकस्य गतिर्विजघ्ने न हि तद्रथस्य ॥ २७॥
+मरुत्सखस्येव बलाहकस्य गतिर्विजघ्ने न हि तद्रथस्य ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथाधिशिश्ये प्रयतः प्रदोषे रथं रघुः कल्पितशस्त्रगर्भम् ।  
-सामन्तसंभावनयैव धीरः कैलासनाथं तरसा जिगीषुः ॥ २८॥
+सामन्तसंभावनयैव धीरः कैलासनाथं तरसा जिगीषुः ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रातः प्रयाणाभिमुखाय तस्मै सविस्मयाः कोषगृहे नियुक्ताः ।  
-हिरण्मयीं कोषगृहस्य मध्ये वृष्टिं शशंसुः पतितां नभस्तः ॥ २९॥
+हिरण्मयीं कोषगृहस्य मध्ये वृष्टिं शशंसुः पतितां नभस्तः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स भूपतिर्भासुरहेमराशिं लब्धं कुबेरादभियास्यमानात् ।  
-दिदेश कौत्साय समस्तमेव पादं सुमेरोरिव वज्रभिन्नम् ॥ ३०॥
+दिदेश कौत्साय समस्तमेव पादं सुमेरोरिव वज्रभिन्नम् ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-31-40.mp3"></div>
 
 जनस्य साकेतनिवासिनस्तौ द्वावप्यभूतानभिनन्द्यसत्त्वौ ।  
-गुरुप्रदेयाधिकनिःस्पृहोऽर्थी नृपोऽर्थिकामादधिकप्रदश्च ॥ ३१॥
+गुरुप्रदेयाधिकनिःस्पृहोऽर्थी नृपोऽर्थिकामादधिकप्रदश्च ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोष्ट्रवामीशतवाहितार्थं प्रजेश्वरं प्रीतमना महर्षिः ।  
-स्पृशन्करेणानतपूर्वकायं संप्रस्थितो वाचमुवाच कौत्सः ॥ ३२॥
+स्पृशन्करेणानतपूर्वकायं संप्रस्थितो वाचमुवाच कौत्सः ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 किमत्र चित्रं यदि कामसूर्भूर्वृत्ते स्थितस्याधिपतेः प्रजानाम् ।  
-अचिन्तनीयस्तु तव प्रभावो मनीषितं द्यौरपि येन दुग्धा ॥ ३३॥
+अचिन्तनीयस्तु तव प्रभावो मनीषितं द्यौरपि येन दुग्धा ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आशास्यमन्यत्पुनरुक्तभूतं श्रेयांसि सर्वाण्यधिजग्मुषस्ते ।  
-पुत्रं लभस्वात्मगुणानुरूपं भवन्तमीड्यं भवतः पितेव ॥ ३४॥
+पुत्रं लभस्वात्मगुणानुरूपं भवन्तमीड्यं भवतः पितेव ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्थं प्रयुज्याशिषमग्रजन्मा राज्ञे प्रतीयाय गुरोः सकाशम् ।  
-राजापि लेभे सुतमाशु तस्मादालोकमर्कादिव जीवलोकः ॥ ३५॥
+राजापि लेभे सुतमाशु तस्मादालोकमर्कादिव जीवलोकः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ब्राह्मे मुहूर्ते किल तस्य देवी कुमारकल्पं सुषुवे कुमारम् ।  
-अतः पिता ब्रह्मण एव नाम्ना तमात्मजन्मानमजं चकार ॥ ३६॥
+अतः पिता ब्रह्मण एव नाम्ना तमात्मजन्मानमजं चकार ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रूपं तदोजस्वि तदेव वीर्यं तदेव नैसर्गिकमुन्नतत्वम् ।  
-न कारणात्स्वाद्बिभिदे कुमारः प्रवर्तितो दीप इव प्रदीपात् ॥ ३७॥
+न कारणात्स्वाद्बिभिदे कुमारः प्रवर्तितो दीप इव प्रदीपात् ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उत्पातविद्यं विधिवद्गुरुभ्यस्तं यौवनोद्भेदविशेषकान्तम् ।  
-श्रीः साभिलाषापि गुरोरनुज्ञां धीरेव कन्या पितुराचकाङ्क्ष ॥ ३८॥
+श्रीः साभिलाषापि गुरोरनुज्ञां धीरेव कन्या पितुराचकाङ्क्ष ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथेश्वरेण क्रथकैशिकानां स्वयंवरार्थं स्वसुरिन्दुमत्याः ।  
-आप्तः कुमारानयनोत्सुकेन भोजेन दूतो रघवे विसृष्टः ॥ ३९॥
+आप्तः कुमारानयनोत्सुकेन भोजेन दूतो रघवे विसृष्टः ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं श्लाघ्यसंबन्धमसौ विचिन्त्य दारक्रियायोग्यदशश्च पुत्रम् ।  
-प्रस्थापयामास ससैन्यमेनमृद्धां विदर्भाधिपराजधानीम् ॥ ४०॥
+प्रस्थापयामास ससैन्यमेनमृद्धां विदर्भाधिपराजधानीम् ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-41-50.mp3"></div>
 
 तस्योपकार्यारचितोपचारा वन्येतरा जानपदोपदाभिः ।  
-मार्गे निवासा मनुजेन्द्रसूनोर्बभूवुरुद्यानविहारकल्पाः ॥ ४१॥
+मार्गे निवासा मनुजेन्द्रसूनोर्बभूवुरुद्यानविहारकल्पाः ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स नर्मदारोधसि सीकरार्द्रैर्मरुद्भिरानर्तितनक्तमाले ।  
-निवेशयामास विलङ्घिताध्वा क्लान्तं रजोधूसरकेतु सैन्यम् ॥ ४२॥
+निवेशयामास विलङ्घिताध्वा क्लान्तं रजोधूसरकेतु सैन्यम् ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोपरिष्टाद्भ्रमरैर्भ्रमद्भिः प्राक्सूचितान्तःसलिलप्रवेशः ।  
-निर्धौतदानामलगण्डभित्तिर्वन्यः सरित्तो गज उन्ममज्ज ॥ ४३॥
+निर्धौतदानामलगण्डभित्तिर्वन्यः सरित्तो गज उन्ममज्ज ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निःशेषविक्षालितधातुनापि वप्रक्रियामृक्षवतस्तटेषु ।  
-नीलोर्ध्वरेखाशबलेन शंसन्दन्तद्वयेनाश्मविकुण्ठितेन ॥ ४४॥
+नीलोर्ध्वरेखाशबलेन शंसन्दन्तद्वयेनाश्मविकुण्ठितेन ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संहारविक्षेपलघुक्रियेण हस्तेन तीराभिमुखः सशब्दम् ।  
-बभौ स भिन्दन्बृहतस्तरंगान्वार्यर्गलाभङ्ग इव प्रवृत्तः ॥ ४५॥
+बभौ स भिन्दन्बृहतस्तरंगान्वार्यर्गलाभङ्ग इव प्रवृत्तः ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शैलोपमः शैवलमञ्जरीणां जालानि कर्षन्नुरसा स पश्चात् ।  
-पूर्वं तदुत्पीडितवारिराशिः सरित्प्रवाहस्तटमुत्ससर्प ॥ ४६॥
+पूर्वं तदुत्पीडितवारिराशिः सरित्प्रवाहस्तटमुत्ससर्प ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यैकनागस्य कपोलभित्त्योर्जलावगाहक्षणमेकशान्ता ।  
-वन्येतरानेकपदर्शनेन पुनर्दिदीपे मददुर्दिनश्रीः ॥ ४७॥
+वन्येतरानेकपदर्शनेन पुनर्दिदीपे मददुर्दिनश्रीः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सप्तच्छदक्षीरकटुप्रवाहमसह्यमाघ्राय मदं तदीयम् ।  
-विलङ्घिताधोरणतीव्रयत्नाः सेनागजेन्द्रा विमुखा बभूवुः  ॥ ४८॥
+विलङ्घिताधोरणतीव्रयत्नाः सेनागजेन्द्रा विमुखा बभूवुः  ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स च्छिन्नबन्धद्रुतयुग्यशून्यं भग्नक्षपर्यस्तरथं क्षणेन ।  
-रामापरित्राणविहस्तयोधं सेननिवेशं तुमुलं चकार ॥ ४९॥
+रामापरित्राणविहस्तयोधं सेननिवेशं तुमुलं चकार ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमापतन्तं नृपतेरवध्यो वन्यः करीति श्रुतवान्कुमारः ।  
-निर्वर्तयिष्यन्विशिखेन कुम्भे जघान नात्यायतकृष्टशार्ङ्गः ॥ ५०॥
+निर्वर्तयिष्यन्विशिखेन कुम्भे जघान नात्यायतकृष्टशार्ङ्गः ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-51-65.mp3"></div>
 
 स विद्धमात्रः किल नागरूपमुत्सृज्य तद्विस्मितसैन्यदृष्टः ।  
-स्फुरत्प्रभामण्डलमध्यवर्ति कान्तं वपुर्व्योमचरः प्रपेदे ॥ ५१॥
+स्फुरत्प्रभामण्डलमध्यवर्ति कान्तं वपुर्व्योमचरः प्रपेदे ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ प्रभावोपनतैः कुमारं कल्पद्रुमोत्थैरवकीर्य पुष्पैः ।  
-उवाच वाग्मी दशनप्रभाभिः संवर्धितोरःस्थलतारहारः ॥ ५२॥
+उवाच वाग्मी दशनप्रभाभिः संवर्धितोरःस्थलतारहारः ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मतङ्गशापादवलेपमूलादवाप्तवानस्मि मतङ्गजत्वम् ।  
-अवेहि गन्धर्वपतेस्तनूजं प्रियंवदं मां प्रियदर्शनस्य ॥ ५३॥
+अवेहि गन्धर्वपतेस्तनूजं प्रियंवदं मां प्रियदर्शनस्य ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स चानुनीतः प्रणतेन पश्चान्मया महर्षिर्मृदुतामगच्छत् ।  
-उष्णत्वमग्न्यातपसंप्रयोगाच्छैत्यं हि यत्सा प्रकृतिर्जलस्य ॥ ५४॥
+उष्णत्वमग्न्यातपसंप्रयोगाच्छैत्यं हि यत्सा प्रकृतिर्जलस्य ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इक्ष्वाकुवंशप्रभवो यदा ते भेत्स्यत्यजः कुम्भमयोमुखेन ।  
-संयोक्ष्यसे स्वेन वपुर्महिम्ना तदेत्यवोचत्स तपोनिधिर्माम् ॥ ५५॥
+संयोक्ष्यसे स्वेन वपुर्महिम्ना तदेत्यवोचत्स तपोनिधिर्माम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संमोचितः सत्त्ववता त्वयाहं शापाच्चिरप्रार्थितदर्शनेन ।  
-प्रतिप्रियं चेद्भवतो न कुर्यां वृथा हि मे स्यात्स्वपदोपलब्धिः ॥ ५६॥
+प्रतिप्रियं चेद्भवतो न कुर्यां वृथा हि मे स्यात्स्वपदोपलब्धिः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संमोहनं नाम सखे ममास्त्रं प्रयोगसंहारविभक्तमन्त्रम् ।  
-गान्धर्वमादत्स्व यतः प्रयोक्तुर्न चारिहिंसा विजयश्च हस्ते ॥ ५७॥
+गान्धर्वमादत्स्व यतः प्रयोक्तुर्न चारिहिंसा विजयश्च हस्ते ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अलं ह्रिया मां प्रति यन्मुहूर्तं दयापरोऽभूः प्रहरन्नपि त्वम् ।  
-तस्मादुपच्छन्दयति प्रयोज्यं मयि त्वया न प्रतिषेधरौक्ष्यम् ॥ ५८॥
+तस्मादुपच्छन्दयति प्रयोज्यं मयि त्वया न प्रतिषेधरौक्ष्यम् ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेत्युपस्पृश्य पयः पवित्रं सोमोद्भवायाः सरितो नृसोमः ।  
-उदङ्मुखः सोऽस्त्रविदस्त्रमन्त्रं जग्राह तस्मान्निगृहीतशापात् ॥ ५९॥
+उदङ्मुखः सोऽस्त्रविदस्त्रमन्त्रं जग्राह तस्मान्निगृहीतशापात् ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवं तयोरध्वनि दैवयोगादासेदुषोः सख्यमचिन्त्यहेतु ।  
-एको ययौ चैत्ररथप्रदेशान्सौराज्यरम्यानपरो विदर्भान् ॥ ६०॥
+एको ययौ चैत्ररथप्रदेशान्सौराज्यरम्यानपरो विदर्भान् ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं तस्थिवांसं नगरोपकण्ठे तदागमारूढगुरुप्रहर्षः ।  
-प्रत्युज्जगाम क्रथकैशिकेन्द्रश्चन्द्रं प्रवृद्धोर्मिरिवोर्मिमाली ॥ ६१॥
+प्रत्युज्जगाम क्रथकैशिकेन्द्रश्चन्द्रं प्रवृद्धोर्मिरिवोर्मिमाली ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रवेश्य चैनं पुनरग्रयायी नीचैस्तथोपाचरदर्पितश्रीः ।  
-मेने यथा तत्र जनः समेतो वैदर्भमागन्तुमजं गृहेशम् ॥ ६२॥
+मेने यथा तत्र जनः समेतो वैदर्भमागन्तुमजं गृहेशम् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याधिकारपुरुषैः प्रणतैः प्रदिष्टां
 प्राग्द्वारवेदिविनिवेशितपूर्णकुम्भाम्।  
 रम्यां रघुप्रतिनिधिः स नवोपकार्यां
-बाल्यात्परामिव दशां मदनोऽध्युवास ॥ ६३॥
+बाल्यात्परामिव दशां मदनोऽध्युवास ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र स्वयंवरसमाहृतराजलोकं
 कन्याललाम कमनीयमजस्य लिप्सोः।  
 भावावबोधकलुषा दयितेव रात्रौ
-निद्रा चिरेण नयनाभिमुखी बभूव ॥ ६४॥
+निद्रा चिरेण नयनाभिमुखी बभूव ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं कर्णभूषणनिपीडितपीवरांसं
 शय्योत्तरच्छदविमर्दकृशाङ्गरागम् ।  
 सूतात्मजाः सवयसः प्रथितप्रबोधं
-प्राबोधयन्नुषसि वाग्भिरुदारवाचः ॥ ६५॥
+प्राबोधयन्नुषसि वाग्भिरुदारवाचः ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga05-66-76.mp3"></div>
 
 रात्रिर्गता मतिमतां वर मुञ्च शय्यां
 धात्रा द्विधैव ननु धूर्जगतो विभक्ता ।  
 तामेकतस्तव बिभर्ति गुरुर्विनिद्र-
-स्तस्या भवानपरधुर्यपदावलम्बी ॥ ६६॥
+स्तस्या भवानपरधुर्यपदावलम्बी ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निद्रावशेन भवताप्यनवेक्षमाणा
 पर्युत्सुकत्वमबला निशि खण्डितेव ।  
 लक्ष्मीर्विनोदयति येन दिगन्तलम्बी
-सोऽपि त्वदाननरुचिं विजहाति चन्द्रः ॥ ६७॥
+सोऽपि त्वदाननरुचिं विजहाति चन्द्रः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तद्वल्गुना युगपदुन्मिषितेन तावत्-
 सद्यः परस्परतुलामधिरोहतां द्वे ।  
 प्रस्पन्दमानपरुषेतरतारमन्त-
-श्चक्षुस्तव प्रचलितभ्रमरं च पद्मम् ॥ ६८॥
+श्चक्षुस्तव प्रचलितभ्रमरं च पद्मम् ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वृन्ताच्छ्लथं हरति पुष्पमनोकहानां
 संसृज्यते सरसिजैररुणांशुभिन्नैः ।  
 स्वाभाविकं परगुणेन विभातवायुः
-सौरभ्यमीप्सुरिव ते मुखमारुतस्य ॥ ६९॥
+सौरभ्यमीप्सुरिव ते मुखमारुतस्य ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताम्रोदरेषु पतितं तरुपल्लवेषु
 निर्धौतहारगुलिकाविशदं हिमाम्भः
 आभाति लब्धपरभागतयाधरोष्ठे
-लीलास्मितं सदशनार्चिरिव त्वदीयम् ॥ ७०॥
+लीलास्मितं सदशनार्चिरिव त्वदीयम् ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यावत्प्रतापनिधिराक्रमते न भानु-
 रह्नाय तावदरुणेन तमो निरस्तम् ।  
 आयोधनाग्रसरतां त्वयि वीर याते
-किं वा रिपूंस्तव गुरुः स्वयमुच्छिनत्ति ॥ ७१॥
+किं वा रिपूंस्तव गुरुः स्वयमुच्छिनत्ति ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शय्यां जहत्युभयपक्षविनीतनिद्राः
 स्तम्बेरमा मुखरशृङ्खलकर्षिणस्ते ।  
 येषां विभाति तरुणारुणरागयोगा-
-द्भिन्नाद्रिगैरिकतटा इव दन्तकोशाः ॥ ७२॥
+द्भिन्नाद्रिगैरिकतटा इव दन्तकोशाः ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दीर्घेष्वमी नियमिताः पटमण्डपेषु
 निद्रां विहाय वनजाक्ष वनायुदेश्याः ।  
 वक्त्रोष्मणा मलिनयन्ति पुरोगतानि
-लेह्यानि सैन्धवशिलाशकलानि वाहाः ॥ ७३॥
+लेह्यानि सैन्धवशिलाशकलानि वाहाः ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भवति विरलभक्तिर्म्लानपुष्पोपहारः
 स्वकिरणपरिवेषोद्भेदशून्याः प्रदीपाः ।  
 अयमपि च गिरं नस्त्वत्प्रबोधप्रयुक्ता-
-मनुवदति शुकस्ते मञ्जुवाक्पञ्जरस्थः ॥ ७४॥
+मनुवदति शुकस्ते मञ्जुवाक्पञ्जरस्थः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति विरचितवाग्भिर्बन्दिपुत्रैः कुमारः
 सपदि विगतनिद्रस्तल्पमुज्झांचकार ।  
 मदपटुनिनदद्भिर्बोधितो राजहंसैः
-सुरगज इव गाङ्गं सैकतं सुप्रतीकः ॥ ७५॥
+सुरगज इव गाङ्गं सैकतं सुप्रतीकः ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ विधिमवसाय्य शास्त्रदृष्टं
 दिवसमुखोचितमञ्चिताक्षिपक्ष्मा ।  
 कुशलविरचितानुकूलवेशः
-क्षितिपसमाजमगात्स्वयंवरस्थम् ॥ ७६॥
+क्षितिपसमाजमगात्स्वयंवरस्थम् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीकालिदासकृते रघुवंशे महाकाव्ये पञ्चमः सर्गः ॥
