--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/06.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/06.md
@@ -1,275 +1,447 @@
----
-title: ०६ स्वयंवरवर्णनम्       
-unicode_script: devanagari
----
++++
+title = "०६ स्वयंवरवर्णनम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga06-01-30.mp3"></div>
 
 स तत्र मञ्चेषु मनोज्ञवेषान्सिंहासनस्थानुपचारवत्सु ।  
-वैमानिकानां मरुतामपश्यदाकृष्टलीलान्नरलोकपालान् ॥ १॥
+वैमानिकानां मरुतामपश्यदाकृष्टलीलान्नरलोकपालान् ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रतेर्गृहीतानुनयेन कामं प्रत्यर्पितस्वाङ्गमिवेश्वरेण ।  
-काकुत्स्थमालोकयतां नृपाणां मनो बभूवेन्दुमतीनिराशम् ॥ २॥
+काकुत्स्थमालोकयतां नृपाणां मनो बभूवेन्दुमतीनिराशम् ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वैदर्भनिर्दिष्टमसौ कुमारः कॢप्तेन सोपानपथेन मञ्चम् ।  
-शिलाविभङ्गैर्मृगराजशावस्तुङ्गं नगोत्सङ्गमिवारुरोह ॥ ३॥
+शिलाविभङ्गैर्मृगराजशावस्तुङ्गं नगोत्सङ्गमिवारुरोह ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परार्ध्यवर्णास्तरणोपपन्नमासेदिवान्रत्नवदासनं सः ।  
-भूयिष्ठमासीदुपमेयकान्तिर्मयूरपृष्ठाश्रयिणा गुहेन ॥ ४॥
+भूयिष्ठमासीदुपमेयकान्तिर्मयूरपृष्ठाश्रयिणा गुहेन ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तासु श्रिया राजपरंपरासु प्रभाविशेषोदयदुर्निरीक्ष्यः ।  
-सहस्रधात्मा व्यरुचद्विभक्तः पयोमुचां पङ्क्तिषु विद्युतेव ॥ ५॥
+सहस्रधात्मा व्यरुचद्विभक्तः पयोमुचां पङ्क्तिषु विद्युतेव ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेषां महार्हासनसंस्थितानामुदारनेपथ्यभृतां स मध्ये ।  
-रराज धाम्ना रघुसूनुरेव कल्पद्रुमाणामिव पारिजातः ॥ ६॥
+रराज धाम्ना रघुसूनुरेव कल्पद्रुमाणामिव पारिजातः ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नेत्रव्रजाः पौरजनस्य तस्मिन्विहाय सर्वान्नृपतीन्निपेतुः ।  
-मदोत्कटे रेचितपुष्पवृक्षा गन्धद्विपे वन्य इव द्विरेफाः ॥ ७॥
+मदोत्कटे रेचितपुष्पवृक्षा गन्धद्विपे वन्य इव द्विरेफाः ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ स्तुते बन्दिभिरन्वयज्ञैः सोमार्कवंश्ये नरदेवलोके ।  
-संचारिते चागुरुसारयोनौ धूपे समुत्सर्पति वैजयन्तीः ॥ ८॥
+संचारिते चागुरुसारयोनौ धूपे समुत्सर्पति वैजयन्तीः ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरोपकण्टोपवनाश्रयाणां कलापिनामुद्धतनृत्तहेतौ ।  
-प्रध्मातशङ्खे परितो दिगन्तांस्तूर्यस्वने मूर्च्छति मङ्गलार्थे ॥ ९॥
+प्रध्मातशङ्खे परितो दिगन्तांस्तूर्यस्वने मूर्च्छति मङ्गलार्थे ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मनुष्यवाह्यं चतुरन्तयानमध्यास्य कन्या परिवारशोभि ।  
-विवेश मञ्चान्तरराजमार्गं पतिंवरा कॢप्तविवाहवेषा ॥ १०॥
+विवेश मञ्चान्तरराजमार्गं पतिंवरा कॢप्तविवाहवेषा ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्विधानातिशये विधातुः कन्यामये नेत्रशतैकलक्ष्ये ।  
-निपेतुरन्तःकरणैर्नरेन्द्रा देहैः स्थिताः केवलमासनेषु ॥ ११॥
+निपेतुरन्तःकरणैर्नरेन्द्रा देहैः स्थिताः केवलमासनेषु ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तां प्रत्यभिव्यक्तमनोरथानां? महीपतीनां प्रणयाग्रदूत्यः ।  
-प्रवालशोभा इव पादपानां? शृङ्गारचेष्टा विविधा बभूवुः ॥ १२॥
+प्रवालशोभा इव पादपानां? शृङ्गारचेष्टा विविधा बभूवुः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कश्चित्कराभ्यामुपगूढनालमालोलपत्राभिहतद्विरेफम् ।  
-रजोभिरन्तः परिवेषबन्धि लीलारविन्दं भ्रमयांचकार ॥ १३॥
+रजोभिरन्तः परिवेषबन्धि लीलारविन्दं भ्रमयांचकार ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विस्रस्तमंसादपरो विलासी रत्नानुविद्धाङ्गदकोटिलग्नम् ।  
-प्रालम्बमुत्कृष्य यथावकाशं निनाय साचीकृतचारुवक्त्रः ॥ १४॥
+प्रालम्बमुत्कृष्य यथावकाशं निनाय साचीकृतचारुवक्त्रः ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आकुञ्चिताग्राङ्गुलिना ततोऽन्यः किञ्चित्समावर्जितनेत्रशोभः ।  
-तिर्यग्विसंसर्पिनखप्रभेण पादेन हैमं विलिलेख पीठम् ॥ १५॥
+तिर्यग्विसंसर्पिनखप्रभेण पादेन हैमं विलिलेख पीठम् ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निवेश्य वामं भुजमासनार्धे तत्संनिवेशात् अधिकोन्नतांसः ।  
-कश्चिद्विवृत्तत्रिकभिन्नहारः सुहृत्समाभाषणतत्परोऽभूत् ॥ १६॥
+कश्चिद्विवृत्तत्रिकभिन्नहारः सुहृत्समाभाषणतत्परोऽभूत् ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विलासिनीविभ्रमदन्तपत्रमपाण्डुरं केतकबर्हमन्यः ।  
-प्रियानितम्बोचितसंनिवेशैर्विपाटयामास युवा नखाग्रैः ॥ १७॥
+प्रियानितम्बोचितसंनिवेशैर्विपाटयामास युवा नखाग्रैः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुशेशयाताम्रतलेन कश्चित्करेण रेखाध्वजलाञ्छनेन ।  
-रत्नाङ्गुलीयप्रभयानुविद्धानुदीरयामास सलीलमक्षान् ॥ १८॥
+रत्नाङ्गुलीयप्रभयानुविद्धानुदीरयामास सलीलमक्षान् ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कश्चिद्यथाभागमवस्थितेऽपि स्वसंनिवेशाद्व्यतिलङ्घिनीव ।  
-वज्रांशुगर्भाङ्गुलिरन्ध्रमेकं व्यापारयामास करं किरीटे ॥ १९॥
+वज्रांशुगर्भाङ्गुलिरन्ध्रमेकं व्यापारयामास करं किरीटे ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो नृपाणां श्रुतवृत्तवंशा पुंवत्प्रगल्भा प्रतिहाररक्षी ।  
-प्राक्संनिकर्षं मगधेश्वरस्य नीत्वा कुमारीमवदत्सुनन्दा ॥ २०॥
+प्राक्संनिकर्षं मगधेश्वरस्य नीत्वा कुमारीमवदत्सुनन्दा ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असौ शरण्यः शरणोन्मुखानामगाधसत्त्वो मगधप्रतिष्ठः ।  
-राजा प्रजारञ्जनलब्धवर्णः परंतपो नाम यथार्थनामा ॥ २१॥
+राजा प्रजारञ्जनलब्धवर्णः परंतपो नाम यथार्थनामा ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामं नृपाः सन्तु सहस्रशोऽन्ये राजन्वतीमाहुरनेन भूमिम् ।  
-नक्षत्रताराग्रहसंकुलापि ज्योतिष्मती चन्द्रमसैव रात्रिः ॥ २२॥
+नक्षत्रताराग्रहसंकुलापि ज्योतिष्मती चन्द्रमसैव रात्रिः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रियाप्रबन्धादयमध्वराणामजस्रमाहूतसहस्रनेत्रः ।  
-शच्याश्चिरं पाण्डुकपोललम्बान्मन्दारशून्यानलकांश्चकार ॥ २३॥
+शच्याश्चिरं पाण्डुकपोललम्बान्मन्दारशून्यानलकांश्चकार ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन चेदिच्छसि गृह्यमाणं पाणिं वरेण्येन कुरु प्रवेशे ।  
-प्रासादवातायनसंस्थितानां नेत्रोत्सवं पुष्पपुराङ्गनानाम् ॥ २४॥
+प्रासादवातायनसंस्थितानां नेत्रोत्सवं पुष्पपुराङ्गनानाम् ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवं तयोक्ते तमवेक्ष्य किंचिद्विस्रंसिदूर्वाङ्कमधूकमाला ।  
-ऋजुप्रणामक्रिययैव तन्वी प्रत्यादिदेशैनमभाषमाणा ॥ २५॥
+ऋजुप्रणामक्रिययैव तन्वी प्रत्यादिदेशैनमभाषमाणा ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तां सैव वेत्रग्रहणे नियुक्ता राजान्तरं राजसुतां निनाय ।  
-समीरणोत्थेव तरंगरेखा पद्मान्तरं मानसराजहंसीम् ॥ २६॥
+समीरणोत्थेव तरंगरेखा पद्मान्तरं मानसराजहंसीम् ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जगाद चैनामयमङ्गनाथः सुराङ्गनाप्रार्थितयौवनश्रीः ।  
-विनीतनागः किल सूत्रकारैरैन्द्रं पदं भूमिगतोऽपि भुङ्क्ते ॥ २७॥
+विनीतनागः किल सूत्रकारैरैन्द्रं पदं भूमिगतोऽपि भुङ्क्ते ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन पर्यासयताश्रुबिन्दून्मुक्ताफलस्थूलतमान्स्तनेषु ।  
-प्रत्यर्पिताः शत्रुविलासिनीनामुन्मुच्य सूत्रेण विनैव हाराः ॥ २८॥
+प्रत्यर्पिताः शत्रुविलासिनीनामुन्मुच्य सूत्रेण विनैव हाराः ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निसर्गभिन्नास्पदमेकसंस्थमस्मिन्द्वयं श्रीश्च सरस्वती च ।  
-कान्त्या गिरा सूनृतया च योग्या त्वमेव कल्याणि तयोस्तृतीया ॥ २९॥
+कान्त्या गिरा सूनृतया च योग्या त्वमेव कल्याणि तयोस्तृतीया ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथाङ्गराजदवतार्य चक्षुर्याहीति जन्यामवदत्कुमारी ।  
-नासौ न काम्यो न च वेद सम्यग्द्रष्टुं न सा भिन्नरुचिर्हि लोकः ॥ ३०॥
+नासौ न काम्यो न च वेद सम्यग्द्रष्टुं न सा भिन्नरुचिर्हि लोकः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga06-31-50.mp3"></div>
 
 ततः परं दुःप्रसहं द्विषद्भिर्नृपं नियुक्ता प्रतिहारभूमौ ।  
-निदर्शयामास विशेषदृश्यमिन्दुं नवोत्थानमिवेन्दुमत्यै ॥ ३१॥
+निदर्शयामास विशेषदृश्यमिन्दुं नवोत्थानमिवेन्दुमत्यै ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवन्तिनाथोऽयमुग्रबाहुर्विशालवक्षास्तनुवृत्तमध्यः ।  
-आरोप्य चक्रभ्रममुष्णतेजास्त्वष्ट्रेव यत्नोल्लिखितो विभाति ॥ ३२॥
+आरोप्य चक्रभ्रममुष्णतेजास्त्वष्ट्रेव यत्नोल्लिखितो विभाति ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अस्य प्रयाणेषु समग्रशक्तेरग्रेसरैर्वाजिभिरुत्थितानि ।  
-कुर्वन्ति सामन्तशिखामणीनां प्रभाप्ररोहास्तमयं रजांसि ॥ ३३॥
+कुर्वन्ति सामन्तशिखामणीनां प्रभाप्ररोहास्तमयं रजांसि ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असौ महाकालनिकेतनस्य वसन्नदूरे किल चन्द्रमौलेः ।  
-तमिस्रपक्षेऽपि सहप्रियाभिर्ज्योत्स्नावतो निर्विशति प्रदोषान् ॥ ३४॥
+तमिस्रपक्षेऽपि सहप्रियाभिर्ज्योत्स्नावतो निर्विशति प्रदोषान् ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन यूना सह पार्थिवेन रम्भोरु कच्चिन्मनसो रुचिस्ते ।  
-सिप्रातरंगानिलकम्पितासु विहर्तुमुद्यानपरंपरासु ॥ ३५॥
+सिप्रातरंगानिलकम्पितासु विहर्तुमुद्यानपरंपरासु ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्नभिद्योतितबन्धुपद्मे प्रतापसंशोषितशत्रुपङ्के ।  
-बबन्ध सा नोत्तमसौकुमार्या कुमुद्वती भानुमतीव भावम् ॥ ३६॥
+बबन्ध सा नोत्तमसौकुमार्या कुमुद्वती भानुमतीव भावम् ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तामग्रतस्तामरसान्तराभामनूपराजस्य गुणैरनूनाम् ।  
-विधाय सृष्टिं ललितां विधातुर्जगाद भूयः सुदतीं सुनन्दा ॥ ३७॥
+विधाय सृष्टिं ललितां विधातुर्जगाद भूयः सुदतीं सुनन्दा ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सङ्ग्रामनिर्विष्टसहस्रबाहुरष्टादशद्वीपनिखातयूपः ।  
-अनन्यसाधारणराजशब्दो बभूव योगी किल कार्तवीर्यः ॥ ३८॥
+अनन्यसाधारणराजशब्दो बभूव योगी किल कार्तवीर्यः ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अकार्यचिन्ता समकालमेव प्रादुर्भवंश्चापधरः पुरस्तात् ।  
-अन्तःशरीरेष्वपि यः प्रजानां प्रत्यादिदेशाविनयं विनेता ॥ ३९॥
+अन्तःशरीरेष्वपि यः प्रजानां प्रत्यादिदेशाविनयं विनेता ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ज्याबन्धनिष्पन्दभुजेन यस्य विनिःश्वसद्वक्त्रपरंपरेण ।  
-कारागृहे निर्जितवासवेन लङ्केश्वरेणोषितमा प्रसादात् ॥ ४०॥
+कारागृहे निर्जितवासवेन लङ्केश्वरेणोषितमा प्रसादात् ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यान्वये भूपतिरेष जातः प्रतीप इत्यागमवृद्धसेवी ।  
-येनः श्रियः संश्रयदोषरूढं स्वभावलोलेत्ययशं प्रमृष्टम् ॥ ४१॥
+येनः श्रियः संश्रयदोषरूढं स्वभावलोलेत्ययशं प्रमृष्टम् ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आयोधने कृष्णगतिं सहायमवाप्य यः क्षत्रियकालरात्रिम् ।  
-धारां शितां रामपरश्वधस्य संभावयत्युत्पलपत्रसाराम् ॥ ४२॥
+धारां शितां रामपरश्वधस्य संभावयत्युत्पलपत्रसाराम् ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अस्याङ्कलक्ष्मीर्भव दीर्घबाहोर्माहिष्मतीवप्रनितम्बकाञ्चीम् ।  
-प्रासादजालैर्जलवेणिरम्यां रेवां यदि प्रेक्षितुमस्ति कामः ॥ ४३॥
+प्रासादजालैर्जलवेणिरम्यां रेवां यदि प्रेक्षितुमस्ति कामः ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याः प्रकामं प्रियदर्शनोऽपि न स क्षितीशो रुचये बभूव ।  
-शरत्प्रमृष्टाम्बुधरोपरोधः शशीव पर्याप्तकलो नलिन्याः ॥ ४४॥
+शरत्प्रमृष्टाम्बुधरोपरोधः शशीव पर्याप्तकलो नलिन्याः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा शूरसेनाधिपतिं सुषेणमुद्दिश्य लोकान्तरगीतकीर्तिम् ।  
-आचारशुद्धोभयवंशदीपं शुद्धान्तरक्ष्या जगदे कुमारी ॥ ४५॥
+आचारशुद्धोभयवंशदीपं शुद्धान्तरक्ष्या जगदे कुमारी ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नीपान्वयः पार्थिव एष यज्वा गुणैर्यमाश्रित्य परस्परेण ।  
-सिद्धाश्रमं शान्तमिवेत्य सत्त्वैर्नैसर्गिकोऽप्युत्ससृजे विरोधः ॥ ४६॥
+सिद्धाश्रमं शान्तमिवेत्य सत्त्वैर्नैसर्गिकोऽप्युत्ससृजे विरोधः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यस्यात्मगेहे नयनाभिरामा कान्तिर्हिमांशोरिव संनिविष्टा ।  
-हर्म्याग्रसंरूढतृणाङ्कुरेषु तेजोऽविषह्यं रिपुमन्दिरेषु ॥ ४७॥
+हर्म्याग्रसंरूढतृणाङ्कुरेषु तेजोऽविषह्यं रिपुमन्दिरेषु ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यस्यावरोधस्तनचन्दनानां प्रक्षालनाद्वारिविहारकाले ।  
-कलिन्दकन्या मथुरां गतापि गङ्गोर्मिसंसक्तजलेव भाति ॥ ४८॥
+कलिन्दकन्या मथुरां गतापि गङ्गोर्मिसंसक्तजलेव भाति ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्रस्तेन तार्क्ष्यात्किल कालियेन मणिं विसृष्टं यमुनौकसा यः ।  
-वक्षःस्थलव्यापिरुचं दधानः सकौस्तुभं ह्रेपयतीव कृष्णम् ॥ ४९॥
+वक्षःस्थलव्यापिरुचं दधानः सकौस्तुभं ह्रेपयतीव कृष्णम् ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संभाव्य भर्तारममुं युवानं मृदुप्रवालोत्तरपुष्पशय्ये ।  
-वृन्दावने चैत्ररथादनूने निर्विश्यतां सुन्दरि यौवनश्रीः ॥ ५०॥
+वृन्दावने चैत्ररथादनूने निर्विश्यतां सुन्दरि यौवनश्रीः ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga06-51-60.mp3"></div>
 
 अध्यास्य चाम्भःपृषतोक्षितानि शैलेयगन्धीनि शिलातलानि ।  
-कलापिनां प्रावृषि पश्य नृत्यं कान्तासु गोवर्धनकन्दरासु ॥ ५१॥
+कलापिनां प्रावृषि पश्य नृत्यं कान्तासु गोवर्धनकन्दरासु ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नृपं तमावर्तमनोज्ञनाभिः सा व्यत्यगादन्यवधूर्भवित्री ।  
-महीधरं मार्गवशादुपेतं स्रोतोवहा सागरगामिनीव ॥ ५२॥
+महीधरं मार्गवशादुपेतं स्रोतोवहा सागरगामिनीव ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथाङ्गदालिष्टभुजं भुजिष्या हेमाङ्गदं नाम कलिङ्गनाथम् ।  
-आसेदुषीं सादितशत्रुपक्षं बालामबालेन्दुमुखीं बभाषे ॥ ५३॥
+आसेदुषीं सादितशत्रुपक्षं बालामबालेन्दुमुखीं बभाषे ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असौ महेन्द्रादिसमानसारः पतिर्महेन्द्रस्य महोदधेश्च ।  
-यस्य क्षरत्सैन्यगजच्छलेन यात्रासु यातीव पुरो महेन्द्रः ॥ ५४॥
+यस्य क्षरत्सैन्यगजच्छलेन यात्रासु यातीव पुरो महेन्द्रः ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ज्याघातरेखे सुभुजो भुजाभ्यां बिभर्ति यश्चापभृतां पुरोगः ।  
-रिपुश्रियां साञ्जनबाष्पसेके बन्दीकृतानामिव पद्धती द्वे ॥ ५५॥
+रिपुश्रियां साञ्जनबाष्पसेके बन्दीकृतानामिव पद्धती द्वे ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यमात्मनः सद्मनि संनिकृष्टो मन्द्रध्वनित्याजितयामतूर्यः ।  
-प्रासादवातायनदृश्यवीचिः प्रबोधयत्यर्णव एव सुप्तम् ॥ ५६॥
+प्रासादवातायनदृश्यवीचिः प्रबोधयत्यर्णव एव सुप्तम् ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन सार्धं विहराम्बुराशेस्तीरेषु तालीवनमर्मरेषु ।  
-द्वीपान्तरानीतलवङ्गपुष्पैरपाकृतस्वेदलवा मरुद्भिः ॥ ५७॥
+द्वीपान्तरानीतलवङ्गपुष्पैरपाकृतस्वेदलवा मरुद्भिः ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रलोभिताप्याकृतिलोभनीया विदर्भराजावरजा तयैवम् ।  
-तस्मादपावर्तत दूरकृष्टा नीत्येव लक्ष्मीः प्रतिकूलदैवात् ॥ ५८॥
+तस्मादपावर्तत दूरकृष्टा नीत्येव लक्ष्मीः प्रतिकूलदैवात् ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोरगाख्यस्य पुरस्य नाथं दौवारिकी देवसरूपमेत्य ।  
-इतश्चकोराक्षि विलोकयेति पूर्वानुशिष्टां निजगाद भोज्याम् ॥ ५९॥
+इतश्चकोराक्षि विलोकयेति पूर्वानुशिष्टां निजगाद भोज्याम् ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पाण्ड्योऽयमंसार्पितलम्बहारः कॢप्ताङ्गरागो हरिचन्दनेन ।  
-आभाति बालातपरक्तसानुः सनिर्झरोद्गार इवाद्रिराजः ॥ ६०॥
+आभाति बालातपरक्तसानुः सनिर्झरोद्गार इवाद्रिराजः ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga06-61-86.mp3"></div>
 
 विन्ध्यस्य संस्तम्भयिता महाद्रेर्निःशेषपीतोज्झितसिन्धुराजः ।  
-प्रीत्याश्वमेधावभृथार्द्रमूर्तेः सौस्नातिको यस्य भवत्यगस्त्यः ॥ ६१॥
+प्रीत्याश्वमेधावभृथार्द्रमूर्तेः सौस्नातिको यस्य भवत्यगस्त्यः ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अस्त्रं हरादाप्तवता दुरापं येनेन्द्रलोकावजयाय दृप्तः ।  
-पुरा जनस्थानविमर्दशङ्की संधाय लङ्काधिपतिः प्रतस्थे ॥ ६२॥
+पुरा जनस्थानविमर्दशङ्की संधाय लङ्काधिपतिः प्रतस्थे ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनेन पाणौ विधिवद्गृहीते महाकुलीनेन महीव गुर्वी ।  
-रत्नानुविद्धार्णवमेखलाया दिशः सपत्नी भव दक्षिणस्याः ॥ ६३॥
+रत्नानुविद्धार्णवमेखलाया दिशः सपत्नी भव दक्षिणस्याः ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताम्बूलवल्लीपरिणद्धपूगास्वेलालतालिङ्गितचन्दनासु ।  
-तमालपत्रास्तरणासु रन्तुं प्रसीद शश्वन्मलयस्थलीषु ॥ ६४॥
+तमालपत्रास्तरणासु रन्तुं प्रसीद शश्वन्मलयस्थलीषु ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इन्दीवरश्यामतनुर्नृपोऽसौ त्वं रोचनागौरशरीरयष्टिः ।  
-अन्योन्यशोभापरिवृद्धये वां योगस्तडित्तोयदयोरिवास्तु ॥ ६५॥
+अन्योन्यशोभापरिवृद्धये वां योगस्तडित्तोयदयोरिवास्तु ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वसुर्विदर्भाधिपतेस्तदीयो लेभेऽन्तरं चेतसि नोपदेशः ।  
-दिवाकरादर्शनबद्धकोशे नक्षत्रनाथांशुरिवारविन्दे ॥ ६६॥
+दिवाकरादर्शनबद्धकोशे नक्षत्रनाथांशुरिवारविन्दे ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संचारिणी दीपशिखेव रात्रौ यं यं व्यतीयाय पतिंवरा सा ।  
-नरेन्द्रमार्गाट्ट इव प्रपेदे विवर्णभावं स स भूमिपालः ॥ ६७॥
+नरेन्द्रमार्गाट्ट इव प्रपेदे विवर्णभावं स स भूमिपालः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यां रघोः सूनुरुपस्थितायां वृणीत मां नेति समाकुलोऽभूत् ।  
-वामेतरः संशयमस्य बाहुः केयूरबन्धोच्छ्वसितैर्नुनोद ॥ ६८॥
+वामेतरः संशयमस्य बाहुः केयूरबन्धोच्छ्वसितैर्नुनोद ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं प्राप्य सर्वावयवानवद्यं व्यावर्ततान्योपगमात्कुमारी ।  
-न हि प्रफुल्लं सहकारमेत्य वृक्षान्तरं काङ्क्षति षट्पदाली ॥ ६९॥
+न हि प्रफुल्लं सहकारमेत्य वृक्षान्तरं काङ्क्षति षट्पदाली ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्समावेशितचित्तवृत्तिमिन्दुप्रभामिन्दुमतीमवेक्ष्य ।  
-प्रचक्रमे वक्तुमनुक्रमज्ञा सविस्तरं वाक्यमिदं सुनन्दा ॥ ७०॥
+प्रचक्रमे वक्तुमनुक्रमज्ञा सविस्तरं वाक्यमिदं सुनन्दा ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इक्ष्वाकुवंश्यः ककुदं नृपाणां ककुत्स्थ इत्याहितलक्षणोऽभूत् ।  
-काकुत्स्थशब्दं यत उन्नतेच्छाः श्लाघ्यं दधत्युत्तरकोसलेन्द्राः ॥ ७१॥
+काकुत्स्थशब्दं यत उन्नतेच्छाः श्लाघ्यं दधत्युत्तरकोसलेन्द्राः ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 महेन्द्रमास्थाय महोक्षरूपं यः संयति प्राप्तपिनाकिलीलः ।  
-चकार बाणैरसुराङ्गनानां गण्डस्थलीः प्रोषितपत्रलेखाः ॥ ७२॥
+चकार बाणैरसुराङ्गनानां गण्डस्थलीः प्रोषितपत्रलेखाः ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऐरावतस्फालनविश्लथं यः संघट्टयन्नङ्गदमङ्गदेन ।  
-उपेयुषः स्वामपि मूर्तिमग्र्यामर्धासनं गोत्रभिदोऽधितष्ठौ ॥ ७३॥
+उपेयुषः स्वामपि मूर्तिमग्र्यामर्धासनं गोत्रभिदोऽधितष्ठौ ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जातः कुले तस्य किलोरुकीर्तिः कुलप्रदीपो नृपतिर्दिलीपः ।  
-अतिष्ठदेकोनशतक्रतुत्वे शक्राभ्यसूयाविनिवृत्तये यः ॥ ७४॥
+अतिष्ठदेकोनशतक्रतुत्वे शक्राभ्यसूयाविनिवृत्तये यः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यस्मिन्महीं शासति वाणिनीनां निद्रां विहारार्धपथे गतानाम् ।  
-वातोऽपि नास्रंसयदंशुकानि को लम्बयेदाहरणाय हस्तम् ॥ ७५॥
+वातोऽपि नास्रंसयदंशुकानि को लम्बयेदाहरणाय हस्तम् ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुत्रो रघुस्तस्य पदं प्रशास्ति महाक्रतोर्विश्वजितः प्रयोक्ता ।  
-चतुर्दिगावर्जितसंभृतां यो मृत्पात्रशेषामकरोद्विभूतिम् ॥ ७६॥
+चतुर्दिगावर्जितसंभृतां यो मृत्पात्रशेषामकरोद्विभूतिम् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आरूढमद्रीनुदधीन्वितीर्णं भुजंगमानां वसतिं प्रविष्टम् ।  
-ऊर्ध्वं गतं यस्य न चानुबन्धि यशः परिच्छेत्तुमियत्तयालम् ॥ ७७॥
+ऊर्ध्वं गतं यस्य न चानुबन्धि यशः परिच्छेत्तुमियत्तयालम् ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असौ कुमारस्तमजोऽनुजातस्त्रिविष्टपस्येव पतिं जयन्तः ।  
-गुर्वीं धुरं यो जगतस्य पित्रा धुर्येण दम्यः सदृशं बिभर्ति ॥ ७८॥
+गुर्वीं धुरं यो जगतस्य पित्रा धुर्येण दम्यः सदृशं बिभर्ति ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुलेन कान्त्या वयसा नवेन गुणैश्च तैस्तैर्विनयप्रधानैः ।  
-त्वमात्मनस्तुल्यममुं वृणीष्व रत्नं समागच्छतु काञ्चनेन ॥ ७९॥
+त्वमात्मनस्तुल्यममुं वृणीष्व रत्नं समागच्छतु काञ्चनेन ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः सुनन्दावचनावसाने लज्जां तनूकृत्य नरेन्द्रकन्या ।  
-दृष्ट्या प्रसादामलया कुमारं प्रत्यग्रहीत्संवरणस्रजेव ॥ ८०॥
+दृष्ट्या प्रसादामलया कुमारं प्रत्यग्रहीत्संवरणस्रजेव ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा यूनि तस्मिन्नभिलाषबन्धं शशाक शालीनतया न वक्तुम् ।  
-रोमाञ्चलक्ष्येण स गात्रयष्टिं भित्त्वा निराक्रामदरालकेश्याः ॥ ८१॥
+रोमाञ्चलक्ष्येण स गात्रयष्टिं भित्त्वा निराक्रामदरालकेश्याः ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथागतायां परिहासपूर्वं सख्यां सखी वेत्रभृदाबभाषे ।  
-आर्ये व्रजामोऽन्यत इत्यथैनां वधूरसूयाकुटिलं ददर्श ॥ ८२॥
+आर्ये व्रजामोऽन्यत इत्यथैनां वधूरसूयाकुटिलं ददर्श ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा चूर्णगौरं रघुनन्दनस्य धात्रीकराभ्यां करभोपमोरूः ।  
-आसञ्जयामास यथाप्रदेशं कण्ठे गुणं मूर्तमिवानुरागम् ॥ ८३॥
+आसञ्जयामास यथाप्रदेशं कण्ठे गुणं मूर्तमिवानुरागम् ॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तया स्रजा मङ्गलपुष्पमय्या विशालवक्षःस्थललम्बया सः ।  
-अमंस्त कण्ठार्पितबाहुपाशां विदर्भराजावरजां वरेण्यः ॥ ८४॥
+अमंस्त कण्ठार्पितबाहुपाशां विदर्भराजावरजां वरेण्यः ॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शशिनमुपगतेयं कौमुदी मेघमुक्तं
 जलनिधिमनुरूपं जह्नुकन्यावतीर्णा ।  
 इति समगुणयोगप्रीतयस्तत्र पौराः
-श्रवणकटु नृपाणामेकवाक्यं विवव्रुः ॥ ८५॥
+श्रवणकटु नृपाणामेकवाक्यं विवव्रुः ॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रमुदितवरपक्षमेकतस्तत्क्षितिपतिमण्डलमन्यतो वितानम् ।  
-उषसि सर इव प्रफुल्लपद्मं कुमुदवनप्रतिपन्ननिद्रमासीत् ॥ ८६॥
+उषसि सर इव प्रफुल्लपद्मं कुमुदवनप्रतिपन्ननिद्रमासीत् ॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/06/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 स्वयंवरवर्णनो नाम षष्ठः सर्गः ॥
