--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/07.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/07.md
@@ -1,238 +1,380 @@
----
-title: ०७ अजपाणिग्रहम्    
-unicode_script: devanagari
----
++++
+title = "०७ अजपाणिग्रहम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-01-20.mp3"></div>
 
 अथोपयन्त्रा सदृशेण युक्तां स्कन्देन साक्षादिव देवसेनाम् ।  
-स्वसारमादाय विदर्भनाथः पुरप्रवेशाभिमुखो बभूव ॥ १॥
+स्वसारमादाय विदर्भनाथः पुरप्रवेशाभिमुखो बभूव ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सेनानिवेशान्पृथिवीक्षितोऽपि जग्मुर्विभातग्रहमन्दभासः ।  
-भोज्यां प्रति व्यर्थमनोरथत्वाद्रूपेषु वेशेषु च साभ्यसूया ॥ २॥
+भोज्यां प्रति व्यर्थमनोरथत्वाद्रूपेषु वेशेषु च साभ्यसूया ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सांनिध्ययोगात्किल तत्र शच्याः स्वयंवरक्षोभकृतामभावः ।  
-काकुत्स्थमुद्दिश्य समत्सरोऽपि शशाम तेन क्षितिपाललोकः ॥ ३॥
+काकुत्स्थमुद्दिश्य समत्सरोऽपि शशाम तेन क्षितिपाललोकः ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तावत्प्रकीर्णाभिनवोपचारमिन्द्रायुधद्योतिततोरणाङ्कम् ।  
-वरः सवध्वा सह राजमार्गं प्राप ध्वजच्छायनिवारितोष्णम् ॥ ४॥
+वरः सवध्वा सह राजमार्गं प्राप ध्वजच्छायनिवारितोष्णम् ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततस्तदालोकनतत्पराणां सौधेषु चामीकरजालवत्सु ।  
-बभूवुरित्थं पुरसुन्दरीणां त्यक्तान्यकार्याणि विचेष्टितानि ॥ ५॥
+बभूवुरित्थं पुरसुन्दरीणां त्यक्तान्यकार्याणि विचेष्टितानि ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आलोकमार्गं सहसा व्रजन्त्या कयाचिदुद्वेष्टनवान्तमाल्यः ।  
-बद्धुं न संभावित एव तावत्करेण रुद्धोऽपि च केशपाशः ॥ ६॥
+बद्धुं न संभावित एव तावत्करेण रुद्धोऽपि च केशपाशः ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रसाधिकालम्बितमग्रपादमाक्षिप्य काचिद्द्रवरागमेव ।  
-उत्सृष्टलीलागतिरागवाक्षादलक्तकाङ्कां पदवीं ततान ॥ ७॥
+उत्सृष्टलीलागतिरागवाक्षादलक्तकाङ्कां पदवीं ततान ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विलोचनं दक्षिणमञ्जनेन संभाव्य तद्वञ्चितवामनेत्रा।  
-तथैव वातायनसंनिकर्षं ययौ शलाकामपरा वहन्ती ॥ ८॥
+तथैव वातायनसंनिकर्षं ययौ शलाकामपरा वहन्ती ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जालान्तरप्रेषितदृष्टिरन्या प्रस्थानभिन्नां न बबन्ध नीवीम् ।  
-नाभिप्रविष्टाभरणप्रभेन हस्तेन तस्थाववलम्ब्य वासः ॥ ९॥
+नाभिप्रविष्टाभरणप्रभेन हस्तेन तस्थाववलम्ब्य वासः ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अर्धाञ्चिता सत्वरमुत्थितायाः पदे पदे दुर्निमिते गलन्ती ।  
-कस्याश्चिदासीद्रशना तदानीमङ्गुष्ठमूलार्पितसूत्रशेषा ॥ १०॥
+कस्याश्चिदासीद्रशना तदानीमङ्गुष्ठमूलार्पितसूत्रशेषा ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तासां मुखैरासवगन्धगर्भैर्व्याप्तान्तराः सान्द्रकुतूहलानाम् ।  
-विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्रपत्राभरणा इवासन् ॥ ११॥
+विलोलनेत्रभ्रमरैर्गवाक्षाः सहस्रपत्राभरणा इवासन् ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ता राघवं दृष्टिभिरापिबन्त्यो नार्यो न जग्मुर्विषयान्तराणि ।  
-तथा हि शेषेन्द्रियवृत्तिरासां सर्वात्मना चक्षुरिव प्रविष्टा ॥ १२॥
+तथा हि शेषेन्द्रियवृत्तिरासां सर्वात्मना चक्षुरिव प्रविष्टा ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्थाने वृता भूपतिभिः परोक्षैः स्वयंवरं साधुममंस्त भोज्या ।  
-पद्मेव नारायणमन्यथासौ लभेत कान्तं कथमात्मतुल्यम् ॥ १३॥
+पद्मेव नारायणमन्यथासौ लभेत कान्तं कथमात्मतुल्यम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्परेण स्पृहणीयशोभं न चेदिदं द्वन्द्वमयोजयिष्यत् ।  
-अस्मिन्द्वये रूपविधानयत्नः पत्युः प्रजानां वितथोऽभविष्यत् ॥ १४॥
+अस्मिन्द्वये रूपविधानयत्नः पत्युः प्रजानां वितथोऽभविष्यत् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रतिस्मरौ नूनमिमावभूतां राज्ञां सहस्रेषु तथा हि बाला ।  
-गतेयमात्मप्रतिरूपमेव मनो हि जन्मान्तरसंगतिज्ञम् ॥ १५॥
+गतेयमात्मप्रतिरूपमेव मनो हि जन्मान्तरसंगतिज्ञम् ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्युद्गताः पौरवधूमुखेभ्यः शृण्वन्कथाः श्रोत्रसुखाः कुमारः ।  
-उद्भासितं मङ्गलसंविधाभिः संबन्धिनः सद्म समाससाद ॥ १६॥
+उद्भासितं मङ्गलसंविधाभिः संबन्धिनः सद्म समाससाद ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततोऽवतीर्याशु करेणुकायाः स कामरूपेश्वरदत्तहस्तः ।  
-वैदर्भनिर्दिष्टमथो विवेश नारीमनांसीव चतुष्कमन्तः ॥ १७॥
+वैदर्भनिर्दिष्टमथो विवेश नारीमनांसीव चतुष्कमन्तः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 महार्हसिंहासनसंस्थितोऽसौ सरत्नमर्घ्यं मधुपर्कमिश्रम् ।  
-भोजोपनीतं च दुकूलयुग्मं जग्राह सार्धं वनिताकटाक्षैः ॥ १८॥
+भोजोपनीतं च दुकूलयुग्मं जग्राह सार्धं वनिताकटाक्षैः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दुकूलवासाः स वधूसमीपं निन्ये विनीतैरवरोधरक्षैः ।  
-वेलासकाशं स्फुटफेनराशिर्नवैरुदन्वानिव चन्द्रपादैः ॥ १९॥
+वेलासकाशं स्फुटफेनराशिर्नवैरुदन्वानिव चन्द्रपादैः ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्रार्चितो भोजपतेः पुरोधा हुत्वाग्निमाज्यादिभिरग्निकल्पः ।  
-तमेव चाधाय विवाहसाक्ष्ये वधूवरौ संगमयांचकार ॥ २०॥
+तमेव चाधाय विवाहसाक्ष्ये वधूवरौ संगमयांचकार ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-21-30.mp3"></div>
 
 हस्तेन हस्तं परिगृह्य वध्वाः स राजसूनुः सुतरां चकासे ।  
-अनन्तराशोकलताप्रवालं प्राप्येव चूतः प्रतिपल्लवेन ॥ २१॥
+अनन्तराशोकलताप्रवालं प्राप्येव चूतः प्रतिपल्लवेन ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आसीद्वरः कण्टकितप्रकोष्ठः स्विन्नाङ्गुलिः संववृते कुमारी ।  
-तस्मिन्द्वये तत्क्षणमात्मवृत्तिः समं विभक्तेव मनोभवेन ॥ २२॥
+तस्मिन्द्वये तत्क्षणमात्मवृत्तिः समं विभक्तेव मनोभवेन ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तयोरपाङ्गप्रतिसारितानि क्रियासमापत्तिनिवर्तितानि ।  
-ह्रीयन्त्रणामानशिरे मनोज्ञामन्योन्यलोलानि विलोचनानि ॥ २३॥
+ह्रीयन्त्रणामानशिरे मनोज्ञामन्योन्यलोलानि विलोचनानि ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रदक्षिणप्रक्रमणात्कृशानोरुदर्चिषस्तन्मिथुनं चकासे ।  
-मेरोरुपान्तेष्विव वर्तमानमन्योन्यसंसक्तमहस्त्रियामम् ॥ २४॥
+मेरोरुपान्तेष्विव वर्तमानमन्योन्यसंसक्तमहस्त्रियामम् ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नितम्बगुर्वी गुरुणा प्रयुक्ता वधूर्विधातृप्रतिमेन तेन ।  
-चकार सा मत्तचकोरनेत्रा लज्जावती लाजविसर्गमग्नौ ॥ २५॥
+चकार सा मत्तचकोरनेत्रा लज्जावती लाजविसर्गमग्नौ ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हविःशमीपल्लवलाजगन्धी पुण्यः कृशानोरुदियाय धूमः ।  
-कपोलसंसर्पिशिखः स तस्या मुहूर्तकर्णोत्पलतां प्रपेदे ॥ २६॥
+कपोलसंसर्पिशिखः स तस्या मुहूर्तकर्णोत्पलतां प्रपेदे ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदञ्जनक्लेदसमाकुलाक्षं प्रम्लानबीजाङ्कुरकर्णपूरम् ।  
-वधूमुखं पाटलगन्धलेखमाचारधूमग्रहणाद्बभूव ॥ २७॥
+वधूमुखं पाटलगन्धलेखमाचारधूमग्रहणाद्बभूव ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ स्नातकैर्बन्धुमता च राज्ञा पुरंध्रिभिश्च क्रमशः प्रयुक्तम् ।  
-कन्याकुमारौ कनकासनस्थावार्द्राक्षतारोपणमन्वभूताम् ॥ २८॥
+कन्याकुमारौ कनकासनस्थावार्द्राक्षतारोपणमन्वभूताम् ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति स्वसुर्भोजकुलप्रदीपः संपाद्य पाणिग्रहणं स राजा ।  
-महीपतीनां पृथगर्हणार्थं समादिदेशाधिकृतानधिश्रीः ॥ २९॥
+महीपतीनां पृथगर्हणार्थं समादिदेशाधिकृतानधिश्रीः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लिङ्गैर्मुदः संवृतविक्रियास्ते ह्रदाः प्रसन्ना इव गूढनक्राः ।  
-वैदर्भमामन्त्र्य ययुस्तदीयां प्रत्यर्प्य पूजामुपदाछलेन ॥ ३०॥
+वैदर्भमामन्त्र्य ययुस्तदीयां प्रत्यर्प्य पूजामुपदाछलेन ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-31-35.mp3"></div>
 
 स राजलोकः कृतपूर्वसंविदारम्भसिद्धौ समयोपलभ्यम् ।  
-आदास्यमानः प्रमदामिषं तदावृत्य पन्थानमजस्य तस्थौ ॥ ३१॥
+आदास्यमानः प्रमदामिषं तदावृत्य पन्थानमजस्य तस्थौ ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भर्तापि तावत्क्रथकैशिकानामनुष्ठितानन्तरजाविवाहः ।  
-सत्त्वानुरूपाहरणीकृतश्रीः प्रास्थापयद्राघवमन्वगाच्च ॥ ३२॥
+सत्त्वानुरूपाहरणीकृतश्रीः प्रास्थापयद्राघवमन्वगाच्च ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तिस्रस्त्रिलोकप्रथितेन सार्धमजेन मार्गे वसतीरुषित्वा ।  
-तस्मादपावर्तत कुण्डिनेशः पर्वात्यये सोम इवोष्णरश्मेः ॥ ३३॥
+तस्मादपावर्तत कुण्डिनेशः पर्वात्यये सोम इवोष्णरश्मेः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रमन्यवः प्रागपि कोसलेन्द्रे प्रत्येकमात्तस्वतया बभूवुः ।  
-अतो नृपश्चक्षमिरे समेताः स्त्रीरत्नलाभं न तदाजत्मस्य ॥ ३४॥
+अतो नृपश्चक्षमिरे समेताः स्त्रीरत्नलाभं न तदाजत्मस्य ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमुद्वहन्तं पथि भोजकन्यां रुरोध राजन्यगण स दृप्तः ।  
-बलिप्रदिष्टां श्रियमाददानं त्रैविक्रमं पादमिवेन्द्रशत्रुः ॥ ३५॥
+बलिप्रदिष्टां श्रियमाददानं त्रैविक्रमं पादमिवेन्द्रशत्रुः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-36-45.mp3"></div>
 
 तस्याः स रक्षार्थमनल्पयोधमादिश्य पित्र्यं सचिवं कुमारः ।  
-प्रत्यग्रहीत्पार्थिववाहिनीं तां भागीरथीं शोण इवोत्तरङ्गः ॥ ३६॥
+प्रत्यग्रहीत्पार्थिववाहिनीं तां भागीरथीं शोण इवोत्तरङ्गः ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पत्तिः पदातिं रथिनं रथेशस्तुरंगसादी तुरगाधिरूढम् ।  
-यन्ता गजस्याभ्यपतद्गजस्थं तुल्यप्रतिद्वन्द्वि बभूव युद्धम् ॥ ३७॥
+यन्ता गजस्याभ्यपतद्गजस्थं तुल्यप्रतिद्वन्द्वि बभूव युद्धम् ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नदत्सु तूर्येष्वविभाव्यवाचो नोदीरयन्ति स्म कुलोपदेशान् ।  
-बाणाक्षरैरेव परस्परस्य नामोर्जितं चापभृतः शशंसुः ॥ ३८॥
+बाणाक्षरैरेव परस्परस्य नामोर्जितं चापभृतः शशंसुः ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उत्थापितः संयति रेणुरश्वैः सान्द्रीकृतः स्यन्दनवंशचक्रैः ।  
-विस्तारितः कुञ्जरकर्णतालैर्नेत्रक्रमेणोपरुरोध सूर्यम् ॥ ३९॥
+विस्तारितः कुञ्जरकर्णतालैर्नेत्रक्रमेणोपरुरोध सूर्यम् ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मत्स्यध्वजा वायुवशाद्विदीर्णैर्मुखैः प्रवृद्धध्वजिनीरजांसि ।  
-बभुः पिबन्तः परमार्थमत्स्याः पर्याविलानीव नवोदकानि ॥ ४०॥
+बभुः पिबन्तः परमार्थमत्स्याः पर्याविलानीव नवोदकानि ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रथो रथाङ्गध्वनिना विजज्ञे विलोलघण्टाक्वणितेन नागः ।  
-स्वभर्तुनामग्रहणाद्बभूव सान्द्रे रजस्यात्मपरावबोधः ॥ ४१॥
+स्वभर्तुनामग्रहणाद्बभूव सान्द्रे रजस्यात्मपरावबोधः ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आवृण्वतो लोचनमार्गमाजौ रजोन्धकारस्य विजृम्भितस्य ।  
-शस्त्रक्षताश्वद्वीपवीरजन्मा बालारुणोऽभूद्रुधिरप्रवाहः ॥ ४२॥
+शस्त्रक्षताश्वद्वीपवीरजन्मा बालारुणोऽभूद्रुधिरप्रवाहः ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स च्छिन्नमूलः क्षतजेन रेणुस्तस्योपरिष्टात्पवनापधूतः ।  
-अङ्गारशेषस्य हुताशनस्य पूर्वोत्थितो धूम इवाबभासे ॥ ४३॥
+अङ्गारशेषस्य हुताशनस्य पूर्वोत्थितो धूम इवाबभासे ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रहारमूर्च्छापगमे रथस्था यन्तॄनुपालभ्य निवर्तिताश्वान् ।  
-यैः सादिता लक्षितपूर्वकेतूंस्तानेव सामर्षतया निजघ्नुः ॥ ४४॥
+यैः सादिता लक्षितपूर्वकेतूंस्तानेव सामर्षतया निजघ्नुः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अप्यर्धमार्गे परबाणलूना धनुर्भृतां हस्तवतां पृषत्काः ।  
-संप्रापुरेवात्मजवानुवृत्त्या पूर्वार्धभागैः फलिभिः शरव्यम् ॥ ४५॥
+संप्रापुरेवात्मजवानुवृत्त्या पूर्वार्धभागैः फलिभिः शरव्यम् ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-46-50.mp3"></div>
 
 आधोरणानां गजसंनिपाते शिरांसि चक्रैर्निशितैः क्षुराग्रैः ।  
-हतान्यपि श्येननखाग्रकोटिव्यासक्तकेशानि चिरेण पेतुः ॥ ४६॥
+हतान्यपि श्येननखाग्रकोटिव्यासक्तकेशानि चिरेण पेतुः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पूर्वं प्रहर्ता न जघान भूयः प्रतिप्रहाराक्षममश्वसादी ।  
-तुरंगमस्कन्धनिषण्णदेहं प्रत्याश्वसन्तं रिपुमाचकाङ्क्ष ॥ ४७॥
+तुरंगमस्कन्धनिषण्णदेहं प्रत्याश्वसन्तं रिपुमाचकाङ्क्ष ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तनुत्यजां वर्मभृतां विकोशैबृहत्सु दन्तेष्वसिभिः पतद्भिः ।  
-उद्यन्तमग्निं शमयांबभूवुर्गजा विविग्नाः करशीकरेण ॥ ४८॥
+उद्यन्तमग्निं शमयांबभूवुर्गजा विविग्नाः करशीकरेण ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शिलीमुखोत्कृत्तशिरःफलाढ्या च्युतैः शिरस्त्रैश्चषकोत्तरेव ।  
-रणक्षितिः शोणितमद्यकुल्या रराज मृत्योरिव पानभूमिः ॥ ४९॥
+रणक्षितिः शोणितमद्यकुल्या रराज मृत्योरिव पानभूमिः ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपान्तयोर्निष्कुषितं विहंगैराक्षिप्य तेभ्यः पिशितप्रियापि ।  
-केयूरकोटिक्षततालुदेशा शिवा भुजच्छेदमपाचकार ॥ ५०॥
+केयूरकोटिक्षततालुदेशा शिवा भुजच्छेदमपाचकार ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-51-55.mp3"></div>
 
 कश्चिद्विषत्खड्गहृतोत्तमाङ्गः सद्यो विमानप्रभुतामुपेत्य ।  
-वामाङ्गसंसक्तसुराङ्गनः स्वं नृत्यत्कबन्धं समरे ददर्श ॥ ५१॥
+वामाङ्गसंसक्तसुराङ्गनः स्वं नृत्यत्कबन्धं समरे ददर्श ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अन्योन्यसूतोन्मथनादभूतां तावेव सूतौ रथिनौ च कौचित् ।  
-व्यश्वौ गदाव्यायतसंप्रहारौ भग्नायुधौ बाहुविमर्दनिष्ठौ ॥ ५२॥
+व्यश्वौ गदाव्यायतसंप्रहारौ भग्नायुधौ बाहुविमर्दनिष्ठौ ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्परेण क्षतयोः प्रहर्त्रोरुत्क्रान्तवाय्वोः समकालमेव ।  
-अमर्त्यभावेऽपि कयोश्चिदासीदेकाप्सरःप्रार्थितयोर्विवादः ॥ ५३॥
+अमर्त्यभावेऽपि कयोश्चिदासीदेकाप्सरःप्रार्थितयोर्विवादः ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्यूहावुभौ तावितरेतरस्माद्भङ्गं जयं चापतुरव्यवस्थम् ।  
-पश्चात्पुरोमारुतयोः प्रवृद्धौ पर्यायवृत्येव महार्णवोर्मी ॥ ५४॥
+पश्चात्पुरोमारुतयोः प्रवृद्धौ पर्यायवृत्येव महार्णवोर्मी ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परेण भग्नेऽपि बले महौजा ययावजः प्रत्यरिसैन्यमेव ।  
-धूमो निवर्त्येत समीरणेन यतस्तु कक्षस्तत एव वह्निः ॥ ५५॥
+धूमो निवर्त्येत समीरणेन यतस्तु कक्षस्तत एव वह्निः ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga07-56-71.mp3"></div>
 
 रथी निषङ्गी कवची धनुष्मान्दृप्तः स राजन्यकमेकवीरः ।  
-निवारयामास महावराहः कल्पक्षयोद्वृत्तमिवार्णवाम्भः ॥ ५६॥
+निवारयामास महावराहः कल्पक्षयोद्वृत्तमिवार्णवाम्भः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स दक्षिणं तूणमुखेन वामं व्यापारयन्हस्तमलक्ष्यताजौ ।  
-आकर्णकृष्टा सकृदस्य योद्धुर्मौर्वीव बाणान्सुषुवे रिपुघ्नान् ॥ ५७॥
+आकर्णकृष्टा सकृदस्य योद्धुर्मौर्वीव बाणान्सुषुवे रिपुघ्नान् ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स रोषदष्टाधिकलोहितोष्ठैर्व्यक्तोर्ध्वरेखा भृकुटीर्वहद्भिः ।  
-तस्तार गां भल्लनिकृत्तकण्ठैर्हूंकारगर्भैर्द्विषतां शिरोभिः ॥ ५८॥
+तस्तार गां भल्लनिकृत्तकण्ठैर्हूंकारगर्भैर्द्विषतां शिरोभिः ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सर्वैर्बलाङ्गैर्द्विरदप्रधानैः सर्वायुधैः कङ्कटभेदिभिश्च ।  
-सर्वप्रयत्नेन च भूमिपालास्तस्मिन्प्रजह्रुर्युधि सर्व एव ॥ ५९॥
+सर्वप्रयत्नेन च भूमिपालास्तस्मिन्प्रजह्रुर्युधि सर्व एव ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽस्त्रव्रजैश्छन्नरथः परेषां ध्वजाग्रमात्रेण बभूव लक्ष्यः ।  
-नीहारमग्नो दिनपूर्वभागः किंचित्प्रकाशेन विवस्वतेव ॥ ६०॥
+नीहारमग्नो दिनपूर्वभागः किंचित्प्रकाशेन विवस्वतेव ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रियंवदात्प्राप्तमसौ कुमारः प्रायुङ्क्त राजस्वधिराजसूनुः ।  
-गान्धर्वमस्त्रं कुसुमास्त्रकान्तः प्रस्वापनं स्वप्ननिवृत्तलौल्यः ॥ ६१॥
+गान्धर्वमस्त्रं कुसुमास्त्रकान्तः प्रस्वापनं स्वप्ननिवृत्तलौल्यः ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो धनुष्कर्षणमूढहस्तमेकांसपर्यस्तशिरस्त्रजालम् ।  
-तस्थौ ध्वजस्तम्भनिषण्णदेहं निद्राविधेयं नरदेवसैन्यम् ॥ ६२॥
+तस्थौ ध्वजस्तम्भनिषण्णदेहं निद्राविधेयं नरदेवसैन्यम् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः प्रियोपात्तरसेऽधरोष्ठे निवेश्य दध्मौ जलजं कुमारः ।  
-तेन स्वहस्तार्जितमेकवीरः पिबन्यशो मूर्तमिवाबभासे ॥ ६३॥
+तेन स्वहस्तार्जितमेकवीरः पिबन्यशो मूर्तमिवाबभासे ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शङ्खस्वनाभिज्ञतया निवृत्तास्तं सन्नशत्रुं ददृशुः स्वयोधाः ।  
-निमीलितानामिव पङ्कजानां मध्ये स्फुरन्तं प्रतिमाशशाङ्कम् ॥ ६४॥
+निमीलितानामिव पङ्कजानां मध्ये स्फुरन्तं प्रतिमाशशाङ्कम् ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सशोणितैस्तेन शिलीमुखाग्रैर्निक्षेपिताः केतुषु पार्थिवानाम् ।  
-यशो हृतं संप्रति राघवेण न जीवितं वः कृपयेति वर्णाः ॥ ६५॥
+यशो हृतं संप्रति राघवेण न जीवितं वः कृपयेति वर्णाः ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स चापकोटीनिहितैकबाहुः शिरस्त्रनिष्कर्षणभिन्नमौलिः ।  
-ललाटबद्धश्रमवारिबिन्दुर्भीतां प्रियामेत्य वचो बभाषे ॥ ६६॥
+ललाटबद्धश्रमवारिबिन्दुर्भीतां प्रियामेत्य वचो बभाषे ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इतः परानर्भकहार्यशस्त्रान्वैदर्भि पश्यानुमता मयासि ।  
-एवंविधेनाहवचेष्टितेन त्वं प्रार्थ्यसे हस्तगता ममैभिः ॥ ६७॥
+एवंविधेनाहवचेष्टितेन त्वं प्रार्थ्यसे हस्तगता ममैभिः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याः प्रतिद्वन्द्विभवाद्विषादात्सद्यो विमुक्तं मुखमाबभासे ।  
-निःश्वासबाष्पापगमात्प्रपन्नः प्रसादमात्मीयमिवात्मदर्शः ॥ ६८॥
+निःश्वासबाष्पापगमात्प्रपन्नः प्रसादमात्मीयमिवात्मदर्शः ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हृष्टापि सा ह्रीविजिता न साक्षाद्वाग्भिः सखीनां प्रियमभ्यनन्दत् ।  
-स्थली नवाम्भःपृषताभिवृष्टा मयूरकेकाभिरिवाभ्रवृन्दम् ॥ ६९॥
+स्थली नवाम्भःपृषताभिवृष्टा मयूरकेकाभिरिवाभ्रवृन्दम् ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति शिरसि स वामं पादमाधाय राज्ञा-
 मुदवहदनवद्यां तामवद्यादपेतः ।  
 रथतुरगरजोभिस्तस्य रूक्षालकाग्रा
-समरविजयलक्ष्मीः सैव मूर्ता बभूव ॥ ७०॥
+समरविजयलक्ष्मीः सैव मूर्ता बभूव ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रथमपरिगतार्थस्तं रघुः संनिवृत्तं
 विजयिनमभिनन्द्य श्लाघ्यजायासमेतम् ।  
 तदुपहितकुटुम्बः शान्तिमार्गोत्सुकोऽभू-
-न्न हि सति कुलधुर्ये सूर्यवंश्या गृहाय ॥ ७१॥
+न्न हि सति कुलधुर्ये सूर्यवंश्या गृहाय ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदास-
 कृतावजस्वयंवराभिगमनो नाम सप्तमः सर्गः ॥
