--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/08.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/08.md
@@ -1,308 +1,498 @@
----
-title: ०८ अजविलापः   
-unicode_script: devanagari
----
++++
+title = "०८ अजविलापः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga08-01-15.mp3"></div>
 
 अथ तस्य विवाहकौतुकं ललितं बिभ्रत एव पार्थिवः ।  
-वसुधामपि हस्तगामिनीमकरोदिन्दुमतीमिवापराम् ॥ १॥
+वसुधामपि हस्तगामिनीमकरोदिन्दुमतीमिवापराम् ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दुरितैरपि कर्तुमात्मसात्प्रयतन्ते नृपसूनवो हि यत् ।  
-तदुपस्थितमग्रहीदजः पितुराज्ञेति न भोगतृष्णया ॥ २॥
+तदुपस्थितमग्रहीदजः पितुराज्ञेति न भोगतृष्णया ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनुभूय वसिष्ठसंभृतैः सलिलैस्तेन सहाभिषेचनम् ।  
-विशदोच्छ्वसितेन मेदिनी  कथयामास कृतार्थतामिव ॥ ३॥
+विशदोच्छ्वसितेन मेदिनी  कथयामास कृतार्थतामिव ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स बभूव दुरासदः परैर्गुरुणाऽथर्वविदा कृतक्रियः ।  
-पवनाग्निसमागमो ह्ययं सहितं ब्रह्म यदस्त्रतेजसा ॥ ४॥
+पवनाग्निसमागमो ह्ययं सहितं ब्रह्म यदस्त्रतेजसा ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुमेव निवृत्तयौवनं तममन्यन्त नवेश्वरं प्रजाः ।  
-स हि तस्य न केवलां श्रियं प्रतिपेदे सकलान्गुणानपि ॥ ५॥
+स हि तस्य न केवलां श्रियं प्रतिपेदे सकलान्गुणानपि ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अधिकं शुशुभे शुभंयुना द्वितयेन द्वयमेव संगतम् ।  
-पदमृद्धमजेन पैतृकं विनयेनास्य नवं च यौवनम् ॥ ६॥
+पदमृद्धमजेन पैतृकं विनयेनास्य नवं च यौवनम् ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सदयं बुभुजे महाभुजः सहसोद्वेगमियं व्रजेदिति ।  
-अचिरोपनतां स मेदिनीं नवपाणिग्रहणां वधूमिव ॥ ७॥
+अचिरोपनतां स मेदिनीं नवपाणिग्रहणां वधूमिव ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अहमेव मतो महीपतेरिति सर्वः प्रकृतिष्वचिन्तयत् ।  
-उदधेरिव निम्नगाशतेष्वभवन्नास्य विमानना क्वचित् ॥ ८॥
+उदधेरिव निम्नगाशतेष्वभवन्नास्य विमानना क्वचित् ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न खरो न च भूयसा मृदुः पवमानः पृथिवीरुहानिव ।  
-स पुरस्कृतमध्यमक्रमो नमयामास नृपाननुद्धरन् ॥ ९॥
+स पुरस्कृतमध्यमक्रमो नमयामास नृपाननुद्धरन् ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ वीक्ष्य रघुः प्रतिष्ठितं प्रकृतिष्वात्मजमात्मवत्तया ।  
-विषयेषु विनाशधर्मसु त्रिदिवस्थेष्वपि निःस्पृहोऽभवत् ॥ १०॥
+विषयेषु विनाशधर्मसु त्रिदिवस्थेष्वपि निःस्पृहोऽभवत् ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुणवत्सुतरोपितश्रियः परिणामे हि दिलीपवंशजाः ।  
-पदवीं तरुवल्कवाससां प्रयताः संयमिनां प्रपेदिरे ॥ ११॥
+पदवीं तरुवल्कवाससां प्रयताः संयमिनां प्रपेदिरे ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमरण्यसमाश्रयोन्मुखं शिरसा वेष्टनशोभिना सुतः ।  
-पितरं प्रणिपत्य पादयोरपरित्यागमयाचतात्मनः ॥ १२॥
+पितरं प्रणिपत्य पादयोरपरित्यागमयाचतात्मनः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रघुरश्रुमुखस्य तस्य तत्कृतवानीप्सितमात्मजप्रियः ।  
-न तु सर्प इव त्वचं पुनः प्रतिपेदे व्यपवर्जितां श्रियम् ॥ १३॥
+न तु सर्प इव त्वचं पुनः प्रतिपेदे व्यपवर्जितां श्रियम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स किलाश्रममन्त्यमाश्रितो निवसन्नावसथे पुराद्बहिः ।  
-समुपास्यत पुत्रभोग्यया स्नुषयेवाविकृतेन्द्रियः श्रिया ॥ १४॥
+समुपास्यत पुत्रभोग्यया स्नुषयेवाविकृतेन्द्रियः श्रिया ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रशमस्थितपूर्वपार्थिवं कुलमभ्यद्यतनूतनेश्वरम् ।  
-नभसा निभृतेन्दुना तुलामुदितार्केण समारुरोह तत् ॥ १५॥
+नभसा निभृतेन्दुना तुलामुदितार्केण समारुरोह तत् ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga08-16-36.mp3"></div>
 
 यतिपार्थिवलिङ्गधारिणौ ददृशाते रघुराघवौ जनैः ।  
-अपवर्गमहोदयार्थयोर्भुवमंशाविव धर्मयोर्गतौ ॥ १६॥
+अपवर्गमहोदयार्थयोर्भुवमंशाविव धर्मयोर्गतौ ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अजिताधिगमाय मन्त्रिभिर्युयुजे नीतिविशारदैरजः ।  
-अनुपायिपदोपप्राप्तये रघुराप्तैः समियाय योगिभिः ॥ १७॥
+अनुपायिपदोपप्राप्तये रघुराप्तैः समियाय योगिभिः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नृपतिः प्रकृतीरवेक्षितुं व्यवहारासनमाददे युवा ।  
-परिचेतुमुपांशु धारणां कुशपूतं प्रवयास्तु विष्टरम् ॥ १८॥
+परिचेतुमुपांशु धारणां कुशपूतं प्रवयास्तु विष्टरम् ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनयत्प्रभुशक्तिसंपदा वशमेको नृपतीननन्तरान् ।  
-अपरः प्रणिधानयोग्यया मरुतः पञ्च शरीरगोचरान् ॥ १९॥
+अपरः प्रणिधानयोग्यया मरुतः पञ्च शरीरगोचरान् ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अकरोदचिरेश्वरः क्षितौ द्विषदारम्भफलानि भस्मसात् ।  
-इतरो दहने स्वकर्मणां ववृते ज्ञानमयेन वह्निना ॥ २०॥
+इतरो दहने स्वकर्मणां ववृते ज्ञानमयेन वह्निना ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पणबन्धमुखान्गुणानजः षडुपायुङ्क्त समीक्ष्य तत्फलम् ।  
-रघुरप्यजयत्गुणत्रयं प्रकृतिस्थं समलोष्टकाञ्चनः ॥ २१॥
+रघुरप्यजयत्गुणत्रयं प्रकृतिस्थं समलोष्टकाञ्चनः ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न नवः प्रभुरा फलोदयात्स्थिरकर्मा विरराम कर्मणः ।  
-न च योगविधेर्नवेतरः स्थिरधीरा परमात्मदर्शनात् ॥ २२॥
+न च योगविधेर्नवेतरः स्थिरधीरा परमात्मदर्शनात् ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति शत्रुषु चेन्द्रियेषु च प्रतिषिद्धप्रसरेषु जाग्रतौ ।  
-प्रसितावुदयापवर्गयोरुभयीं सिद्धिमुभाववापतुः ॥ २३॥
+प्रसितावुदयापवर्गयोरुभयीं सिद्धिमुभाववापतुः ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ काश्चिदजव्यपेक्षया गमयित्वा समदर्शनः समाः ।  
-तमसः परमापदव्ययं पुरुषं योगसमाधिना रघुः ॥ २४॥
+तमसः परमापदव्ययं पुरुषं योगसमाधिना रघुः ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुतदेहविसर्जनः पितुश्चिरमश्रूणि विमुच्य राघवः ।  
-विदधे विधिमस्य नैष्ठिकं यतिभिः सार्धमनग्निरग्निचित् ॥ २५॥
+विदधे विधिमस्य नैष्ठिकं यतिभिः सार्धमनग्निरग्निचित् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अकरोत्स तदौर्ध्वदैहिकं पितृभक्त्या पितृकार्यकल्पवित् ।  
-न हि तेन पथा तनुत्यजस्तनयावर्जितपिण्डकाङ्क्षिणः ॥ २६॥
+न हि तेन पथा तनुत्यजस्तनयावर्जितपिण्डकाङ्क्षिणः ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स परार्ध्यगतेरशोच्यतां पितुरुद्दिश्य सदर्थवेदिभिः ।  
-शमिताधिरधिज्यकार्मुकः कृतवानप्रतिशासनं जगत् ॥ २७॥
+शमिताधिरधिज्यकार्मुकः कृतवानप्रतिशासनं जगत् ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्षितिरिन्दुमती च भामिनी पतिमासाद्य तमग्र्यपौरुषम् ।  
-प्रथमा बहुरत्नसूरभूदपरा वीरमजीजनत्सुतम् ॥ २८॥
+प्रथमा बहुरत्नसूरभूदपरा वीरमजीजनत्सुतम् ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दशरश्मिशतोपमद्युतिं यशसा दिक्षु दशस्वपि श्रुतम् ।  
-दशपूर्वरथं यमाख्यया दशकण्ठारिगुरुं विदुर्बुधाः ॥ २९॥
+दशपूर्वरथं यमाख्यया दशकण्ठारिगुरुं विदुर्बुधाः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ऋषिदेवगणस्वधाभुजां श्रुतयागप्रसवैः स पार्थिवः ।  
-अनृणत्वमुपेयिवान्बभौ परिधेर्मुक्त इवोष्णदीधितिः ॥ ३०॥
+अनृणत्वमुपेयिवान्बभौ परिधेर्मुक्त इवोष्णदीधितिः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बलमार्तभयोपशान्तये विदुषां सत्कृतये बहु श्रुतम् ।  
-वसु तस्य विभोर्न केवलं गुणवत्तापि परप्रयोजना ॥ ३१॥
+वसु तस्य विभोर्न केवलं गुणवत्तापि परप्रयोजना ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स कदाचिदवेक्षितप्रजः सह देव्या विजहार सुप्रजाः ।  
-नगरोपवने शचीसखो मरुतां पालयितेव नन्दने ॥ ३२॥
+नगरोपवने शचीसखो मरुतां पालयितेव नन्दने ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ रोधसि दक्षिणादधेः श्रितगोकर्णनिकेतमीश्वरम् ।  
-उपवीणयितुं ययौ रवेरुदयावृत्तिपथेन नारदः ॥ ३३॥
+उपवीणयितुं ययौ रवेरुदयावृत्तिपथेन नारदः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुमैर्ग्रथितामपार्थिवैः स्रजमातोद्यशिरोनिवेशिताम् ।  
-अहरत्किल तस्य वेगवानधिवासस्पृहयेव मारुतः ॥ ३४॥
+अहरत्किल तस्य वेगवानधिवासस्पृहयेव मारुतः ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भ्रमरैः कुसुमानुसारिभिः परिकीर्णा परिवादिनी मुनेः ।  
-ददृशे पवनापलेपजं सृजती बाष्पमिवाञ्जनाविलम् ॥ ३५॥
+ददृशे पवनापलेपजं सृजती बाष्पमिवाञ्जनाविलम् ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अभिभूय विभूतिमार्तवीं मधुगन्धातिशयेन वीरुधाम् ।  
-नृपतेरमरस्रगाप सा दयितोरुस्तनकोटिसुस्थितीम् ॥ ३६॥
+नृपतेरमरस्रगाप सा दयितोरुस्तनकोटिसुस्थितीम् ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga08-37-50.mp3"></div>
 
 क्षणमात्रसखीं सुजातयोः स्तनयोस्तामवलोक्य विह्वला ।  
-निमिमील नरोत्तमप्रिया हृतचन्द्रा तमसेव कौमुदी ॥ ३७॥
+निमिमील नरोत्तमप्रिया हृतचन्द्रा तमसेव कौमुदी ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वपुषा करणोज्झितेन सा निपतन्ती पतिमप्यपातयत् ।  
-ननु तैलनिषेकबिन्दुना सह दीपार्चिरुपैति मेदिनीम् ॥ ३८॥
+ननु तैलनिषेकबिन्दुना सह दीपार्चिरुपैति मेदिनीम् ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उभयोरपि पार्श्ववर्तिनां तुमुलेनार्तरवेण वेजिताः ।  
-विहगाः कमलाकरालयाः समदुःखा इव तत्र चुक्रुशुः ॥ ३९॥
+विहगाः कमलाकरालयाः समदुःखा इव तत्र चुक्रुशुः ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नृपतेर्व्यजनादिभिस्तमो नुनुदे सा तु तथैव संस्थिता ।  
-प्रतिकारविधानमायुषः सति शेषे हि फलाय कल्पते ॥ ४०॥
+प्रतिकारविधानमायुषः सति शेषे हि फलाय कल्पते ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रतियोजयितव्यवल्लकीसमवस्थामथ सत्त्वविप्लवात् ।  
-स निनाय नितान्तवत्सलः परिगृह्योचितमङ्कमङ्गनाम् ॥ ४१॥
+स निनाय नितान्तवत्सलः परिगृह्योचितमङ्कमङ्गनाम् ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पतिरङ्कनिषण्णया तया करणापायविभिन्नवर्णया ।  
-समलक्ष्यत बिभ्रदाविलां मृगलेखामुषसीव चन्द्रमाः ॥ ४२॥
+समलक्ष्यत बिभ्रदाविलां मृगलेखामुषसीव चन्द्रमाः ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विललाप स बाष्पगद्गदं सहजामप्यपहाय धीरताम् ।  
-अभितप्तमयोऽपि मार्दवं भजते कैव कथा शरीरिषु ॥ ४३॥
+अभितप्तमयोऽपि मार्दवं भजते कैव कथा शरीरिषु ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुमान्यपि गात्रसंगमात्प्रभवन्त्यायुरपोहितुं यदि ।  
-न भविष्यति हन्त साधनं किमिवान्यत्प्रहरिष्यतो विधेः ॥ ४४॥
+न भविष्यति हन्त साधनं किमिवान्यत्प्रहरिष्यतो विधेः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथवा मृदु वस्तु हिंसितुं मृदुनैवारभते प्रजान्तकः ।  
-हिमसेकविपत्तिरत्र मे नलिनी पूर्वनिदर्शनं मता ॥ ४५॥
+हिमसेकविपत्तिरत्र मे नलिनी पूर्वनिदर्शनं मता ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्रगियं यदि जीवितापहा हृदये किं निहिता न हन्ति माम् ।  
-विषमप्यमृतं क्वचिद्भवेदमृतं वा विषमीश्वरेच्छया ॥ ४६॥
+विषमप्यमृतं क्वचिद्भवेदमृतं वा विषमीश्वरेच्छया ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथवा मम भाग्यविप्लवादशनिः कल्पित एव वेधसा ।  
-यदनेन तरुर्न पातितः क्षपिता तद्विटपाश्रिता लता ॥ ४७॥
+यदनेन तरुर्न पातितः क्षपिता तद्विटपाश्रिता लता ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृतवत्यसि नावधीरणामपराद्धेऽपि यदा चिरं मयि ।  
-कथमेकपदे निरागसं जनमाभाष्यमिमं न मन्यसे ॥ ४८॥
+कथमेकपदे निरागसं जनमाभाष्यमिमं न मन्यसे ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ध्रुवमस्मि शठः शुचिस्मिते विदितः कैतववत्सलस्तव ।  
-परलोकमसंनिवृत्तये यदनापृच्छ्य गतासि मामितः ॥ ४९॥
+परलोकमसंनिवृत्तये यदनापृच्छ्य गतासि मामितः ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दयितां यदि तावदन्वगाद्विनिवृत्तं किमिदं तया विना ।  
-सहतां हतजीवितं मम प्रबलामात्मकृतेन वेदनाम् ॥ ५०॥
+सहतां हतजीवितं मम प्रबलामात्मकृतेन वेदनाम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga08-51-70.mp3"></div>
 
 सुरतश्रमसंभृतो मुखे ध्रियते स्वेदलवोद्गमोऽपि ते ।  
-अथ चास्तमिता त्वमात्मना धिगिमां देहभृतामसारताम् ॥ ५१॥
+अथ चास्तमिता त्वमात्मना धिगिमां देहभृतामसारताम् ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मनसापि न विप्रियं मया कृतपूर्वं तव किं जहासि माम् ।  
-ननु शब्दपतिः क्षितेरहं त्वयि मे भावनिबन्धना रतिः ॥ ५२॥
+ननु शब्दपतिः क्षितेरहं त्वयि मे भावनिबन्धना रतिः ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुमोत्खचितान्वलीभृतश्चलयन्भृङ्गरुचस्तवालकान् ।  
-करभोरु करोति मारुतस्त्वदुपावर्तनशङ्कि मे मनः ॥ ५३॥
+करभोरु करोति मारुतस्त्वदुपावर्तनशङ्कि मे मनः ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदपोहितुमर्हसि प्रिये प्रतिबोधेन विषादमाशु मे ।  
-ज्वलितेन गुहागतं तमस्तुहिनाद्रेरिव नक्तमोषधिः ॥ ५४॥
+ज्वलितेन गुहागतं तमस्तुहिनाद्रेरिव नक्तमोषधिः ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इदमुच्छ्वसितालकं मुखं तव  विश्रान्तकथं दुनोति माम् ।  
-निशि सुप्तमिवैकपङ्कजं विरताभ्यन्तरषट्पदस्वनम् ॥ ५५॥
+निशि सुप्तमिवैकपङ्कजं विरताभ्यन्तरषट्पदस्वनम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शशिनं पुनरेति शर्वरी दयिता द्वन्द्वचरं पतत्रिणम् ।  
-इति तौ विरहान्तरक्षमौ कथमत्यन्तगता न मां दहेः ॥ ५६॥
+इति तौ विरहान्तरक्षमौ कथमत्यन्तगता न मां दहेः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नवपल्लवसंस्तरेऽपि ते मृदु दूयेत यदङ्गमर्पितम् ।  
-तदिदं विषहिष्यते कथं वद वामोरु चिताधिरोहणम् ॥ ५७॥
+तदिदं विषहिष्यते कथं वद वामोरु चिताधिरोहणम् ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इयमप्रतिबोधशायिनीं रशना त्वां प्रथमा रहःसखी ।  
-गतिविभ्रमसादनीरवा न शुचा नानु मृतेव लक्ष्यते ॥ ५८॥
+गतिविभ्रमसादनीरवा न शुचा नानु मृतेव लक्ष्यते ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कलमन्यभृतासु भासितं कलहंसीषु मदालसं गतम् ।  
-पृषतीषु विलोलमीक्षितं पवनाधूतलतासु विभ्रमाः ॥ ५९॥
+पृषतीषु विलोलमीक्षितं पवनाधूतलतासु विभ्रमाः ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्रिदिवोत्सुकयाप्यवेक्ष्य मां निहिताः सत्यममी गुणास्त्वया ।  
-विरहे तव मे गुरुव्यथं हृदयं न त्ववलम्बितुं क्षमाः ॥ ६०॥
+विरहे तव मे गुरुव्यथं हृदयं न त्ववलम्बितुं क्षमाः ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मिथुनं परिकल्पितं त्वया सहकारः फलिनी च नन्विमौ ।  
-अविधाय विवाहसत्क्रियामनयोर्गम्यत इत्यसांप्रतम् ॥ ६१॥
+अविधाय विवाहसत्क्रियामनयोर्गम्यत इत्यसांप्रतम् ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुमं कृतदोहदस्त्वया यदशोकोऽयमुदीरयिष्यति ।  
-अलकाभरणं कथं नु तत्तव नेष्यामि निवापमाल्यताम् ॥ ६२॥
+अलकाभरणं कथं नु तत्तव नेष्यामि निवापमाल्यताम् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्मरतेव सशब्दनूपुरं चरणानुग्रहमन्यदुर्लभम् ।  
-अमुना कुसुमाश्रुवर्षिणा त्वमशोकेन सुगात्रि शोच्यसे ॥ ६३॥
+अमुना कुसुमाश्रुवर्षिणा त्वमशोकेन सुगात्रि शोच्यसे ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तव निःश्वसितानुकारिभिर्बकुलैरर्धचितां समं मया ।  
-असमाप्य विलासमेखलां किमिदं किन्नरकण्ठि सुप्यते ॥ ६४॥
+असमाप्य विलासमेखलां किमिदं किन्नरकण्ठि सुप्यते ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 समदुःखसुखः सखीजनः प्रतिपच्चन्द्रनिभोऽयमात्मजः ।  
-अहमेकरसस्तथापि ते व्यवसायः प्रतिपत्तिनिष्ठुरः ॥ ६५॥
+अहमेकरसस्तथापि ते व्यवसायः प्रतिपत्तिनिष्ठुरः ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 धृतिरस्तमिता रतिश्च्युता विरतं गेयमृतुर्निरुत्सवः ।  
-गतमाभरणप्रयोजनं परिशून्यं शयनीयमद्य मे ॥ ६६॥
+गतमाभरणप्रयोजनं परिशून्यं शयनीयमद्य मे ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गृहिणी सचिवः सखी मिथः प्रियशिष्या ललिते कलाविधौ ।  
-करुणाविमुखेन मृत्युना हरता त्वां वद किं न मे हृतम् ॥ ६७॥
+करुणाविमुखेन मृत्युना हरता त्वां वद किं न मे हृतम् ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मदिराक्षि मदाननार्पितं मधु पीत्वा रसवत्कथं नु मे ।  
-अनुपास्यसि बाष्पदूषितं परलोकोपनतं जलाञ्जलिम् ॥ ६८॥
+अनुपास्यसि बाष्पदूषितं परलोकोपनतं जलाञ्जलिम् ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विभवेऽपि सति त्वया विना सुखमेतावदजस्य गण्यताम् ।  
-अहृतस्य विलोभनान्तरैर्मम सर्वे विषयास्त्वदाश्रयाः ॥ ६९॥
+अहृतस्य विलोभनान्तरैर्मम सर्वे विषयास्त्वदाश्रयाः ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विलपन्निति कोसलाधिपः करुणार्थग्रथितं प्रियां प्रति ।  
-अकरोत्पृथिवीरुहानपि स्रुतशाखारसबाष्पदूषितान् ॥ ७०॥
+अकरोत्पृथिवीरुहानपि स्रुतशाखारसबाष्पदूषितान् ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga08-71-95.mp3"></div>
 
 अथ तस्य कथंचिदङ्कतः स्वजनस्तामपनीय सुन्दरीम् ।  
-विससर्ज तदन्त्यमण्डनामनलायागुरुचन्दनैधसे ॥ ७१॥
+विससर्ज तदन्त्यमण्डनामनलायागुरुचन्दनैधसे ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रमदामनु संस्थितः शुचा नृपतिः सन्निति वाच्यदर्शनात् ।  
-न चकार शरीरमग्निसात्सह देव्या न तु जीविताशया ॥ ७२॥
+न चकार शरीरमग्निसात्सह देव्या न तु जीविताशया ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ तेन दशाहतः परे गुणशेषामपदिश्य भामिनीम् ।  
-विदुषा विधयो महर्द्धयः पुर एवोपवने समापिताः ॥ ७३॥
+विदुषा विधयो महर्द्धयः पुर एवोपवने समापिताः ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स विवेश पुरीं तया विना क्षणदापायशशाङ्कदर्शनः ।  
-परिवाहमिवावलोकयन्स्वशुचः पौरवधूमुखाश्रुषु ॥ ७४॥
+परिवाहमिवावलोकयन्स्वशुचः पौरवधूमुखाश्रुषु ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ तं सवनाय दीक्षितः प्रणिधानाद्गुरुराश्रमस्थितः ।  
-अभिषङ्गजडं विजज्ञिवानिति शिष्येण किलान्वबोधयत् ॥ ७५॥
+अभिषङ्गजडं विजज्ञिवानिति शिष्येण किलान्वबोधयत् ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असमाप्तविधिर्यतो मुनिस्तव विद्वानपि तापकारणम् ।  
-न भवन्तमुपस्थितः स्वयं प्रकृतौ स्थापयितुं पथश्च्युतम् ॥ ७६॥
+न भवन्तमुपस्थितः स्वयं प्रकृतौ स्थापयितुं पथश्च्युतम् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मयि तस्य सुवृत्त वर्तते लघुसंदेशपदा सरस्वती ।  
-श्रुणु विश्रुतसत्त्वसार तां हृदि चैनामपधातुमर्हसि ॥ ७७॥
+श्रुणु विश्रुतसत्त्वसार तां हृदि चैनामपधातुमर्हसि ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पुरुषस्य पदेष्वजन्मनः समतीतं च भवच्च भावि च ।  
-स हि निष्प्रतिघेन चक्षुषा त्रितयं ज्ञानमयेन पश्यति ॥ ७८॥
+स हि निष्प्रतिघेन चक्षुषा त्रितयं ज्ञानमयेन पश्यति ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चरतः किल दुश्चरं तपस्तृणबिन्दोः परिशङ्कितः पुरा ।  
-प्रजिघाय समाधिभेदिनीं हरिरस्मै हरिणीं सुराङ्गनाम् ॥ ७९॥
+प्रजिघाय समाधिभेदिनीं हरिरस्मै हरिणीं सुराङ्गनाम् ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तपःप्रतिबन्धमन्युना प्रमुखाविष्कृतचारुविभ्रमम् ।  
-अशपद्भव मानुषीति तां शमवेलाप्रलयोर्मिणा भुवि ॥ ८०॥
+अशपद्भव मानुषीति तां शमवेलाप्रलयोर्मिणा भुवि ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भगवन्परवानयं जनः प्रतिकूलाचरितं क्षमस्व मे ।  
-इति चोपनतां क्षितिस्पृशं कृतवाना सुरपुष्पदर्शनात् ॥ ८१॥
+इति चोपनतां क्षितिस्पृशं कृतवाना सुरपुष्पदर्शनात् ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रथकैशिकवंशसंभवा तव भूत्वा महिषी चिराय सा ।  
-उपलब्धवती दिवश्च्युतं विवशा शापनिवृत्तिकारणम् ॥ ८२॥
+उपलब्धवती दिवश्च्युतं विवशा शापनिवृत्तिकारणम् ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदलं तदपायचिन्तया विपदुत्पत्तिमतामुपस्थिता ।  
-वसुधेयमवेक्ष्यतां त्वया वसुमत्या हि नृपाः कलत्रिणः ॥ ८३॥
+वसुधेयमवेक्ष्यतां त्वया वसुमत्या हि नृपाः कलत्रिणः ॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उदये मदवाच्यमुज्झता श्रुतमाविष्कृतमात्मवत्त्वया ।  
-मनसस्तदुपस्थिते ज्वरे पुनरक्लीबतया प्रकाश्यताम् ॥ ८४॥
+मनसस्तदुपस्थिते ज्वरे पुनरक्लीबतया प्रकाश्यताम् ॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रुदता कुत एव सा पुनर्भवता नानुमृतापि लभ्यते ।  
-परलोकजुषां स्वकर्मभिर्गतयो भिन्नपथा हि देहिनाम् ॥ ८५॥
+परलोकजुषां स्वकर्मभिर्गतयो भिन्नपथा हि देहिनाम् ॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपशोकमनाः कुटुम्बिनीमनुगृह्णीष्व निवापदत्तिभिः ।  
-स्वजनाश्रु किलातिसंततं दहति प्रेतमिति प्रचक्षते ॥ ८६॥
+स्वजनाश्रु किलातिसंततं दहति प्रेतमिति प्रचक्षते ॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मरणं प्रकृतिः शरीरिणां विकृतिर्जीवितमुच्यते बुधैः ।  
-क्षणमप्यवतिष्ठते श्वसन्यदि जन्तुर्ननु लाभवानसौ ॥ ८७॥
+क्षणमप्यवतिष्ठते श्वसन्यदि जन्तुर्ननु लाभवानसौ ॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवगच्छति मूढचेतनः प्रियनाशं हृदि शल्यमर्पितम् ।  
-स्थिरधीस्तु तदेव मन्यते कुशलद्वारतया समुद्धृतम् ॥ ८८॥
+स्थिरधीस्तु तदेव मन्यते कुशलद्वारतया समुद्धृतम् ॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वशरीरशरीरिणावपि श्रुतसंयोगविपर्ययौ यदा ।  
-विरहः किमिवानुतापयेद्वद बाह्यैर्विषयैर्विपश्चितम् ॥ ८९॥
+विरहः किमिवानुतापयेद्वद बाह्यैर्विषयैर्विपश्चितम् ॥ ८९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/89.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न पृथग्जनवच्छुचो वशं वशिनामुत्तम गन्तुमर्हसि ।  
-द्रुमसानुमतां किमन्तरं यदि वायौ द्वितयेऽपि ते चलाः ॥ ९०॥
+द्रुमसानुमतां किमन्तरं यदि वायौ द्वितयेऽपि ते चलाः ॥ ९०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/90.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तथेति विनेतुरुदारमतेः प्रतिगॄह्य वचो विससर्ज मुनिम् ।  
-तदलब्धपदं हृदि शोकघने प्रतियातमिवान्तिकमस्य गुरोः ॥ ९१॥
+तदलब्धपदं हृदि शोकघने प्रतियातमिवान्तिकमस्य गुरोः ॥ ९१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/91.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेनाष्टौ परिगमिताः समाः कथंचिद्बालत्वादवितथसूनृतेन सूनोः ।  
-सादृश्यप्रतिकृतिदर्शनैः प्रियायाः स्वप्नेषु क्षणिकसमागमोत्सवैश्च ॥ ९२॥
+सादृश्यप्रतिकृतिदर्शनैः प्रियायाः स्वप्नेषु क्षणिकसमागमोत्सवैश्च ॥ ९२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/92.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य प्रसह्य हृदयं किल शोकशङ्कुः
 प्लक्षप्ररोह इव सौधतलं बिभेद ।  
 प्राणान्तहेतुमपि तं भिषजामसाध्यं
-लाभं प्रियानुगमने त्वरया स मेने ॥ ९३॥
+लाभं प्रियानुगमने त्वरया स मेने ॥ ९३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/93.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सम्यग्विनीतमथ वर्महरं कुमार-
 मादिश्य रक्षणविधौ विधिवत्प्रजानाम् ।  
 रोगोपसृष्टतनुदुर्वसतिं मुमुक्षुः
-प्रायोपवेशनमतिर्नृपतिर्बभूव ॥ ९४॥
+प्रायोपवेशनमतिर्नृपतिर्बभूव ॥ ९४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/94.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तीर्थे तोयव्यतिकरभवे जह्नुकन्यासरय्वो-
 र्देहत्यागादमरगणनालेख्यमासाद्य सद्यः ।  
 पूर्वाकाराधिकतररुचा संगतः कान्तयासौ
-लीलागारेष्वरमत पुनर्नन्दनाभ्यन्तरेषु ॥ ९५॥
+लीलागारेष्वरमत पुनर्नन्दनाभ्यन्तरेषु ॥ ९५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/95.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदास-
 कृतावजविलापो नामाष्टमः सर्गः ॥
