--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/09.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/09.md
@@ -1,293 +1,457 @@
----
-title: ०९ मृगयावर्णनम्
-unicode_script: devanagari
----
++++
+title = "०९ मृगयावर्णनम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga09-01-20.mp3"></div>
 
 पितुरनन्तरमुत्तरकोसलान्समधिगम्य समाधिजितेन्द्रियः ।  
-दशरथः प्रशशास महारथो यमवतामवतां च धुरि स्थितः ॥ १॥
+दशरथः प्रशशास महारथो यमवतामवतां च धुरि स्थितः ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अधिगतं विधिवद्यदपालयत्प्रकृतिमण्डलमात्मकुलोचितम् ।  
-अभवदस्य ततो गुणवत्तरं सनगरं नगरन्ध्रकरौजसः ॥ २॥
+अभवदस्य ततो गुणवत्तरं सनगरं नगरन्ध्रकरौजसः ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उभयमेव वदन्ति मनीषिणः समयवर्षितया कृतकर्मणाम्।  
-बलनिषूदनमर्थपतिं च तं श्रमनुदं मनुदण्डधरान्वयम् ॥ ३॥
+बलनिषूदनमर्थपतिं च तं श्रमनुदं मनुदण्डधरान्वयम् ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जनपदे न गदः पदमादधावभिभवः कुत एव सपत्नजः ।  
-क्षितिरभूत्फलवत्यजनन्दने शमरतेऽमरतेजसि पार्थिवे ॥ ४॥
+क्षितिरभूत्फलवत्यजनन्दने शमरतेऽमरतेजसि पार्थिवे ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दशदिगन्तजिता रघुणा यथा श्रियमपुष्यदजेन ततः परम् ।  
-तमधिगम्य तथैव पुनर्बभौ न न महीनमहीनपराक्रमम् ॥ ५॥
+तमधिगम्य तथैव पुनर्बभौ न न महीनमहीनपराक्रमम् ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 समतया वसुवृष्टिविसर्जनैनियमनादसतां च नराधिपः ।  
-अनुययौ यमपुण्यजनेश्वरौ सवरुणावरुणाग्रसरं रुचा ॥ ६॥
+अनुययौ यमपुण्यजनेश्वरौ सवरुणावरुणाग्रसरं रुचा ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न मृगयाभिरतिर्न दुरोदरं न च शशिप्रतिमाभरणं मधु ।  
-तमुदयाय न वा नवयौवना प्रियतमा यतमानमपाहरत् ॥ ७॥
+तमुदयाय न वा नवयौवना प्रियतमा यतमानमपाहरत् ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न कृपणा प्रभवत्यपि वासवे न वितथा परिहासकथास्वपि ।  
-न च सपत्नजनेष्वपि तेन वागपरुषा परुषाक्षरमीरिता ॥ ८॥
+न च सपत्नजनेष्वपि तेन वागपरुषा परुषाक्षरमीरिता ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उअदयमस्तमयं च रघूद्वहादुभयमानशिरे वसुधाधिपाः ।  
-स हि निदेशमलङ्घयतामभूत्सुहृदयोहृदयः प्रतिगर्जताम् ॥ ९॥
+स हि निदेशमलङ्घयतामभूत्सुहृदयोहृदयः प्रतिगर्जताम् ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अजयदेकरथेन स मेदिनीमुदधिनेमिमधिज्यशरासनः ।  
-जयमघोषयदस्य तु केवलं गजवती जवतीव्रहया चमूः ॥ १०॥
+जयमघोषयदस्य तु केवलं गजवती जवतीव्रहया चमूः ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवनिमेकरथेन वरूथिना जितवतः किल तस्य धनुर्भृतः ।  
-विजयदुन्दुभितां ययुरर्णवा घनरवा नरवाहनसंपदः ॥ ११॥
+विजयदुन्दुभितां ययुरर्णवा घनरवा नरवाहनसंपदः ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शमितपक्षबलः शतकोटिना शिखरिणां कुलिशेन पुरंदरः ।  
-स शरवृष्टिमुचा धनुषा द्विषां स्वनवता नवतामरसाननः ॥ १२॥
+स शरवृष्टिमुचा धनुषा द्विषां स्वनवता नवतामरसाननः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चरणयोर्नखरागसमृद्धिभिर्मुकुटरत्नमरीचिभिरस्पृशन् ।  
-नृपतयः शतशो मरुतो यथा शतमखं तमखण्डितपौरुषम् ॥ १३॥
+नृपतयः शतशो मरुतो यथा शतमखं तमखण्डितपौरुषम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निववृते स महार्णवरोधसः सचिवकारितबालसुताञ्जलीन् ।  
-समनुकम्प्य सपत्नपरिग्रहाननलकानलकानवमां पुरीम् ॥ १४॥
+समनुकम्प्य सपत्नपरिग्रहाननलकानलकानवमां पुरीम् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपगतोऽपि च मण्डलनाभितामनुदितान्यसितातपवारणः ।  
-श्रियमवेक्ष्य स रन्ध्रचलामभूदनलसोऽनलसोमसमद्युतिः ॥ १५॥
+श्रियमवेक्ष्य स रन्ध्रचलामभूदनलसोऽनलसोमसमद्युतिः ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमपहाय ककुत्स्थकुलोद्भवं पुरुषमात्मभवं च पतिव्रता ।  
-नृपतिमन्यमसेवत देवता सकमला कमलाघवमर्थिषु ॥ १६॥
+नृपतिमन्यमसेवत देवता सकमला कमलाघवमर्थिषु ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमलभन्त पतिं पतिदेवताः शिखरिणामिव सागरमापगाः ।  
-मगधकोसलकेकयशासिनां दुहितरोऽहितरोपितमार्गणम् ॥ १७॥
+मगधकोसलकेकयशासिनां दुहितरोऽहितरोपितमार्गणम् ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रियतमाभिरसौ तिसृभिर्बभौ तिसृभिरेव भुवं सह शक्तिभिः ।  
-उपगतो विनिनीषुरिव प्रजा हरिहयोऽरिहयोगविचक्षणः ॥ १८॥
+उपगतो विनिनीषुरिव प्रजा हरिहयोऽरिहयोगविचक्षणः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स किल संयुगमूर्ध्नि सहायतां मघवतः प्रतिपद्य महारथः ।  
-स्वभुजवीर्यमगापयदुच्छ्रितं सुरवधूरवधूतभयाः शरैः ॥ १९॥
+स्वभुजवीर्यमगापयदुच्छ्रितं सुरवधूरवधूतभयाः शरैः ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्रतुषु तेन विसर्जितमौलिना भुजसमाहृतदिग्वसुना कृताः ।  
-कनकयूपसमुच्छ्रयशोभिनो वितमसा तमसासरयूतटाः ॥ २०॥
+कनकयूपसमुच्छ्रयशोभिनो वितमसा तमसासरयूतटाः ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga09-21-40.mp3"></div>
 
 अजिनदण्डभृतं कुशमेखलां यतगिरं मृगशृङ्गपरिग्रहाम् ।  
-अधिवसंस्तनुमध्वरदीक्षितामसमभासमभासयदीश्वरः ॥ २१॥
+अधिवसंस्तनुमध्वरदीक्षितामसमभासमभासयदीश्वरः ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवभृथप्रयतो नियतेन्द्रियः सुरसमाजसमाक्रमणोचितः ।  
-नमयति स्म स केवलमुन्नतं वनमुचे नमुचेररये शिरः ॥ २२॥
+नमयति स्म स केवलमुन्नतं वनमुचे नमुचेररये शिरः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 असकृदेकरथेन तरस्विना हरिहयाग्रसरेण धनुर्भृता ।  
-दिनकराभिमुखा रणरेणवो रुरुधिरे रुधिरेण सुरद्विषाम् ॥ २३॥
+दिनकराभिमुखा रणरेणवो रुरुधिरे रुधिरेण सुरद्विषाम् ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ समाववृते कुसुमैर्नवैस्तमिव सेवितुमेकनराधिपम् ।  
-यमकुबेरजलेश्वरवज्रिणां समधुरं मधुरञ्चितविक्रमम् ॥ २४॥
+यमकुबेरजलेश्वरवज्रिणां समधुरं मधुरञ्चितविक्रमम् ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जिगमिषुर्धनदाध्युषितां दिशं रथयुजा परिवर्तितवाहनः ।  
-दिनमुखानि रविर्हिमनिग्रहैर्विमलयन्मलयं नगमत्यजत् ॥ २५॥
+दिनमुखानि रविर्हिमनिग्रहैर्विमलयन्मलयं नगमत्यजत् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुमजन्म ततो नवपल्लवास्तदनु षट्पदकोकिलकूजितम् ।  
-इति यथाक्रममाविरभून्मधुर्द्रुमवतीमवतीर्य वनस्थलीम् ॥ २६॥
+इति यथाक्रममाविरभून्मधुर्द्रुमवतीमवतीर्य वनस्थलीम् ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नयगुणोपचितामिव भूपतेः सदुपकारफलां श्रियमर्थिनः ।  
-अभिययुः सरसो मधुसंभृतां कमलिनीमलिनीरपतत्रिणः ॥ २७॥
+अभिययुः सरसो मधुसंभृतां कमलिनीमलिनीरपतत्रिणः ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुसुममेव न केवलमार्तवं नवमशोकतरोः स्मरदीपनम् ।  
-किसलयप्रसवोऽपि विलासिनां मदयिता दयिताश्रवणार्पितः ॥ २८॥
+किसलयप्रसवोऽपि विलासिनां मदयिता दयिताश्रवणार्पितः ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विरचिता मधुनोपवनश्रियामभिनवा इव पत्रविशेषकाः ।  
-मधुलिहां मधुदानविशारदाः कुरबका रवकारणतां ययुः ॥ २९॥
+मधुलिहां मधुदानविशारदाः कुरबका रवकारणतां ययुः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुवदनावदनासवसंभृतस्तदनुवादिगुणः कुसुमोद्गमः ।  
-मधुकरैरकरोन्मधुलोलुपैर्बकुलमाकुलमायतपङ्क्तिभिः ॥ ३०॥
+मधुकरैरकरोन्मधुलोलुपैर्बकुलमाकुलमायतपङ्क्तिभिः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपहितं शिशिरापगमश्रिया मुकुलजालमशोभत किंशुके ।  
-प्रणयिनीव नखक्षतमण्डनं प्रमदया मदयापितलज्जया ॥ ३१॥
+प्रणयिनीव नखक्षतमण्डनं प्रमदया मदयापितलज्जया ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्रणगुरुप्रमदाधरदुःसहं जघननिर्विषयीकृतमेखलम् ।  
-न खलु तावदशेषमपोहितुं रविरलं विरलं कृतवान्हिमम् ॥ ३२॥
+न खलु तावदशेषमपोहितुं रविरलं विरलं कृतवान्हिमम् ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अभिनयान्परिचेतुमिवोद्यता मलयमारुतकम्पितपल्लवा ।  
-अमदयत्सहकारलता मनः सकलिका कलिकामजितामपि ॥ ३३॥
+अमदयत्सहकारलता मनः सकलिका कलिकामजितामपि ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रथममन्यभृताभिरुदीरिताः प्रविरला इव मुग्धवधूकथाः ।  
-सुरभिगन्धिषु शुश्रुविरे गिरः कुसुमितासु मिता वनराजिषु ॥ ३४॥
+सुरभिगन्धिषु शुश्रुविरे गिरः कुसुमितासु मिता वनराजिषु ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्रुतिसुखभ्रमरस्वनगीतयः कुसुमकोमलदन्तरुचो बभुः ।  
-उपवनान्तलताः पवनाहतैः किसलयैः सलयैरिव पाणिभिः ॥ ३५॥
+उपवनान्तलताः पवनाहतैः किसलयैः सलयैरिव पाणिभिः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ललितविभ्रमबन्धविचेक्षणं सुरभिगन्धपराजितकेसरम् ।  
-पतिषु निर्विविशुर्मधुमङ्गनाः स्मरसखं रसखण्डनवर्जितम् ॥ ३६॥
+पतिषु निर्विविशुर्मधुमङ्गनाः स्मरसखं रसखण्डनवर्जितम् ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शुशुभिरे स्मितचारुतराननाः स्त्रिय इव श्लथशिञ्जितमेखलाः ।  
-विकचतामरसा गृहदीर्घिका मदकलोदकलोलविहंगमाः ॥ ३७॥
+विकचतामरसा गृहदीर्घिका मदकलोदकलोलविहंगमाः ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपययौ तनुतां मधुखण्डिता हिमकरोदयपाण्डुमुखच्छविः ।  
-सदृशमिष्टसमागमनिर्वृतिं वनितयानितया रजनीवधूः ॥ ३८॥
+सदृशमिष्टसमागमनिर्वृतिं वनितयानितया रजनीवधूः ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपतुषारतया विशदप्रभैः सुरतसङ्गपरिश्रमनोदिभिः ।  
-कुसुमचापमतेजयदंशुभिर्हिमकरो मकरोर्जितकेतनम् ॥ ३९॥
+कुसुमचापमतेजयदंशुभिर्हिमकरो मकरोर्जितकेतनम् ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हुतहुताशनदीप्ति वनश्रियः प्रतिनिधिः कनकाभरणस्य यत् ।  
-युवतयः कुसुमं दधुराहितं तदलके दलकेसरपेशलम् ॥ ४०॥
+युवतयः कुसुमं दधुराहितं तदलके दलकेसरपेशलम् ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga09-41-60.mp3"></div>
 
 अलिभिरञ्जनबिन्दुमनोहरैः कुसुमपङ्क्तिनिपातिभिरङ्कितः ।  
-न खलु शोभयति स्म वनस्थलीं न तिलकस्तिलकः प्रमदामिव ॥ ४१॥
+न खलु शोभयति स्म वनस्थलीं न तिलकस्तिलकः प्रमदामिव ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अमदयन्मधुगन्धसनाथया किसलयाधरसंगतया मनः ।  
-कुसुमसंभृतया नवमल्लिका स्मितरुचा तरुचारुविलासिनी ॥ ४२॥
+कुसुमसंभृतया नवमल्लिका स्मितरुचा तरुचारुविलासिनी ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अरुणरागनिषेधिभिरंशुकैः श्रवणलब्धपदैश्च यवाङ्कुरैः ।  
-परभृताविरुतैश्च विलासिनः स्मरबलैरबलैकरसाः कृताः ॥ ४३॥
+परभृताविरुतैश्च विलासिनः स्मरबलैरबलैकरसाः कृताः ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उपचितावयवा शुचिभिः कणैरलिकदम्बकयोगमुपेयुषी ।  
-सदृशकान्तिरक्ष्यत मञ्जरी तिलकजालकजालकमौक्तिकैः ॥ ४४॥
+सदृशकान्तिरक्ष्यत मञ्जरी तिलकजालकजालकमौक्तिकैः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ध्वजपटं मदनस्य धनुर्भृतश्छविकरं मुखचूर्णमृतुश्रियः ।  
-कुसुमकेसररेणुमलिव्रजाः सपवनोपवनोत्थितमन्वयुः ॥ ४५॥
+कुसुमकेसररेणुमलिव्रजाः सपवनोपवनोत्थितमन्वयुः ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनुभवन्नवदोलमृतूत्सवं पटुरपि प्रियकण्ठजिघृक्षया ।  
-अनयदासनरज्जुपरिग्रहे भुजलतां जलतामबलाजनः ॥ ४६॥
+अनयदासनरज्जुपरिग्रहे भुजलतां जलतामबलाजनः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्यजत मानमलं बत विग्रहैर्न पुनरेति गतं चतुरं वयः ।  
-परभृताभिरितीव निवेदिते स्मरमते रमते स्म वधूजनः ॥ ४७॥
+परभृताभिरितीव निवेदिते स्मरमते रमते स्म वधूजनः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ यथासुखमार्तवमुत्सवं समनुभूय विलासवतीसखः ।  
-नरपतिश्चकमे मृगयारतिं स मधुमन्मधुमन्मथसंनिभः ॥ ४८॥
+नरपतिश्चकमे मृगयारतिं स मधुमन्मधुमन्मथसंनिभः ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परिचयं चललक्ष्यनिपातने भयरुचोश्च तदिङ्गितबोधनम् ।  
-श्रमजयात्प्रगुणां च करोत्यसौ तनुमतोऽनुमतः सचिवैर्ययौ ॥ ४९॥
+श्रमजयात्प्रगुणां च करोत्यसौ तनुमतोऽनुमतः सचिवैर्ययौ ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मृगवनोपगमक्षमवेषभृद्विपुलकण्ठनिषक्तशरासनः ।  
-गगनमश्वखुरोद्धतरेणुभिर्नृसविता स वितानमिवाकरोत् ॥ ५०॥
+गगनमश्वखुरोद्धतरेणुभिर्नृसविता स वितानमिवाकरोत् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ग्रथितमौलिरसौ वनमालया तरुपलाशसवर्णतनुच्छदः ।  
-तुरगवल्गनचञ्चलकुण्डलो विरुरुचे रुरुचेष्टितभूमिषु ॥ ५१॥
+तुरगवल्गनचञ्चलकुण्डलो विरुरुचे रुरुचेष्टितभूमिषु ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तनुलताविनिवेशितविग्रहा भ्रमरसंक्रमितेक्षणवृत्तयः ।  
-ददृशुरध्वनि तं वनदेवताः सुनयनं नयनन्दितकोसलम् ॥ ५२॥
+ददृशुरध्वनि तं वनदेवताः सुनयनं नयनन्दितकोसलम् ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्वगणिवागुरिकैः प्रथमास्थितं व्यपगतानलदस्यु विवेश सः ।  
-स्थिरतुरंगमभूमि निपानवन्मृगवयोगवयोपचितं वनम् ॥ ५३॥
+स्थिरतुरंगमभूमि निपानवन्मृगवयोगवयोपचितं वनम् ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ नभस्य इव त्रिदशायुधं कनकपिङ्गतडिद्गुणसंयुतम् ।  
-धनुरधिज्यमनाधिरुपाददे नरवरो रवरोषितकेसरी ॥ ५४॥
+धनुरधिज्यमनाधिरुपाददे नरवरो रवरोषितकेसरी ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य स्तनप्रणयिभिर्मुहुरेणशावै-
 र्व्याहन्यमानहरिणीगमनं पुरस्तात् ।  
 आविर्बभूव कुशगर्भमुखं मृगाणां
-यूथं तदग्रसरगर्वितकृष्णसारम् ॥ ५५॥
+यूथं तदग्रसरगर्वितकृष्णसारम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्प्रार्थितं जवनवाजिगतेन राज्ञा
 तूणीमुखोद्धृतशरेण विशीर्णपङ्क्ति ।  
 श्यामीचकार वनमाकुलदृष्टिपातै-
-र्वातेरितोत्पलदलप्रकरैरिवार्द्रैः ॥ ५६॥
+र्वातेरितोत्पलदलप्रकरैरिवार्द्रैः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लक्ष्यीकृतस्य हरिणस्य हरिप्रभावः
 प्रेक्ष्य स्थितां सहचरीं व्यवधाय देहम् ।  
 आकर्णकृष्टमपि कामितया स धन्वी
-बाणं कृपामृदुमनाः प्रतिसंजहार ॥ ५७॥
+बाणं कृपामृदुमनाः प्रतिसंजहार ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यापरेष्वपि मृगेषु शरान्मुमुक्षोः
 कर्णान्तमेत्य बिभिदे निबिडोऽपि मुष्टिः ।  
 त्रासातिमात्रचटुलैः स्मरतः सुनेत्रैः
-प्रौढप्रियानयनविभ्रमचेष्टितानि ॥ ५८॥
+प्रौढप्रियानयनविभ्रमचेष्टितानि ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उत्तस्थुषः सपदि पल्वलपङ्कमध्या-
 न्मुस्ताप्ररोहकवलावयवानुकीर्णम् ।  
 जग्राह स द्रुतवराहकुलस्य मार्गं
-सुव्यक्तमार्द्रपदपङ्क्तिभिरायताभिः ॥ ५९॥
+सुव्यक्तमार्द्रपदपङ्क्तिभिरायताभिः ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं वाहनादवनतोत्तरकायमीष-
 द्विध्यन्तमुद्धृतसटाः प्रतिहन्तुमीषुः ।  
 नात्मानमस्य विविदुः सहसा वराहा
-वृक्षेषु विद्धमिषुभिर्जघनाश्रयेषु ॥ ६०॥
+वृक्षेषु विद्धमिषुभिर्जघनाश्रयेषु ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga09-61-82.mp3"></div>
 
 तेनाभिघातरभसस्य विकृष्य पत्री
 वन्यस्य नेत्रविवरे महिषस्य मुक्तः ।  
 निर्भिद्य विग्रहमशोणितलिप्तपुङ्ख-
-स्तं पातयां प्रथममास पपात पश्चात् ॥ ६१॥
+स्तं पातयां प्रथममास पपात पश्चात् ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रायो विषाणपरिमोक्षलघूत्तमाङ्गा-
 न्खड्गांश्चकार नृपतिर्निशितैः क्षुरप्रैः ।  
 शृङ्गं स दृप्तविनयाधिकृतः परेषा-
-मत्युच्छ्रितं न ममृषे न तु दीर्घमायुः ॥ ६२॥
+मत्युच्छ्रितं न ममृषे न तु दीर्घमायुः ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्याघ्रानभीरभिमुखोत्पतितान्गुहाभ्यः
 फुल्लासनाग्रविटपानिव वायुरुग्णान् ।  
 शिक्षाविशेषलघुहस्ततया निमेषा-
-त्तूणीचकार शरपूरितवक्त्ररन्ध्रान् ॥ ६३॥
+त्तूणीचकार शरपूरितवक्त्ररन्ध्रान् ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्घातोग्रैः कुञ्जलीनाञ्जिघांसुर्ज्यानिर्घोषैः क्षोभयामास सिंहान् ।  
-नूनं तेषामभ्यसूयापरोऽभूद्वीर्योदग्रे राजशब्दो मृगेषु ॥ ६४॥
+नूनं तेषामभ्यसूयापरोऽभूद्वीर्योदग्रे राजशब्दो मृगेषु ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तान्हत्वा गजकुलबद्धतीव्रवैरान्काकुत्स्थः कुटिलनखाग्रलग्नमुक्तान् ।  
-आत्मानं रणकृतकर्मणां गजानामानृण्यं गतमिव मार्गणैरमंस्त ॥ ६५॥
+आत्मानं रणकृतकर्मणां गजानामानृण्यं गतमिव मार्गणैरमंस्त ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चमरान्परितः प्रवर्तिताश्वः क्वचिदाकर्णविकृष्टभल्लवर्षी ।  
-नृपतीनिव तान्वियोज्य सद्यः सितबालव्यजनैर्जगाम शन्तिम् ॥ ६६॥
+नृपतीनिव तान्वियोज्य सद्यः सितबालव्यजनैर्जगाम शन्तिम् ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अपि तुरगसमीपादुत्पतन्तं मयूरं
 न स रुचिरकलापं बाणलक्ष्यीचकार ।  
 सपदि गतमनस्कश्चित्रमाल्यानुकीर्णे
-रतिविगलितबन्धे केशपाशे प्रियायाः ॥ ६७॥
+रतिविगलितबन्धे केशपाशे प्रियायाः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य कर्कशविहारसंभवं स्वेदमाननविलग्नजालकम् ।  
-आचचाम सतुषारशीकरो भिन्नपल्लवपुटो वनानिलः ॥ ६८॥
+आचचाम सतुषारशीकरो भिन्नपल्लवपुटो वनानिलः ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति विस्मृतान्यकरणीयमात्मनः सचिवावलम्बिधुरं धराधिपम् ।  
-परिवृद्धरागमनुबन्धसेवया मृगया जहार चतुरेव कामिनी ॥ ६९॥
+परिवृद्धरागमनुबन्धसेवया मृगया जहार चतुरेव कामिनी ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स ललितकुसुमप्रवालशय्यां ज्वलितमहौषधिदीपिकासनाथाम् ।  
-नरपतिरतिवाहयांबभूव क्वचिदसमेतपरिच्छदस्त्रियामाम् ॥ ७०॥
+नरपतिरतिवाहयांबभूव क्वचिदसमेतपरिच्छदस्त्रियामाम् ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उषसि स गजयूथकर्णतालैः पटुपटहध्वनिभिर्विनीतनिद्रः ।  
-अरमत मधुराणि तत्र शृण्वन्विहगविकूचितबन्दिमङ्गलानि ॥ ७१॥
+अरमत मधुराणि तत्र शृण्वन्विहगविकूचितबन्दिमङ्गलानि ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ जातु रुरोर्गृहीतवर्त्मा विपिने पार्श्वचरैरलक्ष्यमाणः ।  
-श्रमफेनमुचा तपस्विगाढां तमसां प्राप नदीं तुरंगमेण ॥ ७२॥
+श्रमफेनमुचा तपस्विगाढां तमसां प्राप नदीं तुरंगमेण ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुम्भपूरणभवः पटुरुच्चैरुच्चचार निनदोऽम्भसि तस्याः ।  
-तत्र स द्विरदबृंहितशङ्की शब्दपातिनमिषुं विससर्ज ॥ ७३॥
+तत्र स द्विरदबृंहितशङ्की शब्दपातिनमिषुं विससर्ज ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नृपतेः प्रतिषिद्धमेव तत्कृतवान्पङ्क्तिरथो विलङ्घ्य यत् ।  
-अपथे पदमर्पयन्ति हि श्रुतवन्तोऽपि रजोनिमीलिताः ॥ ७४॥
+अपथे पदमर्पयन्ति हि श्रुतवन्तोऽपि रजोनिमीलिताः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 हा तातेति क्रन्दितमाकर्ण्य विषण्ण-
 स्तस्यान्विष्यन्वेतसगूढं प्रभवं सः ।  
 शल्यप्रोतं प्रेक्ष्य सकुम्भं मुनिपुत्रं
-तापादन्तःशल्य इवासीत्क्षितिपोऽपि ॥ ७५॥
+तापादन्तःशल्य इवासीत्क्षितिपोऽपि ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेनावतीर्य तुरगात्प्रथितान्वयेन
 पृष्टान्वयः स जलकुम्भनिषण्णदेहः ।  
 तस्मै द्विजेतरतपस्विसुतं स्खलद्भि-
-रात्मानमक्षरपदैः कथयांबभूव ॥ ७६॥
+रात्मानमक्षरपदैः कथयांबभूव ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तच्चोदितः स तमनुद्धृतशल्यमेव पित्रोः सकाशमवसन्नदृशोर्निनाय ।  
-ताभ्यां तथागतमुपेत्य तमेकपुत्रमज्ञानतः स्वचरितं नृपतिः शशंस ॥ ७७॥
+ताभ्यां तथागतमुपेत्य तमेकपुत्रमज्ञानतः स्वचरितं नृपतिः शशंस ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ दंपती बहु विलप्य शिशोः प्रहर्त्रा
 शल्यं निखातमुदहारयतामुरस्तः ।  
 सोऽभूत्परासुरथ भूमिपतिं शशाप
-हस्तार्पितैर्नयनवारिभिरेव वृद्धः ॥ ७८॥
+हस्तार्पितैर्नयनवारिभिरेव वृद्धः ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिष्टान्तमाप्स्यति भवानपि पुत्रशोका-
 दन्त्ये वयस्यहमिवेति तमुक्तवन्तम् ।  
 आक्रान्तपूर्वमिव मुक्तविषं भुजंगं
-प्रोवाच कोसलपतिः प्रथमापराद्धः ॥ ७९॥
+प्रोवाच कोसलपतिः प्रथमापराद्धः ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शापोऽप्यदृष्टतनयाननपद्मशोभे
 सानुग्रहो भगवता मयि पातितोऽयम् ।  
 कृष्यां दहन्नपि खलु क्षितिमिन्धनेद्धो
-बीजप्ररोहजननीं ज्वलनः करोति ॥ ८०॥
+बीजप्ररोहजननीं ज्वलनः करोति ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्थं गते गतघृणः किमयं विधत्तां वध्यस्तवेत्यभिहितो वसुधाधिपेन ।  
-एधान्हुताशनवतः स मुनिर्ययाचे पुत्रं परासुमनुगन्तुमनाः सदारः ॥ ८१॥
+एधान्हुताशनवतः स मुनिर्ययाचे पुत्रं परासुमनुगन्तुमनाः सदारः ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्राप्तानुगः सपदि शासनमस्य राजा
 संपाद्य पातकविलुप्तधृतिर्निवृत्तः ।  
 अन्तर्निविष्टपदमात्मविनाशहेतुं
-शापं दधज्ज्वलनमौर्वमिवाम्बुराशिः ॥ ८२॥
+शापं दधज्ज्वलनमौर्वमिवाम्बुराशिः ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 मृगयावर्णनो नाम नवमः सर्गः ॥
