--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/11.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/11.md
@@ -1,300 +1,486 @@
----
-title: ११ सीताविवाहवर्णनम्
-unicode_script: devanagari
----
++++
+title = "११ सीताविवाहवर्णनम्"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga11-01-25.mp3"></div>
 
 कौशिकेन स किल क्षितीश्वरो राममध्वरविघातशान्तये ।  
-काकपक्षधरमेत्य याचितस्तेजसां हि न वयः समीक्ष्यते ॥ १॥
+काकपक्षधरमेत्य याचितस्तेजसां हि न वयः समीक्ष्यते ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृच्छ्रलब्धमपि लब्धवर्णभाक्तं दिदेश मुनये सलक्ष्मणम् ।  
-अप्यसुप्रणयिनां रघोः कुले न व्यहन्यत कदाचिदर्थिता ॥ २॥
+अप्यसुप्रणयिनां रघोः कुले न व्यहन्यत कदाचिदर्थिता ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यावदादिशति पार्थिवस्तयोर्निर्गमाय पुरमार्गसंस्क्रियाम् ।  
-तावदाशु विदधे मरुत्सखैः सा सपुष्पजलवर्षिभिर्घनैः ॥ ३॥
+तावदाशु विदधे मरुत्सखैः सा सपुष्पजलवर्षिभिर्घनैः ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ निदेशकरणोद्यतौ पितुर्धन्विनौ चरणयोर्निपेततुः ।  
-भूपतेरपि तयोः प्रवत्स्यतोर्नम्रयोरुपरि बाष्पबिन्दवः ॥ ४॥
+भूपतेरपि तयोः प्रवत्स्यतोर्नम्रयोरुपरि बाष्पबिन्दवः ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ पितुर्नयनजेन वारिणा किंचिदुक्षितशिखण्डकावुभौ ।  
-धन्विनौ तमृषिमन्वगच्छतां पौरदृष्टिकृतमार्गतोरणौ ॥ ५॥
+धन्विनौ तमृषिमन्वगच्छतां पौरदृष्टिकृतमार्गतोरणौ ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लक्ष्मणानुचरमेव राघवं नेतुमैच्छदृषिरित्यसौ नृपः ।  
-आशिषं प्रयुयुजे न वाहिनीं सा हि रक्षणविधौ तयोः क्षमा ॥ ६॥
+आशिषं प्रयुयुजे न वाहिनीं सा हि रक्षणविधौ तयोः क्षमा ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मातृवर्गचरणस्पृशौ मुनेस्तौ प्रपद्य पदवीं महौजसः ।  
-रेचतुर्गतिवशात्प्रवर्तिनौ भास्करस्य मधुमाधवाविव ॥ ७॥
+रेचतुर्गतिवशात्प्रवर्तिनौ भास्करस्य मधुमाधवाविव ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वीचिलोलभुजयोस्तयोर्गतं शैशवाच्चपलमप्यशोभत ।  
-तूयदागम इवोद्ध्यभिद्ययोर्नामधेयसदृशं विचेष्टितम् ॥ ८॥
+तूयदागम इवोद्ध्यभिद्ययोर्नामधेयसदृशं विचेष्टितम् ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ बलातिबलयोः प्रभावतो विद्ययोः पथि मुनिप्रदिष्टयोः ।  
-मम्लतुर्न मणिकुट्टिमोचितौ मातृपार्श्वपरिवर्तिनाविव ॥ ९॥
+मम्लतुर्न मणिकुट्टिमोचितौ मातृपार्श्वपरिवर्तिनाविव ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पूर्ववृत्तकथितैः पुराविदः सानुजः पितृसखस्य राघवः ।  
-उह्यमान इव वाहनोचितः पादचारमपि न व्यभावयत् ॥ १०॥
+उह्यमान इव वाहनोचितः पादचारमपि न व्यभावयत् ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ सरांसि रसवद्भिरम्बुभिः कूजितैः श्रुतिसुखैः पतत्रिणः ।  
-वायवः सुरभिपुष्परेणुभिश्छायया च जलदाः सिषेविरे ॥ ११॥
+वायवः सुरभिपुष्परेणुभिश्छायया च जलदाः सिषेविरे ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नाम्भसां कमलशोभिनां तथा शाखिनां च न परिश्रमच्छिदाम् ।  
-दर्शनेन लघुना यथा तयोः प्रीतिमापुरुभयोस्तपस्विनः ॥ १२॥
+दर्शनेन लघुना यथा तयोः प्रीतिमापुरुभयोस्तपस्विनः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्थाणुदग्धवपुषस्तपोवनं प्राप्य दाशरथिरात्तकार्मुकः ।  
-विग्रहेण मदनस्य चारुणा सोऽभवत्प्रतिनिधिर्न कर्मणा ॥ १३॥
+विग्रहेण मदनस्य चारुणा सोऽभवत्प्रतिनिधिर्न कर्मणा ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ सुकेतुसुतया खिलीकृते कौशिकाद्विदितशापया पथि ।  
-निन्यतुः स्थलनिवेशिताटनी लीलयैव धनुषी अधिज्यताम् ॥ १४॥
+निन्यतुः स्थलनिवेशिताटनी लीलयैव धनुषी अधिज्यताम् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ज्यानिनादमथ गृह्णती तयोः प्रादुरास बहुलक्षपाछविः ।  
-ताडका चलकपालकुण्डला कालिकेव निबिडा बलाकिनी ॥ १५॥
+ताडका चलकपालकुण्डला कालिकेव निबिडा बलाकिनी ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तीव्रवेगधुतमार्गवृक्षया प्रेतचीवरवसा स्वनोग्रया ।  
-अभ्यभावि भरताग्रजस्तया वात्ययेव पितृकाननोत्थया ॥ १६॥
+अभ्यभावि भरताग्रजस्तया वात्ययेव पितृकाननोत्थया ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उद्यतैकभुजयष्टिमायतीं श्रोणिलम्बिपुरुषान्त्रमेखलाम् ।  
-तां विलोक्य वनितावधे घृणां पत्रिणा सह मुमोच राघवः ॥ १७॥
+तां विलोक्य वनितावधे घृणां पत्रिणा सह मुमोच राघवः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यच्चकार विवरं शिलाघने ताडकोरसि स रामसायकः ।  
-अप्रविष्टविषयस्य रक्षसां द्वारतामगमदन्तकस्य तत् ॥ १८॥
+अप्रविष्टविषयस्य रक्षसां द्वारतामगमदन्तकस्य तत् ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बाणभिन्नहृदया निपेतुषी सा स्वकाननभुवं न केवलाम् ।  
-विष्टपत्रयपराजयस्थिरां रावणश्रियमपि व्यकम्पयत् ॥ १९॥
+विष्टपत्रयपराजयस्थिरां रावणश्रियमपि व्यकम्पयत् ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राममन्मथशरेण ताडिता दुःसहेन हृदये निशाचरी ।  
-गन्धवद्रुधिरचन्दनोक्षिता जीवितेशवसतिं जगाम सा ॥ २०॥
+गन्धवद्रुधिरचन्दनोक्षिता जीवितेशवसतिं जगाम सा ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नैरृतघ्नमथ मन्त्रवन्मुनेः प्रापदस्त्रमवदानतोषितात् ।  
-ज्योतिरिन्धननिपाति भास्करात्सूर्यकान्त इव ताडकान्तकः ॥ २१॥
+ज्योतिरिन्धननिपाति भास्करात्सूर्यकान्त इव ताडकान्तकः ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वामनाश्रमपदं ततः परं पावनं श्रुतमृषेरुपेयिवान् ।  
-उन्मनाः प्रथमजन्मचेष्टितान्यस्मरन्नपि बभूव राघवः ॥ २२॥
+उन्मनाः प्रथमजन्मचेष्टितान्यस्मरन्नपि बभूव राघवः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आससाद मुनिरात्मनस्ततः शिष्यवर्गपरिकल्पितार्हणम् ।  
-बद्धपल्लवपुटाञ्जलिद्रुमं दर्शनोन्मुखमृगं तपोवनम् ॥ २३॥
+बद्धपल्लवपुटाञ्जलिद्रुमं दर्शनोन्मुखमृगं तपोवनम् ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र दीक्षितमृषिं ररक्षतुर्विघ्नतो दशरथात्मजौ शरैः ।  
-लोकमन्धतमसात्क्रमोदितौ रश्मिभिः शशिदिवाकराविव ॥ २४॥
+लोकमन्धतमसात्क्रमोदितौ रश्मिभिः शशिदिवाकराविव ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वीक्ष्य वेदिमथ रक्तबिन्दुभिर्बन्धुजीवपृथुभिः प्रदूषिताम् ।  
-संभ्रमोऽभवदपोढकर्मणामृत्विजां च्युतविकङ्कतस्रुचाम् ॥ २५॥
+संभ्रमोऽभवदपोढकर्मणामृत्विजां च्युतविकङ्कतस्रुचाम् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga11-26-49.mp3"></div
 
 उन्मुखः सपदि लक्षमणाग्रजो बाणमाश्रयमुखात्समुद्धरन् ।  
-रक्षसां बलमपश्यदम्बरे गृध्रपक्षपवनेरितध्वजम् ॥ २६॥
+रक्षसां बलमपश्यदम्बरे गृध्रपक्षपवनेरितध्वजम् ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र यावधिपती मखद्विषां तौ शरव्यमकरोत्स नेतरान् ।  
-किं महोरगविसर्पिविक्रमो राजिलेषु गरुडः प्रवर्तते ॥ २७॥
+किं महोरगविसर्पिविक्रमो राजिलेषु गरुडः प्रवर्तते ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽस्त्रमुग्रजवमस्त्रकोविदः संदधे धनुषि वायुदैवतम् ।  
-तेन शैलगुरुमप्यपातयत्पाण्डुपत्रमिव ताडकासुतम् ॥ २८॥
+तेन शैलगुरुमप्यपातयत्पाण्डुपत्रमिव ताडकासुतम् ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यः सुबाहुरिति राक्षसोऽपरस्तत्र तत्र विससर्प मायया ।  
-तं क्षुरप्रशकलीकृतं कृती पत्रिणां व्यभजदाश्रमाद्बहिः ॥ २९॥
+तं क्षुरप्रशकलीकृतं कृती पत्रिणां व्यभजदाश्रमाद्बहिः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्यपास्तमखविघ्नयोस्तयोः सांयुगीनमभिनन्द्य विक्रमम् ।  
-ऋत्विजः कुलपतेर्यथाक्रमं वाग्यतस्य निरवर्तयन्क्रियाः ॥ ३०॥
+ऋत्विजः कुलपतेर्यथाक्रमं वाग्यतस्य निरवर्तयन्क्रियाः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ प्रणामचलकाकपक्षकौ भ्रातराववभृथाप्लुतो मुनिः ।  
-आशिषामनुपदं समस्पृशद्दर्भपाटलतलेन पाणिना ॥ ३१॥
+आशिषामनुपदं समस्पृशद्दर्भपाटलतलेन पाणिना ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं न्यमन्त्रयत संभृतक्रतुर्मैथिलः स मिथिलां व्रजन्वशी ।  
-राघवावपि निनाय बिभ्रतौ तद्धनुःश्रवणजं कुतूहलम् ॥ ३२॥
+राघवावपि निनाय बिभ्रतौ तद्धनुःश्रवणजं कुतूहलम् ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तैः शिवेषु वसतिर्गताध्वभिः सायमाश्रमतनुष्वगृह्यत ।  
-येषु दीर्घतपसः परिग्रहो वासवक्षणकलत्रतां ययौ ॥ ३३॥
+येषु दीर्घतपसः परिग्रहो वासवक्षणकलत्रतां ययौ ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रत्यपद्यत चिराय यत्पुनश्चारु गौतमवधूः शिलामयी ।  
-स्वं वपुः स किल किल्बिषच्छिदां रामपादरजसामनुग्रहः ॥ ३४॥
+स्वं वपुः स किल किल्बिषच्छिदां रामपादरजसामनुग्रहः ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राघवान्वितमुपस्थितं मुनिं तं निशम्य जनको जनेश्वरः ।  
-अर्थकामसहितं सपर्यया देहबद्धमिव धर्ममभ्यगात् ॥ ३५॥
+अर्थकामसहितं सपर्यया देहबद्धमिव धर्ममभ्यगात् ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ विदेहनगरीनिवासिनां गां गताविव दिवः पुनर्वसू ।  
-मन्यते स्म पिबतां विलोचनैः पक्ष्मपातमपि वञ्चनां मनः ॥ ३६॥
+मन्यते स्म पिबतां विलोचनैः पक्ष्मपातमपि वञ्चनां मनः ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यूपवत्यवसिते क्रियाविधौ कालवित्कुशिकवंशवर्धनः ।  
-राममिष्वसनदर्शनोत्सुकं मैथिलाय कथयांबभूव सः ॥ ३७॥
+राममिष्वसनदर्शनोत्सुकं मैथिलाय कथयांबभूव सः ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य वीक्ष्य ललितं वपुः शिशोः पार्थिवः प्रथितवंशजन्मनः ।  
-स्वं विचिन्त्य च धनुर्दुरानमं पीडितो दुहितृशुल्कसंस्थया ॥ ३८॥
+स्वं विचिन्त्य च धनुर्दुरानमं पीडितो दुहितृशुल्कसंस्थया ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अब्रवीच्च भगवन्मतङ्गजैर्यद्बृहद्भिरपि कर्म दुष्करम् ।  
-तत्र नाहमनुमन्तुमुत्सहे मोक्षवृत्ति कलभस्य चेष्टितम् ॥ ३९॥
+तत्र नाहमनुमन्तुमुत्सहे मोक्षवृत्ति कलभस्य चेष्टितम् ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ह्रेपिता हि बहवो नरेश्वरास्तेन तात धनुषा धनुर्भृतः ।  
-ज्यानिघातकठिनत्वचो भुजान्स्वान्विधूय धिगिति प्रतस्थिरे ॥ ४०॥
+ज्यानिघातकठिनत्वचो भुजान्स्वान्विधूय धिगिति प्रतस्थिरे ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रत्युवाच तमृषिर्निशम्यतां सारतोऽयमथवा गिरा कृतम् ।  
-चाप एव भवतो भविष्यति व्यक्तशक्तिरशनिर्गिराविव ॥ ४१॥
+चाप एव भवतो भविष्यति व्यक्तशक्तिरशनिर्गिराविव ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवमाप्तवचनात्स पौरुषं काकपक्षकधरेऽपि राघवे ।  
-श्रद्दधे त्रिदशगोपमात्रके दाहशक्तिमिव कृष्णवर्त्मनि ॥ ४२॥
+श्रद्दधे त्रिदशगोपमात्रके दाहशक्तिमिव कृष्णवर्त्मनि ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्यादिदेश गणशोऽथ पार्श्वगान्कार्मुकाभिहरणाय मैथिलः ।  
-तैजसस्य धनुषः प्रवृत्तये तोयदानिव सहस्रलोचनः ॥ ४३॥
+तैजसस्य धनुषः प्रवृत्तये तोयदानिव सहस्रलोचनः ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्प्रसुप्तभुजगेन्द्रभीषणं वीक्ष्य दाशरथिराददे धनुः ।  
-विद्रुतक्रतुमृगानुसारिणं येन बाणमसृजत्वृषध्वजः ॥ ४४॥
+विद्रुतक्रतुमृगानुसारिणं येन बाणमसृजत्वृषध्वजः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आततज्यमकरोत्स संसदा विस्मयस्तिमितनेत्रमीक्षितः ।  
-शैलसारमपि नातियत्नतः पुष्पचापमिव पेशलं स्मरः  ॥ ४५॥
+शैलसारमपि नातियत्नतः पुष्पचापमिव पेशलं स्मरः  ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भज्यमानमतिमात्रकर्षणात्तेन वज्रपरुषस्वनं धनुः ।  
-भार्गवाय दृढमन्यवे पुनः क्षत्रमुद्यतमिव न्यवेदयत् ॥ ४६॥
+भार्गवाय दृढमन्यवे पुनः क्षत्रमुद्यतमिव न्यवेदयत् ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दृष्टसारमथ रुद्रकार्मुके वीर्यशुल्कमभिनन्द्य मैथिलः ।  
-राघवाय तनयामयोनिजां रूपिणीं श्रियमिव न्यवेदयत् ॥ ४७॥
+राघवाय तनयामयोनिजां रूपिणीं श्रियमिव न्यवेदयत् ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मैथिलः सपदि सत्यसंगरो राघवाय तनयामयोनिजाम् ।  
-संनिधौ द्युतिमतस्तपोनिधेरग्निसाक्षिक इवातिसृष्टवान् ॥ ४८॥
+संनिधौ द्युतिमतस्तपोनिधेरग्निसाक्षिक इवातिसृष्टवान् ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्राहिणोच्च महितं महाद्युतिः कोसलाधिपतये पुरोधसम् ।  
-भृत्यभावि दुहितुः परिग्रहाद्दिश्यतां कुलमिदं निमेरिति ॥ ४९॥
+भृत्यभावि दुहितुः परिग्रहाद्दिश्यतां कुलमिदं निमेरिति ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अन्वियेष सदृशीं स च स्नुषां प्राप चैनमनुकूलवाग्द्विजः ।  
-सद्य एव सुकृतां हि पच्यते कल्पवृक्षफलधर्मि काङ्क्षितम् ॥ ५०॥
+सद्य एव सुकृतां हि पच्यते कल्पवृक्षफलधर्मि काङ्क्षितम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga11-50-55.mp3"></div
 
 तस्य कल्पितपुरस्क्रियाविधेः शुश्रुवान्वचनमग्रजन्मनः ।  
-उच्चचाल बलभित्सखो वशी सैन्यरेणुमुषितार्कदीधितिः ॥ ५१॥
+उच्चचाल बलभित्सखो वशी सैन्यरेणुमुषितार्कदीधितिः ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आससाद मिथिलां स वेष्टयन्पीडितोपवनपादपां बलैः ।  
-प्रीतिरोधमसहिष्ट सा पुरी स्त्रीव कान्तपरिभोगमायतम् ॥ ५२॥
+प्रीतिरोधमसहिष्ट सा पुरी स्त्रीव कान्तपरिभोगमायतम् ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तौ समेत्य समये स्थितावुभौ भूपती वरुणवासवोपमौ ।  
-कन्यकातनयकौतुकक्रियां स्वप्रभावसदृशीं वितेनतुः ॥ ५३॥
+कन्यकातनयकौतुकक्रियां स्वप्रभावसदृशीं वितेनतुः ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पार्थिवीमुदवहद्रघूद्वहो लक्ष्मणस्तदनुजामथोर्मिलाम् ।  
-यौ तयोरवरजौ वरौजसौ तौ कुशध्वजसुते सुमध्यमे ॥ ५४॥
+यौ तयोरवरजौ वरौजसौ तौ कुशध्वजसुते सुमध्यमे ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते चतुर्थसहितास्त्रयो बभुः सूनवो नववधूपरिग्रहाः ।  
-सामदानविधिभेदनिग्रहाः सिद्धिमन्त इव तस्य भूपतेः ॥ ५५॥
+सामदानविधिभेदनिग्रहाः सिद्धिमन्त इव तस्य भूपतेः ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga11-56-80.mp3"></div
 
 ता नराधिपसुता नृपात्मजैस्ते च ताभिरगमन्कृतार्थताम् ।  
-सोऽभवद्वरवधूसमागमः प्रत्ययप्रकृतियोगसंनिभः ॥ ५६॥
+सोऽभवद्वरवधूसमागमः प्रत्ययप्रकृतियोगसंनिभः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवमात्तरतिरात्मसंभवांस्तान्निवेश्य चतुरोऽपि तत्र सः ।  
-अध्वसु त्रिषु विसृष्टमैथिलः स्वां पुरीं दशरथो न्यवर्तत ॥ ५७॥
+अध्वसु त्रिषु विसृष्टमैथिलः स्वां पुरीं दशरथो न्यवर्तत ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य जातु मरुतः प्रतीपगा वर्त्मसु ध्वजतरुप्रमाथिनः ।  
-चिक्लिशुर्भृशतया वरूथिनीमुत्तटा इव नदीरयाः स्थलीम् ॥ ५८॥
+चिक्लिशुर्भृशतया वरूथिनीमुत्तटा इव नदीरयाः स्थलीम् ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लक्ष्यते स्म तदनन्तरं रविर्बद्धभीमपरिवेषमण्डलः ।  
-वैनतेयशमितस्य भोगिनो भोगवेष्टित इव च्युतो मणिः ॥ ५९॥
+वैनतेयशमितस्य भोगिनो भोगवेष्टित इव च्युतो मणिः ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 श्येनपक्षपरिधूसरालकाः सांध्यमेघरुधिरार्द्रवाससः ।  
-अङ्गना इव रजस्वला दिशो नो बभूवुरवलोकनक्षमाः ॥ ६०॥
+अङ्गना इव रजस्वला दिशो नो बभूवुरवलोकनक्षमाः ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भास्करश्च दिशमध्युवास यां तां श्रिताः प्रतिभयं ववासिरे ।  
-क्षत्रशोणितपितृक्रियोचितं चोदयन्त्य इव भार्गवं शिवाः ॥ ६१॥
+क्षत्रशोणितपितृक्रियोचितं चोदयन्त्य इव भार्गवं शिवाः ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्प्रतीपपवनादिवैकृतं प्रेक्ष्य शान्तिमधिकृत्य कृत्यविद् ।  
-अन्वयुङ्क्त गुरुमीश्वरः क्षितेः स्वन्तमित्यलघयत्स तद्व्यथाम् ॥ ६२॥
+अन्वयुङ्क्त गुरुमीश्वरः क्षितेः स्वन्तमित्यलघयत्स तद्व्यथाम् ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेजसः सपदि राशिरुत्थितः प्रादुरास किल वाहिनीमुखे ।  
-यः प्रमृज्य नयनानि सैनिकैर्लक्षणीयपुरुषाकृतिश्चिरात् ॥ ६३॥
+यः प्रमृज्य नयनानि सैनिकैर्लक्षणीयपुरुषाकृतिश्चिरात् ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पित्र्यवंशमुपवीतलक्षणं मातृकं च धनुरूर्जितं दधत् ।  
-यः ससोम इव घर्मदीधितिः सद्विजिह्व इव चन्दनद्रुमः ॥ ६४॥
+यः ससोम इव घर्मदीधितिः सद्विजिह्व इव चन्दनद्रुमः ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 येन रोषपरुषात्मनः पितुः शासने स्थितिभिदोऽपि तस्थुषा ।  
-वेपमानजननीशिरश्छिदा प्रागजीयत घृणा ततो मही ॥ ६५॥
+वेपमानजननीशिरश्छिदा प्रागजीयत घृणा ततो मही ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अक्षबीजवलयेन निर्बभौ दक्षिणश्रवणसंस्थितेन यः ।  
-क्षत्रियान्तकरणैकविंशतेर्व्याजपूर्वगणनामिवोद्वहन् ॥ ६६॥
+क्षत्रियान्तकरणैकविंशतेर्व्याजपूर्वगणनामिवोद्वहन् ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं पितुर्वधभवेन मन्युना राजवंशनिधनाय दीक्षितम् ।  
-बालसूनुरवलोक्य भार्गवं स्वां दशां च विषसाद पार्थिवः ॥ ६७॥
+बालसूनुरवलोक्य भार्गवं स्वां दशां च विषसाद पार्थिवः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नाम राम इति तुल्यमात्मजे वर्तमानमहिते च दारुणे ।  
-हृद्यमस्य भयदायि चाभवद्रत्नजातमिव हारसर्पयोः ॥ ६८॥
+हृद्यमस्य भयदायि चाभवद्रत्नजातमिव हारसर्पयोः ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अर्घ्यमर्घ्यमिति वादिनं नृपं सोऽनवेक्ष्य भरताग्रजो यतः ।  
-क्षत्रकोपदहनार्चिषं ततः संदधे दृशमुदग्रतारकाम् ॥ ६९॥
+क्षत्रकोपदहनार्चिषं ततः संदधे दृशमुदग्रतारकाम् ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेन कार्मुकनिषक्तमुष्टिना राघवो विगतभीः पुरोगतः ।  
-अङ्गुलीविवरचारिणं शरं कुर्वता निजगदे युयुत्सुना ॥ ७०॥
+अङ्गुलीविवरचारिणं शरं कुर्वता निजगदे युयुत्सुना ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्षत्रजातमपकारवैरि मे तन्निहत्य बहुशः शमं गतः ।  
-सुप्तसर्प इव दण्डघट्टनाद्रोषितोऽस्मि तव विक्रमश्रवात् ॥ ७१॥
+सुप्तसर्प इव दण्डघट्टनाद्रोषितोऽस्मि तव विक्रमश्रवात् ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मैथिलस्य धनुरन्यपार्थिवैस्त्वं किलानमितपूर्वमक्षणोः ।  
-तन्निशम्य भवता समर्थये वीर्यशृङ्गमिव भग्नमात्मनः ॥ ७२॥
+तन्निशम्य भवता समर्थये वीर्यशृङ्गमिव भग्नमात्मनः ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अन्यदा जगति राम इत्ययं शब्द उच्चरित एव मामगात् ।  
-व्रीडमावहति मे स संप्रति व्यस्तवृत्तिरुदयोन्मुखे त्वयि ॥ ७३॥
+व्रीडमावहति मे स संप्रति व्यस्तवृत्तिरुदयोन्मुखे त्वयि ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बिभ्रतोऽस्त्रमचलेऽप्यकुण्ठितं द्वौ रुपू मम मतौ समागसौ ।  
-धेनुवत्सहरणाच्च हैहयस्त्वं च कीर्तिमपहर्तुमुद्यतः ॥ ७४॥
+धेनुवत्सहरणाच्च हैहयस्त्वं च कीर्तिमपहर्तुमुद्यतः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 क्षत्रियान्तकरणोऽपि विक्रमस्तेन मामवति नाजिते त्वयि ।  
-पावकस्य महिमा स गण्यते कक्षवज्जलति सागरेऽपि यः ॥ ७५॥
+पावकस्य महिमा स गण्यते कक्षवज्जलति सागरेऽपि यः ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विद्धि चात्तबलमोजसा हरेरैश्वरं धनुरभाजि यत्त्वया ।  
-खातमूलमनिलो नदीरयैः पातयत्यपि मृदुस्तटद्रुमम् ॥ ७६॥
+खातमूलमनिलो नदीरयैः पातयत्यपि मृदुस्तटद्रुमम् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तन्मदीयमिदमायुधं ज्यया संगमय्य सशरं विकृष्यताम् ।  
-तिष्ठतु प्रधवमेवमप्यहं तुल्यबाहुतरसा जितस्त्वया ॥ ७७॥
+तिष्ठतु प्रधवमेवमप्यहं तुल्यबाहुतरसा जितस्त्वया ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कातरोऽसि यदि वोद्गतार्चिषा तर्जितः परशुधारया मम ।  
-ज्यानिघातकठिनाङ्गुलिर्वृथा बध्यतामभययाचनाञ्जलिः ॥ ७८॥
+ज्यानिघातकठिनाङ्गुलिर्वृथा बध्यतामभययाचनाञ्जलिः ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवमुक्तवति भीमदर्शने भार्गवे स्मितविकम्पिताधरः ।  
-तद्धनुर्ग्रहणमेव राघवः प्रत्यपद्यत समर्थमुत्तरम् ॥ ७९॥
+तद्धनुर्ग्रहणमेव राघवः प्रत्यपद्यत समर्थमुत्तरम् ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पूर्वजन्मधनुषा समागतः सोऽतिमात्रलघुदर्शनोऽभवत् ।  
-केवलोऽपि सुभगो नवाम्बुदः किं पुनस्त्रिदशचापलाञ्छितः ॥ ८०॥
+केवलोऽपि सुभगो नवाम्बुदः किं पुनस्त्रिदशचापलाञ्छितः ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga11-81-93.mp3"></div
 
 तेन भूमिनिहितैककोटि तत्कार्मुकं च बलिनाधिरोपितम् ।  
-निष्प्रभश्च रिपुरास भूभृतां धूमशेष इव धूमकेतनः ॥ ८१॥
+निष्प्रभश्च रिपुरास भूभृतां धूमशेष इव धूमकेतनः ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तावुभावपि परस्परस्थितौ वर्धमानपरिहीनतेजसौ ।  
-पश्यति स्म जनता दिनात्यये पार्वणौ शशिदिवाकराविव ॥ ८२॥
+पश्यति स्म जनता दिनात्यये पार्वणौ शशिदिवाकराविव ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं कृपामुदुरवेक्ष्य भार्गवं राघवः स्खलितवीर्यमात्मनि ।  
-स्वं च संहितममोघमाशुगं व्याजहार हरसूनुसंनिभः ॥ ८३॥
+स्वं च संहितममोघमाशुगं व्याजहार हरसूनुसंनिभः ॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न प्रहर्तुमलमस्मि निर्दयं विप्र इत्यभिभत्यपि त्वयि ।  
-शंस किं गतिमनेन पत्रिणा हन्मि लोकमुत ते मखार्जितम् ॥ ८४॥
+शंस किं गतिमनेन पत्रिणा हन्मि लोकमुत ते मखार्जितम् ॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रत्युवाच तमृषिर्न तत्त्वतस्त्वां न वेद्मि पुरुषं पुरातनम् ।  
-गां गतस्य तव धाम वैष्णवं कोपितो ह्यसि मया दिदृक्षुणा ॥ ८५॥
+गां गतस्य तव धाम वैष्णवं कोपितो ह्यसि मया दिदृक्षुणा ॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 भस्मसात्कृतवतः पितृद्विषः पात्रसाच्च वसुधां ससागराम् ।  
-आहितो जयविपर्ययोऽपि मे श्लाघ्य एव परमेष्ठिना त्वया ॥ ८६॥
+आहितो जयविपर्ययोऽपि मे श्लाघ्य एव परमेष्ठिना त्वया ॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तद्गतिं मतिमतां वरेप्सितां पुण्यतीर्थगमनाय रक्ष मे ।  
-पीडयिष्यति न मां खिलीकृता स्वर्गपद्धतिरमोघलोलुपम् ॥ ८७॥
+पीडयिष्यति न मां खिलीकृता स्वर्गपद्धतिरमोघलोलुपम् ॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रत्यपद्यत तथेति राघवः प्राङ्मुखश्च विससर्ज सायकम् ।  
-भार्गवस्य सुकृतोऽपि सोऽभवत्स्वर्गमार्गपरिघो दुरत्ययः ॥ ८८॥
+भार्गवस्य सुकृतोऽपि सोऽभवत्स्वर्गमार्गपरिघो दुरत्ययः ॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राघवोऽपि चरणौ तपोनिधेः क्षम्यतामिति वदन्समस्पृशत् ।  
-निर्जितेषु तरसा तरस्विनां शत्रुषु प्रणतिरेव कीर्तये ॥ ८९॥
+निर्जितेषु तरसा तरस्विनां शत्रुषु प्रणतिरेव कीर्तये ॥ ८९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/89.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 राजसत्वमवधूय मातृकं पित्र्यमस्मि गमितः शमं यदा ।  
-नन्वनिन्दितफलो मम त्वया निग्रहोऽप्ययमनुगृहीकृतः ॥ ९०॥
+नन्वनिन्दितफलो मम त्वया निग्रहोऽप्ययमनुगृहीकृतः ॥ ९०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/90.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 साधयाम्यहमविघ्नमस्तु ते देवकार्यमुपपादयिष्यतः ।  
-ऊचिवानिति वचः सलक्ष्मणं लक्ष्मणाग्रजमृषितिरोदधे ॥ ९१॥
+ऊचिवानिति वचः सलक्ष्मणं लक्ष्मणाग्रजमृषितिरोदधे ॥ ९१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/91.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्गते विजयिनं परिरभ्य रामं
 स्नेहादमन्यत पिता पुनरेव जातम् ।  
 तस्याभवत्क्षणशुचः परितोषलाभः
-कक्षाग्निलङ्घिततरोरिव वृष्टिपातः ॥ ९२॥
+कक्षाग्निलङ्घिततरोरिव वृष्टिपातः ॥ ९२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/92.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ पथि गमयित्वा कॢप्तरम्योपकार्ये
 कतिचिदवनिपालः शर्वरीः शर्वकल्पः ।  
 पुरमविशदयोध्यां मैथिलीदर्शनीनां
-कुवलयितगवाक्षां लोचनैरङ्गनानाम् ॥ ९३॥
+कुवलयितगवाक्षां लोचनैरङ्गनानाम् ॥ ९३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/11/93.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 सीतविवाहवर्णनो नामैकादशः सर्गः ॥
