--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/16.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/16.md
@@ -1,285 +1,461 @@
----
-title: १६ कुमुद्वतीपरिणयः
-unicode_script: devanagari
----
++++
+title = "१६ कुमुद्वतीपरिणयः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga16-01-20.mp3"></div>
 
 अथेतरे सप्तरघुप्रवीरा ज्येष्ठं पुरोजन्मतया गुणैश्च ।  
-चक्रुः कुशं रत्नविशेषभाजं सौभ्रात्रमेषां हि कुलानुकारि ॥ १॥
+चक्रुः कुशं रत्नविशेषभाजं सौभ्रात्रमेषां हि कुलानुकारि ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ते सेतुवार्तागजबन्धमुखैरभ्युच्छ्रिताः कर्मभिरप्यवन्ध्यैः ।  
-अन्योन्यदेशप्रविभागसीमां वेलां समुद्रा इव न व्यतीयुः ॥ २॥
+अन्योन्यदेशप्रविभागसीमां वेलां समुद्रा इव न व्यतीयुः ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चतुर्भुजांशप्रभवः स तेषां दानप्रवृत्तेरनुपारतानाम् ।  
-सुरद्विपानामिव सामयोनिर्भिन्नोऽष्टधा विप्रससार वंशः ॥ ३॥
+सुरद्विपानामिव सामयोनिर्भिन्नोऽष्टधा विप्रससार वंशः ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथार्धरात्रे स्तिमितप्रदीपे शय्यागृहे सुप्तजने प्रबुद्धः ।  
-कुशः प्रवासस्थकलत्रवेषामदृष्टपूर्वां वनितामपश्यत् ॥ ४॥
+कुशः प्रवासस्थकलत्रवेषामदृष्टपूर्वां वनितामपश्यत् ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा साधुसाधारणपार्थिवर्द्धेः स्थित्वा पुरस्तात्पुरहूतभासः ।  
-जेतुः परेषां जयशब्दपूर्वं तस्याञ्जलिं बन्धुमतो बबन्ध ॥ ५॥
+जेतुः परेषां जयशब्दपूर्वं तस्याञ्जलिं बन्धुमतो बबन्ध ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथानपोढार्गलमप्यगारं छायामिवादर्शतलं प्रविष्टाम् ।  
-सविस्मयो दाशरथेस्तनूजः प्रोवाच पूर्वार्धविसृष्टतल्पः ॥ ६॥
+सविस्मयो दाशरथेस्तनूजः प्रोवाच पूर्वार्धविसृष्टतल्पः ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लब्धान्तरा सावरणेऽपि गेहे योगप्रभावो न च लक्ष्यते ते ।  
-बिभर्षि चाकारमनिर्वृतानां मृणालिनी हैममिवोपरागम् ॥ ७॥
+बिभर्षि चाकारमनिर्वृतानां मृणालिनी हैममिवोपरागम् ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 का त्वं शुभे कस्य परिग्रहो वा किं वा मदभ्यागमकारणं ते ।  
-आचक्ष्व मत्वा वशिनां रघूणां मनः परस्त्रीविमुखप्रवृत्तिः ॥ ८॥
+आचक्ष्व मत्वा वशिनां रघूणां मनः परस्त्रीविमुखप्रवृत्तिः ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमब्रवीत्सा गुरुणानवद्या या नीतपौरा स्वपदोन्मुखेन ।  
-तस्याः पुरः संप्रति वीतनाथां जानीहि राजन्नधिदेवतां माम् ॥ ९॥
+तस्याः पुरः संप्रति वीतनाथां जानीहि राजन्नधिदेवतां माम् ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वस्वौकसारामभिभूय साहं सौराज्यबद्धोत्सवया विभूत्या ।  
-समग्रशक्तौ त्वयि सूर्यवंश्ये सति प्रपन्ना करुणामवस्थाम् ॥ १०॥
+समग्रशक्तौ त्वयि सूर्यवंश्ये सति प्रपन्ना करुणामवस्थाम् ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विशीर्णतल्पाट्टशतो निवेशः पर्यस्तसालः प्रभुणा विना मे ।  
-विडम्बयत्यस्तनिमग्नसूर्यं दिनान्तमुग्रानिलभिन्नमेघम् ॥ ११॥
+विडम्बयत्यस्तनिमग्नसूर्यं दिनान्तमुग्रानिलभिन्नमेघम् ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निशासु भास्वत्कलनूपुराणां यः संचरोऽभूदभिसारिकाणाम् ।  
-नदन्मुखोल्काविचितामिषाभिः स वाह्यते राजपथः शिवाभिः ॥ १२॥
+नदन्मुखोल्काविचितामिषाभिः स वाह्यते राजपथः शिवाभिः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आस्फालितं यत्प्रमदाकराग्रैर्मृदङ्गधीरध्वनिमन्वगच्छत् ।  
-वन्यैरिदानीं महिषैस्तदम्भः शृङ्गाहतं क्रोशति दीर्घिकाणाम् ॥ १३॥
+वन्यैरिदानीं महिषैस्तदम्भः शृङ्गाहतं क्रोशति दीर्घिकाणाम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वृक्षेशया यष्टिनिवासभङ्गान्मृदङ्गशब्दापगमादलास्याः ।  
-प्राप्ता दवोल्काहतशेषबर्ह्याः क्रीडामयूरा वनबर्हिणत्वम् ॥ १४॥
+प्राप्ता दवोल्काहतशेषबर्ह्याः क्रीडामयूरा वनबर्हिणत्वम् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सूपानमार्गेषु च येषु रामा निक्षिप्तवत्यश्चरणान्सरागान् ।  
-सद्योहतन्यङ्कुभिरस्रदिग्धं व्याघ्रैः पदं तेषु निधीयते मे ॥ १५॥
+सद्योहतन्यङ्कुभिरस्रदिग्धं व्याघ्रैः पदं तेषु निधीयते मे ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चित्रद्विपाः पद्मवनावतीर्णाः करेणुभिर्दत्तमृणालभङ्गाः ।  
-नखाङ्कुशाघातविभिन्नकुम्भाः संरब्धसिंहप्रहृतं वहन्ति ॥ १६॥
+नखाङ्कुशाघातविभिन्नकुम्भाः संरब्धसिंहप्रहृतं वहन्ति ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्तम्भेषु योषित्प्रतियातनानामुत्क्रान्तवर्णक्रमधूसराणाम् ।  
-स्तनोत्तरीयाणि भवन्ति सङ्गान्निर्मोकपट्टाः फणिभिर्विमुक्ताः ॥ १७॥
+स्तनोत्तरीयाणि भवन्ति सङ्गान्निर्मोकपट्टाः फणिभिर्विमुक्ताः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कालान्तरश्यामसुधेषु नक्तमितस्ततो रूढतृणाङ्कुरेषु ।  
-त एव मुक्तागुणशुद्धयोऽपि हर्म्येषु मूर्च्छन्ति न चन्द्रपादाः ॥ १८॥
+त एव मुक्तागुणशुद्धयोऽपि हर्म्येषु मूर्च्छन्ति न चन्द्रपादाः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आवर्ज्य शाखां सदयं च यासां पुष्पाण्युपात्तानि विलासिनीभिः ।  
-वन्यैः पुलिन्दैरिव वानरैस्ताः क्लिश्यन्त उद्यानलता मदीयाः ॥ १९॥
+वन्यैः पुलिन्दैरिव वानरैस्ताः क्लिश्यन्त उद्यानलता मदीयाः ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 रात्रावनाविष्कृतदीपभासः कान्तामुखश्रीवियुता दिवापि ।  
-तिरस्क्रियन्ते कृमितन्तुजालैर्विच्छन्नधूमप्रसरा गवाक्षाः ॥ २०॥
+तिरस्क्रियन्ते कृमितन्तुजालैर्विच्छन्नधूमप्रसरा गवाक्षाः ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga16-21-40.mp3"></div>
 
 बलिक्रियावर्जितसैकतानि स्नानीयसंसर्गमनाप्नुवन्ति ।  
-उपान्तवानीरगृहाणि दृष्ट्वा शून्यानि दूये सरयूजलानि ॥ २१॥
+उपान्तवानीरगृहाणि दृष्ट्वा शून्यानि दूये सरयूजलानि ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदर्हसीमां वसतिं विसृज्य मामभ्युपेतुं कुलराजधानीम् ।  
-हित्वा तनुं कारणमानुषीं तां यथा गुरुस्ते परमात्ममूर्तिम् ॥ २२॥
+हित्वा तनुं कारणमानुषीं तां यथा गुरुस्ते परमात्ममूर्तिम् ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तथेति तस्याः प्रणयं प्रतीतः प्रत्यग्रहीत्प्राग्रहरो रघूणाम् ।  
-पूरप्यभिव्यक्तमुखप्रसादा शरीरबन्धेन तिरोबभूव ॥ २३॥
+पूरप्यभिव्यक्तमुखप्रसादा शरीरबन्धेन तिरोबभूव ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदद्भुतं संसदि रात्रिवृत्तं प्रातर्द्विजेभ्यो नृपतिः शशंस ।  
-श्रुत्वा त एनं कुलराजधान्या साक्षात्पतित्वे वृतमभ्यनन्दन् ॥ २४॥
+श्रुत्वा त एनं कुलराजधान्या साक्षात्पतित्वे वृतमभ्यनन्दन् ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कुशावतीं श्रोत्रियसात्स कृत्वा यात्रानुकूलेऽहनि सावरोधः ।  
-अनुद्रुतो वायुरिवाभ्रवृन्दैः सैन्यैरयोध्याभिमुखः प्रतस्थे ॥ २५॥
+अनुद्रुतो वायुरिवाभ्रवृन्दैः सैन्यैरयोध्याभिमुखः प्रतस्थे ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा केतुमालोपवना बृहद्भिर्विहारशैलानुगतेव नागैः ।  
-सेना रथोदारगृहा प्रयाणे तस्याभवज्जंगमराजधानी ॥ २६॥
+सेना रथोदारगृहा प्रयाणे तस्याभवज्जंगमराजधानी ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेनातपत्रामलमण्डलेन प्रस्थापितः पूर्वनिवासभूमिम् ।  
-बभौ बलौघः शशिनोदितेन वेलामुदन्वानिव नीयमानः ॥ २७॥
+बभौ बलौघः शशिनोदितेन वेलामुदन्वानिव नीयमानः ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य प्रयातस्य वरूथिनीनां पीडामपर्याप्तवतीव सोढुम् ।  
-वसुंधरा विष्णुपदं द्वितीयमध्यारुरोहेव रजश्छलेन ॥ २८॥
+वसुंधरा विष्णुपदं द्वितीयमध्यारुरोहेव रजश्छलेन ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उद्यच्छमाना गमनाय पश्चात्पुरो निवेशे पथि च व्रजन्ती ।  
-सा यत्र सेना ददृशे नृपस्य तत्रैव सामग्र्यमतिं चकार ॥ २९॥
+सा यत्र सेना ददृशे नृपस्य तत्रैव सामग्र्यमतिं चकार ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य द्विपानां मदवारिसेकात्खुराभिघाताच्च तुरंगमाणाम् ।  
-रेणुः प्रपेदे प्रथि पङ्कभावं पङ्कोऽपि रेणुत्वमियाय नेतुः ॥ ३०॥
+रेणुः प्रपेदे प्रथि पङ्कभावं पङ्कोऽपि रेणुत्वमियाय नेतुः ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मार्गैषिणी सा कटकान्तरेषु वैन्ध्येषु सेना बहुधा विभिन्ना ।  
-चकार रेवेव महाविरावा बद्धप्रतिश्रुन्ति गुहामुखानि ॥ ३१॥
+चकार रेवेव महाविरावा बद्धप्रतिश्रुन्ति गुहामुखानि ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स धातुभेदारुणयाननेमिः प्रभुः प्रयाणध्वनिमिश्रतूर्यः ।  
-व्यलङ्घयद्विन्ध्यमुपायनानि पश्यन्पुलिन्दैरुपपादितानि ॥ ३२॥
+व्यलङ्घयद्विन्ध्यमुपायनानि पश्यन्पुलिन्दैरुपपादितानि ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तीर्थे तदीये गजसेतुबन्धात्प्रतीपगामुत्तरतोस्य गङ्गाम् ।  
-अयत्नबालव्यजनीबभूवुर्हंसा नभोलङ्घनलोलपक्षाः ॥ ३३॥
+अयत्नबालव्यजनीबभूवुर्हंसा नभोलङ्घनलोलपक्षाः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स पूर्वजानां कपिलेन रोषाद्भस्मावशेषीकृतविग्रहाणाम् ।  
-सुरालयप्राप्तिनिमित्तमम्भस्त्रैस्रोतसं नौलुलितं ववन्दे ॥ ३४॥
+सुरालयप्राप्तिनिमित्तमम्भस्त्रैस्रोतसं नौलुलितं ववन्दे ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्यध्वनः केचिदहोभिरन्ते कूलं समासाद्य कुशः सरय्वाः ।  
-वेदिप्रतिष्ठान्वितताधराणां यूपानपश्यच्छतशो रघूणाम् ॥ ३५॥
+वेदिप्रतिष्ठान्वितताधराणां यूपानपश्यच्छतशो रघूणाम् ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आधूय शाखाः कुसुमद्रुमाणां स्पृष्ट्वा च शीतान्सरयूतरंगान् ।  
-तं क्लान्तसैन्यं कुलराजधान्याः प्रत्युज्जगामोपवनान्तवायुः ॥ ३६॥
+तं क्लान्तसैन्यं कुलराजधान्याः प्रत्युज्जगामोपवनान्तवायुः ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोपशल्ये रिपुमग्नशल्यस्तस्याः पुरः पौरसखा स राजा ।  
-कुलध्वजस्तानि चलध्वजानि निवेशयामास बली बलानि ॥ ३७॥
+कुलध्वजस्तानि चलध्वजानि निवेशयामास बली बलानि ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं शिल्पिसंघाः प्रभुणा नियुक्तास्तथागतां संभृतसाधनत्वात् ।  
-पुरं नवीचक्रुरपां विसर्गान्मेघा निदाघग्लपितामिवोर्वीम् ॥ ३८॥
+पुरं नवीचक्रुरपां विसर्गान्मेघा निदाघग्लपितामिवोर्वीम् ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः सपर्यां सपशूपहारां पुरः परार्घ्यप्रतिमागृहायाः ।  
-उपोषितैर्वास्तुविधानविद्भिर्निर्वर्तयामास रघुप्रवीरः ॥ ३९॥
+उपोषितैर्वास्तुविधानविद्भिर्निर्वर्तयामास रघुप्रवीरः ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याः स राजोपपदं निशान्तं कामीव कान्ताहृदयं प्रविश्य ।  
-यथार्हमन्यैरनुजीविलोकं संभावयामास यथाप्रधानम् ॥ ४०॥
+यथार्हमन्यैरनुजीविलोकं संभावयामास यथाप्रधानम् ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga16-41-60.mp3"></div>
 
 सा मन्दुरासंश्रयिभिस्तुरंगैः शालाविधिस्तम्भगतैश्च नागैः ।  
-पूराबभासे विपणिस्थपण्या सर्वाङ्गनद्धाभरणेव नारी ॥ ४१॥
+पूराबभासे विपणिस्थपण्या सर्वाङ्गनद्धाभरणेव नारी ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वसन्स तस्यां वसतौ रघूणां पुराणशोभामभिरोपितायाम् ।  
-न मैथिलेयः स्पृहयांबभूव भर्त्रे दिवो नाप्यलकेश्वराय ॥ ४२॥
+न मैथिलेयः स्पृहयांबभूव भर्त्रे दिवो नाप्यलकेश्वराय ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथास्य रत्नग्रथितोत्तरीयमेकान्तपाण्डुस्तनलम्बिहारम् ।  
-निःश्वासहार्यांशुकमाजगाम घर्मः प्रियावेशमिवोपदेष्टुम् ॥ ४३॥
+निःश्वासहार्यांशुकमाजगाम घर्मः प्रियावेशमिवोपदेष्टुम् ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अगस्त्यचिह्नादयनात्समीपं दिगुत्तरा भास्वति संनिवृत्ते ।  
-आनन्दशीतामिव बाष्पवृष्टिं हिमस्रुतिं हैमवतीं ससर्ज ॥ ४४॥
+आनन्दशीतामिव बाष्पवृष्टिं हिमस्रुतिं हैमवतीं ससर्ज ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रवृद्धतापो दिवसोऽतिमात्रमत्यर्थमेव क्षणदा च तन्वी ।  
-उभौ विरोधक्रियया विभिन्नौ जायापती सानुशयाविवास्ताम् ॥ ४५॥
+उभौ विरोधक्रियया विभिन्नौ जायापती सानुशयाविवास्ताम् ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दिने दिने शैवलवन्त्यधस्तात्सोपानपर्वाणि विमुञ्चदम्भः ।  
-उद्दण्डपद्मं गृहदीर्घिकाणां नारीनितम्बद्वयसं बभूव ॥ ४६॥
+उद्दण्डपद्मं गृहदीर्घिकाणां नारीनितम्बद्वयसं बभूव ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वनेषु सायंतनमल्लिकानां विजृम्भणोद्गन्धिषु कुड्मलेषु ।  
-प्रत्येकनिक्षिप्तपदः सशब्दं संख्यामिवैषां भ्रमरश्चकार ॥ ४७॥
+प्रत्येकनिक्षिप्तपदः सशब्दं संख्यामिवैषां भ्रमरश्चकार ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वेदानुविद्धार्धनखक्षताङ्के भूयिष्ठसंदिष्टशिखं कपोले ।  
-च्युतं न कर्णादपि कामिनीनां शिरीषपुष्पं सहसा पपात ॥ ४८॥
+च्युतं न कर्णादपि कामिनीनां शिरीषपुष्पं सहसा पपात ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यन्त्रप्रवाहैः शिशिरैः परीतान्रसेन धौतान्मलयोद्भवस्य ।  
-शिलाविशेषान्यधिशय्य निन्युर्धारागृहेष्वातपमृद्धिवन्तः ॥ ४९॥
+शिलाविशेषान्यधिशय्य निन्युर्धारागृहेष्वातपमृद्धिवन्तः ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्नानार्द्रमुक्तेष्वनुधूपवासं विन्यस्तसायंतनमल्लिकेषु ।  
-कामो वसन्तात्ययमन्दवीर्यः केशेषु लेभे बलमङ्गनानाम् ॥ ५०॥
+कामो वसन्तात्ययमन्दवीर्यः केशेषु लेभे बलमङ्गनानाम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आपिञ्जरा बद्धरजःकणत्वान्मञ्जुर्युदारा शुशुभेऽर्जुनस्य ।  
-दग्ध्वापि देहं गिरिशेन रोषात्खण्डीकृता ज्येव मनोभवस्य ॥ ५१॥
+दग्ध्वापि देहं गिरिशेन रोषात्खण्डीकृता ज्येव मनोभवस्य ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मनोज्ञगन्धं सहकारभङ्गं पुराणशीधुं नवपाटलं च ।  
-संबध्नता कामिजनेषु दोषाः सर्वे निदाघावधिना प्रमृष्टाः ॥ ५२॥
+संबध्नता कामिजनेषु दोषाः सर्वे निदाघावधिना प्रमृष्टाः ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जनस्य तस्मिन्समये विगाढे बभूवतुर्द्वौ सविशेषकान्तौ ।  
-तापापनोदक्षमपादसेवौ स चोदयस्थौ नृपतिः शशी च ॥ ५३॥
+तापापनोदक्षमपादसेवौ स चोदयस्थौ नृपतिः शशी च ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथोर्मिलोलोन्मदराजहंसे रोधोलतापुष्पवहे सरय्वाः ।  
-विहर्तुमिच्छा वनितासखस्य तस्याम्भसि ग्रीष्मसुखे बभूव ॥ ५४॥
+विहर्तुमिच्छा वनितासखस्य तस्याम्भसि ग्रीष्मसुखे बभूव ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स तीरभूमौ विहितोपकार्यामानायिभिस्तामपकृष्टनक्राम् ।  
-विगाहितुं श्रीमहिमानुरूपं प्रचक्रमे चक्रधरप्रभावः ॥ ५५॥
+विगाहितुं श्रीमहिमानुरूपं प्रचक्रमे चक्रधरप्रभावः ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सा तीरसोपानपथावतारादन्योन्यकेयूरविघट्टिनीभिः ।  
-सनूपुरक्षोभपदाभिरासीदुद्विग्नहंसा सरिदङ्गनाभिः ॥ ५६॥
+सनूपुरक्षोभपदाभिरासीदुद्विग्नहंसा सरिदङ्गनाभिः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 परस्पराभ्युक्षणतत्पराणां तासां नृपो मज्जनरागदर्शी ।  
-नौसंश्रयः पार्श्वगतां किरातीमुपात्ताबालव्यजनां बभाषे ॥ ५७॥
+नौसंश्रयः पार्श्वगतां किरातीमुपात्ताबालव्यजनां बभाषे ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पश्यावरोधैः शतशो मदीयैर्विगाह्यमानो गलिताङ्गरागैः ।  
-संध्योदयः साभ्र इवेष वर्णं पुष्यत्यनेकं सरयूप्रवाहः ॥ ५८॥
+संध्योदयः साभ्र इवेष वर्णं पुष्यत्यनेकं सरयूप्रवाहः ॥ ५८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/58.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विलुप्तमन्तःपुरसुन्दरीणां यदञ्जनं नौलुलिताभिरद्भिः ।  
-तद्बध्नतीभिर्मदरागशोभां विलोचनेषु प्रतिमुक्तमासाम् ॥ ५९॥
+तद्बध्नतीभिर्मदरागशोभां विलोचनेषु प्रतिमुक्तमासाम् ॥ ५९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/59.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एता गुरुश्रोणिपयोधरत्वादात्मानमुद्वोढुमशक्नुवत्यः ।  
-गाढाङ्गदैर्बाहुभिरप्सु बालाः क्लेशोत्तरं रागवशात्प्लवन्ते ॥ ६०॥
+गाढाङ्गदैर्बाहुभिरप्सु बालाः क्लेशोत्तरं रागवशात्प्लवन्ते ॥ ६०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/60.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga16-61-88.mp3"></div>
 
 अमी शिरीषप्रसवावतंसाः प्रभ्रंशिनो वारिविहारिणीनाम् ।  
-पारिप्लवाः स्रोतसि निम्नगायाः शैवाललोलांश्छलयन्ति मीनान् ॥ ६१॥
+पारिप्लवाः स्रोतसि निम्नगायाः शैवाललोलांश्छलयन्ति मीनान् ॥ ६१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/61.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आसां जलास्फालनतत्पराणां मुक्ताफलस्पर्धिषु शीकरेषु ।  
-पयोधरोत्सर्पिषु शीर्यमाणः संलक्ष्यते न च्छिदुरोऽपि हारः ॥ ६२॥
+पयोधरोत्सर्पिषु शीर्यमाणः संलक्ष्यते न च्छिदुरोऽपि हारः ॥ ६२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/62.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आवर्तशोभा नतनाभिकान्तेर्भङ्गो भ्रुवां द्वन्द्वचराः स्तनानाम् ।  
-जातानि रूपावयवोपमानान्यदूरवर्तीनि विलासिनीनाम् ॥ ६३॥
+जातानि रूपावयवोपमानान्यदूरवर्तीनि विलासिनीनाम् ॥ ६३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/63.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तीरस्थलीबर्हिभिरुत्कलापैः प्रस्निग्धकेकैरभिनन्द्यमानम् ।  
-श्रोत्रेषु संमूर्च्छति रक्तमासां गीतानुगं वारिमृदङ्गवाद्यम् ॥ ६४॥
+श्रोत्रेषु संमूर्च्छति रक्तमासां गीतानुगं वारिमृदङ्गवाद्यम् ॥ ६४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/64.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संदष्टवस्त्रेष्वबलानितम्बेष्विन्दुप्रकाशान्तरितोडुतुल्याः ।  
-अमी जलापूरितसूत्रमार्गा मौनं भजन्ते रशनाकलापाः ॥ ६५॥
+अमी जलापूरितसूत्रमार्गा मौनं भजन्ते रशनाकलापाः ॥ ६५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/65.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एताः करोत्पीडितवारिधारा दर्पात्सखीभिर्वदनेषु सिक्ताः ।  
-वक्रेतराग्रैरलकैस्तरुण्यश्चूर्णारुणान्वारिलवान्वमन्ति ॥ ६६॥
+वक्रेतराग्रैरलकैस्तरुण्यश्चूर्णारुणान्वारिलवान्वमन्ति ॥ ६६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/66.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उद्बन्धकेशच्युतपत्रलेखो विश्लेषिमुक्ताफलपत्रवेष्टः ।  
-मनोज्ञ एव प्रमदामुखानामम्भोविहाराकुलितोऽपि वेषः ॥ ६७॥
+मनोज्ञ एव प्रमदामुखानामम्भोविहाराकुलितोऽपि वेषः ॥ ६७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/67.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स नौविमानादवतीर्य रेमे विलोलहारः सह ताभिरप्सु ।  
-स्कन्धावलग्नोद्धृतपद्मिनीकः करेणुभिर्वन्य इव द्विपेन्द्रः ॥ ६८॥
+स्कन्धावलग्नोद्धृतपद्मिनीकः करेणुभिर्वन्य इव द्विपेन्द्रः ॥ ६८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/68.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततो नृपेणानुगताः स्त्रियस्ता भ्राजिष्णुना सातिशयं विरेजुः ।  
-प्रागेव मुक्ता नयनाभिरामाः प्राप्येन्द्रनीलं किमुतोन्मयूखम् ॥ ६९॥
+प्रागेव मुक्ता नयनाभिरामाः प्राप्येन्द्रनीलं किमुतोन्मयूखम् ॥ ६९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/69.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वर्णोदकैः काञ्चनशृङ्गमुक्तैस्तमायताक्ष्यः प्रणयादसिञ्चन् ।  
-तथागतः सोऽतितरां बभासे सधातुनिष्यन्द इवाद्रिराजः ॥ ७०॥
+तथागतः सोऽतितरां बभासे सधातुनिष्यन्द इवाद्रिराजः ॥ ७०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/70.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेनावरोधप्रमदासखेन विगाहमानेन सरिद्वरां ताम् ।  
-आकाशगङ्गारतिरप्सरोभिर्वृतो मरुत्वाननुयातलीलः ॥ ७१॥
+आकाशगङ्गारतिरप्सरोभिर्वृतो मरुत्वाननुयातलीलः ॥ ७१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/71.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यत्कुम्भयोनेरधिगम्य रामः कुशाय राज्येन समं दिदेश ।  
-तदस्य जैत्राभरणं विहर्तुरज्ञातपातं सलिले ममज्ज ॥ ७२॥
+तदस्य जैत्राभरणं विहर्तुरज्ञातपातं सलिले ममज्ज ॥ ७२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/72.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्नात्वा यथाकाममसौ सदारस्तीरोपकार्यां गतमात्र एव ।  
-दिव्येन शून्यं वलयेन बाहुमपोढनेपथ्यविधिर्ददर्श ॥ ७३॥
+दिव्येन शून्यं वलयेन बाहुमपोढनेपथ्यविधिर्ददर्श ॥ ७३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/73.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 जयश्रियः संवननं यतस्तदामुक्तपूर्वं गुरुणा च यस्मात् ।  
-सेहेऽस्य न भ्रंशमतो न लोभात्स तुल्यपुष्पाभरणो हि धीरः ॥ ७४॥
+सेहेऽस्य न भ्रंशमतो न लोभात्स तुल्यपुष्पाभरणो हि धीरः ॥ ७४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/74.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः समाज्ञापयदाशु सर्वानानायिनस्तद्विचये नदीष्णान् ।  
-वन्ध्यश्रमास्ते सरयूं विगाह्य तमूचुरम्लानमुखप्रसादाः ॥ ७५॥
+वन्ध्यश्रमास्ते सरयूं विगाह्य तमूचुरम्लानमुखप्रसादाः ॥ ७५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/75.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कृतः प्रयत्नो न च देव लब्धं मग्नं पयस्याभरणोत्तमं ते ।  
-नागेन लौल्यात्कुमुदेन नूनमुपात्तमन्तर्ह्रदवासिना तत् ॥ ७६॥
+नागेन लौल्यात्कुमुदेन नूनमुपात्तमन्तर्ह्रदवासिना तत् ॥ ७६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/76.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः स कृत्वा धनुराततज्यं धनुर्धरः कोपविलोहिताक्षः ।  
-गारुत्मतं तीरगतस्तरस्वी भुजंगनाशाय समाददेऽस्त्रम् ॥ ७७॥
+गारुत्मतं तीरगतस्तरस्वी भुजंगनाशाय समाददेऽस्त्रम् ॥ ७७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/77.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्ह्रदः संहितमात्र एव क्षोभात्समाविद्धतरंगहस्तः ।  
-रोधांसि निघ्नन्नवपातमग्नः करीव वन्यः परुषं ररास ॥ ७८॥
+रोधांसि निघ्नन्नवपातमग्नः करीव वन्यः परुषं ररास ॥ ७८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/78.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मात्समुद्रादिव मथ्यमानादुद्वृत्तनक्रात्सहसोन्ममज्ज ।  
-लक्ष्म्येव सार्धं सुरराजवृक्षः कन्यां पुरस्कृत्य भुजंगराजः ॥ ७९॥
+लक्ष्म्येव सार्धं सुरराजवृक्षः कन्यां पुरस्कृत्य भुजंगराजः ॥ ७९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/79.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विभूषणप्रत्युपहारहस्तमुपस्थितं वीक्ष्य विशांपतिस्तम् ।  
-सौपर्णमस्त्रं प्रतिसंजहार प्रह्रेष्वनिर्बन्धरुषो हि सन्तः ॥ ८०॥
+सौपर्णमस्त्रं प्रतिसंजहार प्रह्रेष्वनिर्बन्धरुषो हि सन्तः ॥ ८०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/80.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 त्रैलोक्यनाथप्रभवं प्रभावात्कुशं द्विषामङ्कुशमस्त्रविद्वान् ।  
-मानोन्नतेनाप्यभिवन्द्य मूर्ध्ना मूर्धाभिषिक्तं कुमुदो बभाषे ॥ ८१॥
+मानोन्नतेनाप्यभिवन्द्य मूर्ध्ना मूर्धाभिषिक्तं कुमुदो बभाषे ॥ ८१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/81.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अवैमि कार्यान्तरमानुषस्य विष्णोः सुताख्यामपरां तनुं त्वाम् ।  
-सोऽहं कथं नाम तवाचरेयमाराधनीयस्य धृतेर्विघातम् ॥ ८२॥
+सोऽहं कथं नाम तवाचरेयमाराधनीयस्य धृतेर्विघातम् ॥ ८२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/82.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कराभिघातोत्थितकन्दुकेयमालोक्य बालातिकुतूहलेन ।  
-ह्रदात्पतज्ज्योतिरिवान्तरिक्षादादत्त जैत्राभरणं त्वदीयम् ॥ ८३॥
+ह्रदात्पतज्ज्योतिरिवान्तरिक्षादादत्त जैत्राभरणं त्वदीयम् ॥ ८३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/83.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तदेतदाजानुविलम्बिना ते ज्याघातरेखाकिणलाञ्छनेन ।  
-भुजेन रक्षापरिघेण भूमेरुपैतु योगं पुनरंसलेन ॥ ८४॥
+भुजेन रक्षापरिघेण भूमेरुपैतु योगं पुनरंसलेन ॥ ८४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/84.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इमां स्वसारं च यवीयसीं मे कुमुद्वतीं नार्हसि नानुमन्तुम् ।  
-आत्मापराधं नुदतीं चिराय शुश्रूषया पार्थिव पादयोस्ते ॥ ८५॥
+आत्मापराधं नुदतीं चिराय शुश्रूषया पार्थिव पादयोस्ते ॥ ८५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/85.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्यूचिवानुपहृताभरणः क्षितीशं
 श्लाघ्यू भवान्स्वजन इत्यनुभाषितारम् ।  
 संयोजयां विधिवदास समेतबन्धुः
-कन्यामयेन कुमुदः कुलभूषणेन ॥ ८६॥
+कन्यामयेन कुमुदः कुलभूषणेन ॥ ८६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/86.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याः स्पृष्टे मनुजपतिना साहचर्याय हस्ते
 माङ्गल्योर्णावलयिनि पुरः पावकस्योच्छिखस्य ।  
 दिव्यस्तूर्यध्वनिरुदचरद्व्यश्नुवानो दिगन्ता -
-न्गन्धोदग्रं तदनु ववृषुः पुष्पमाश्चर्यमेघाः ॥ ८७॥
+न्गन्धोदग्रं तदनु ववृषुः पुष्पमाश्चर्यमेघाः ॥ ८७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/87.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इत्थं नागस्त्रिभुवनगुरोरौरसं मैथिलेयं
 लब्ध्वा बन्धुं तमपि च कुशः पञ्चमं तक्षकस्य ।  
 एकः शङ्कां पितृवधरिपोरत्यजद्वैनतेया -
-च्छान्तव्यालामवनिमपरः पौरकान्तः शशास ॥ ८८॥
+च्छान्तव्यालामवनिमपरः पौरकान्तः शशास ॥ ८८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/16/88.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदासकृतौ
 कुमुद्वतीपरिणयो नाम षोडशः सर्गः ॥
