--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/18.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/18.md
@@ -1,176 +1,282 @@
----
-title: १८ वंशानुक्रमः
-unicode_script: devanagari
----
++++
+title = "१८ वंशानुक्रमः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-01-20.mp3"></div>
 
 स नैषधस्यार्थपतेः सुतायामुत्पादयामास निषिद्धशत्रुः ।  
-अनूनसारं निषधान्नगेन्द्रात्पुत्रं यमाहुर्निषधाख्यमेव ॥ १॥
+अनूनसारं निषधान्नगेन्द्रात्पुत्रं यमाहुर्निषधाख्यमेव ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेनोनुवीर्येण पिता प्रजायै कल्पिष्यमाणेन ननन्द यूना ।  
-सुवृष्टियोगादिव जीवलोकः सस्येन संपत्तिफलोन्मुखेन ॥ २॥
+सुवृष्टियोगादिव जीवलोकः सस्येन संपत्तिफलोन्मुखेन ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शब्दादि निर्विश्य सुखं चिराय तस्मिन्प्रतिष्ठापितराजशब्दः ।  
-कौमुद्वतेयः कुमुदावदातैर्द्यामर्जितां कर्मभिरारुरोह ॥ ३॥
+कौमुद्वतेयः कुमुदावदातैर्द्यामर्जितां कर्मभिरारुरोह ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पौत्रः कुशस्यापि कुशेशयाक्षः ससागरां सागरधीरचेताः ।  
-एकातपत्रां भुवमेकवीरः पुरार्गलादीर्घभुजो बुभोज ॥ ४॥
+एकातपत्रां भुवमेकवीरः पुरार्गलादीर्घभुजो बुभोज ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यानलौजास्तनयस्तदन्ते वंशश्रियं प्राप नलाभिधानः ।  
-यो नड्वलानीव गजः परेषां बलान्यमृद्गान्नलिनाभवक्त्रः ॥ ५॥
+यो नड्वलानीव गजः परेषां बलान्यमृद्गान्नलिनाभवक्त्रः ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नभश्चरैर्गीतयशाः स लेभे नभस्तलश्यामतनुं तनूजम् ।  
-ख्यातं नभःशब्दमयेन नाम्ना कान्तं नभोमासमिव प्रजानाम् ॥ ६॥
+ख्यातं नभःशब्दमयेन नाम्ना कान्तं नभोमासमिव प्रजानाम् ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मै विसृज्योत्तरकोसलानां धर्मोत्तरस्तत्प्रभवे प्रभुत्वम् ।  
-मृगैरजर्यं जरसोपदिष्टमदेहबन्धाय पुनर्बबन्ध ॥ ७॥
+मृगैरजर्यं जरसोपदिष्टमदेहबन्धाय पुनर्बबन्ध ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेन द्विपानामिव पुण्डरीको राज्ञामजय्योऽजनि पुण्डरीकः ।  
-शान्ते पितर्याहृतपुण्डरीका यं पुण्डरीकाक्षमिव श्रिता श्रीः ॥ ८॥
+शान्ते पितर्याहृतपुण्डरीका यं पुण्डरीकाक्षमिव श्रिता श्रीः ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स क्षेमधन्वानममोघधन्वा पुत्रं प्रजाक्षेमविधानदक्षम् ।  
-क्ष्मां लम्भयित्वा क्षमयोपपन्नं वने तपः क्षान्ततरश्चचार ॥ ९॥
+क्ष्मां लम्भयित्वा क्षमयोपपन्नं वने तपः क्षान्ततरश्चचार ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनीकिनीनां समरेऽग्रयायी तस्यापि देवप्रतिमः सुतोऽभूत् ।  
-व्यश्रूयतानीकपदावसानं देवादि नाम त्रिदिवेऽपि यस्य ॥ १०॥
+व्यश्रूयतानीकपदावसानं देवादि नाम त्रिदिवेऽपि यस्य ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पिता समाराधनतत्परेण पुत्रेण पुत्री स यथैव तेन ।  
-पुत्रस्तथैवात्मजवत्सलेन स तेन पित्रा पितृमान्बभूव ॥ ११॥
+पुत्रस्तथैवात्मजवत्सलेन स तेन पित्रा पितृमान्बभूव ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पूर्वस्तयोरात्मसमे चिरोढामात्मोभवे वर्णचतुष्टयस्य ।  
-धुरं निधायैकनिधिर्गुणानां जगाम यज्वा यजमानलोकम् ॥ १२॥
+धुरं निधायैकनिधिर्गुणानां जगाम यज्वा यजमानलोकम् ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वशी सुतस्तस्य वशंवदत्वात्स्वेषामिवासीद्विषतामपीष्टः ।  
-सकृद्विविग्नानपि हि प्रयुक्तं माधुर्यमीष्टे हरिणान्ग्रहीतुम् ॥ १३॥
+सकृद्विविग्नानपि हि प्रयुक्तं माधुर्यमीष्टे हरिणान्ग्रहीतुम् ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अहीनगुर्नाम स गां समग्रामहीनबाहुद्रविणः शशास ।  
-यो हीनसंसर्गपराङ्मुखत्वाद्युवाप्यनर्थैर्व्यसनैर्विहीनः ॥ १४॥
+यो हीनसंसर्गपराङ्मुखत्वाद्युवाप्यनर्थैर्व्यसनैर्विहीनः ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गुरोः स चानन्तरमन्तरज्ञः पुंसां पुमानाद्य इवावतीर्णः ।  
-उपक्रमैरस्खलितैश्चतुर्भिश्चतुर्दिगीशश्चतुरो बभूव ॥ १५॥
+उपक्रमैरस्खलितैश्चतुर्भिश्चतुर्दिगीशश्चतुरो बभूव ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्प्रयाते परलोकयात्रां जेतर्यरीणां तनयं तदीयम् ।  
-उच्चैःशिरस्त्वाज्जितपारियात्रं लक्ष्मीः सिषेवे किल पारियात्रम् ॥ १६॥
+उच्चैःशिरस्त्वाज्जितपारियात्रं लक्ष्मीः सिषेवे किल पारियात्रम् ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्याभवत्सूनुरुदारशीलः शिलः शिलापट्टविशालवक्षाः ।  
-जितारिपक्षोऽपि शिलीमुखैर्यः शालीनतामव्रजदीड्यमानः ॥ १७॥
+जितारिपक्षोऽपि शिलीमुखैर्यः शालीनतामव्रजदीड्यमानः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तमात्मसंपन्नमनिन्दितात्मा कृत्वा युवानं युवराजमेव ।  
-सुखानि सोऽभुङ्क्त सुखोपरोधि वृत्तं हि राज्ञामुपरुद्धवृत्तम् ॥ १८॥
+सुखानि सोऽभुङ्क्त सुखोपरोधि वृत्तं हि राज्ञामुपरुद्धवृत्तम् ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं रागबन्धिष्ववितृप्तमेव भोगेषु सौभाग्यविशेषभोग्यम् ।  
-विलासिनीनामरतिक्षमाऽपि जरा वृथा मत्सरिणी जहार ॥ १९॥
+विलासिनीनामरतिक्षमाऽपि जरा वृथा मत्सरिणी जहार ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उन्नाभ इत्युद्गतनामधेयस्तस्यायथार्थोन्नतनाभिरन्ध्रः ।  
-सुतोऽभवत्पङ्कजनाभकल्पः कृत्स्नस्य नाभिर्नृपमण्डलस्य ॥ २०॥
+सुतोऽभवत्पङ्कजनाभकल्पः कृत्स्नस्य नाभिर्नृपमण्डलस्य ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-21-40.mp3"></div>
 
 ततः परं वज्रधरप्रभावस्तदात्मजः संयति वज्रघोषः ।  
-बभूव वज्राकरभूषणायाः पतिः पृथिव्याः किल वज्रणाभः ॥ २१॥
+बभूव वज्राकरभूषणायाः पतिः पृथिव्याः किल वज्रणाभः ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्गते द्यां सुकृतोपलब्धां तत्संभवं शङ्खणमर्णवान्ता ।  
-उत्खातशत्रुं वसुधोपतस्थे रत्नोपहारैरुदितैः खनिभ्यः ॥ २२॥
+उत्खातशत्रुं वसुधोपतस्थे रत्नोपहारैरुदितैः खनिभ्यः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यावसाने हरिदश्वधामा पित्र्यं प्रपेदे पदमश्विरूपः ।  
-वेलातटेषूषितसैनिकाश्वं पुराविदो यं व्युषिताश्वमाहुः ॥ २३॥
+वेलातटेषूषितसैनिकाश्वं पुराविदो यं व्युषिताश्वमाहुः ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 आराध्य विश्वेश्वरमीश्वरेण तेन क्षितेर्विश्वसहो विजज्ञे ।  
-पातुं सहो विश्वसखः समग्रां विश्वंभरामात्मजमूर्तिरात्मा ॥ २४॥
+पातुं सहो विश्वसखः समग्रां विश्वंभरामात्मजमूर्तिरात्मा ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अंशे हिरण्याक्षरिपोः स जाते हिरण्यनाभे तनये नयज्ञः ।  
-द्विषामसह्यः सुतरां तरूणां हिरण्यरेता इव सानिलोऽभूत् ॥ २५॥
+द्विषामसह्यः सुतरां तरूणां हिरण्यरेता इव सानिलोऽभूत् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पिता पितॄणामनृणस्तमन्ते वयस्यनन्तानि सुखानि लिप्सुः ।  
-राजानमाजानुविलम्बिबाहुं कृत्वा कृती वल्कलवान्बभूव ॥ २६॥
+राजानमाजानुविलम्बिबाहुं कृत्वा कृती वल्कलवान्बभूव ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कौसल्य इत्त्युत्तरकोसलानां पत्युः पतङ्गान्वयभूषणस्य ।  
-तस्यौरसः सोमसुतः सुतोऽभून्नेत्रोत्सवः सोम इव द्वितीयः ॥ २७॥
+तस्यौरसः सोमसुतः सुतोऽभून्नेत्रोत्सवः सोम इव द्वितीयः ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यशोभिराब्रह्मसभं प्रकाशः स ब्रह्मभूयं गतिमाजगाम ।  
-ब्रह्मिष्ठमाधाय निजेऽधिकारे ब्रह्मिष्ठमेव स्वतनुप्रसूतम् ॥ २८॥
+ब्रह्मिष्ठमाधाय निजेऽधिकारे ब्रह्मिष्ठमेव स्वतनुप्रसूतम् ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्मिन्कुलापीडनिभे विपीडं सम्यङ्महीं शासति शासनाङ्काम् ।  
-प्रजाश्चिरं सुप्रजसि प्रजेशे ननन्दुरानन्दजलाविलाक्ष्यः ॥ २९॥
+प्रजाश्चिरं सुप्रजसि प्रजेशे ननन्दुरानन्दजलाविलाक्ष्यः ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पात्रीकृतात्मा गुरुसेवनेन स्पष्टाकृतिः पत्ररथेन्द्रकेतोः ।  
-तं पुत्रिणां पुष्करपत्रनेत्रः पुत्रः समारोपयदग्रसंख्याम् ॥ ३०॥
+तं पुत्रिणां पुष्करपत्रनेत्रः पुत्रः समारोपयदग्रसंख्याम् ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वंशस्थितिं वंशकरेण तेन संभाव्य भावी स सखा मघोनः ।  
-उपस्पृशन्स्पर्शनिवृत्तलौल्यस्त्रिपुष्करेषु त्रिदशत्वमाप ॥ ३१॥
+उपस्पृशन्स्पर्शनिवृत्तलौल्यस्त्रिपुष्करेषु त्रिदशत्वमाप ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य प्रभानिर्जितपुष्परागं पौष्यां तिथौ पुष्यमसूत पत्नी ।  
-तस्मिन्नपुष्यन्नुदिते समग्रां पुष्टिं जनाः पुष्य इव द्वितीये ॥ ३२॥
+तस्मिन्नपुष्यन्नुदिते समग्रां पुष्टिं जनाः पुष्य इव द्वितीये ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 महीं महेच्छः परिकीर्य सूनौ मनीषिणे जैमिनयेऽर्पितात्मा ।  
-तस्मात्सयोगादधिगम्य योगमजन्मनेऽकल्पत जन्मभीरुः ॥ ३३॥
+तस्मात्सयोगादधिगम्य योगमजन्मनेऽकल्पत जन्मभीरुः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ततः परं तत्प्रभवः प्रपेदे ध्रुवोपमेयो ध्रुवसंधिरुर्वीम् ।  
-यस्मिन्नभूज्ज्यायसि सत्यसंधे संधिर्ध्रुवः संनमतामरीणाम् ॥ ३४॥
+यस्मिन्नभूज्ज्यायसि सत्यसंधे संधिर्ध्रुवः संनमतामरीणाम् ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सुते शिशावेव सुदर्शनाख्ये दर्शात्ययेन्दुप्रियदर्शने सः ।  
-मृगायताक्षो मृगयाविहारी सिंहादवापद्विपदं नृसिंहः ॥ ३५॥
+मृगायताक्षो मृगयाविहारी सिंहादवापद्विपदं नृसिंहः ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वर्गामिनस्तस्य तमैकमत्यादमात्यवर्गः कुलतन्तुमेकम् ।  
-अनाथदीनाः प्रकृतीरवेक्ष्य साकेतनाथं विधिवच्चकार ॥ ३६॥
+अनाथदीनाः प्रकृतीरवेक्ष्य साकेतनाथं विधिवच्चकार ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नवेन्दुना तन्नभसोपमेयं शावैकसिंहेन च काननेन ।  
-रघोः कुलं कुड्मलपुष्करेण तोयेन चाप्रौढनरेन्द्रमासीत् ॥ ३७॥
+रघोः कुलं कुड्मलपुष्करेण तोयेन चाप्रौढनरेन्द्रमासीत् ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लोकेन भावी पितुरेव तुल्यः संभावितो मौलिपरिग्रहात्सः ।  
-दृष्टो हि वृण्वन्कलभप्रमाणोऽप्याशाः पुरोवातमवाप्य मेघः ॥ ३८॥
+दृष्टो हि वृण्वन्कलभप्रमाणोऽप्याशाः पुरोवातमवाप्य मेघः ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं राजवीथ्यामधिहस्ति यातमाधोरणालम्बितमग्र्यवेशम् ।  
-षड्वर्षदेशीयमपि प्रभुत्वात्प्रैक्षन्त पौराः पितृगौरवेण ॥ ३९॥
+षड्वर्षदेशीयमपि प्रभुत्वात्प्रैक्षन्त पौराः पितृगौरवेण ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामं न सोऽकल्पत पैतृकस्य सिंहासनस्य प्रतिपूरणाय ।  
-तेजोमहिम्ना पुनरावृतात्मा तद्व्याप चामीकरपिञ्जरेण ॥ ४०॥
+तेजोमहिम्ना पुनरावृतात्मा तद्व्याप चामीकरपिञ्जरेण ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-41-53.mp3"></div>
 
 तस्मादधः किंचिदिवावतीर्णावसंस्पृशन्तौ तपनीयपीठम् ।  
-सालक्तकौ भूपतयः प्रसिद्धैर्ववन्दिरे मौलिभिरस्य पादौ ॥ ४१॥
+सालक्तकौ भूपतयः प्रसिद्धैर्ववन्दिरे मौलिभिरस्य पादौ ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मणौ महानील इति प्रभावादल्पप्रमाणेऽपि यथा न मिथ्या ।  
-शब्दो महाराज इति प्रतीतस्तथैव तस्मिन्युयुजेऽर्भकेऽपि ॥ ४२॥
+शब्दो महाराज इति प्रतीतस्तथैव तस्मिन्युयुजेऽर्भकेऽपि ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 पर्यन्तसंचारितचामरस्य कपोललोलोभयकाकपक्षात् ।  
-तस्याननादुच्चरितो विवादश्चचाल वेलास्वपि नार्णवानाम् ॥ ४३॥
+तस्याननादुच्चरितो विवादश्चचाल वेलास्वपि नार्णवानाम् ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 निर्वृत्तजाम्बूनदपट्टशोभे न्यस्तं ललाटे तिलकं दधानः ।  
-तेनैव शून्यान्यरिसुन्दरीणां मुखानि स स्मेरमुखश्चकार ॥ ४४॥
+तेनैव शून्यान्यरिसुन्दरीणां मुखानि स स्मेरमुखश्चकार ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 शिरीषपुष्पाधिकसौकुमार्यः खेदं न यायादपि भूषणेन ।  
-नितान्तगुर्वीमपि सोऽनुभावाद्धुरं धरित्र्या बिभरांबभूव ॥ ४५॥
+नितान्तगुर्वीमपि सोऽनुभावाद्धुरं धरित्र्या बिभरांबभूव ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न्यस्ताक्षरामक्षरभूमिकायां कार्त्स्न्येन गृह्णाति लिपिं न यावद् ।  
-सर्वाणि तावच्छ्रुतवृद्धयोगात्फलान्युपायुङ्क्त स दण्डनीतेः ॥ ४६॥
+सर्वाणि तावच्छ्रुतवृद्धयोगात्फलान्युपायुङ्क्त स दण्डनीतेः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 उरस्यपर्याप्तनिवेशभागा प्रौढीभविष्यन्तमुदीक्षमाणा ।  
-संजातलज्जेव तमालपत्रच्छायाछलेनोपजुगूह लक्ष्मीः ॥ ४७॥
+संजातलज्जेव तमालपत्रच्छायाछलेनोपजुगूह लक्ष्मीः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अनश्नुवानेन युगोपमानमबद्धमौर्वीकिणलाञ्छनेन ।  
-अस्पृष्टखड्गत्सरुणापि चासीद्रक्षावती तस्य भुजेन भूमिः ॥ ४८॥
+अस्पृष्टखड्गत्सरुणापि चासीद्रक्षावती तस्य भुजेन भूमिः ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 न केवलं गच्छति तस्य काले ययुः शरीरावयवा विवृद्धिम् ।  
-वंश्या गुणाः खल्वपि लोककान्ताः प्रारम्भसूक्ष्माः प्रथिमानमापुः ॥ ४९॥
+वंश्या गुणाः खल्वपि लोककान्ताः प्रारम्भसूक्ष्माः प्रथिमानमापुः ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स पूर्वजन्मान्तरदृष्टपाराः स्मरन्निवाक्लेशकरो गुरूणाम् ।  
-तिस्रस्त्रिवर्गाधिगमस्य मूलं जग्राह विद्याः प्रकृतीश्च पित्र्याः ॥ ५०॥
+तिस्रस्त्रिवर्गाधिगमस्य मूलं जग्राह विद्याः प्रकृतीश्च पित्र्याः ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्यूह्यः स्थितः किंचिदिवोत्तरार्धमुन्नद्धचूडोऽञ्चितसव्यजानुः ।  
-आकर्णमाकृष्टसबाणधन्वा व्यरोचतास्त्रे स विनीयमानः ॥ ५१॥
+आकर्णमाकृष्टसबाणधन्वा व्यरोचतास्त्रे स विनीयमानः ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अथ मधु वनितानां नेत्रनिर्वेशनीय-
 मनसिजतरुपुष्पं रागबन्धप्रवालम् ।  
 अकृतकविधि सर्वाङ्गीणमाकल्पजातं
-विलसितपदमाद्यं यौवनं स प्रपेदे ॥ ५२॥
+विलसितपदमाद्यं यौवनं स प्रपेदे ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रतिकृतिरचनाभ्यो दूतिसंदर्शिताभ्यः
 समधिकतररूपाः शुद्धसंतानकामैः ।  
 अधिविविदुरमात्यैराहृतास्तस्य यूनः
-प्रथमपरिगृहीते श्रीभुवौ राजकन्याः ॥ ५३॥
+प्रथमपरिगृहीते श्रीभुवौ राजकन्याः ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदास-
 कृतौ वंशानुक्रमो नामाष्टदशः सर्गः ॥
