--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/19.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/19.md
@@ -1,188 +1,302 @@
----
-title: १९ अग्निवर्णशृंगारः
-unicode_script: devanagari
----
++++
+title = "१९ अग्निवर्णशृंगारः"
+unicode_script = "devanagari"
 
++++
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-01-20.mp3"></div>
 
 अग्निवर्णमभिषिच्य राघवः स्वे पदे तनयमग्नितेजसम् ।  
-शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ १॥
+शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ १॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/01.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र तीर्थसलिलेन दीर्घिकास्तल्पमन्तरितभूमिभिः कुशैः ।  
-सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ २॥
+सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ २॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/02.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लब्धपालनविधौ न तत्सुतः खेदमाप गुरुणा हि मेदिनी ।  
-भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ ३॥
+भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ ३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/03.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सोऽधिकारमभिकः कुलोचितं काश्चन स्वयमवर्तयत्समाः ।  
-संनिवेश्य सचिवेष्वतःपरं स्त्रीविधेयनवयौवनोऽभवत् ॥ ४॥
+संनिवेश्य सचिवेष्वतःपरं स्त्रीविधेयनवयौवनोऽभवत् ॥ ४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/04.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कामिनीसहचरस्य कामिनस्तस्य वेश्मसु मृदङ्गनादिषु ।  
-ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ ५॥
+ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ ५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/05.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इन्द्रियार्थपरिशून्यमक्षमः सोढुमेकमपि स क्षणान्तरम् ।  
-अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ ६॥
+अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ ६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/06.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 गौरवाद्यदपि जातु मन्त्रिणां दर्शनं प्रकृतिकाङ्क्षितं ददौ ।  
-तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ ७॥
+तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ ७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/07.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं कृतप्रणतयोऽनुजीविनः कोमलात्मनखरागरूषितम् ।  
-भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ ८॥
+भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ ८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/08.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यौवनोन्नतविलासिनीस्तनक्षोभलोलकमलाश्च दीर्घिकाः ।  
-गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ ९॥
+गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ ९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/09.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तत्र सेकहृतलोचनाञ्जनैर्धौतरागपरिपाटलाधरैः ।  
-अङ्गनास्तमधिकं व्यलोभयन्नर्पितप्रकृतकान्तिभिर्मुखैः ॥ १०॥
+अङ्गनास्तमधिकं व्यलोभयन्नर्पितप्रकृतकान्तिभिर्मुखैः ॥ १०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/10.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 घ्राणकान्तमधुगन्धकर्षिणीः पानभूमिरचनाः प्रियासखः ।  
-अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ ११॥
+अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ ११॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/11.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सातिरेकमदकारणं रहस्तेन दत्तमभिलेषुरङ्गनाः ।  
-ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ १२॥
+ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ १२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/12.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अङ्कमङ्कपरिवर्तनोचिते तस्य निन्यतुरशून्यतामुभे ।  
-वल्लकी च हृदयंगमक्षमा वल्गुवागपि च वामलोचना ॥ १३॥
+वल्लकी च हृदयंगमक्षमा वल्गुवागपि च वामलोचना ॥ १३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/13.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स स्वयं प्रहतपुष्करः कृती लोलमाल्यवलयो हरन्मनः ।  
-नर्तकीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ १४॥
+नर्तकीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ १४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/14.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चारु नृत्यविगमे स तन्मुखं स्वेदभिन्नतिलकं परिश्रमात् ।  
-प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ १५॥
+प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ १५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/15.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य सावरणदृष्टसंधयः काम्यवस्तुषु नवेषु सङ्गिनः ।  
-वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमा ॥ १६॥
+वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमा ॥ १६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/16.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अङ्गुलीकिसलयाग्रतर्जनं भ्रूविभङ्गकुटिलं च वीक्षितम् ।  
-मेखलाभिरसकृच्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ १७॥
+मेखलाभिरसकृच्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ १७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/17.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तेन दूतिविदितं निषेदुषा पृष्ठतः सुरतवाररात्रिषु ।  
-शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ १८॥
+शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ १८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/18.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 लौल्यमेत्य गृहिणीपरिग्रहान्नर्तकीष्वसुलभासु तद्वपुः ।  
-वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ १९॥
+वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ १९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/19.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रेमगर्वितविपक्षमत्सरादायताश्च मदनान्महीक्षितम् ।  
-निन्युरुत्सवविधिच्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ २०॥
+निन्युरुत्सवविधिच्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ २०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/20.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-21-40.mp3"></div>
 
 प्रातरेत्य परिभोगशोभिना दर्शनेन कृतखण्डनव्यथाः ।  
-प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ २१॥
+प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ २१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/21.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स्वप्नकीर्तितविपक्षमङ्गनाः प्रत्यभैत्सुरवदन्त्य एव तम् ।  
-प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ २२॥
+प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ २२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/22.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कॢप्तपुष्पशयनाꣳल्लतागृहानेत्य दूतिकृतमार्गदर्शनः ।  
-अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ २३॥
+अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ २३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/23.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 नाम वल्लभजनस्य ते मया प्राप्य भाग्यमपि तस्य काङ्क्ष्यते ।  
-लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ २४॥
+लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ २४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/24.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चूर्णबभ्रु लुलितस्रगाकुलं छिन्नमेखलमलक्तकाङ्कितम् ।  
-उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ २५॥
+उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ २५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/25.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स स्वयं चरणरागमादधे योषितां न च तथा समाहितः ।  
-लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ २६॥
+लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ २६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/26.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 चुम्बने विपरिवर्तिताधरं हस्तरोधि रशनाविघट्टने ।  
-विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ २७॥
+विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ २७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/27.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दर्पणेषु परिभोगदर्शिनीर्नर्मपूर्वमनुपृष्ठसंस्थितः ।  
-छायया स्मितमनोज्ञया वधूर्ह्रीनिमीलितमुखीश्चकार सः ॥ २८॥
+छायया स्मितमनोज्ञया वधूर्ह्रीनिमीलितमुखीश्चकार सः ॥ २८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/28.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कण्ठसक्तमृदुबाहुबन्धनं न्यस्तपादतलमग्रपादयोः ।  
-प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ २९॥
+प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ २९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/29.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 प्रेक्ष्य दर्पणतलस्थमात्मनो राजवेषमतिशक्रशोभिनम् ।  
-पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्मपरिभोगमण्डनम् ॥ ३०॥
+पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्मपरिभोगमण्डनम् ॥ ३०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/30.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 मित्रकृत्यमपदिश्य पार्श्वतः प्रस्थितं तमनवस्थितं प्रियाः ।  
-विद्म हे शठ पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ ३१॥
+विद्म हे शठ पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ ३१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/31.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य निर्दयरतिश्रमालसाः कण्ठसूत्रमपदिश्य योषितः ।  
-अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ ३२॥
+अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ ३२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/32.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 संगमाय निशि गूढचारिणं चारदूतिकथितं पुरोगताः ।  
-वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ ३३॥
+वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ ३३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/33.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 योषितामुडुपतेरिवार्चिषां स्पर्शनिवृतिमसाववाप्नुवन् ।  
-आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ ३४॥
+आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ ३४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/34.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 वेणुना दशनपीडिताधरा वीणया नखपदाङ्कितोरवः ।  
-शिल्पकार्य उभयेन वेजितास्तं विजिह्मनयना व्यलोभयन् ॥ ३५॥
+शिल्पकार्य उभयेन वेजितास्तं विजिह्मनयना व्यलोभयन् ॥ ३५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/35.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अङ्गसत्त्ववचनाश्रयं मिथः स्त्रीषु नृत्यमुपधाय दर्शयन् ।  
-स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ ३६॥
+स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ ३६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/36.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अंसलम्बिकुटजार्जुनस्रजस्तस्य नीपरजसाङ्गरागिणः ।  
-प्रावृषि प्रमदबर्हिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ ३७॥
+प्रावृषि प्रमदबर्हिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ ३७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/37.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 विग्रहाच्च शयने पराङ्मुखीर्नानुनेतुमबलाः स तत्वरे ।  
-आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ ३८॥
+आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ ३८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/38.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 कार्तिकीषु सवितानहर्म्यभाग्यामिनीषु ललिताङ्गनासखः ।  
-अन्वभुङ्क्त सुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ ३९॥
+अन्वभुङ्क्त सुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ ३९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/39.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 सैकतं स सरयूं विवृण्वतीं श्रोणिबिम्बमिव हंसमेखलम् ।  
-स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ ४०॥
+स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ ४०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/40.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 <div class="audioEmbed"  caption="वेदभूमिपाठः" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-41-57.mp3"></div>
 
 मर्मरैरगुरुधूपगन्धिभिर्व्यक्तहेमरशनैस्तमेकतः ।  
-जह्रुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ ४१॥
+जह्रुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ ४१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/41.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 अर्पितस्तिमितदीपदृष्टयो गर्भवेश्मसु निवातकुक्षिषु ।  
-तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ ४२॥
+तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ ४२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/42.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दक्षिणेन पवनेन संभृतं प्रेक्ष्य चूतकुसुमं सपल्लवम् ।  
-अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ ४३॥
+अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ ४३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/43.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 ताः स्वमङ्कमधिरोप्य दोलया प्रेङ्खयन्परिजनापविद्धया ।  
-मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ ४४॥
+मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ ४४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/44.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं पयोधरनिषिक्तचन्दनैर्मौक्तिकग्रथितचारुभूषणैः ।  
-ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ ४५॥
+ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ ४५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/45.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 यत्स लग्नसहकारमासवं रक्तपाटलसमागमं पपौ ।  
-तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ ४६॥
+तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ ४६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/46.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 एवमिन्द्रियसुखानि निर्विशन्नन्यकार्यविमुखः स पार्थिवः ।  
-आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ ४७॥
+आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ ४७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/47.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं प्रमत्तमपि न प्रभावतः शेकुराक्रमितुमन्यपार्थिवाः ।  
-आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ ४८॥
+आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ ४८॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/48.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 दृष्टदोषमपि तन्न सोऽत्यजत्सङ्गवस्तु भिषजामनाश्रवः ।  
-स्वादुभिस्तु विषयैर्हृतस्ततो दुःखमिन्द्रियगणो निवार्यते ॥ ४९॥
+स्वादुभिस्तु विषयैर्हृतस्ततो दुःखमिन्द्रियगणो निवार्यते ॥ ४९॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/49.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्य पाण्डुवदनाल्पभूषणा सावलम्बगमना मृदुस्वना ।  
-राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ ५०॥
+राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ ५०॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/50.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 व्योम पश्चिमकलास्थितेन्दु वा पङ्कशेषमिव घर्मपल्वलम् ।  
-राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ ५१॥
+राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ ५१॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/51.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 बाढमेष दिवसेषु पार्थिवः कर्म साधयति पुत्रजन्मने ।  
-इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ ५२॥
+इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ ५२॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/52.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 स त्वनेकवनितासखोऽपि सन्पावनीमनवलोक्य संततिम् ।  
-वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ ५३॥
+वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ ५३॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/53.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं गृहोपवनएव संगताः पश्चिमक्रतुविदा पुरोधसा ।  
-रोगशान्तिमपदिश्य मन्त्रिणः संभृते शिखिनि गूढमादधुः ॥ ५४॥
+रोगशान्तिमपदिश्य मन्त्रिणः संभृते शिखिनि गूढमादधुः ॥ ५४॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/54.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तैः कृतप्रकृतिमुख्यसंग्रहैराशु तस्य सहधर्मचारिणी ।  
-साधु दृष्टशुभगर्भलक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ ५५॥
+साधु दृष्टशुभगर्भलक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ ५५॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/55.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तस्यास्तथाविधनरेन्द्रविपत्तिशोका-
 दुष्णैर्विलोचनजलैः प्रथमाभितप्तः ।  
 निर्वापितः कनककुम्भमुखोज्झितेन
-वंशाभिषेकविधिना शिशिरेण गर्भः ॥ ५६॥
+वंशाभिषेकविधिना शिशिरेण गर्भः ॥ ५६॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/56.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 तं भावार्थं प्रसवसमयाकाङ्क्षिणीनां प्रजाना-
 मन्तर्गूढं क्षितिरिव नभोबीजमुष्टिं दधाना ।  
 मौलैः सार्धं स्थविरसचिवैर्हेमसिंहासनस्था
-राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ ५७॥
+राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ ५७॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/57.md"  newLevelForH1="4" title="मल्लिनाथः"  > </div>
+
 
 इति श्रीरघुवंशे महाकाव्ये कविश्रीकालिदास-
 कृतावग्निवर्णशृङ्गारो नामैकोनविंशः सर्गः ॥
